adding rules, modify ReadMe, extract rule params to global

--- a/Tools/Rotation/LayerRotation/LayerRotation_0.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_0.cfg
@@ -1,200 +1,200 @@
-Gorodok_Destruction_v1 ADF+Mechanized PLA+CombinedArms
-Belaya_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 WPMC+LightInfantry PLA+LightInfantry
-Chora_Skirmish_v1 ADF+CombinedArms INS+CombinedArms
-Kamdesh_RAAS_v1 VDV+Support CAF+Support
-Manicouagan_AAS_v2 USMC+CombinedArms WPMC+AirAssault
-Tallil_Invasion_v1 USMC+Motorized PLA+Motorized
-FoolsRoad_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-AlBasrah_TC_v1 TLF+AirAssault WPMC+AirAssault
-Narva_RAAS_v1 RGF+Support USMC+Support
-Kohat_Invasion_v1 INS+LightInfantry WPMC+LightInfantry
-BlackCoast_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Lashkar_RAAS_v1 USA+Support WPMC+CombinedArms
-Fallujah_Skirmish_v1 MEA+CombinedArms CAF+CombinedArms
-Kamdesh_AAS_v1 USMC+Support INS+Support
-GooseBay_Invasion_v1 RGF+CombinedArms PLANMC+CombinedArms
-Mestia_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 RGF+CombinedArms BAF+CombinedArms
-Gorodok_AAS_v1 TLF+CombinedArms USMC+CombinedArms
-Anvil_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Sanxian_Invasion_v2 ADF+AirAssault WPMC+CombinedArms
-Belaya_TC_v1 VDV+AirAssault WPMC+AirAssault
-FoolsRoad_Skirmish_v2 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 MEA+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 IMF+Motorized RGF+Motorized
-Mutaha_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-Narva_AAS_v1 IMF+Armored VDV+Support
-Kohat_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
-Lashkar_AAS_v1 INS+Support USA+Support
-Sumari_AAS_v1 ADF+CombinedArms MEA+CombinedArms
-Gorodok_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 USMC+Motorized WPMC+AirAssault
-BlackCoast_Invasion_v2 VDV+CombinedArms CAF+CombinedArms
-Harju_AAS_v2 IMF+CombinedArms CAF+CombinedArms
-AlBasrah_AAS_v1 WPMC+AirAssault VDV+AirAssault
-Tallil_TC_v1 BAF+Armored TLF+Armored
-Chora_TC_v1 USA+CombinedArms PLA+CombinedArms
-Fallujah_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-Kamdesh_RAAS_v1 TLF+Support MEA+Mechanized
-Lashkar_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-Kokan_Skirmish_v1 USMC+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 RGF+Mechanized CAF+Mechanized
-Belaya_Invasion_v1 PLA+Armored TLF+Armored
-Skorpo_RAAS_v1 IMF+Mechanized BAF+Armored
-Sanxian_Skirmish_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Gorodok_AAS_v1 USMC+Armored TLF+Armored
-AlBasrah_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Manicouagan_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
-Anvil_Skirmish_v1 VDV+CombinedArms MEA+CombinedArms
-Mutaha_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
-Tallil_TC_v1 CAF+Support MEA+LightInfantry
-GooseBay_AAS_v1 WPMC+LightInfantry PLANMC+LightInfantry
-Lashkar_Invasion_v1 ADF+CombinedArms INS+CombinedArms
-BlackCoast_Skirmish_v1 IMF+CombinedArms ADF+CombinedArms
-Kamdesh_TC_v1 WPMC+CombinedArms BAF+CombinedArms
-Kohat_RAAS_v2 CAF+AirAssault TLF+AirAssault
-Yehorivka_RAAS_v1 TLF+AirAssault CAF+AirAssault
-Mestia_Invasion_v1 IMF+CombinedArms CAF+CombinedArms
-Gorodok_TC_v1 ADF+Mechanized IMF+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-FoolsRoad_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 INS+LightInfantry USMC+CombinedArms
-GooseBay_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Chora_AAS_v2 USMC+CombinedArms VDV+CombinedArms
-BlackCoast_RAAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 MEA+AirAssault WPMC+AirAssault
-Kohat_Skirmish_v1 INS+CombinedArms BAF+CombinedArms
-Narva_Destruction_v1 VDV+CombinedArms IMF+LightInfantry
-Tallil_RAAS_v2 RGF+Mechanized ADF+Mechanized
-Lashkar_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-Fallujah_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Manicouagan_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Mutaha_Skirmish_v1 MEA+CombinedArms RGF+CombinedArms
-Harju_Invasion_v2 CAF+CombinedArms IMF+Support
-Gorodok_TC_v1 RGF+LightInfantry USA+LightInfantry
-Kokan_AAS_v2 BAF+CombinedArms MEA+CombinedArms
-Kamdesh_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
-BlackCoast_Invasion_v2 TLF+AirAssault PLANMC+Armored
+Kohat_Invasion_v2 RGF+Support USA+Support
+Lashkar_RAAS_v1 TLF+Mechanized RGF+Mechanized
+BlackCoast_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 ADF+CombinedArms WPMC+AirAssault
+Tallil_RAAS_v2 RGF+Armored BAF+Armored
+Yehorivka_AAS_v1 TLF+AirAssault WPMC+AirAssault
+Kokan_Invasion_v1 TLF+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 INS+LightInfantry MEA+LightInfantry
+Skorpo_RAAS_v1 CAF+Support IMF+Support
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
 GooseBay_Skirmish_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Lashkar_TC_v2 TLF+CombinedArms PLA+CombinedArms
-Belaya_TC_v1 IMF+Support USMC+Support
-Tallil_AAS_v1 MEA+Armored PLA+Armored
-FoolsRoad_Destruction_v1 IMF+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 WPMC+LightInfantry PLA+Motorized
-Mutaha_RAAS_v2 VDV+Support CAF+Support
-Mestia_Skirmish_v1 IMF+CombinedArms VDV+CombinedArms
-Manicouagan_RAAS_v1 RGF+Mechanized PLAAGF+Mechanized
-Narva_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_Invasion_v1 PLA+LightInfantry BAF+Mechanized
-Yehorivka_RAAS_v2 USA+Armored TLF+Armored
-Lashkar_RAAS_v1 USMC+CombinedArms VDV+CombinedArms
-Belaya_TC_v1 BAF+Support IMF+Support
-Chora_AAS_v3 RGF+CombinedArms INS+CombinedArms
-AlBasrah_RAAS_v1 TLF+Support USMC+Support
-Kohat_Invasion_v1 INS+Armored TLF+Armored
-Logar_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Fallujah_AAS_v1 MEA+CombinedArms INS+Support
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms BAF+CombinedArms
-Narva_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
-Mutaha_Invasion_v1 INS+Mechanized MEA+Mechanized
-Sanxian_AAS_v3 PLA+Support USA+Mechanized
-Tallil_AAS_v1 ADF+Mechanized TLF+Mechanized
-Anvil_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Lashkar_RAAS_v1 USMC+Armored RGF+Armored
-Skorpo_Invasion_v1 WPMC+CombinedArms IMF+CombinedArms
-Kohat_RAAS_v2 WPMC+CombinedArms RGF+CombinedArms
-Fallujah_AAS_v1 WPMC+LightInfantry INS+LightInfantry
-Kamdesh_AAS_v1 RGF+CombinedArms TLF+AirAssault
-Belaya_AAS_v2 ADF+CombinedArms RGF+CombinedArms
-FoolsRoad_Destruction_v1 ADF+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 PLA+Armored TLF+Armored
-Manicouagan_AAS_v3 PLAAGF+CombinedArms WPMC+CombinedArms
-Chora_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-Yehorivka_Invasion_v1 PLA+Motorized USMC+Motorized
-Narva_AAS_v2 IMF+Motorized WPMC+CombinedArms
-Kokan_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 TLF+AirAssault MEA+AirAssault
-Kamdesh_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
-Sumari_TC_v1 INS+CombinedArms VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms CAF+CombinedArms
-Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Lashkar_TC_v1 PLA+Armored INS+Armored
-Mestia_TC_v1 IMF+CombinedArms USA+CombinedArms
-BlackCoast_Invasion_v2 PLAAGF+Mechanized IMF+Mechanized
-Belaya_AAS_v2 TLF+CombinedArms BAF+CombinedArms
-Kokan_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v2 USA+AirAssault WPMC+CombinedArms
-Mutaha_RAAS_v1 PLA+Support USMC+Support
-Anvil_Invasion_v1 USMC+CombinedArms INS+CombinedArms
-Chora_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
-Manicouagan_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Gorodok_TC_v1 USMC+Support TLF+Support
-Sumari_TC_v1 WPMC+CombinedArms MEA+CombinedArms
-Lashkar_Invasion_v1 TLF+Mechanized ADF+Mechanized
-Fallujah_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Yehorivka_TC_v2 PLA+Support VDV+Support
-BlackCoast_RAAS_v1 TLF+Support IMF+LightInfantry
-Belaya_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Kokan_Invasion_v1 TLF+CombinedArms USMC+CombinedArms
-Harju_AAS_v1 ADF+CombinedArms IMF+CombinedArms
-Mutaha_AAS_v2 TLF+CombinedArms INS+CombinedArms
-Anvil_Skirmish_v1 INS+CombinedArms TLF+CombinedArms
-AlBasrah_TC_v1 CAF+AirAssault PLAAGF+Mechanized
-Kohat_Invasion_v1 USA+Support INS+Support
-Chora_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-Gorodok_AAS_v1 RGF+Motorized USA+Motorized
-Skorpo_RAAS_v1 VDV+Armored CAF+Armored
+Kohat_RAAS_v2 RGF+Mechanized ADF+AirAssault
+Sanxian_Invasion_v2 USA+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Fallujah_TC_v1 WPMC+LightInfantry MEA+LightInfantry
+Tallil_AAS_v1 VDV+Armored ADF+AirAssault
+Lashkar_AAS_v2 USMC+Support VDV+Support
+Gorodok_Destruction_v1 VDV+Support PLA+Support
+Chora_AAS_v3 BAF+CombinedArms VDV+CombinedArms
+Yehorivka_AAS_v1 USA+AirAssault VDV+AirAssault
+Mutaha_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
+Narva_AAS_v2 WPMC+AirAssault IMF+Mechanized
+GooseBay_Skirmish_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 MEA+Mechanized INS+Mechanized
+Manicouagan_Invasion_v1 BAF+Armored PLA+Armored
+Kokan_AAS_v2 INS+CombinedArms MEA+CombinedArms
+Sanxian_AAS_v2 USA+LightInfantry WPMC+LightInfantry
+Harju_RAAS_v1 WPMC+AirAssault VDV+Support
+Sumari_Skirmish_v1 CAF+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Skorpo_Invasion_v1 USA+LightInfantry WPMC+LightInfantry
+Kohat_AAS_v1 VDV+AirAssault TLF+AirAssault
+Chora_AAS_v3 RGF+CombinedArms USA+CombinedArms
+Gorodok_TC_v1 CAF+Armored TLF+Armored
+Mutaha_AAS_v1 PLA+AirAssault TLF+Armored
+Tallil_RAAS_v2 ADF+AirAssault PLA+AirAssault
+Lashkar_Invasion_v1 INS+CombinedArms USA+CombinedArms
+Anvil_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+FoolsRoad_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 BAF+Armored RGF+Mechanized
+AlBasrah_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Kamdesh_Invasion_v1 BAF+Support RGF+Support
+Sumari_RAAS_v1 INS+CombinedArms ADF+CombinedArms
+Harju_RAAS_v2 IMF+Mechanized ADF+Mechanized
+Kohat_TC_v1 RGF+Motorized CAF+Motorized
+Yehorivka_AAS_v2 TLF+Support PLA+Support
+Narva_AAS_v2 WPMC+AirAssault IMF+Armored
+Mestia_Invasion_v1 IMF+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 USMC+CombinedArms RGF+CombinedArms
+Lashkar_AAS_v1 VDV+CombinedArms INS+CombinedArms
+Kokan_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+AlBasrah_TC_v1 RGF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry USMC+Support
+BlackCoast_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Manicouagan_Invasion_v1 CAF+Armored PLANMC+Armored
+Tallil_AAS_v1 MEA+CombinedArms RGF+CombinedArms
+Chora_AAS_v3 BAF+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 INS+Motorized TLF+Motorized
+Gorodok_RAAS_v2 TLF+Motorized WPMC+AirAssault
+Mestia_AAS_v1 USA+CombinedArms TLF+CombinedArms
+Yehorivka_Destruction_v1 CAF+Support RGF+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Kamdesh_Skirmish_v1 TLF+CombinedArms MEA+CombinedArms
+GooseBay_RAAS_v1 BAF+Armored PLAAGF+Armored
+Harju_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Mutaha_RAAS_v2 INS+Support PLA+Motorized
+Kokan_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v1 MEA+Support PLA+Support
+Narva_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 RGF+CombinedArms INS+Support
+Gorodok_RAAS_v1 PLA+Motorized TLF+Motorized
+Mestia_Invasion_v1 RGF+CombinedArms BAF+CombinedArms
+Belaya_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v3 PLAAGF+Armored CAF+Armored
+Tallil_Skirmish_v1 RGF+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v1 TLF+Mechanized WPMC+LightInfantry
+Mutaha_AAS_v2 USMC+Support PLA+Support
+Sumari_Invasion_v1 CAF+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v1 RGF+Motorized IMF+Motorized
+Skorpo_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v1 MEA+Armored BAF+Armored
+Harju_Skirmish_v2 WPMC+CombinedArms CAF+CombinedArms
+Kamdesh_RAAS_v1 TLF+CombinedArms PLA+Motorized
+AlBasrah_Invasion_v2 BAF+Support INS+Support
+Chora_AAS_v1 MEA+CombinedArms USA+CombinedArms
+Kohat_RAAS_v1 TLF+Armored MEA+Armored
+Manicouagan_RAAS_v1 USMC+Armored VDV+Armored
+Mutaha_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Tallil_AAS_v1 ADF+Mechanized INS+LightInfantry
+BlackCoast_Invasion_v2 BAF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 BAF+CombinedArms RGF+CombinedArms
+Sumari_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
+Belaya_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 VDV+CombinedArms PLA+Armored
+Kokan_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+Gorodok_Destruction_v1 PLA+CombinedArms ADF+CombinedArms
+Sanxian_AAS_v1 USMC+Support PLANMC+Support
+FoolsRoad_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 VDV+Support PLA+Motorized
+Tallil_AAS_v1 INS+Support VDV+Support
 PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms VDV+CombinedArms
-Fallujah_TC_v1 CAF+Armored PLA+Armored
-GooseBay_AAS_v1 PLA+Support VDV+Support
-Yehorivka_TC_v2 USMC+Support IMF+Mechanized
-Kamdesh_AAS_v1 ADF+CombinedArms INS+CombinedArms
-Mutaha_Invasion_v1 WPMC+LightInfantry MEA+LightInfantry
-Sanxian_Skirmish_v1 USMC+CombinedArms PLAAGF+CombinedArms
-Kohat_AAS_v1 WPMC+LightInfantry INS+LightInfantry
-AlBasrah_TC_v1 PLA+Motorized USMC+Motorized
-Chora_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
-Gorodok_Invasion_v1 PLA+Armored TLF+Armored
-Narva_AAS_v1 VDV+Armored IMF+Support
-Kokan_TC_v1 TLF+CombinedArms INS+CombinedArms
-Fallujah_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Anvil_Invasion_v1 MEA+Support PLA+Support
-Kamdesh_AAS_v1 WPMC+AirAssault USMC+LightInfantry
-Mutaha_Skirmish_v1 VDV+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 INS+Motorized USA+Motorized
-BlackCoast_Invasion_v2 RGF+Armored USMC+Armored
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Lashkar_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 TLF+CombinedArms MEA+Armored
-Gorodok_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
-Yehorivka_Destruction_v1 PLA+LightInfantry IMF+LightInfantry
-AlBasrah_RAAS_v1 BAF+AirAssault WPMC+AirAssault
-GooseBay_AAS_v1 WPMC+LightInfantry USA+LightInfantry
-Anvil_RAAS_v2 MEA+AirAssault TLF+Armored
-Skorpo_RAAS_v1 WPMC+AirAssault VDV+AirAssault
-Mestia_Invasion_v1 USA+CombinedArms IMF+CombinedArms
-Mutaha_TC_v1 MEA+AirAssault ADF+AirAssault
-Belaya_AAS_v1 VDV+CombinedArms TLF+CombinedArms
-Kokan_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v1 BAF+Armored TLF+Armored
-Fallujah_Insurgency_v1 TLF+CombinedArms INS+CombinedArms
-Kamdesh_Skirmish_v1 MEA+CombinedArms USMC+CombinedArms
-Yehorivka_RAAS_v2 PLA+AirAssault ADF+AirAssault
-Kohat_TC_v1 USA+Armored WPMC+AirAssault
-FoolsRoad_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Gorodok_Invasion_v1 BAF+Support TLF+Support
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLANMC+CombinedArms
-Harju_TC_v1 WPMC+CombinedArms CAF+CombinedArms
-Tallil_TC_v1 INS+CombinedArms MEA+Armored
-Mutaha_RAAS_v2 CAF+Motorized PLA+Motorized
-Narva_Destruction_v1 USA+Armored VDV+Armored
-AlBasrah_RAAS_v1 WPMC+AirAssault TLF+AirAssault
+Yehorivka_Destruction_v1 PLA+Armored IMF+Armored
+Sumari_AAS_v3 TLF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 USA+AirAssault WPMC+AirAssault
+Kohat_TC_v1 MEA+Mechanized BAF+Mechanized
+AlBasrah_AAS_v1 INS+LightInfantry USMC+LightInfantry
+GooseBay_AAS_v1 USA+CombinedArms PLAAGF+Mechanized
+Kokan_Invasion_v1 RGF+CombinedArms BAF+CombinedArms
+Anvil_AAS_v1 INS+Motorized CAF+Motorized
+Lashkar_TC_v2 VDV+Armored PLA+Armored
+Harju_AAS_v2 WPMC+CombinedArms ADF+CombinedArms
+Belaya_AAS_v3 RGF+Armored USA+Armored
+Gorodok_RAAS_v2 RGF+Support PLA+Support
+Fallujah_Invasion_v2 WPMC+LightInfantry CAF+Motorized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Kamdesh_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
+BlackCoast_AAS_v2 PLAAGF+Armored TLF+Armored
+Sanxian_AAS_v1 USMC+Armored PLA+Armored
+Logar_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+Anvil_Invasion_v1 WPMC+AirAssault MEA+CombinedArms
+AlBasrah_AAS_v1 PLANMC+AirAssault VDV+AirAssault
+Tallil_RAAS_v2 INS+LightInfantry WPMC+LightInfantry
+Kohat_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Manicouagan_AAS_v2 CAF+Mechanized VDV+Mechanized
+Lashkar_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
+FoolsRoad_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Kamdesh_TC_v1 MEA+Mechanized ADF+Mechanized
+Skorpo_RAAS_v1 IMF+Armored WPMC+LightInfantry
+Kokan_AAS_v1 USA+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v1 RGF+CombinedArms ADF+CombinedArms
+Narva_Invasion_v1 IMF+CombinedArms RGF+CombinedArms
+Sanxian_AAS_v1 PLA+LightInfantry WPMC+LightInfantry
+AlBasrah_RAAS_v1 WPMC+CombinedArms MEA+Support
+Kohat_TC_v1 WPMC+LightInfantry MEA+LightInfantry
+Anvil_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Chora_AAS_v3 MEA+CombinedArms TLF+CombinedArms
+Manicouagan_Invasion_v1 WPMC+LightInfantry USMC+LightInfantry
+Mutaha_RAAS_v2 WPMC+AirAssault USA+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mestia_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 USA+CombinedArms PLA+CombinedArms
+FoolsRoad_Destruction_v1 WPMC+CombinedArms USMC+CombinedArms
+Narva_RAAS_v1 IMF+Motorized USMC+Motorized
+Fallujah_TC_v1 BAF+Support PLA+CombinedArms
+Sumari_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Lashkar_RAAS_v1 RGF+LightInfantry PLA+LightInfantry
+Kohat_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Manicouagan_Invasion_v2 WPMC+CombinedArms VDV+CombinedArms
+Gorodok_RAAS_v1 USA+Motorized IMF+Motorized
+Yehorivka_RAAS_v1 CAF+Support PLA+Support
+Tallil_TC_v1 INS+Armored VDV+Armored
+Harju_AAS_v1 BAF+Armored VDV+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+BlackCoast_Invasion_v2 RGF+Armored TLF+Armored
+Sanxian_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Mutaha_TC_v1 INS+LightInfantry WPMC+LightInfantry
+Lashkar_AAS_v2 PLA+Armored INS+Armored
+GooseBay_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 WPMC+AirAssault RGF+CombinedArms
+Kohat_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
+Yehorivka_Destruction_v1 IMF+Support TLF+Support
+Anvil_RAAS_v1 INS+Armored TLF+Armored
+Kokan_AAS_v2 PLA+CombinedArms INS+CombinedArms
+Tallil_AAS_v1 PLA+Armored WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Logar_RAAS_v1 USMC+CombinedArms MEA+CombinedArms
+Mutaha_Invasion_v1 PLA+LightInfantry USMC+LightInfantry
+Fallujah_RAAS_v2 USA+CombinedArms PLA+CombinedArms
+Mestia_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 TLF+Armored IMF+Motorized
+Lashkar_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
+FoolsRoad_AAS_v1 TLF+CombinedArms USA+CombinedArms
+Gorodok_Destruction_v1 PLA+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 WPMC+CombinedArms ADF+CombinedArms
+Tallil_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v1 WPMC+LightInfantry TLF+Motorized
+Narva_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Logar_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
+Kamdesh_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
+Kokan_AAS_v2 TLF+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v1 MEA+Support USMC+Support
+Kohat_TC_v1 PLA+Armored TLF+Armored
+Mutaha_RAAS_v1 TLF+Mechanized USA+Mechanized
+Chora_AAS_v3 USMC+CombinedArms PLA+CombinedArms
+AlBasrah_Invasion_v2 MEA+Armored ADF+Mechanized
+GooseBay_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Yehorivka_Skirmish_v2 WPMC+CombinedArms IMF+CombinedArms
+Anvil_RAAS_v1 CAF+Support VDV+Support
+Harju_RAAS_v2 WPMC+CombinedArms BAF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Narva_Invasion_v1 RGF+Armored IMF+LightInfantry
+Logar_AAS_v1 VDV+CombinedArms MEA+CombinedArms
