--- a/Tools/Rotation/LayerRotation/LayerRotation_1.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_1.cfg
@@ -1,200 +1,200 @@
-Anvil_RAAS_v2 INS+Support USA+Support
-Mestia_AAS_v1 BAF+CombinedArms VDV+CombinedArms
-Lashkar_AAS_v1 PLA+Motorized RGF+Motorized
-Fallujah_Invasion_v1 TLF+Support INS+Armored
-Belaya_TC_v1 IMF+LightInfantry WPMC+LightInfantry
-Kohat_AAS_v1 BAF+Support PLA+Support
-GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
-Chora_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Kamdesh_Invasion_v1 WPMC+LightInfantry MEA+LightInfantry
-Gorodok_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Kokan_RAAS_v1 BAF+CombinedArms VDV+CombinedArms
-Tallil_RAAS_v2 WPMC+LightInfantry MEA+LightInfantry
-BlackCoast_RAAS_v2 WPMC+LightInfantry PLAAGF+CombinedArms
-Logar_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 WPMC+LightInfantry RGF+LightInfantry
-Mutaha_Skirmish_v1 INS+CombinedArms CAF+CombinedArms
-Kohat_RAAS_v2 PLA+AirAssault VDV+AirAssault
-Anvil_AAS_v1 MEA+Support TLF+Support
-Yehorivka_Destruction_v1 VDV+Armored USA+Armored
-Sumari_TC_v1 USA+CombinedArms PLA+CombinedArms
-GooseBay_RAAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
-Manicouagan_RAAS_v1 BAF+Armored VDV+Mechanized
-FoolsRoad_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Fallujah_Invasion_v2 PLA+CombinedArms MEA+CombinedArms
-Sanxian_AAS_v3 WPMC+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Lashkar_RAAS_v1 CAF+AirAssault RGF+Motorized
-Chora_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
-Kamdesh_Invasion_v1 MEA+Mechanized RGF+Mechanized
-Mutaha_TC_v1 TLF+Armored BAF+Armored
-AlBasrah_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 WPMC+AirAssault MEA+AirAssault
+Kamdesh_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 VDV+Support USMC+Support
+AlBasrah_AAS_v1 VDV+Support USMC+Support
+Chora_Invasion_v2 MEA+CombinedArms INS+CombinedArms
+BlackCoast_RAAS_v2 WPMC+LightInfantry RGF+Motorized
+Lashkar_TC_v1 RGF+Motorized PLA+Motorized
+FoolsRoad_AAS_v2 WPMC+CombinedArms ADF+CombinedArms
+Fallujah_RAAS_v1 TLF+Armored PLA+Armored
+Gorodok_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Yehorivka_Destruction_v1 VDV+Support IMF+Support
+Sanxian_AAS_v1 ADF+CombinedArms PLANMC+Armored
+Kohat_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
+Belaya_AAS_v2 RGF+CombinedArms ADF+CombinedArms
+Tallil_AAS_v1 TLF+AirAssault WPMC+AirAssault
+Logar_AAS_v1 VDV+CombinedArms ADF+CombinedArms
+Kamdesh_RAAS_v1 PLA+CombinedArms INS+CombinedArms
+Anvil_Invasion_v1 INS+LightInfantry TLF+Support
+AlBasrah_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+FoolsRoad_Skirmish_v2 PLA+CombinedArms IMF+CombinedArms
+Mutaha_RAAS_v1 ADF+Mechanized MEA+Mechanized
+GooseBay_RAAS_v1 USA+Mechanized PLAAGF+Mechanized
+Chora_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Kohat_Invasion_v1 USA+Armored PLA+Armored
+Gorodok_AAS_v1 CAF+Armored PLA+Armored
+Manicouagan_AAS_v2 CAF+AirAssault PLAAGF+CombinedArms
+Fallujah_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Harju_TC_v1 ADF+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Lashkar_AAS_v2 USA+Support MEA+Support
+Kokan_Invasion_v1 VDV+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v1 PLA+LightInfantry MEA+LightInfantry
+Kamdesh_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Logar_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
+GooseBay_AAS_v1 VDV+CombinedArms PLA+Motorized
+Tallil_Invasion_v1 TLF+Support PLA+Support
+Kohat_RAAS_v1 MEA+LightInfantry PLA+LightInfantry
+Chora_TC_v1 TLF+CombinedArms USMC+CombinedArms
+Gorodok_RAAS_v2 PLA+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v1 TLF+Motorized IMF+Motorized
+Fallujah_RAAS_v1 INS+Motorized BAF+Support
+Kokan_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
+Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 USA+Mechanized RGF+Mechanized
+AlBasrah_Skirmish_v2 RGF+CombinedArms USA+CombinedArms
+Kamdesh_AAS_v1 INS+CombinedArms TLF+Armored
+Manicouagan_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Anvil_RAAS_v2 PLA+LightInfantry WPMC+LightInfantry
+Mestia_AAS_v2 IMF+CombinedArms TLF+CombinedArms
+BlackCoast_AAS_v2 PLA+Mechanized VDV+Mechanized
+Tallil_RAAS_v2 BAF+Armored VDV+Armored
+Belaya_AAS_v3 RGF+Armored USA+CombinedArms
+Yehorivka_Invasion_v2 VDV+Mechanized ADF+Mechanized
+Narva_RAAS_v1 IMF+Motorized RGF+Motorized
+Harju_Skirmish_v2 RGF+CombinedArms USA+CombinedArms
+Fallujah_AAS_v1 PLA+Support RGF+Support
+Kamdesh_AAS_v1 WPMC+LightInfantry BAF+Support
+Sumari_AAS_v3 PLA+CombinedArms CAF+CombinedArms
+GooseBay_Invasion_v1 USA+LightInfantry PLA+LightInfantry
+Anvil_RAAS_v2 CAF+AirAssault PLA+AirAssault
+Kokan_AAS_v1 BAF+CombinedArms TLF+CombinedArms
+Kohat_AAS_v1 MEA+AirAssault USA+LightInfantry
+AlBasrah_TC_v1 PLA+AirAssault CAF+AirAssault
+Logar_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v2 BAF+CombinedArms RGF+CombinedArms
+Yehorivka_Destruction_v1 TLF+Support RGF+Support
+Mestia_AAS_v1 USA+CombinedArms PLA+CombinedArms
 Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Tallil_TC_v1 RGF+Mechanized CAF+Motorized
-Kokan_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Yehorivka_RAAS_v2 PLA+Support CAF+Support
-Gorodok_Invasion_v2 BAF+CombinedArms PLA+CombinedArms
-Kohat_TC_v1 USA+LightInfantry PLA+LightInfantry
-FoolsRoad_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 MEA+Mechanized USA+Mechanized
-Anvil_TC_v1 MEA+Mechanized INS+LightInfantry
-Fallujah_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
-Narva_Destruction_v1 VDV+Armored CAF+Armored
-Manicouagan_AAS_v3 PLANMC+Support CAF+Support
-Chora_TC_v1 TLF+CombinedArms RGF+CombinedArms
-AlBasrah_TC_v1 BAF+Mechanized PLA+AirAssault
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Mestia_Invasion_v1 BAF+CombinedArms IMF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 TLF+AirAssault WPMC+AirAssault
-FoolsRoad_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Anvil_TC_v1 WPMC+AirAssault PLA+AirAssault
-Kamdesh_Invasion_v1 BAF+Mechanized VDV+Mechanized
-Kohat_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 INS+Mechanized MEA+Mechanized
-Gorodok_TC_v1 TLF+Support RGF+Support
-Tallil_RAAS_v1 USMC+CombinedArms INS+Motorized
-Lashkar_Insurgency_v1 PLA+Armored INS+Armored
-Logar_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
-Yehorivka_RAAS_v2 TLF+AirAssault CAF+AirAssault
-Manicouagan_RAAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
-Chora_AAS_v3 TLF+CombinedArms PLA+CombinedArms
-BlackCoast_Invasion_v2 PLANMC+Motorized RGF+Motorized
-Kamdesh_AAS_v1 USA+Motorized PLA+Motorized
-AlBasrah_TC_v1 USA+Mechanized MEA+Mechanized
-Sumari_AAS_v3 BAF+CombinedArms INS+CombinedArms
-Sanxian_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Gorodok_Destruction_v1 VDV+Mechanized ADF+CombinedArms
-Belaya_RAAS_v1 VDV+Support PLA+Support
-Tallil_TC_v1 VDV+AirAssault WPMC+AirAssault
-Anvil_RAAS_v1 PLA+Support BAF+Support
-Mutaha_Skirmish_v1 TLF+CombinedArms BAF+CombinedArms
-Kohat_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 IMF+LightInfantry WPMC+CombinedArms
-Yehorivka_RAAS_v1 USMC+Motorized PLA+Motorized
-Kokan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v2 VDV+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Manicouagan_Invasion_v2 BAF+Armored PLA+Armored
-GooseBay_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Sumari_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 TLF+Support MEA+Support
-Gorodok_AAS_v1 TLF+Mechanized RGF+Motorized
-AlBasrah_Insurgency_v1 USA+Support INS+Support
-FoolsRoad_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 WPMC+LightInfantry PLA+LightInfantry
-Yehorivka_AAS_v1 TLF+Motorized USMC+Motorized
-Mestia_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+Kamdesh_TC_v1 INS+Armored USA+Armored
+Lashkar_AAS_v1 USMC+Motorized PLA+Motorized
+Chora_AAS_v2 WPMC+CombinedArms INS+CombinedArms
+Fallujah_Invasion_v2 TLF+CombinedArms PLA+Motorized
+GooseBay_AAS_v1 VDV+Support BAF+Support
+Narva_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 USMC+Armored INS+Armored
+Manicouagan_AAS_v1 PLANMC+LightInfantry USA+LightInfantry
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Belaya_RAAS_v1 RGF+Motorized PLA+Support
-GooseBay_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 WPMC+LightInfantry USMC+LightInfantry
-Kamdesh_Insurgency_v1 USMC+Motorized INS+Motorized
-Sumari_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Tallil_TC_v1 ADF+AirAssault PLA+AirAssault
-Lashkar_AAS_v2 PLA+Armored CAF+Mechanized
-Mutaha_Skirmish_v1 VDV+CombinedArms MEA+CombinedArms
-Gorodok_RAAS_v1 TLF+Support PLA+Support
-Skorpo_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Yehorivka_Skirmish_v2 IMF+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Fallujah_TC_v1 PLA+Motorized TLF+Motorized
-BlackCoast_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
-Kohat_Invasion_v2 TLF+AirAssault MEA+Support
-Belaya_TC_v1 PLA+Motorized TLF+Motorized
-Manicouagan_AAS_v2 BAF+AirAssault WPMC+AirAssault
-Tallil_RAAS_v1 PLA+Armored USMC+Armored
-Harju_Skirmish_v1 USMC+CombinedArms IMF+CombinedArms
-Narva_Destruction_v1 CAF+Armored WPMC+LightInfantry
-Gorodok_TC_v1 TLF+AirAssault WPMC+AirAssault
-Logar_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 PLA+AirAssault USA+AirAssault
-Kamdesh_AAS_v1 USA+Armored MEA+Armored
-Yehorivka_Destruction_v1 VDV+Armored ADF+Mechanized
-Kokan_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
-AlBasrah_AAS_v1 USA+Armored MEA+Armored
-Lashkar_TC_v2 PLA+Motorized USA+Motorized
-Tallil_Skirmish_v2 CAF+CombinedArms RGF+CombinedArms
-Fallujah_Invasion_v2 MEA+Mechanized WPMC+CombinedArms
-Belaya_AAS_v2 RGF+Armored PLA+Armored
-Mestia_TC_v1 PLA+CombinedArms RGF+CombinedArms
-Kohat_TC_v1 USA+Mechanized VDV+Mechanized
-Narva_AAS_v2 VDV+Support IMF+Support
-Anvil_Invasion_v1 RGF+Support ADF+CombinedArms
-FoolsRoad_Skirmish_v2 TLF+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v2 USMC+Armored TLF+Armored
-Gorodok_TC_v1 WPMC+CombinedArms RGF+CombinedArms
-Chora_AAS_v1 INS+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 TLF+Motorized INS+Motorized
-Logar_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Harju_RAAS_v1 USA+Support IMF+Support
-BlackCoast_AAS_v2 PLAAGF+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 TLF+Mechanized USA+Mechanized
-Anvil_RAAS_v2 ADF+Mechanized VDV+Support
-Fallujah_Invasion_v2 USMC+Motorized PLA+Motorized
-Kohat_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Kokan_TC_v1 RGF+CombinedArms USA+CombinedArms
-Kamdesh_TC_v1 PLA+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v1 TLF+Mechanized WPMC+AirAssault
-Gorodok_RAAS_v2 PLA+AirAssault WPMC+AirAssault
-Mutaha_Invasion_v1 TLF+Mechanized ADF+Mechanized
-Tallil_TC_v1 RGF+Armored CAF+Armored
-AlBasrah_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
-Harju_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Belaya_AAS_v2 BAF+Armored WPMC+CombinedArms
-Anvil_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Chora_Invasion_v1 VDV+CombinedArms CAF+CombinedArms
-Lashkar_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Kohat_AAS_v1 PLA+Armored USMC+Armored
-Logar_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Manicouagan_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 INS+Mechanized TLF+Mechanized
-Yehorivka_Destruction_v1 CAF+Motorized IMF+Motorized
-Kokan_AAS_v1 PLA+CombinedArms VDV+CombinedArms
-Gorodok_TC_v1 IMF+LightInfantry USMC+LightInfantry
-AlBasrah_AAS_v1 RGF+Support PLAAGF+CombinedArms
-Anvil_AAS_v1 PLA+Support MEA+Support
-Kamdesh_Insurgency_v1 USMC+CombinedArms INS+CombinedArms
-Lashkar_TC_v1 MEA+Armored USA+Armored
-Kohat_TC_v1 MEA+Armored USMC+Armored
-Logar_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Belaya_Invasion_v1 PLA+LightInfantry BAF+Support
-Mestia_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v1 WPMC+AirAssault USA+AirAssault
-Mutaha_RAAS_v1 PLA+Motorized USMC+Motorized
-Sumari_TC_v1 PLA+CombinedArms VDV+CombinedArms
-Anvil_TC_v1 USMC+LightInfantry INS+Armored
-GooseBay_Invasion_v1 PLAAGF+Armored CAF+Armored
-Yehorivka_RAAS_v2 PLA+LightInfantry WPMC+LightInfantry
-Harju_Skirmish_v2 WPMC+CombinedArms BAF+CombinedArms
-Tallil_RAAS_v1 RGF+Motorized CAF+Motorized
-Kohat_TC_v1 RGF+Support USMC+CombinedArms
-Lashkar_Invasion_v1 MEA+Armored TLF+Armored
-Logar_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v2 VDV+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 CAF+Mechanized PLAAGF+Mechanized
-FoolsRoad_TC_v1 RGF+CombinedArms USMC+CombinedArms
-Kamdesh_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 WPMC+LightInfantry CAF+Motorized
-Yehorivka_RAAS_v1 USA+AirAssault WPMC+AirAssault
-Manicouagan_Skirmish_v3 WPMC+CombinedArms BAF+CombinedArms
-Mutaha_TC_v1 WPMC+CombinedArms RGF+CombinedArms
-Skorpo_Invasion_v1 ADF+Mechanized IMF+Mechanized
-GooseBay_Skirmish_v1 VDV+CombinedArms PLAAGF+CombinedArms
-Tallil_AAS_v1 TLF+Armored MEA+Armored
-Gorodok_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
-Harju_RAAS_v2 WPMC+LightInfantry IMF+Mechanized
-FoolsRoad_Invasion_v1 VDV+CombinedArms USMC+CombinedArms
-Belaya_TC_v1 PLA+LightInfantry WPMC+LightInfantry
-Lashkar_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
-Yehorivka_TC_v1 WPMC+CombinedArms VDV+CombinedArms
-Anvil_RAAS_v1 ADF+CombinedArms RGF+Support
-Kamdesh_Invasion_v1 USMC+Support MEA+Support
-Fallujah_TC_v1 USA+CombinedArms WPMC+CombinedArms
-Narva_TC_v1 IMF+Support USA+Support
-Chora_Skirmish_v1 USMC+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v1 USA+CombinedArms INS+Support
+Kohat_Invasion_v1 CAF+Mechanized INS+LightInfantry
+FoolsRoad_AAS_v1 CAF+CombinedArms IMF+CombinedArms
+Gorodok_TC_v1 TLF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v3 RGF+Motorized USA+Motorized
+Tallil_AAS_v1 ADF+AirAssault PLA+AirAssault
+Mutaha_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
+Sumari_Invasion_v1 MEA+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v2 MEA+CombinedArms VDV+CombinedArms
+Anvil_TC_v1 TLF+CombinedArms RGF+CombinedArms
+Logar_AAS_v1 WPMC+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+BlackCoast_RAAS_v1 ADF+AirAssault PLANMC+AirAssault
+Kohat_AAS_v1 WPMC+AirAssault VDV+Mechanized
+Gorodok_Destruction_v1 BAF+Mechanized VDV+Mechanized
+Yehorivka_RAAS_v2 CAF+Support PLA+Support
+Kokan_TC_v1 MEA+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 USMC+Motorized TLF+Motorized
+Mutaha_RAAS_v1 MEA+AirAssault TLF+AirAssault
+AlBasrah_RAAS_v1 MEA+Support USMC+Support
+Sanxian_RAAS_v2 BAF+Mechanized WPMC+LightInfantry
+Mestia_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+Belaya_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v2 RGF+Support CAF+Support
+BlackCoast_RAAS_v2 VDV+CombinedArms CAF+CombinedArms
+Chora_Skirmish_v1 TLF+CombinedArms MEA+CombinedArms
+Anvil_AAS_v1 RGF+Support PLA+Support
+Kamdesh_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
+Fallujah_RAAS_v2 BAF+Armored RGF+Motorized
+FoolsRoad_AAS_v1 BAF+CombinedArms VDV+CombinedArms
+Tallil_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Kokan_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
+Yehorivka_AAS_v2 USA+CombinedArms TLF+AirAssault
+AlBasrah_Invasion_v2 MEA+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+Gorodok_AAS_v1 IMF+CombinedArms TLF+CombinedArms
+Lashkar_TC_v1 WPMC+AirAssault MEA+AirAssault
+Sumari_AAS_v2 MEA+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 VDV+Support WPMC+LightInfantry
+Fallujah_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
+Harju_AAS_v3 RGF+CombinedArms IMF+CombinedArms
+Sanxian_AAS_v2 PLA+Armored USA+Armored
+Mutaha_AAS_v1 CAF+Motorized PLA+Motorized
+Chora_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v2 WPMC+CombinedArms INS+CombinedArms
+Narva_Destruction_v1 IMF+LightInfantry USMC+CombinedArms
+BlackCoast_RAAS_v2 PLANMC+Armored USMC+Armored
+Kohat_AAS_v1 RGF+CombinedArms ADF+CombinedArms
+FoolsRoad_Skirmish_v2 WPMC+CombinedArms PLA+CombinedArms
+Tallil_RAAS_v1 CAF+Motorized INS+Motorized
+Manicouagan_RAAS_v2 PLAAGF+Mechanized CAF+Armored
+Lashkar_Invasion_v1 PLA+Support RGF+Support
+Fallujah_RAAS_v1 TLF+Armored BAF+Armored
+Harju_RAAS_v1 IMF+CombinedArms CAF+CombinedArms
+Kamdesh_Skirmish_v1 BAF+CombinedArms INS+CombinedArms
+Belaya_AAS_v3 TLF+AirAssault WPMC+AirAssault
+AlBasrah_AAS_v1 MEA+Support PLA+Support
+Mestia_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
+Sanxian_AAS_v1 WPMC+AirAssault USA+Mechanized
+Anvil_RAAS_v1 INS+Armored PLA+Armored
+Kokan_TC_v1 RGF+CombinedArms USMC+CombinedArms
+BlackCoast_AAS_v2 BAF+Armored PLAAGF+Armored
+Gorodok_RAAS_v2 IMF+CombinedArms ADF+CombinedArms
+Tallil_Invasion_v1 INS+Armored BAF+Armored
+Fallujah_RAAS_v1 WPMC+LightInfantry BAF+CombinedArms
+Sumari_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 VDV+Support IMF+Support
+AlBasrah_RAAS_v1 PLAAGF+Armored MEA+Armored
+Mestia_AAS_v2 RGF+CombinedArms ADF+CombinedArms
+Sanxian_RAAS_v2 WPMC+CombinedArms ADF+CombinedArms
+Kamdesh_Invasion_v1 MEA+LightInfantry WPMC+LightInfantry
+Narva_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v1 USMC+CombinedArms MEA+CombinedArms
+Lashkar_AAS_v2 RGF+CombinedArms BAF+CombinedArms
+Yehorivka_AAS_v1 TLF+Mechanized IMF+CombinedArms
+Kokan_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+BlackCoast_AAS_v2 VDV+AirAssault TLF+AirAssault
+Fallujah_TC_v1 TLF+Armored BAF+Armored
+Sumari_AAS_v3 BAF+CombinedArms PLA+CombinedArms
+Harju_RAAS_v2 VDV+Mechanized ADF+Mechanized
+Kamdesh_RAAS_v1 PLA+Support USA+Armored
+Chora_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
+Narva_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Tallil_AAS_v1 USMC+Support MEA+Support
+Anvil_AAS_v1 TLF+AirAssault BAF+AirAssault
+AlBasrah_RAAS_v1 TLF+Motorized INS+Motorized
+Logar_TC_v1 VDV+CombinedArms MEA+CombinedArms
+Lashkar_RAAS_v1 RGF+LightInfantry WPMC+AirAssault
+Gorodok_Destruction_v1 RGF+Mechanized ADF+Mechanized
+BlackCoast_AAS_v2 PLAAGF+Armored TLF+Armored
+GooseBay_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Mutaha_TC_v1 MEA+LightInfantry PLA+LightInfantry
+Mestia_AAS_v2 PLA+CombinedArms ADF+CombinedArms
+Fallujah_RAAS_v1 VDV+CombinedArms INS+CombinedArms
+Manicouagan_Invasion_v2 BAF+Armored WPMC+LightInfantry
+Tallil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Harju_RAAS_v2 WPMC+LightInfantry RGF+LightInfantry
+AlBasrah_Skirmish_v1 ADF+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v2 MEA+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 CAF+Motorized PLA+CombinedArms
+Sumari_AAS_v1 PLA+CombinedArms USA+CombinedArms
+GooseBay_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 MEA+Armored USMC+Armored
+BlackCoast_Skirmish_v1 IMF+CombinedArms PLANMC+CombinedArms
+Gorodok_AAS_v1 WPMC+AirAssault BAF+Support
+Manicouagan_RAAS_v2 WPMC+CombinedArms CAF+CombinedArms
+Fallujah_RAAS_v1 INS+LightInfantry RGF+LightInfantry
+Mestia_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v1 VDV+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 VDV+Support IMF+Support
+Kokan_Skirmish_v1 RGF+CombinedArms MEA+CombinedArms
+Anvil_AAS_v1 USA+AirAssault PLA+AirAssault
+Sanxian_AAS_v1 PLAAGF+CombinedArms WPMC+AirAssault
+FoolsRoad_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+AlBasrah_Invasion_v2 RGF+Mechanized CAF+Mechanized
+Kohat_AAS_v1 BAF+Armored PLA+Armored
+Lashkar_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v2 PLA+CombinedArms WPMC+AirAssault
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
