--- a/Tools/Rotation/LayerRotation/LayerRotation_10.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_10.cfg
@@ -1,200 +1,200 @@
-Harju_Skirmish_v1 USMC+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 RGF+CombinedArms TLF+Motorized
-Kohat_Invasion_v2 TLF+CombinedArms PLA+CombinedArms
-Tallil_RAAS_v2 MEA+CombinedArms PLA+CombinedArms
-Kokan_TC_v1 CAF+CombinedArms MEA+CombinedArms
-Fallujah_TC_v1 USMC+CombinedArms INS+CombinedArms
-AlBasrah_RAAS_v1 TLF+Mechanized MEA+Mechanized
-Gorodok_Destruction_v1 PLA+LightInfantry WPMC+LightInfantry
-Mutaha_AAS_v1 PLA+Armored VDV+Armored
-FoolsRoad_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 VDV+Armored USMC+Armored
-Lashkar_TC_v2 USMC+CombinedArms MEA+CombinedArms
-Anvil_Invasion_v1 CAF+Mechanized TLF+Armored
-Chora_Skirmish_v1 USMC+CombinedArms VDV+CombinedArms
-Belaya_TC_v1 WPMC+CombinedArms RGF+CombinedArms
-Tallil_RAAS_v2 USA+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 MEA+Mechanized TLF+Mechanized
-BlackCoast_Invasion_v2 RGF+Armored IMF+Armored
-Mestia_AAS_v2 IMF+CombinedArms TLF+CombinedArms
-Kohat_RAAS_v2 CAF+Motorized TLF+Motorized
-Skorpo_RAAS_v1 ADF+AirAssault WPMC+LightInfantry
-AlBasrah_TC_v1 TLF+AirAssault PLANMC+AirAssault
-Yehorivka_Destruction_v1 IMF+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v1 VDV+AirAssault BAF+AirAssault
-Chora_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Anvil_AAS_v1 RGF+Support CAF+Support
-Tallil_TC_v1 RGF+LightInfantry USMC+LightInfantry
-Logar_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
+GooseBay_RAAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
+Lashkar_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 WPMC+AirAssault MEA+CombinedArms
+Manicouagan_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+Mutaha_Invasion_v1 INS+LightInfantry MEA+LightInfantry
+Kohat_AAS_v1 PLA+AirAssault ADF+AirAssault
+Chora_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Sanxian_RAAS_v1 PLANMC+LightInfantry BAF+Support
+Fallujah_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
+Logar_AAS_v1 BAF+CombinedArms MEA+CombinedArms
+Yehorivka_Destruction_v1 PLA+LightInfantry USMC+LightInfantry
+Gorodok_RAAS_v2 TLF+Support IMF+Support
+Lashkar_RAAS_v1 VDV+Support BAF+Armored
+Kamdesh_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
+Anvil_AAS_v1 INS+Motorized PLA+Motorized
+AlBasrah_RAAS_v1 PLANMC+Motorized INS+Motorized
+Kohat_Invasion_v1 VDV+Armored BAF+Armored
+Kokan_RAAS_v1 MEA+CombinedArms INS+CombinedArms
+Manicouagan_AAS_v2 CAF+Support WPMC+AirAssault
+BlackCoast_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+FoolsRoad_Skirmish_v1 USMC+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v1 RGF+Support USA+Support
 Narva_Destruction_v1 WPMC+LightInfantry IMF+LightInfantry
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Kokan_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 PLA+Support TLF+Support
-Kamdesh_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-Gorodok_Invasion_v1 CAF+Support PLA+Support
-Yehorivka_Skirmish_v1 VDV+CombinedArms USMC+CombinedArms
-Belaya_AAS_v2 USA+Support PLA+CombinedArms
-Kohat_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms VDV+CombinedArms
-Mutaha_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 USMC+Support MEA+Support
-Logar_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Harju_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Lashkar_RAAS_v1 USMC+Armored TLF+Armored
-Sumari_Invasion_v1 INS+CombinedArms MEA+CombinedArms
-Anvil_RAAS_v1 CAF+AirAssault VDV+Armored
-Manicouagan_AAS_v1 USMC+Support VDV+Support
-Kokan_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 PLA+Armored TLF+Armored
-Gorodok_Destruction_v1 ADF+CombinedArms PLA+CombinedArms
-Mestia_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 USA+LightInfantry MEA+Mechanized
-Kamdesh_AAS_v1 WPMC+AirAssault CAF+AirAssault
-Mutaha_AAS_v2 WPMC+LightInfantry INS+LightInfantry
-FoolsRoad_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
-Lashkar_TC_v1 PLA+LightInfantry MEA+LightInfantry
-Sanxian_AAS_v3 CAF+Armored WPMC+CombinedArms
-BlackCoast_Skirmish_v1 PLAAGF+CombinedArms USMC+CombinedArms
-Yehorivka_RAAS_v1 PLA+AirAssault WPMC+AirAssault
-Anvil_Invasion_v1 INS+Armored USMC+Armored
-AlBasrah_Skirmish_v2 USA+CombinedArms MEA+CombinedArms
-Tallil_RAAS_v1 TLF+Support INS+Support
-Narva_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
-Manicouagan_AAS_v2 BAF+Mechanized PLAAGF+Mechanized
-Mutaha_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Fallujah_AAS_v1 VDV+Mechanized USA+Mechanized
-Logar_TC_v1 RGF+CombinedArms PLA+CombinedArms
-Kohat_AAS_v1 RGF+Armored PLA+Armored
-Gorodok_RAAS_v2 ADF+Mechanized PLA+CombinedArms
-Lashkar_Invasion_v1 MEA+LightInfantry PLA+LightInfantry
-Chora_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 WPMC+AirAssault MEA+AirAssault
-Kamdesh_AAS_v1 USMC+Support INS+Support
-FoolsRoad_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
-GooseBay_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Mutaha_TC_v1 INS+Mechanized TLF+Mechanized
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Harju_AAS_v1 IMF+Mechanized ADF+Mechanized
-Fallujah_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-Yehorivka_Destruction_v1 VDV+CombinedArms TLF+Armored
-AlBasrah_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 INS+Support USA+Support
-Tallil_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 TLF+CombinedArms BAF+CombinedArms
-Belaya_Invasion_v1 IMF+LightInfantry TLF+Motorized
-GooseBay_AAS_v1 PLA+AirAssault WPMC+AirAssault
-FoolsRoad_TC_v1 USMC+CombinedArms IMF+CombinedArms
-Anvil_TC_v1 VDV+AirAssault ADF+AirAssault
-Lashkar_TC_v1 MEA+Armored VDV+Armored
-Mutaha_TC_v1 RGF+LightInfantry INS+LightInfantry
-Kamdesh_Invasion_v1 WPMC+AirAssault ADF+Mechanized
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 RGF+Support IMF+Support
-Fallujah_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
-Sumari_Skirmish_v1 INS+CombinedArms VDV+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms BAF+Mechanized
-Tallil_TC_v1 PLA+CombinedArms USMC+CombinedArms
-Kohat_AAS_v1 INS+CombinedArms PLA+CombinedArms
-FoolsRoad_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Sanxian_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Lashkar_Invasion_v1 ADF+AirAssault TLF+Motorized
-Manicouagan_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-AlBasrah_AAS_v1 USA+LightInfantry RGF+LightInfantry
-Mestia_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Yehorivka_Invasion_v2 VDV+Mechanized IMF+Mechanized
-Anvil_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-Belaya_TC_v1 RGF+Support WPMC+LightInfantry
-Fallujah_TC_v1 INS+Mechanized ADF+Mechanized
-FoolsRoad_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Kohat_Invasion_v2 RGF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v1 WPMC+AirAssault USA+AirAssault
-Narva_TC_v1 RGF+Motorized USMC+Support
-Kokan_TC_v1 PLA+CombinedArms RGF+CombinedArms
-AlBasrah_AAS_v1 ADF+Mechanized VDV+Mechanized
-Kamdesh_Invasion_v1 INS+CombinedArms USMC+CombinedArms
-Sumari_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
-Mutaha_RAAS_v1 INS+LightInfantry PLA+LightInfantry
-Belaya_TC_v1 IMF+Support USMC+Support
-Fallujah_AAS_v1 MEA+Mechanized ADF+Mechanized
-FoolsRoad_Destruction_v1 CAF+CombinedArms RGF+CombinedArms
-Anvil_AAS_v1 INS+Armored TLF+Armored
+Fallujah_RAAS_v2 ADF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 RGF+Motorized CAF+Support
+Belaya_RAAS_v1 USA+Motorized RGF+Motorized
 PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Kohat_TC_v1 PLA+Support USA+Motorized
-Chora_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
-Kamdesh_TC_v1 PLA+LightInfantry MEA+LightInfantry
-Sanxian_AAS_v3 PLANMC+LightInfantry WPMC+LightInfantry
-Gorodok_TC_v1 WPMC+LightInfantry IMF+LightInfantry
-AlBasrah_RAAS_v1 TLF+Armored PLANMC+Motorized
-Skorpo_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v2 MEA+CombinedArms USA+CombinedArms
-BlackCoast_RAAS_v2 PLANMC+Motorized USMC+Motorized
-Lashkar_TC_v2 BAF+CombinedArms WPMC+CombinedArms
-Sumari_Skirmish_v1 MEA+CombinedArms CAF+CombinedArms
-Narva_Destruction_v1 USMC+Support WPMC+CombinedArms
-Anvil_RAAS_v1 VDV+CombinedArms USA+CombinedArms
-Chora_AAS_v3 INS+CombinedArms RGF+CombinedArms
-Mutaha_TC_v1 WPMC+AirAssault TLF+AirAssault
-Tallil_TC_v1 VDV+Support PLA+Support
-Kohat_TC_v1 TLF+Motorized USMC+Armored
-Belaya_Invasion_v2 PLA+Support USA+Support
-Fallujah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Kokan_Skirmish_v1 VDV+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 USA+Mechanized TLF+Mechanized
-Lashkar_AAS_v2 VDV+Armored USMC+Support
-Skorpo_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Harju_AAS_v2 RGF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v2 RGF+Armored PLA+Armored
-Anvil_RAAS_v2 PLA+Support BAF+Support
-FoolsRoad_Invasion_v1 IMF+CombinedArms PLA+CombinedArms
+AlBasrah_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
+Anvil_RAAS_v2 WPMC+CombinedArms MEA+CombinedArms
+Gorodok_Invasion_v1 WPMC+AirAssault USMC+Support
+Chora_RAAS_v1 CAF+CombinedArms VDV+CombinedArms
+Kamdesh_RAAS_v1 PLA+Armored TLF+Armored
+Tallil_AAS_v1 WPMC+AirAssault PLA+AirAssault
+Lashkar_RAAS_v1 TLF+Support VDV+Support
+Kokan_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 PLA+CombinedArms USA+Motorized
+Yehorivka_Destruction_v1 USA+CombinedArms VDV+CombinedArms
+Harju_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+GooseBay_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Sumari_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
+Manicouagan_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Sanxian_AAS_v2 USMC+LightInfantry WPMC+CombinedArms
+Mestia_Invasion_v1 TLF+CombinedArms BAF+CombinedArms
+BlackCoast_RAAS_v1 CAF+CombinedArms PLAAGF+CombinedArms
+Belaya_TC_v1 CAF+Motorized PLA+Motorized
+Logar_AAS_v1 MEA+CombinedArms CAF+CombinedArms
+Narva_AAS_v1 IMF+CombinedArms VDV+CombinedArms
+Mutaha_AAS_v2 TLF+AirAssault WPMC+AirAssault
+Anvil_Invasion_v1 VDV+Armored MEA+Armored
+Lashkar_AAS_v2 PLA+Support BAF+Support
+Yehorivka_TC_v2 BAF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 INS+Motorized ADF+CombinedArms
+Fallujah_RAAS_v1 PLA+Motorized TLF+Motorized
+FoolsRoad_AAS_v1 USA+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLA+CombinedArms
+BlackCoast_Invasion_v2 PLAAGF+CombinedArms ADF+CombinedArms
+Kamdesh_RAAS_v1 TLF+AirAssault PLA+AirAssault
+Sumari_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+GooseBay_RAAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Anvil_TC_v1 MEA+Armored INS+Armored
+Mestia_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
+Yehorivka_Destruction_v1 IMF+Armored RGF+Armored
+AlBasrah_AAS_v1 VDV+CombinedArms CAF+CombinedArms
+Logar_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+Lashkar_RAAS_v1 PLA+CombinedArms INS+CombinedArms
+Fallujah_AAS_v1 VDV+Support PLA+Support
 Tallil_TC_v1 PLA+AirAssault ADF+AirAssault
-Narva_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
-GooseBay_AAS_v1 WPMC+LightInfantry USMC+CombinedArms
-Sanxian_AAS_v3 PLANMC+CombinedArms USA+CombinedArms
-Mutaha_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Fallujah_Insurgency_v1 TLF+Motorized INS+Motorized
-Belaya_RAAS_v1 CAF+Mechanized TLF+Mechanized
-Skorpo_RAAS_v1 USMC+Support RGF+Support
-Sumari_AAS_v2 INS+CombinedArms CAF+CombinedArms
-Gorodok_AAS_v1 RGF+LightInfantry IMF+LightInfantry
-Yehorivka_Invasion_v2 PLA+CombinedArms VDV+Support
-Kamdesh_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Lashkar_AAS_v1 RGF+Armored TLF+Armored
-Kohat_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v2 MEA+AirAssault USMC+Support
-Anvil_RAAS_v1 PLA+AirAssault TLF+AirAssault
-Mestia_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 PLA+AirAssault VDV+AirAssault
-Fallujah_TC_v1 BAF+CombinedArms INS+CombinedArms
-BlackCoast_Skirmish_v1 RGF+CombinedArms USA+CombinedArms
-Gorodok_Invasion_v1 IMF+Armored TLF+CombinedArms
-GooseBay_RAAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Tallil_AAS_v1 USA+AirAssault PLA+AirAssault
-Lashkar_AAS_v2 TLF+CombinedArms USMC+CombinedArms
-Yehorivka_TC_v1 USMC+CombinedArms PLA+CombinedArms
-Narva_Destruction_v1 VDV+CombinedArms IMF+CombinedArms
-Kamdesh_RAAS_v1 ADF+Mechanized PLA+Motorized
-Mutaha_TC_v1 MEA+Armored INS+Armored
-Anvil_Skirmish_v1 USA+CombinedArms RGF+CombinedArms
-AlBasrah_RAAS_v1 TLF+Armored PLAAGF+Armored
-Kohat_Insurgency_v1 TLF+CombinedArms INS+CombinedArms
-Manicouagan_RAAS_v1 RGF+Support CAF+Motorized
-Chora_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
-GooseBay_RAAS_v2 BAF+AirAssault WPMC+AirAssault
 PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 PLA+Motorized USMC+Motorized
-Sumari_TC_v1 TLF+CombinedArms USA+CombinedArms
-Gorodok_RAAS_v2 RGF+Motorized PLA+Support
-Fallujah_RAAS_v1 PLA+Armored USMC+Armored
-Kokan_RAAS_v1 CAF+CombinedArms INS+CombinedArms
-Yehorivka_Destruction_v1 IMF+Support BAF+Support
-AlBasrah_AAS_v1 PLAAGF+Armored VDV+Armored
-Skorpo_Skirmish_v1 VDV+CombinedArms USA+CombinedArms
-Narva_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
-Anvil_TC_v1 PLA+Support BAF+Support
-Lashkar_Invasion_v1 USMC+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v2 MEA+LightInfantry PLA+Motorized
+Kohat_RAAS_v2 TLF+Motorized INS+CombinedArms
+Gorodok_Invasion_v1 USA+Support RGF+Support
+Mutaha_RAAS_v2 INS+Armored MEA+Armored
+Harju_TC_v1 WPMC+CombinedArms ADF+CombinedArms
+Manicouagan_AAS_v1 WPMC+AirAssault PLANMC+AirAssault
+Kamdesh_AAS_v1 TLF+Mechanized INS+Mechanized
+Anvil_RAAS_v2 CAF+Armored MEA+AirAssault
+Skorpo_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
+Narva_AAS_v2 USA+LightInfantry IMF+LightInfantry
+Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v2 CAF+Motorized TLF+Motorized
+Lashkar_AAS_v1 BAF+Armored MEA+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Mutaha_AAS_v1 PLA+AirAssault USA+Motorized
+FoolsRoad_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
+Harju_RAAS_v2 CAF+AirAssault WPMC+AirAssault
+Tallil_TC_v1 TLF+Armored MEA+Armored
+Chora_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+BlackCoast_AAS_v1 USMC+Motorized RGF+Motorized
+Fallujah_RAAS_v2 TLF+Support USMC+Support
+Kohat_Invasion_v1 PLA+Motorized CAF+Motorized
+Manicouagan_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Kokan_TC_v1 MEA+CombinedArms RGF+CombinedArms
+Lashkar_AAS_v1 BAF+Support VDV+CombinedArms
+Yehorivka_RAAS_v1 USMC+Support PLA+Support
+Sumari_RAAS_v1 MEA+CombinedArms RGF+CombinedArms
+Narva_Destruction_v1 WPMC+CombinedArms RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Chora_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 WPMC+AirAssault MEA+AirAssault
+Gorodok_RAAS_v2 CAF+Support IMF+Motorized
+Tallil_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Kohat_Invasion_v1 PLA+Support CAF+Support
+GooseBay_RAAS_v2 WPMC+CombinedArms RGF+CombinedArms
+Manicouagan_AAS_v3 WPMC+CombinedArms PLAAGF+CombinedArms
+Mestia_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 MEA+AirAssault ADF+AirAssault
+BlackCoast_RAAS_v2 IMF+Support WPMC+AirAssault
+Yehorivka_Invasion_v2 WPMC+CombinedArms CAF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Lashkar_TC_v2 BAF+CombinedArms INS+CombinedArms
+Mutaha_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 BAF+CombinedArms PLA+AirAssault
+Sumari_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Belaya_Invasion_v2 PLA+LightInfantry IMF+LightInfantry
+Kohat_RAAS_v1 MEA+Support TLF+Support
+Kokan_TC_v1 USMC+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 MEA+CombinedArms ADF+CombinedArms
+Manicouagan_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v2 VDV+Support IMF+Support
+Fallujah_Invasion_v1 PLA+Support MEA+Support
+Sanxian_RAAS_v1 USA+Armored PLANMC+Armored
+Lashkar_AAS_v1 MEA+CombinedArms VDV+AirAssault
+Mestia_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 PLA+LightInfantry USA+LightInfantry
+GooseBay_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
+Belaya_Invasion_v1 USA+Motorized PLA+Motorized
+Chora_AAS_v3 RGF+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 CAF+CombinedArms PLA+CombinedArms
+Mutaha_TC_v1 MEA+LightInfantry WPMC+CombinedArms
+Yehorivka_RAAS_v1 BAF+Armored IMF+Armored
+Tallil_RAAS_v1 INS+Mechanized TLF+Mechanized
+Fallujah_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
+Kokan_AAS_v1 PLA+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Lashkar_RAAS_v1 USMC+Motorized PLA+Motorized
+Anvil_TC_v1 PLA+AirAssault WPMC+AirAssault
+Chora_RAAS_v1 RGF+CombinedArms CAF+CombinedArms
+Kamdesh_Invasion_v1 VDV+Armored PLA+Motorized
+Kohat_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Logar_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Yehorivka_RAAS_v1 IMF+Armored PLA+Armored
+Mutaha_RAAS_v1 MEA+CombinedArms USMC+CombinedArms
+Mestia_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 USMC+Motorized RGF+CombinedArms
+Belaya_Invasion_v2 VDV+Support PLA+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Kokan_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Lashkar_TC_v1 INS+Armored TLF+Armored
+Skorpo_RAAS_v1 IMF+Armored BAF+Mechanized
+Kohat_RAAS_v2 INS+Motorized PLA+Motorized
+FoolsRoad_Invasion_v1 VDV+CombinedArms TLF+CombinedArms
+AlBasrah_RAAS_v1 INS+Armored MEA+Armored
+Kamdesh_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Yehorivka_TC_v1 VDV+CombinedArms USA+CombinedArms
+Mutaha_RAAS_v2 TLF+Support PLA+Support
+Anvil_RAAS_v1 MEA+AirAssault INS+LightInfantry
+Belaya_Invasion_v2 WPMC+LightInfantry USMC+LightInfantry
+Chora_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Tallil_AAS_v1 RGF+LightInfantry MEA+LightInfantry
+Kokan_TC_v1 MEA+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 USA+AirAssault TLF+Motorized
+Lashkar_Invasion_v1 INS+LightInfantry RGF+LightInfantry
+Skorpo_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Kohat_AAS_v1 INS+CombinedArms MEA+CombinedArms
+FoolsRoad_TC_v1 TLF+CombinedArms USMC+CombinedArms
+Harju_RAAS_v1 RGF+Armored CAF+Armored
+AlBasrah_AAS_v1 TLF+Mechanized USMC+Motorized
+Sanxian_Invasion_v2 USMC+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v2 ADF+Mechanized IMF+Mechanized
+Tallil_TC_v1 PLA+Support VDV+Support
+Mutaha_AAS_v1 TLF+Mechanized USA+Mechanized
+Manicouagan_AAS_v3 VDV+Support WPMC+AirAssault
+Sumari_AAS_v3 MEA+CombinedArms ADF+CombinedArms
+Kamdesh_Invasion_v1 PLA+CombinedArms TLF+CombinedArms
+Gorodok_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms USMC+CombinedArms
+Narva_AAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Yehorivka_Destruction_v1 RGF+LightInfantry WPMC+LightInfantry
+AlBasrah_AAS_v1 MEA+Support INS+Support
+Fallujah_TC_v1 TLF+CombinedArms MEA+CombinedArms
+Anvil_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v2 PLA+CombinedArms BAF+CombinedArms
+BlackCoast_RAAS_v1 IMF+Motorized TLF+Motorized
+Lashkar_Invasion_v1 WPMC+AirAssault MEA+LightInfantry
+Tallil_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 MEA+Mechanized INS+Mechanized
+Kokan_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Sanxian_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 BAF+Support INS+Armored
+Yehorivka_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+GooseBay_Skirmish_v1 USMC+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Lashkar_AAS_v2 USA+Armored VDV+Armored
+AlBasrah_Invasion_v2 INS+Support TLF+Motorized
+Gorodok_AAS_v1 BAF+Mechanized TLF+Mechanized
