--- a/Tools/Rotation/LayerRotation/LayerRotation_11.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_11.cfg
@@ -1,200 +1,200 @@
-Sumari_TC_v1 WPMC+CombinedArms INS+CombinedArms
-Belaya_AAS_v3 WPMC+LightInfantry IMF+LightInfantry
-BlackCoast_RAAS_v2 PLA+LightInfantry IMF+LightInfantry
-FoolsRoad_Destruction_v1 IMF+CombinedArms ADF+CombinedArms
-Tallil_TC_v1 MEA+Mechanized TLF+Mechanized
-Kohat_TC_v1 PLA+AirAssault USA+AirAssault
-Manicouagan_AAS_v3 PLAAGF+Mechanized WPMC+LightInfantry
-AlBasrah_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Sanxian_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLA+CombinedArms
-Mestia_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 USMC+CombinedArms INS+CombinedArms
-Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Lashkar_Invasion_v1 PLA+LightInfantry USA+LightInfantry
-Yehorivka_RAAS_v2 TLF+Mechanized IMF+LightInfantry
-Kokan_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 IMF+CombinedArms USMC+CombinedArms
-Gorodok_RAAS_v2 VDV+CombinedArms ADF+CombinedArms
-AlBasrah_TC_v1 WPMC+LightInfantry INS+LightInfantry
-FoolsRoad_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 VDV+CombinedArms INS+Armored
-Belaya_AAS_v2 PLA+AirAssault TLF+AirAssault
+Logar_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
+Kamdesh_AAS_v1 VDV+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v2 RGF+Mechanized ADF+Mechanized
+Belaya_AAS_v2 IMF+Mechanized TLF+Mechanized
+Tallil_Invasion_v1 BAF+CombinedArms INS+CombinedArms
+Anvil_AAS_v1 VDV+Mechanized MEA+Mechanized
+BlackCoast_AAS_v1 USMC+LightInfantry IMF+Mechanized
+Kohat_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
+Harju_RAAS_v2 VDV+CombinedArms BAF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Lashkar_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
+Mestia_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v1 INS+Mechanized CAF+Mechanized
+Kamdesh_AAS_v1 TLF+Support VDV+Support
+Fallujah_Skirmish_v2 MEA+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v1 PLAAGF+Mechanized WPMC+LightInfantry
+Narva_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
+Chora_AAS_v3 INS+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 PLA+Armored IMF+Armored
+Kohat_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
+Sanxian_RAAS_v1 CAF+Armored PLAAGF+Armored
+AlBasrah_TC_v1 TLF+Support USA+AirAssault
+Anvil_RAAS_v1 WPMC+AirAssault BAF+AirAssault
+Kokan_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Tallil_Invasion_v1 USMC+Support MEA+Support
+Mutaha_AAS_v1 RGF+Motorized CAF+Motorized
+Fallujah_RAAS_v1 INS+Support PLA+Support
+Kamdesh_AAS_v1 PLA+CombinedArms ADF+AirAssault
 Logar_TC_v1 INS+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v1 BAF+AirAssault WPMC+AirAssault
-Narva_Destruction_v1 BAF+Support VDV+Support
-Sumari_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 INS+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 MEA+Armored TLF+Support
-Chora_TC_v1 INS+CombinedArms USA+CombinedArms
-Yehorivka_Destruction_v1 TLF+Motorized IMF+Motorized
-Sanxian_AAS_v3 ADF+CombinedArms PLANMC+CombinedArms
-AlBasrah_Skirmish_v2 MEA+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
-Manicouagan_Invasion_v2 PLANMC+Motorized BAF+Armored
-Logar_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Mutaha_TC_v1 BAF+Armored TLF+Armored
-Fallujah_TC_v1 VDV+Mechanized CAF+Mechanized
-Mestia_RAAS_v1 CAF+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v2 BAF+Mechanized INS+Mechanized
-Narva_Invasion_v1 USMC+LightInfantry IMF+Mechanized
-FoolsRoad_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Belaya_TC_v1 TLF+Motorized RGF+Motorized
-BlackCoast_RAAS_v1 USA+Mechanized VDV+Mechanized
-Sumari_AAS_v1 PLA+CombinedArms VDV+CombinedArms
-Yehorivka_RAAS_v2 WPMC+AirAssault RGF+Armored
-Gorodok_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Kokan_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
-Lashkar_AAS_v2 INS+Motorized USMC+Motorized
-Anvil_TC_v1 BAF+Armored MEA+Armored
-AlBasrah_TC_v1 VDV+AirAssault PLA+AirAssault
-Fallujah_Invasion_v1 USMC+LightInfantry INS+Armored
-Logar_RAAS_v1 RGF+CombinedArms USA+CombinedArms
-Manicouagan_AAS_v1 WPMC+AirAssault PLANMC+AirAssault
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-FoolsRoad_TC_v1 IMF+CombinedArms TLF+CombinedArms
-Belaya_Invasion_v1 USA+Mechanized TLF+CombinedArms
-BlackCoast_AAS_v1 ADF+CombinedArms VDV+CombinedArms
-Tallil_AAS_v1 RGF+LightInfantry INS+LightInfantry
-Mutaha_Skirmish_v1 MEA+CombinedArms ADF+CombinedArms
-Lashkar_AAS_v1 VDV+Armored INS+Armored
-Kamdesh_Invasion_v1 INS+Support BAF+Support
-Anvil_Skirmish_v1 MEA+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 RGF+Mechanized ADF+Mechanized
-AlBasrah_TC_v1 BAF+Mechanized MEA+Mechanized
-Yehorivka_AAS_v2 TLF+Armored VDV+CombinedArms
-Kokan_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-Fallujah_Invasion_v2 WPMC+LightInfantry INS+LightInfantry
-Narva_TC_v1 WPMC+LightInfantry IMF+LightInfantry
-Sanxian_RAAS_v2 PLANMC+AirAssault BAF+AirAssault
-FoolsRoad_Skirmish_v2 USMC+CombinedArms PLA+CombinedArms
-Kohat_AAS_v1 PLA+LightInfantry TLF+CombinedArms
-Gorodok_RAAS_v1 IMF+Armored PLA+Armored
-Mutaha_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Tallil_Skirmish_v3 CAF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 INS+LightInfantry PLA+CombinedArms
-GooseBay_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Fallujah_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Manicouagan_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Mestia_Skirmish_v1 RGF+CombinedArms TLF+CombinedArms
-Sanxian_AAS_v3 WPMC+CombinedArms USA+CombinedArms
-Narva_AAS_v2 IMF+CombinedArms BAF+Mechanized
-FoolsRoad_Destruction_v1 USMC+CombinedArms IMF+CombinedArms
-Kamdesh_AAS_v1 INS+Mechanized MEA+Mechanized
-Kohat_AAS_v1 INS+Support TLF+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Kokan_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Gorodok_Destruction_v1 USMC+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v1 INS+LightInfantry PLA+LightInfantry
-Tallil_RAAS_v1 RGF+Support USMC+Support
-Lashkar_TC_v1 TLF+Armored MEA+Armored
-Yehorivka_TC_v1 IMF+Armored PLA+CombinedArms
-GooseBay_Invasion_v1 RGF+Armored BAF+Armored
-Anvil_RAAS_v2 INS+Mechanized VDV+Mechanized
-Logar_TC_v1 CAF+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v2 USMC+Support RGF+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Manicouagan_Skirmish_v2 USMC+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 WPMC+CombinedArms INS+Mechanized
-Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Tallil_Skirmish_v3 WPMC+CombinedArms TLF+CombinedArms
-Gorodok_RAAS_v1 USMC+Motorized TLF+Motorized
-Lashkar_TC_v2 MEA+LightInfantry WPMC+LightInfantry
-FoolsRoad_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 INS+Support USMC+LightInfantry
-Kamdesh_RAAS_v1 PLA+Support VDV+Support
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Belaya_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Sumari_AAS_v3 INS+CombinedArms CAF+CombinedArms
-Fallujah_Invasion_v1 PLA+Motorized USA+Motorized
-AlBasrah_RAAS_v1 WPMC+AirAssault RGF+Support
-Manicouagan_RAAS_v2 USA+AirAssault PLA+AirAssault
-Logar_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Mutaha_TC_v1 WPMC+CombinedArms PLA+CombinedArms
-Sanxian_Invasion_v2 WPMC+LightInfantry USA+LightInfantry
-FoolsRoad_AAS_v2 ADF+CombinedArms VDV+CombinedArms
-BlackCoast_AAS_v1 CAF+Armored IMF+Armored
-Skorpo_RAAS_v1 USMC+Motorized IMF+Motorized
-Lashkar_RAAS_v1 USA+Armored PLA+Armored
-Kohat_Invasion_v2 ADF+CombinedArms RGF+Armored
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-Kokan_TC_v1 TLF+CombinedArms BAF+CombinedArms
-Belaya_RAAS_v1 BAF+Mechanized VDV+Mechanized
-Kamdesh_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v1 USMC+Motorized IMF+Motorized
-Mutaha_AAS_v1 PLA+Support USA+Support
-Gorodok_TC_v1 CAF+Motorized IMF+Support
-Mestia_Skirmish_v1 TLF+CombinedArms USA+CombinedArms
-Manicouagan_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Yehorivka_Invasion_v2 WPMC+LightInfantry IMF+LightInfantry
-Tallil_Skirmish_v3 TLF+CombinedArms MEA+CombinedArms
-Fallujah_TC_v1 ADF+CombinedArms PLA+Support
-Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Chora_Skirmish_v1 MEA+CombinedArms USA+CombinedArms
-AlBasrah_Invasion_v2 TLF+Support INS+Support
+Yehorivka_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Kohat_Invasion_v1 PLA+Armored VDV+Armored
+FoolsRoad_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 WPMC+AirAssault PLA+LightInfantry
+Manicouagan_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
+GooseBay_Skirmish_v1 BAF+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 RGF+Motorized PLA+Motorized
+Gorodok_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
+Chora_AAS_v1 MEA+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 CAF+CombinedArms PLA+AirAssault
+Logar_Skirmish_v1 TLF+CombinedArms ADF+CombinedArms
+Yehorivka_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
+Kohat_Invasion_v1 ADF+Mechanized MEA+Mechanized
+Mutaha_AAS_v1 INS+Armored USA+Armored
+FoolsRoad_AAS_v2 IMF+CombinedArms USA+CombinedArms
+Manicouagan_AAS_v1 USA+Motorized RGF+Motorized
+PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Kamdesh_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
+Narva_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Gorodok_Destruction_v1 RGF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Harju_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Fallujah_TC_v1 TLF+Mechanized MEA+Mechanized
+Sanxian_AAS_v2 WPMC+AirAssault BAF+AirAssault
+Tallil_AAS_v1 ADF+CombinedArms PLA+LightInfantry
+Anvil_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 ADF+Mechanized RGF+Mechanized
+Logar_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Belaya_TC_v1 CAF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 USA+Motorized PLAAGF+CombinedArms
+Manicouagan_AAS_v2 PLA+CombinedArms VDV+CombinedArms
+Kamdesh_Invasion_v1 PLA+LightInfantry RGF+LightInfantry
+Skorpo_RAAS_v1 USA+Armored VDV+Armored
+FoolsRoad_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Harju_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Mestia_AAS_v2 PLA+CombinedArms USMC+CombinedArms
+Fallujah_Invasion_v2 WPMC+CombinedArms INS+CombinedArms
+Kohat_RAAS_v2 PLA+Armored WPMC+LightInfantry
+Lashkar_TC_v1 TLF+AirAssault USA+AirAssault
+Mutaha_AAS_v1 USMC+LightInfantry PLA+LightInfantry
+AlBasrah_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 BAF+Support PLA+Support
+Gorodok_Invasion_v2 IMF+Support PLA+Support
+Chora_AAS_v1 VDV+CombinedArms USA+CombinedArms
+Sanxian_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
+Belaya_AAS_v2 WPMC+AirAssault TLF+AirAssault
+Sumari_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
+Kamdesh_RAAS_v1 USA+Motorized VDV+Support
+Tallil_Invasion_v1 PLA+LightInfantry RGF+LightInfantry
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
+Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+BlackCoast_RAAS_v2 TLF+Support USA+Support
+Kokan_TC_v1 INS+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
+Yehorivka_Destruction_v1 PLA+Armored CAF+Armored
+Fallujah_AAS_v1 USA+Support WPMC+LightInfantry
+FoolsRoad_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Anvil_TC_v1 BAF+CombinedArms VDV+CombinedArms
+Lashkar_AAS_v1 RGF+Motorized INS+Motorized
+GooseBay_RAAS_v1 PLANMC+AirAssault VDV+AirAssault
+Tallil_Invasion_v1 TLF+Mechanized BAF+Mechanized
+Logar_AAS_v1 ADF+CombinedArms MEA+CombinedArms
+Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Gorodok_TC_v1 CAF+Support WPMC+AirAssault
+Kamdesh_RAAS_v1 TLF+AirAssault ADF+AirAssault
+Chora_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
+Skorpo_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
+Sanxian_RAAS_v2 ADF+AirAssault WPMC+AirAssault
+Anvil_TC_v1 MEA+Armored BAF+Armored
+AlBasrah_RAAS_v1 VDV+Armored WPMC+AirAssault
+Kokan_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+BlackCoast_Invasion_v2 IMF+Armored USA+Armored
+Lashkar_AAS_v2 PLA+LightInfantry USA+LightInfantry
+Yehorivka_TC_v2 BAF+Armored IMF+Armored
+Kohat_AAS_v1 WPMC+AirAssault TLF+AirAssault
+GooseBay_AAS_v1 WPMC+AirAssault CAF+CombinedArms
+Narva_AAS_v3 ADF+Mechanized RGF+Mechanized
+Sumari_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Anvil_TC_v1 PLA+LightInfantry MEA+LightInfantry
+Tallil_RAAS_v1 CAF+Armored MEA+Armored
+Mutaha_AAS_v1 PLA+LightInfantry USMC+Armored
+Manicouagan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Kokan_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Lashkar_Invasion_v1 TLF+Support WPMC+CombinedArms
+FoolsRoad_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
+Kohat_AAS_v1 MEA+AirAssault CAF+AirAssault
+Fallujah_AAS_v1 INS+Support MEA+Support
+Sumari_RAAS_v1 RGF+CombinedArms BAF+CombinedArms
+Belaya_AAS_v2 PLA+CombinedArms TLF+CombinedArms
+Tallil_Invasion_v1 USA+LightInfantry VDV+Support
+Skorpo_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Kokan_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v2 IMF+Support USA+Support
+Gorodok_TC_v1 ADF+AirAssault TLF+AirAssault
+Kamdesh_RAAS_v1 WPMC+AirAssault PLA+AirAssault
+FoolsRoad_Invasion_v1 TLF+CombinedArms VDV+CombinedArms
+Mutaha_RAAS_v2 INS+Mechanized ADF+CombinedArms
+Kohat_AAS_v1 CAF+CombinedArms TLF+CombinedArms
+AlBasrah_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
+BlackCoast_AAS_v2 TLF+CombinedArms PLANMC+CombinedArms
+Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Mestia_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
+Manicouagan_RAAS_v2 USMC+Armored PLA+Armored
+Belaya_TC_v1 PLA+LightInfantry IMF+LightInfantry
+Tallil_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Sumari_AAS_v2 PLA+CombinedArms MEA+CombinedArms
+Gorodok_AAS_v1 IMF+CombinedArms BAF+CombinedArms
+Yehorivka_AAS_v2 USA+CombinedArms TLF+CombinedArms
+Kokan_Invasion_v1 USMC+CombinedArms VDV+CombinedArms
+Lashkar_AAS_v2 PLA+Armored MEA+LightInfantry
+AlBasrah_TC_v1 PLANMC+LightInfantry USA+LightInfantry
+Kohat_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
+Logar_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+GooseBay_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
+Harju_AAS_v1 WPMC+AirAssault USA+Armored
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
 Anvil_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Lashkar_TC_v1 INS+CombinedArms ADF+CombinedArms
-FoolsRoad_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 TLF+Mechanized RGF+Mechanized
-Mutaha_Invasion_v1 PLA+Support USMC+Support
-Kamdesh_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v2 IMF+LightInfantry RGF+LightInfantry
-Manicouagan_AAS_v1 CAF+Motorized PLANMC+Motorized
-Tallil_TC_v1 BAF+Armored TLF+Support
-Belaya_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Fallujah_Invasion_v2 INS+Motorized PLA+Motorized
-Kohat_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v2 PLA+AirAssault ADF+AirAssault
-FoolsRoad_TC_v1 WPMC+CombinedArms CAF+CombinedArms
-AlBasrah_TC_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_Invasion_v1 INS+Mechanized BAF+Armored
-Sanxian_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
-Narva_AAS_v2 WPMC+LightInfantry USA+LightInfantry
-Mutaha_TC_v1 TLF+Armored INS+Armored
-Sumari_TC_v1 USA+CombinedArms INS+CombinedArms
-Manicouagan_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
-Fallujah_RAAS_v2 PLA+Support BAF+Support
-Chora_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-Yehorivka_AAS_v1 IMF+Motorized USA+Armored
-Anvil_RAAS_v1 INS+Mechanized MEA+Mechanized
-FoolsRoad_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 VDV+Support PLA+Support
-Tallil_TC_v1 VDV+CombinedArms PLA+CombinedArms
-BlackCoast_Skirmish_v1 PLANMC+CombinedArms IMF+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+CombinedArms RGF+CombinedArms
-Kamdesh_Insurgency_v1 TLF+Motorized INS+Armored
-Mutaha_RAAS_v1 TLF+Motorized USA+Motorized
-Harju_TC_v1 USMC+CombinedArms IMF+CombinedArms
-Belaya_AAS_v2 RGF+Armored IMF+Armored
-Gorodok_RAAS_v2 USA+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 RGF+Mechanized TLF+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 PLA+CombinedArms TLF+CombinedArms
-GooseBay_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Logar_TC_v1 WPMC+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 BAF+Support TLF+Support
-Manicouagan_AAS_v3 CAF+Mechanized WPMC+CombinedArms
-BlackCoast_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
-Mestia_TC_v1 IMF+CombinedArms USMC+CombinedArms
-Harju_RAAS_v2 USA+Mechanized IMF+Mechanized
-Gorodok_Destruction_v1 PLA+Armored TLF+Armored
-Mutaha_RAAS_v2 MEA+AirAssault PLA+Support
-Tallil_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 ADF+Mechanized TLF+Mechanized
-Kamdesh_RAAS_v1 PLA+Armored BAF+Armored
-Lashkar_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v1 RGF+Support PLA+Support
-Fallujah_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Kohat_AAS_v1 MEA+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 USA+Support PLA+Support
-Yehorivka_AAS_v2 TLF+Support BAF+Support
-FoolsRoad_Destruction_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_TC_v1 INS+LightInfantry WPMC+LightInfantry
-Skorpo_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 USMC+CombinedArms PLA+Armored
-Harju_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 USMC+Support PLA+Support
-Mestia_TC_v1 WPMC+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 MEA+Mechanized VDV+Mechanized
+Fallujah_AAS_v1 INS+Mechanized PLA+Armored
+Yehorivka_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Logar_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_TC_v1 PLA+AirAssault MEA+AirAssault
+Lashkar_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v2 RGF+Motorized TLF+Motorized
+Mestia_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v2 WPMC+AirAssault USMC+Armored
+Mutaha_TC_v1 PLA+Armored INS+Armored
+Sumari_AAS_v2 TLF+CombinedArms ADF+CombinedArms
+Belaya_AAS_v2 IMF+Armored TLF+Armored
+BlackCoast_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Narva_Destruction_v1 CAF+Motorized VDV+Mechanized
+Sanxian_AAS_v1 ADF+Mechanized PLAAGF+Mechanized
+Chora_AAS_v3 INS+CombinedArms BAF+CombinedArms
+Kamdesh_AAS_v1 ADF+CombinedArms MEA+CombinedArms
+Fallujah_TC_v1 USMC+LightInfantry INS+LightInfantry
+Tallil_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v1 BAF+Mechanized VDV+Mechanized
+Anvil_Invasion_v1 INS+Support TLF+Support
+Gorodok_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
+Harju_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
+PacificProvingGrounds_AAS_v1 USA+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 MEA+CombinedArms BAF+CombinedArms
+Sumari_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Kohat_Invasion_v1 WPMC+LightInfantry BAF+Armored
+BlackCoast_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+FoolsRoad_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 MEA+Support TLF+Support
+Tallil_TC_v1 PLA+Motorized INS+Motorized
+Kamdesh_RAAS_v1 USA+LightInfantry INS+LightInfantry
+GooseBay_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
+Kokan_AAS_v2 TLF+CombinedArms VDV+CombinedArms
+Mutaha_TC_v1 CAF+AirAssault WPMC+AirAssault
+Skorpo_RAAS_v1 IMF+CombinedArms RGF+LightInfantry
+AlBasrah_RAAS_v1 INS+CombinedArms RGF+CombinedArms
+Yehorivka_Destruction_v1 BAF+Mechanized RGF+Mechanized
+FoolsRoad_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_TC_v2 TLF+AirAssault PLA+AirAssault
+Tallil_RAAS_v1 INS+CombinedArms TLF+Armored
+Sumari_AAS_v3 USMC+CombinedArms TLF+CombinedArms
