--- a/Tools/Rotation/LayerRotation/LayerRotation_12.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_12.cfg
@@ -1,200 +1,200 @@
-Belaya_AAS_v2 TLF+Mechanized VDV+Mechanized
-Anvil_TC_v1 PLA+Support VDV+Support
-Logar_Insurgency_v1 TLF+CombinedArms INS+CombinedArms
-Kamdesh_AAS_v1 PLA+AirAssault CAF+AirAssault
-Fallujah_RAAS_v1 PLA+Armored USA+Armored
-Mutaha_TC_v1 MEA+Mechanized BAF+AirAssault
-Kokan_TC_v1 WPMC+CombinedArms BAF+CombinedArms
-Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Harju_Invasion_v3 USMC+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 VDV+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 MEA+LightInfantry PLA+Support
-Gorodok_TC_v1 WPMC+CombinedArms PLA+CombinedArms
-FoolsRoad_RAAS_v1 USA+CombinedArms TLF+CombinedArms
-Kohat_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Sanxian_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
-Chora_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 ADF+CombinedArms PLA+Support
-Yehorivka_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Mestia_Skirmish_v1 IMF+CombinedArms TLF+CombinedArms
-Narva_Invasion_v2 IMF+CombinedArms BAF+CombinedArms
-Lashkar_TC_v2 CAF+Armored MEA+Armored
-Fallujah_AAS_v1 INS+Support RGF+Mechanized
-Logar_AAS_v1 USA+CombinedArms PLA+CombinedArms
-Manicouagan_RAAS_v2 RGF+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v2 IMF+CombinedArms VDV+CombinedArms
-Tallil_Invasion_v1 USA+Motorized INS+Motorized
-Belaya_TC_v1 RGF+Mechanized ADF+Mechanized
-Kohat_RAAS_v1 USA+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 USA+CombinedArms MEA+AirAssault
-Kokan_TC_v1 USA+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 PLA+Support USMC+Support
-Yehorivka_Skirmish_v2 WPMC+CombinedArms BAF+CombinedArms
-Fallujah_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-Lashkar_AAS_v2 ADF+AirAssault RGF+Armored
-Chora_AAS_v1 MEA+CombinedArms CAF+CombinedArms
-Anvil_RAAS_v1 WPMC+AirAssault PLA+AirAssault
-Gorodok_Invasion_v1 ADF+Mechanized IMF+Mechanized
-Mutaha_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 INS+Support PLA+Support
-GooseBay_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Mestia_TC_v1 CAF+CombinedArms TLF+CombinedArms
-Kohat_Invasion_v1 RGF+CombinedArms BAF+CombinedArms
-AlBasrah_AAS_v1 TLF+AirAssault PLANMC+LightInfantry
-Sumari_Skirmish_v1 MEA+CombinedArms CAF+CombinedArms
-Kamdesh_TC_v1 WPMC+LightInfantry USMC+LightInfantry
-Manicouagan_RAAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Kokan_AAS_v1 USA+CombinedArms RGF+CombinedArms
-Gorodok_Invasion_v1 TLF+Armored IMF+Motorized
-Yehorivka_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v1 USMC+Armored PLA+Armored
-Fallujah_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Chora_TC_v1 WPMC+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Narva_Destruction_v1 BAF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 INS+Mechanized ADF+Mechanized
+Mutaha_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
+Yehorivka_RAAS_v1 IMF+CombinedArms TLF+Armored
+FoolsRoad_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Manicouagan_Invasion_v1 PLAAGF+Armored USMC+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Chora_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
+Kamdesh_RAAS_v1 PLA+Armored USMC+Support
+Harju_RAAS_v2 IMF+Motorized CAF+Motorized
+Mestia_AAS_v2 ADF+CombinedArms VDV+CombinedArms
+AlBasrah_Invasion_v1 PLAAGF+Mechanized CAF+Mechanized
+Kohat_RAAS_v1 PLA+AirAssault WPMC+AirAssault
+Mutaha_RAAS_v2 INS+Mechanized MEA+AirAssault
+Anvil_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
+GooseBay_RAAS_v1 USMC+Armored VDV+Armored
+Tallil_RAAS_v1 USMC+Armored PLA+Armored
+Narva_Destruction_v1 USMC+LightInfantry RGF+LightInfantry
+Sanxian_AAS_v1 PLAAGF+Armored WPMC+AirAssault
+Kokan_TC_v1 BAF+CombinedArms RGF+CombinedArms
+Fallujah_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Logar_AAS_v1 VDV+CombinedArms USMC+CombinedArms
+Belaya_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 PLA+Motorized IMF+Motorized
+Lashkar_AAS_v1 WPMC+LightInfantry ADF+AirAssault
+AlBasrah_AAS_v1 VDV+CombinedArms ADF+CombinedArms
+FoolsRoad_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v1 PLA+LightInfantry INS+LightInfantry
+Yehorivka_Invasion_v2 USA+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 WPMC+CombinedArms PLA+AirAssault
+Kokan_AAS_v2 INS+CombinedArms ADF+CombinedArms
+Anvil_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Tallil_TC_v1 INS+Armored MEA+Armored
+Manicouagan_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Harju_Invasion_v3 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 PLANMC+LightInfantry TLF+Armored
+Chora_AAS_v3 INS+CombinedArms WPMC+CombinedArms
+Gorodok_TC_v1 WPMC+AirAssault TLF+AirAssault
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Mestia_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
+Fallujah_Invasion_v1 TLF+CombinedArms MEA+Mechanized
+Mutaha_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Lashkar_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v2 WPMC+AirAssault VDV+AirAssault
+Skorpo_RAAS_v1 IMF+Support VDV+Support
+Kamdesh_AAS_v1 VDV+CombinedArms INS+CombinedArms
+Kokan_Invasion_v1 TLF+CombinedArms ADF+CombinedArms
+Tallil_RAAS_v1 RGF+Armored CAF+Armored
+Anvil_RAAS_v2 TLF+CombinedArms RGF+LightInfantry
+Kohat_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+BlackCoast_AAS_v2 PLANMC+LightInfantry RGF+LightInfantry
+Gorodok_RAAS_v2 PLA+Support BAF+Support
+Narva_Invasion_v2 ADF+CombinedArms IMF+CombinedArms
+Sumari_AAS_v1 BAF+CombinedArms VDV+CombinedArms
+Lashkar_RAAS_v1 PLA+AirAssault TLF+AirAssault
+Sanxian_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 PLANMC+AirAssault ADF+AirAssault
+Mutaha_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v2 WPMC+LightInfantry IMF+Armored
+Anvil_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+Kamdesh_AAS_v1 ADF+AirAssault PLA+AirAssault
+Chora_AAS_v2 RGF+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v2 PLAAGF+Armored IMF+Armored
+Manicouagan_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Sumari_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
+Kohat_RAAS_v2 PLA+Motorized RGF+Motorized
+Fallujah_Invasion_v2 USA+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Sanxian_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Gorodok_Skirmish_v1 USMC+CombinedArms PLA+CombinedArms
+Tallil_AAS_v1 INS+LightInfantry TLF+Motorized
+Harju_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Anvil_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v1 IMF+LightInfantry USA+LightInfantry
+Sumari_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Narva_AAS_v2 VDV+CombinedArms CAF+CombinedArms
+Mutaha_Invasion_v1 MEA+Support BAF+Support
 Sanxian_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v2 WPMC+CombinedArms INS+CombinedArms
-Tallil_RAAS_v1 INS+CombinedArms TLF+Mechanized
-FoolsRoad_Skirmish_v2 VDV+CombinedArms USMC+CombinedArms
-Narva_AAS_v2 BAF+Mechanized RGF+Mechanized
-Mutaha_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-Logar_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
-Harju_RAAS_v1 CAF+Armored IMF+Mechanized
-Lashkar_TC_v1 RGF+Motorized USMC+Motorized
-Mestia_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Gorodok_AAS_v1 PLA+Support IMF+Support
-Kamdesh_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-BlackCoast_RAAS_v1 PLA+Armored VDV+Armored
-Fallujah_RAAS_v2 USA+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 INS+Support MEA+Armored
-AlBasrah_TC_v1 TLF+Support MEA+Support
-Kokan_Invasion_v1 CAF+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v1 BAF+Support RGF+Support
-Sanxian_RAAS_v2 PLANMC+Support CAF+Support
-FoolsRoad_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-Narva_Destruction_v1 BAF+CombinedArms VDV+CombinedArms
-Chora_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 USMC+LightInfantry PLA+LightInfantry
-Tallil_TC_v1 MEA+LightInfantry ADF+CombinedArms
-Kohat_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
-Kamdesh_Invasion_v1 PLA+LightInfantry INS+LightInfantry
-Fallujah_TC_v1 INS+Mechanized VDV+Mechanized
-Manicouagan_AAS_v3 WPMC+AirAssault VDV+AirAssault
-Kokan_TC_v1 INS+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 VDV+Mechanized IMF+Support
-Mutaha_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
-Sumari_TC_v1 TLF+CombinedArms BAF+CombinedArms
-Gorodok_TC_v1 PLA+Armored TLF+Armored
-Belaya_AAS_v2 WPMC+CombinedArms RGF+CombinedArms
-AlBasrah_TC_v1 USMC+LightInfantry PLA+LightInfantry
-GooseBay_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Yehorivka_Destruction_v1 TLF+Support PLA+CombinedArms
-Fallujah_Skirmish_v1 INS+CombinedArms VDV+CombinedArms
-Narva_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 PLA+Support RGF+Support
-Kamdesh_RAAS_v1 TLF+Mechanized VDV+Mechanized
-Lashkar_Invasion_v1 TLF+AirAssault INS+Mechanized
-Anvil_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Logar_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v2 ADF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 INS+Armored PLAAGF+Armored
-Sanxian_Invasion_v2 PLA+Motorized CAF+Motorized
-Mutaha_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Fallujah_TC_v1 INS+Support RGF+Support
-Gorodok_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Sumari_AAS_v2 INS+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 TLF+Mechanized INS+Mechanized
-Kamdesh_TC_v1 WPMC+CombinedArms RGF+CombinedArms
-Kokan_AAS_v1 TLF+CombinedArms RGF+CombinedArms
-Kohat_TC_v1 ADF+Mechanized VDV+Support
-Anvil_AAS_v1 ADF+AirAssault TLF+AirAssault
-Yehorivka_Invasion_v2 WPMC+CombinedArms RGF+CombinedArms
-AlBasrah_TC_v1 PLAAGF+Mechanized USA+Mechanized
-Mutaha_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v1 PLA+Support VDV+Support
-Manicouagan_Invasion_v2 WPMC+AirAssault CAF+Armored
-Skorpo_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Mestia_TC_v1 WPMC+CombinedArms USA+CombinedArms
-Kamdesh_RAAS_v1 VDV+Support INS+Support
-Tallil_RAAS_v1 PLA+LightInfantry USMC+LightInfantry
-Belaya_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-Kokan_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
-Gorodok_RAAS_v2 TLF+Motorized IMF+CombinedArms
-Narva_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Lashkar_Insurgency_v1 ADF+Mechanized INS+Mechanized
-BlackCoast_RAAS_v1 IMF+CombinedArms PLAAGF+CombinedArms
-AlBasrah_AAS_v1 INS+Support PLANMC+Support
-Manicouagan_AAS_v2 VDV+Armored WPMC+LightInfantry
-Chora_TC_v1 ADF+CombinedArms RGF+CombinedArms
-Tallil_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Harju_RAAS_v2 RGF+Mechanized ADF+Mechanized
-Kamdesh_Skirmish_v1 INS+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 TLF+Support MEA+Support
-Mutaha_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Anvil_AAS_v1 USMC+Armored INS+Motorized
-Yehorivka_Skirmish_v2 CAF+CombinedArms TLF+CombinedArms
-Fallujah_TC_v1 RGF+Motorized USMC+Motorized
-AlBasrah_RAAS_v1 PLANMC+LightInfantry INS+LightInfantry
-FoolsRoad_Invasion_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_RAAS_v1 PLA+LightInfantry WPMC+AirAssault
-Gorodok_TC_v1 BAF+CombinedArms PLA+CombinedArms
-Mestia_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_AAS_v1 PLA+LightInfantry INS+LightInfantry
-Manicouagan_Invasion_v2 WPMC+CombinedArms RGF+CombinedArms
-Tallil_AAS_v1 PLA+CombinedArms INS+CombinedArms
-Kokan_TC_v1 MEA+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 USA+Armored INS+Armored
-Skorpo_RAAS_v1 WPMC+LightInfantry VDV+AirAssault
-Mutaha_Invasion_v1 USMC+Motorized INS+Motorized
-Logar_Skirmish_v1 WPMC+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v2 CAF+CombinedArms INS+CombinedArms
-AlBasrah_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-FoolsRoad_Skirmish_v2 CAF+CombinedArms VDV+CombinedArms
-Yehorivka_Destruction_v1 RGF+CombinedArms USMC+CombinedArms
-Gorodok_AAS_v1 BAF+Armored TLF+Armored
-Kamdesh_RAAS_v1 ADF+CombinedArms INS+Support
-Lashkar_TC_v2 MEA+Mechanized CAF+Mechanized
-Mestia_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
-Tallil_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Sanxian_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 PLA+AirAssault BAF+AirAssault
-Sumari_TC_v1 INS+CombinedArms USA+CombinedArms
-Kohat_AAS_v1 BAF+AirAssault PLA+AirAssault
-Harju_Invasion_v3 USMC+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 IMF+Armored PLA+Armored
-Narva_AAS_v3 WPMC+CombinedArms CAF+AirAssault
-Logar_TC_v1 MEA+CombinedArms INS+CombinedArms
-Lashkar_AAS_v1 PLA+LightInfantry WPMC+LightInfantry
-Kamdesh_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Mestia_TC_v1 RGF+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Anvil_TC_v1 RGF+Armored TLF+Mechanized
-Sumari_TC_v1 MEA+CombinedArms USMC+CombinedArms
-Manicouagan_Invasion_v2 VDV+Mechanized BAF+Mechanized
-Kohat_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
-Harju_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v1 MEA+Mechanized PLA+AirAssault
-Lashkar_RAAS_v1 USMC+Armored PLA+Armored
-Yehorivka_Destruction_v1 IMF+Motorized PLA+Motorized
-Tallil_TC_v1 ADF+AirAssault PLA+AirAssault
-Kokan_RAAS_v1 USA+CombinedArms PLA+CombinedArms
-Belaya_TC_v1 PLA+AirAssault TLF+AirAssault
-GooseBay_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Fallujah_Invasion_v1 PLA+Armored WPMC+CombinedArms
-Manicouagan_RAAS_v1 VDV+Armored BAF+Armored
-Mestia_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 MEA+Mechanized USA+Mechanized
-Gorodok_Destruction_v1 RGF+Support TLF+Mechanized
-Yehorivka_TC_v2 TLF+Armored CAF+Armored
-Harju_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Kohat_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
-Mutaha_AAS_v2 INS+Mechanized CAF+Mechanized
-FoolsRoad_Invasion_v1 RGF+CombinedArms ADF+CombinedArms
-Belaya_AAS_v2 ADF+CombinedArms WPMC+LightInfantry
-Kamdesh_RAAS_v1 PLA+Armored VDV+Armored
+Logar_TC_v1 USMC+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v1 CAF+Support PLA+Support
+Fallujah_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
+Kohat_RAAS_v2 INS+LightInfantry USA+Motorized
+Gorodok_Destruction_v1 USMC+LightInfantry IMF+LightInfantry
+FoolsRoad_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+AlBasrah_TC_v1 VDV+CombinedArms ADF+CombinedArms
+Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Lashkar_AAS_v2 TLF+Mechanized ADF+Mechanized
+Narva_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Kokan_Invasion_v1 CAF+CombinedArms MEA+CombinedArms
+Yehorivka_RAAS_v1 TLF+Armored USMC+Armored
+Mutaha_AAS_v2 PLA+CombinedArms ADF+CombinedArms
+Tallil_RAAS_v2 INS+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v1 INS+Mechanized PLA+Motorized
+Harju_TC_v1 WPMC+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Manicouagan_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 PLA+Support MEA+Support
+Lashkar_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Kamdesh_TC_v1 PLA+AirAssault TLF+AirAssault
+Belaya_AAS_v2 USMC+Support VDV+Support
+Chora_AAS_v1 BAF+CombinedArms MEA+CombinedArms
+Yehorivka_Destruction_v1 IMF+CombinedArms CAF+CombinedArms
+Gorodok_AAS_v1 ADF+Mechanized RGF+Mechanized
+BlackCoast_AAS_v2 TLF+Armored IMF+Armored
+Mutaha_AAS_v1 RGF+Motorized INS+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Kokan_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 MEA+AirAssault VDV+AirAssault
+Kohat_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
+Anvil_AAS_v1 ADF+AirAssault MEA+AirAssault
+GooseBay_AAS_v1 PLANMC+Armored WPMC+LightInfantry
+Sumari_AAS_v1 BAF+CombinedArms PLA+CombinedArms
+Belaya_RAAS_v1 USA+Mechanized TLF+Mechanized
+Sanxian_AAS_v3 WPMC+AirAssault BAF+AirAssault
+Narva_AAS_v2 IMF+Armored BAF+Armored
+FoolsRoad_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
+Harju_AAS_v1 IMF+Motorized BAF+Armored
+Lashkar_TC_v1 WPMC+LightInfantry USMC+LightInfantry
+Mutaha_RAAS_v1 TLF+AirAssault MEA+AirAssault
+Chora_RAAS_v1 BAF+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v2 CAF+Support RGF+Support
+Kohat_AAS_v1 USA+Armored PLA+Armored
+Tallil_Invasion_v1 PLA+Support MEA+Support
+Logar_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 WPMC+AirAssault PLA+AirAssault
+Anvil_RAAS_v2 TLF+Motorized BAF+Armored
+Yehorivka_Skirmish_v2 TLF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Lashkar_Invasion_v1 INS+Mechanized MEA+Mechanized
+Manicouagan_RAAS_v2 RGF+Support CAF+Support
+Harju_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 PLA+Armored CAF+Mechanized
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Chora_AAS_v3 RGF+CombinedArms TLF+CombinedArms
+Tallil_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 INS+Mechanized USA+Mechanized
+Gorodok_TC_v1 WPMC+CombinedArms TLF+CombinedArms
+Narva_AAS_v3 IMF+LightInfantry WPMC+LightInfantry
+AlBasrah_RAAS_v1 TLF+Armored INS+Support
+BlackCoast_RAAS_v2 IMF+Support PLA+Support
+Kokan_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Yehorivka_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v2 IMF+CombinedArms BAF+CombinedArms
+Skorpo_RAAS_v1 USA+Armored IMF+Armored
+Lashkar_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
+Sumari_AAS_v2 RGF+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 MEA+CombinedArms TLF+CombinedArms
+Gorodok_Destruction_v1 VDV+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v1 INS+CombinedArms ADF+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault USA+AirAssault
+Harju_RAAS_v2 BAF+Support WPMC+LightInfantry
+Kokan_TC_v1 RGF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 PLA+Mechanized ADF+Mechanized
+BlackCoast_Invasion_v2 CAF+Support VDV+Support
+FoolsRoad_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
+Anvil_AAS_v1 USMC+CombinedArms INS+CombinedArms
+Fallujah_TC_v1 TLF+Support INS+Support
+Skorpo_RAAS_v1 WPMC+AirAssault IMF+CombinedArms
+Chora_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Tallil_Invasion_v1 MEA+Mechanized INS+Mechanized
+Kamdesh_AAS_v1 VDV+Mechanized TLF+Mechanized
+Kohat_AAS_v1 TLF+CombinedArms BAF+CombinedArms
+Lashkar_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
+Sanxian_RAAS_v2 USMC+Motorized WPMC+CombinedArms
+Belaya_AAS_v2 VDV+CombinedArms TLF+CombinedArms
+Yehorivka_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
+FoolsRoad_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v1 MEA+CombinedArms INS+CombinedArms
+Harju_AAS_v1 BAF+Armored RGF+Armored
+Kokan_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
+AlBasrah_RAAS_v1 BAF+AirAssault MEA+Support
+Gorodok_Invasion_v1 RGF+Support USA+Support
+Kamdesh_RAAS_v1 ADF+AirAssault VDV+AirAssault
+BlackCoast_AAS_v2 ADF+AirAssault WPMC+AirAssault
+Fallujah_RAAS_v2 PLA+CombinedArms TLF+CombinedArms
+Anvil_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
+Sanxian_RAAS_v2 WPMC+CombinedArms PLANMC+AirAssault
+Narva_Invasion_v2 BAF+Support IMF+Support
+Kohat_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Manicouagan_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Sumari_AAS_v2 WPMC+CombinedArms INS+CombinedArms
+Mutaha_RAAS_v1 VDV+Mechanized USMC+Motorized
+Tallil_TC_v1 BAF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 MEA+Mechanized USA+Mechanized
+FoolsRoad_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v2 VDV+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v1 INS+Mechanized WPMC+AirAssault
+Fallujah_AAS_v1 PLA+Armored VDV+Armored
+Lashkar_RAAS_v1 PLA+Armored USMC+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+BlackCoast_Invasion_v2 PLA+Mechanized VDV+Mechanized
+Gorodok_RAAS_v2 CAF+CombinedArms PLA+AirAssault
+Sumari_Skirmish_v1 MEA+CombinedArms USA+CombinedArms
+Kamdesh_AAS_v1 PLA+Motorized USMC+Motorized
+Tallil_RAAS_v1 TLF+Armored USA+Armored
