--- a/Tools/Rotation/LayerRotation/LayerRotation_14.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_14.cfg
@@ -1,200 +1,200 @@
-Mutaha_RAAS_v1 INS+Support BAF+Support
-AlBasrah_TC_v1 BAF+CombinedArms RGF+CombinedArms
-Sumari_Invasion_v1 ADF+CombinedArms VDV+CombinedArms
-Manicouagan_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
-Belaya_TC_v1 TLF+CombinedArms USMC+CombinedArms
-Kokan_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Fallujah_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Narva_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 WPMC+AirAssault PLA+LightInfantry
-Kohat_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-FoolsRoad_Invasion_v1 RGF+CombinedArms USMC+CombinedArms
-AlBasrah_AAS_v1 TLF+Armored INS+Armored
-Mutaha_TC_v1 INS+Mechanized VDV+Mechanized
-Tallil_TC_v1 ADF+CombinedArms VDV+AirAssault
-Lashkar_AAS_v1 PLA+CombinedArms MEA+CombinedArms
-Harju_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
-Belaya_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Narva_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
-Sumari_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Anvil_TC_v1 ADF+Mechanized MEA+Mechanized
-Yehorivka_RAAS_v2 CAF+Support VDV+Support
-Kokan_Skirmish_v1 INS+CombinedArms USMC+CombinedArms
-Kohat_Invasion_v2 PLA+Motorized USMC+CombinedArms
-Fallujah_RAAS_v1 VDV+Mechanized BAF+Mechanized
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
-Lashkar_TC_v2 WPMC+AirAssault ADF+AirAssault
-Logar_AAS_v1 TLF+CombinedArms USMC+CombinedArms
-BlackCoast_AAS_v2 WPMC+AirAssault TLF+AirAssault
-AlBasrah_Invasion_v2 PLANMC+Motorized USMC+Motorized
-Gorodok_RAAS_v1 PLA+Motorized ADF+AirAssault
-Sanxian_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Belaya_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
-GooseBay_AAS_v1 RGF+Support USA+Support
-Yehorivka_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 BAF+Armored PLA+Armored
-Manicouagan_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Anvil_TC_v1 PLA+AirAssault BAF+AirAssault
-Chora_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Kamdesh_Invasion_v1 CAF+AirAssault PLA+Support
-Mutaha_AAS_v2 INS+LightInfantry WPMC+LightInfantry
-Lashkar_TC_v1 PLA+Armored INS+Armored
-Logar_Skirmish_v1 MEA+CombinedArms BAF+CombinedArms
-AlBasrah_TC_v1 ADF+CombinedArms RGF+CombinedArms
-Gorodok_AAS_v1 RGF+Support CAF+Motorized
-Narva_Destruction_v1 VDV+CombinedArms IMF+CombinedArms
+Sanxian_RAAS_v2 USA+AirAssault PLA+AirAssault
+Kohat_RAAS_v1 MEA+Support WPMC+LightInfantry
+BlackCoast_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Harju_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Anvil_Invasion_v1 TLF+Support INS+Support
+AlBasrah_AAS_v1 WPMC+AirAssault PLA+AirAssault
 Fallujah_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-Belaya_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
-Tallil_RAAS_v1 USA+Support TLF+Support
-Harju_RAAS_v2 USA+LightInfantry WPMC+CombinedArms
-Kamdesh_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Kokan_TC_v1 USMC+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v1 PLA+Armored RGF+Armored
-Yehorivka_AAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 RGF+Support PLA+Support
-Mutaha_Invasion_v1 WPMC+AirAssault BAF+CombinedArms
-Logar_TC_v1 INS+CombinedArms VDV+CombinedArms
-AlBasrah_TC_v1 INS+Armored PLANMC+Armored
-BlackCoast_RAAS_v2 USA+LightInfantry PLANMC+LightInfantry
-Mestia_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
-Lashkar_TC_v1 BAF+Mechanized INS+LightInfantry
-Harju_RAAS_v1 ADF+Mechanized IMF+Mechanized
-GooseBay_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Kokan_TC_v1 INS+CombinedArms TLF+CombinedArms
-Fallujah_Invasion_v1 ADF+Mechanized MEA+Mechanized
-Narva_AAS_v2 IMF+CombinedArms BAF+CombinedArms
-Chora_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 PLAAGF+Armored MEA+Armored
-Manicouagan_AAS_v1 VDV+CombinedArms USMC+Support
-Skorpo_Invasion_v1 WPMC+CombinedArms IMF+CombinedArms
-Tallil_TC_v1 PLA+LightInfantry RGF+LightInfantry
-Kamdesh_Skirmish_v1 RGF+CombinedArms BAF+CombinedArms
-Gorodok_TC_v1 BAF+CombinedArms VDV+CombinedArms
-Sanxian_AAS_v1 USA+Motorized WPMC+CombinedArms
-Lashkar_AAS_v1 ADF+AirAssault TLF+AirAssault
-Yehorivka_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Mutaha_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Belaya_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_TC_v1 USMC+Armored TLF+Armored
-Kohat_RAAS_v2 VDV+Mechanized USMC+Armored
-Narva_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
-BlackCoast_RAAS_v2 VDV+Mechanized BAF+Mechanized
-Kokan_TC_v1 ADF+CombinedArms INS+CombinedArms
-Tallil_TC_v1 INS+Armored VDV+Armored
-AlBasrah_TC_v1 TLF+CombinedArms PLA+Support
-Anvil_Invasion_v1 INS+CombinedArms PLA+CombinedArms
-Chora_AAS_v3 TLF+CombinedArms CAF+CombinedArms
-Gorodok_RAAS_v1 IMF+Motorized USA+Motorized
-Belaya_RAAS_v1 VDV+Support BAF+Support
-Yehorivka_AAS_v1 WPMC+AirAssault IMF+Mechanized
-FoolsRoad_Destruction_v1 TLF+CombinedArms BAF+CombinedArms
-Mutaha_TC_v1 MEA+LightInfantry PLA+LightInfantry
-Fallujah_AAS_v1 PLA+Armored TLF+Armored
-Mestia_TC_v1 PLA+CombinedArms RGF+CombinedArms
-Kamdesh_TC_v1 RGF+LightInfantry PLA+LightInfantry
-Sanxian_Invasion_v2 PLAAGF+CombinedArms USA+CombinedArms
-Kokan_TC_v1 MEA+CombinedArms TLF+CombinedArms
-AlBasrah_TC_v1 MEA+Mechanized INS+Armored
-Lashkar_TC_v2 BAF+Armored MEA+Armored
-Gorodok_TC_v1 TLF+CombinedArms IMF+CombinedArms
-Yehorivka_Destruction_v1 CAF+Motorized PLA+Motorized
-Narva_TC_v1 WPMC+LightInfantry IMF+LightInfantry
-GooseBay_AAS_v1 WPMC+CombinedArms CAF+Mechanized
-Fallujah_AAS_v1 CAF+Motorized TLF+Motorized
-Harju_AAS_v3 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_Insurgency_v1 TLF+Motorized INS+Motorized
-Tallil_TC_v1 INS+Mechanized USA+Mechanized
-Mutaha_TC_v1 INS+Motorized RGF+Motorized
-Chora_TC_v1 PLA+CombinedArms RGF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Kohat_Invasion_v2 TLF+Mechanized ADF+Mechanized
-AlBasrah_RAAS_v1 USA+Mechanized PLAAGF+CombinedArms
-Sumari_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v3 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_TC_v1 INS+LightInfantry WPMC+LightInfantry
-Mestia_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
-Gorodok_TC_v1 CAF+Motorized PLA+Armored
+Mutaha_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
+Manicouagan_RAAS_v1 WPMC+AirAssault CAF+AirAssault
+Kamdesh_AAS_v1 RGF+Mechanized BAF+AirAssault
+Gorodok_Invasion_v1 TLF+Mechanized RGF+Mechanized
+GooseBay_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Mestia_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 USMC+Support IMF+Support
+Sanxian_AAS_v2 BAF+AirAssault WPMC+AirAssault
+Kohat_RAAS_v1 INS+CombinedArms MEA+CombinedArms
+Kokan_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v2 USA+Motorized INS+Motorized
+AlBasrah_TC_v1 MEA+Support WPMC+CombinedArms
+Narva_AAS_v2 USA+AirAssault WPMC+AirAssault
+FoolsRoad_AAS_v1 TLF+CombinedArms IMF+CombinedArms
+Manicouagan_AAS_v1 BAF+AirAssault PLA+AirAssault
+Tallil_Invasion_v1 USA+Armored VDV+Armored
+BlackCoast_AAS_v2 PLAAGF+CombinedArms CAF+Mechanized
+Anvil_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Belaya_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+GooseBay_RAAS_v2 VDV+Armored PLAAGF+Armored
+Sanxian_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
+Lashkar_Invasion_v1 USMC+Support PLA+Support
+Gorodok_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Kohat_AAS_v1 BAF+AirAssault MEA+Armored
+Kokan_Skirmish_v1 ADF+CombinedArms VDV+CombinedArms
+Fallujah_AAS_v1 INS+Motorized TLF+Motorized
+Tallil_AAS_v1 ADF+CombinedArms INS+CombinedArms
+Yehorivka_Destruction_v1 USMC+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 INS+LightInfantry PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Mutaha_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
+Manicouagan_RAAS_v1 PLA+LightInfantry USMC+LightInfantry
+Lashkar_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Belaya_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
+GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Anvil_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Logar_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+Gorodok_TC_v1 TLF+AirAssault USA+AirAssault
+Fallujah_AAS_v1 BAF+Armored PLA+CombinedArms
+BlackCoast_Invasion_v2 TLF+Support IMF+Support
+Mestia_AAS_v2 PLA+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 CAF+CombinedArms RGF+CombinedArms
+Yehorivka_RAAS_v2 RGF+Mechanized USA+Mechanized
+Kokan_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
+Mutaha_AAS_v2 PLA+LightInfantry CAF+Mechanized
+Tallil_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 MEA+CombinedArms INS+CombinedArms
+Sumari_AAS_v3 WPMC+CombinedArms INS+CombinedArms
+Kohat_AAS_v1 PLA+Support MEA+Support
+Belaya_TC_v1 CAF+Armored RGF+Armored
 GooseBay_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 RGF+CombinedArms INS+CombinedArms
-Yehorivka_AAS_v1 TLF+Support CAF+Support
-FoolsRoad_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-Kamdesh_TC_v1 RGF+Support ADF+Mechanized
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Mutaha_Skirmish_v1 ADF+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v1 RGF+LightInfantry USA+LightInfantry
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLAAGF+CombinedArms
-Narva_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-BlackCoast_Skirmish_v1 PLAAGF+CombinedArms IMF+CombinedArms
-Belaya_TC_v1 PLA+CombinedArms BAF+CombinedArms
-AlBasrah_TC_v1 USA+Motorized PLAAGF+Mechanized
-Mestia_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_RAAS_v1 CAF+AirAssault MEA+AirAssault
-Anvil_Skirmish_v1 MEA+CombinedArms USMC+CombinedArms
-Fallujah_TC_v1 BAF+Support WPMC+CombinedArms
-GooseBay_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Mutaha_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-FoolsRoad_TC_v1 TLF+CombinedArms USMC+CombinedArms
-Narva_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Lashkar_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-Tallil_TC_v1 VDV+Support USMC+Motorized
-Chora_Invasion_v1 USA+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 CAF+Mechanized IMF+Mechanized
-AlBasrah_TC_v1 PLANMC+CombinedArms BAF+CombinedArms
-Belaya_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Fallujah_Invasion_v1 INS+LightInfantry PLA+Motorized
-Mutaha_TC_v1 PLA+Armored RGF+Armored
-Anvil_Skirmish_v1 USMC+CombinedArms VDV+CombinedArms
-Kamdesh_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
-Narva_TC_v1 IMF+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v2 ADF+CombinedArms VDV+Mechanized
-Yehorivka_Destruction_v1 TLF+Support USMC+Support
-Kohat_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 IMF+CombinedArms ADF+CombinedArms
-AlBasrah_RAAS_v1 ADF+AirAssault TLF+AirAssault
-Logar_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-Belaya_Invasion_v2 WPMC+LightInfantry USA+LightInfantry
-Lashkar_AAS_v1 USMC+Armored RGF+Mechanized
-Tallil_AAS_v1 INS+Support MEA+Support
-Sumari_AAS_v3 PLA+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Sanxian_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v1 INS+Motorized PLA+Motorized
-Chora_AAS_v3 ADF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 RGF+LightInfantry PLA+LightInfantry
-Mutaha_TC_v1 RGF+Armored BAF+Armored
-Yehorivka_Destruction_v1 WPMC+CombinedArms ADF+CombinedArms
-Kokan_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v3 RGF+Armored PLANMC+AirAssault
-Anvil_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
-FoolsRoad_AAS_v1 VDV+CombinedArms IMF+CombinedArms
-AlBasrah_Invasion_v1 INS+CombinedArms ADF+CombinedArms
-Kohat_AAS_v1 INS+Support MEA+Support
-Mestia_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
-GooseBay_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v1 WPMC+LightInfantry ADF+CombinedArms
-Lashkar_Insurgency_v1 PLA+LightInfantry INS+LightInfantry
-Kamdesh_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
-Fallujah_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 INS+CombinedArms MEA+CombinedArms
-BlackCoast_AAS_v2 WPMC+LightInfantry USMC+LightInfantry
-Mutaha_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
-Logar_RAAS_v1 INS+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 IMF+Support WPMC+LightInfantry
-Gorodok_RAAS_v2 USA+LightInfantry IMF+LightInfantry
-Kokan_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-Manicouagan_Invasion_v2 PLANMC+Support RGF+Support
-AlBasrah_TC_v1 INS+Armored MEA+Armored
-FoolsRoad_AAS_v1 USA+CombinedArms PLA+CombinedArms
-Kohat_TC_v1 USMC+Support VDV+Support
-Belaya_TC_v1 PLA+CombinedArms USMC+Support
-Narva_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Harju_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-Yehorivka_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 INS+LightInfantry PLA+AirAssault
-Tallil_Invasion_v1 ADF+CombinedArms MEA+CombinedArms
+FoolsRoad_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
+Harju_RAAS_v2 WPMC+LightInfantry IMF+Armored
+Narva_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+AlBasrah_TC_v1 USA+Armored PLA+Armored
+Fallujah_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v2 WPMC+LightInfantry RGF+LightInfantry
+BlackCoast_Invasion_v2 PLAAGF+Mechanized VDV+Mechanized
+Sanxian_RAAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry CAF+Mechanized
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Tallil_TC_v1 ADF+CombinedArms PLA+CombinedArms
+Belaya_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Gorodok_Destruction_v1 IMF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 BAF+Mechanized VDV+Mechanized
+Sumari_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Anvil_TC_v1 PLA+Support VDV+AirAssault
+Manicouagan_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Kokan_AAS_v2 RGF+CombinedArms INS+CombinedArms
+Fallujah_Insurgency_v1 VDV+CombinedArms INS+CombinedArms
+BlackCoast_AAS_v2 CAF+Support IMF+Support
+Kamdesh_TC_v1 RGF+Motorized INS+CombinedArms
+Mutaha_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Logar_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+Tallil_RAAS_v1 INS+Support MEA+Support
+Lashkar_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Narva_Destruction_v1 IMF+Motorized BAF+CombinedArms
+Chora_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
+AlBasrah_TC_v1 PLAAGF+CombinedArms USMC+CombinedArms
+Belaya_AAS_v3 IMF+Support USMC+Support
+Anvil_AAS_v1 TLF+Armored INS+Armored
+Yehorivka_AAS_v1 TLF+Motorized USMC+LightInfantry
+Kamdesh_Invasion_v1 ADF+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 CAF+AirAssault VDV+AirAssault
+Sanxian_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
+Sumari_RAAS_v1 MEA+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Fallujah_TC_v1 MEA+LightInfantry USMC+LightInfantry
+Logar_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Tallil_Invasion_v1 TLF+Support INS+CombinedArms
+BlackCoast_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kokan_AAS_v1 INS+CombinedArms PLA+CombinedArms
+Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Lashkar_TC_v2 TLF+Mechanized VDV+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Kohat_AAS_v1 RGF+CombinedArms ADF+CombinedArms
+Sanxian_Invasion_v2 WPMC+CombinedArms PLAAGF+Mechanized
+FoolsRoad_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 VDV+Armored PLA+Armored
+Mutaha_RAAS_v1 MEA+Support TLF+Support
+Fallujah_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v1 USA+Motorized IMF+Motorized
+Tallil_AAS_v1 USMC+CombinedArms RGF+CombinedArms
+Sumari_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+AlBasrah_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 VDV+CombinedArms PLA+AirAssault
+Yehorivka_Skirmish_v2 PLA+CombinedArms USA+CombinedArms
+Skorpo_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Kohat_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+Logar_RAAS_v1 MEA+CombinedArms USA+CombinedArms
+Manicouagan_Invasion_v1 PLA+Support USA+Support
+Anvil_AAS_v1 PLA+Support VDV+AirAssault
+Gorodok_TC_v1 ADF+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v2 PLAAGF+Mechanized TLF+Mechanized
+Mestia_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v1 CAF+Mechanized TLF+Mechanized
+Narva_Invasion_v2 ADF+CombinedArms IMF+CombinedArms
+Kokan_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Belaya_TC_v1 PLA+AirAssault CAF+AirAssault
+Yehorivka_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+FoolsRoad_AAS_v1 PLA+CombinedArms USA+CombinedArms
+AlBasrah_RAAS_v1 TLF+AirAssault PLAAGF+Mechanized
+Lashkar_Invasion_v1 TLF+Armored CAF+Armored
+Manicouagan_AAS_v2 USA+Armored PLANMC+Armored
+Kohat_AAS_v1 PLA+Armored MEA+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_AAS_v2 IMF+CombinedArms USA+CombinedArms
+Kamdesh_TC_v1 MEA+CombinedArms RGF+CombinedArms
+Tallil_RAAS_v2 USA+Mechanized WPMC+CombinedArms
+Fallujah_Invasion_v2 PLA+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Chora_AAS_v1 VDV+CombinedArms INS+CombinedArms
+Anvil_RAAS_v1 PLA+Armored RGF+Armored
+Sanxian_RAAS_v2 WPMC+LightInfantry ADF+CombinedArms
+Belaya_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+FoolsRoad_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 TLF+Support PLA+Support
+Kohat_TC_v1 BAF+CombinedArms RGF+CombinedArms
+Narva_AAS_v2 USA+LightInfantry IMF+Mechanized
+Sumari_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Manicouagan_Invasion_v2 RGF+CombinedArms BAF+CombinedArms
+Gorodok_AAS_v1 TLF+Support USA+Support
+GooseBay_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
+Mutaha_RAAS_v1 ADF+AirAssault PLA+AirAssault
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Fallujah_RAAS_v1 TLF+Armored VDV+Armored
+Kamdesh_Invasion_v1 TLF+CombinedArms INS+CombinedArms
+Yehorivka_AAS_v1 USMC+Armored PLA+Armored
+Chora_TC_v1 MEA+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 BAF+Support TLF+Support
+Sanxian_RAAS_v2 WPMC+AirAssault ADF+CombinedArms
+Mestia_AAS_v1 VDV+CombinedArms IMF+CombinedArms
+Manicouagan_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
+Anvil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+GooseBay_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
+Belaya_AAS_v2 RGF+LightInfantry USA+Motorized
+BlackCoast_RAAS_v2 IMF+Mechanized ADF+Mechanized
+Tallil_AAS_v1 ADF+Mechanized TLF+Mechanized
+Mutaha_Invasion_v1 INS+Mechanized MEA+Mechanized
+Fallujah_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Gorodok_TC_v1 PLA+LightInfantry USMC+LightInfantry
+AlBasrah_AAS_v1 INS+LightInfantry WPMC+LightInfantry
+Narva_AAS_v2 IMF+CombinedArms VDV+Support
+Kohat_RAAS_v2 INS+Motorized PLA+Motorized
+Lashkar_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
+Chora_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v2 TLF+Support IMF+Mechanized
+Manicouagan_Skirmish_v2 WPMC+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 USMC+Support VDV+Support
+Anvil_Invasion_v1 TLF+Armored PLA+Armored
+Fallujah_AAS_v1 INS+Motorized PLA+Motorized
+AlBasrah_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+GooseBay_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
+Kamdesh_AAS_v1 BAF+Armored VDV+Armored
+Mutaha_AAS_v1 TLF+AirAssault USA+AirAssault
+FoolsRoad_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Gorodok_AAS_v1 RGF+Motorized USMC+Armored
+Yehorivka_RAAS_v2 PLA+AirAssault USA+AirAssault
+Manicouagan_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
+Tallil_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+BlackCoast_Invasion_v2 PLAAGF+Mechanized RGF+Mechanized
+Logar_AAS_v1 USA+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 INS+Armored RGF+Armored
+Sanxian_RAAS_v2 PLANMC+Motorized BAF+Mechanized
+FoolsRoad_RAAS_v1 PLA+CombinedArms IMF+CombinedArms
+Fallujah_RAAS_v1 TLF+Support MEA+Support
+AlBasrah_AAS_v1 BAF+Armored MEA+Armored
