--- a/Tools/Rotation/LayerRotation/LayerRotation_15.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_15.cfg
@@ -1,200 +1,200 @@
-Kamdesh_TC_v1 PLA+Motorized TLF+Motorized
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault VDV+AirAssault
-Manicouagan_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Sumari_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-Sanxian_Invasion_v2 PLA+Motorized WPMC+LightInfantry
-BlackCoast_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-FoolsRoad_Skirmish_v2 WPMC+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 VDV+Armored IMF+Armored
-Fallujah_TC_v1 BAF+Support PLA+Support
-Chora_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 PLANMC+Motorized INS+Motorized
-Belaya_TC_v1 IMF+CombinedArms BAF+CombinedArms
-Tallil_TC_v1 TLF+AirAssault BAF+AirAssault
-Anvil_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Yehorivka_Invasion_v2 PLA+Support USA+Support
-Gorodok_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-BlackCoast_RAAS_v2 TLF+AirAssault IMF+Mechanized
-Kokan_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 USMC+LightInfantry IMF+LightInfantry
-Mestia_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized WPMC+CombinedArms
-Fallujah_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-FoolsRoad_AAS_v2 PLA+CombinedArms IMF+CombinedArms
-Kamdesh_Invasion_v1 INS+Mechanized VDV+Mechanized
-AlBasrah_RAAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
-Lashkar_AAS_v2 PLA+Motorized USA+Mechanized
-Logar_TC_v1 CAF+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 USA+Mechanized VDV+Mechanized
-Harju_Invasion_v3 IMF+Mechanized RGF+Mechanized
-Gorodok_TC_v1 WPMC+AirAssault VDV+AirAssault
-Belaya_AAS_v2 PLA+Motorized USMC+CombinedArms
-Mestia_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
-Sumari_RAAS_v1 INS+CombinedArms PLA+CombinedArms
-GooseBay_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Narva_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Manicouagan_Skirmish_v1 PLAAGF+CombinedArms USA+CombinedArms
-AlBasrah_Invasion_v1 PLA+Support ADF+Mechanized
-Tallil_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 PLA+Armored BAF+Armored
-Kokan_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Belaya_Invasion_v1 IMF+Armored USMC+Motorized
-Mestia_TC_v1 IMF+CombinedArms TLF+CombinedArms
-Lashkar_TC_v1 TLF+AirAssault WPMC+AirAssault
-Anvil_TC_v1 MEA+Armored INS+Armored
-Mutaha_AAS_v1 MEA+Mechanized CAF+Mechanized
-Harju_Invasion_v3 USMC+Support IMF+Support
-AlBasrah_TC_v1 VDV+CombinedArms ADF+CombinedArms
-Yehorivka_AAS_v2 USMC+Support IMF+Support
-Logar_Skirmish_v1 MEA+CombinedArms VDV+CombinedArms
-Kamdesh_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-Fallujah_Invasion_v2 INS+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 VDV+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v2 IMF+Motorized TLF+Armored
-Manicouagan_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
-Mestia_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
-Belaya_Invasion_v1 ADF+Mechanized RGF+Mechanized
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 INS+Armored VDV+CombinedArms
-FoolsRoad_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms CAF+CombinedArms
-Harju_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 CAF+Armored VDV+Armored
-Fallujah_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Lashkar_TC_v2 CAF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v2 VDV+CombinedArms WPMC+LightInfantry
-Narva_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 PLA+AirAssault WPMC+AirAssault
-Mutaha_TC_v1 PLA+Armored MEA+Armored
-Manicouagan_Invasion_v1 PLA+Mechanized BAF+Mechanized
-Chora_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 RGF+LightInfantry USA+LightInfantry
-AlBasrah_TC_v1 WPMC+CombinedArms RGF+Support
-Kokan_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Yehorivka_Destruction_v1 WPMC+LightInfantry PLA+LightInfantry
-Fallujah_RAAS_v1 RGF+LightInfantry PLA+LightInfantry
-Lashkar_AAS_v1 PLA+Support USA+Support
-Logar_TC_v1 WPMC+CombinedArms PLA+CombinedArms
-Kamdesh_AAS_v1 MEA+LightInfantry RGF+LightInfantry
-Narva_Destruction_v1 IMF+Mechanized CAF+Mechanized
-Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
-Belaya_AAS_v1 VDV+CombinedArms USA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Harju_RAAS_v1 IMF+Armored WPMC+LightInfantry
-Kokan_AAS_v2 VDV+CombinedArms INS+CombinedArms
-Gorodok_Destruction_v1 WPMC+LightInfantry USA+LightInfantry
-Tallil_RAAS_v2 USA+LightInfantry MEA+LightInfantry
-Kohat_TC_v1 WPMC+LightInfantry MEA+LightInfantry
-Lashkar_TC_v2 PLA+AirAssault ADF+AirAssault
-Kamdesh_TC_v1 PLA+Support MEA+CombinedArms
-FoolsRoad_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Fallujah_RAAS_v2 ADF+Mechanized VDV+Mechanized
-Anvil_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
-Manicouagan_Invasion_v2 WPMC+LightInfantry USA+Armored
-AlBasrah_RAAS_v1 BAF+Armored INS+Armored
-Tallil_RAAS_v1 WPMC+AirAssault MEA+AirAssault
-Kohat_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Yehorivka_Destruction_v1 PLA+Armored TLF+Armored
-Lashkar_TC_v2 BAF+CombinedArms MEA+CombinedArms
-Kamdesh_RAAS_v1 PLA+LightInfantry TLF+AirAssault
-Chora_Skirmish_v1 USMC+CombinedArms MEA+CombinedArms
-Fallujah_AAS_v1 TLF+Mechanized MEA+Mechanized
-Belaya_Invasion_v1 RGF+Motorized USMC+Motorized
-Gorodok_RAAS_v2 IMF+Armored BAF+Armored
-GooseBay_RAAS_v2 PLANMC+CombinedArms RGF+Armored
-Mutaha_RAAS_v2 PLA+Motorized USA+Motorized
-Kokan_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Narva_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
-Anvil_RAAS_v2 CAF+Support PLA+Support
-Harju_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Sanxian_AAS_v1 WPMC+LightInfantry CAF+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Sumari_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
-AlBasrah_Invasion_v1 INS+LightInfantry USA+LightInfantry
-Tallil_AAS_v1 PLA+Armored MEA+Armored
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+Support
-Yehorivka_Skirmish_v1 USA+CombinedArms IMF+CombinedArms
-Kamdesh_AAS_v1 ADF+AirAssault TLF+AirAssault
-Gorodok_Invasion_v1 VDV+Armored TLF+Armored
-Mestia_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v2 BAF+CombinedArms MEA+Support
-Belaya_AAS_v3 IMF+Motorized TLF+Motorized
-Kohat_RAAS_v1 MEA+Support INS+Support
-Narva_Destruction_v1 USA+LightInfantry WPMC+LightInfantry
-Kokan_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 TLF+Support WPMC+AirAssault
-Lashkar_AAS_v2 TLF+Support PLA+Support
-Logar_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 INS+Armored USMC+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Gorodok_AAS_v1 PLA+Motorized WPMC+AirAssault
-Chora_Skirmish_v1 TLF+CombinedArms MEA+CombinedArms
-Mutaha_TC_v1 TLF+AirAssault BAF+AirAssault
-Harju_Invasion_v3 CAF+CombinedArms VDV+CombinedArms
-AlBasrah_RAAS_v1 USMC+Support PLANMC+Support
-Sumari_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 PLA+LightInfantry BAF+Armored
-Yehorivka_AAS_v2 WPMC+LightInfantry PLA+LightInfantry
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Belaya_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
-BlackCoast_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 RGF+Motorized USA+Motorized
-Kohat_TC_v1 PLA+LightInfantry USA+Motorized
-Chora_Invasion_v2 TLF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 VDV+Mechanized CAF+Mechanized
-Mutaha_AAS_v1 VDV+Mechanized USA+Mechanized
-Mestia_TC_v1 IMF+CombinedArms TLF+CombinedArms
-Anvil_AAS_v1 BAF+Mechanized MEA+Mechanized
-Manicouagan_AAS_v3 USMC+LightInfantry WPMC+LightInfantry
-Fallujah_Invasion_v2 WPMC+CombinedArms MEA+Armored
-Tallil_AAS_v1 INS+Motorized TLF+Motorized
-FoolsRoad_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Belaya_AAS_v3 CAF+Motorized IMF+Motorized
-Lashkar_TC_v1 PLA+Motorized RGF+Motorized
-Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_TC_v1 IMF+Mechanized WPMC+AirAssault
-Kamdesh_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 INS+LightInfantry WPMC+LightInfantry
-BlackCoast_RAAS_v1 IMF+Mechanized BAF+Mechanized
-Chora_Invasion_v1 INS+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+Armored USMC+Armored
-Fallujah_AAS_v1 ADF+CombinedArms PLA+Armored
-Harju_TC_v1 RGF+CombinedArms IMF+CombinedArms
-Skorpo_RAAS_v1 BAF+Support IMF+Support
-Tallil_Invasion_v1 USMC+Armored VDV+Armored
-Manicouagan_Skirmish_v2 PLA+CombinedArms USMC+CombinedArms
-Gorodok_TC_v1 RGF+Mechanized ADF+Mechanized
-Mutaha_TC_v1 MEA+LightInfantry WPMC+LightInfantry
-Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
-Narva_Destruction_v1 VDV+Armored IMF+Armored
-Lashkar_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
-AlBasrah_AAS_v1 VDV+CombinedArms PLANMC+Support
-GooseBay_RAAS_v2 BAF+Mechanized RGF+Mechanized
-Kamdesh_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
-FoolsRoad_Destruction_v1 WPMC+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v1 TLF+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
-BlackCoast_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Mutaha_TC_v1 WPMC+AirAssault TLF+Support
-Sanxian_Invasion_v2 PLA+LightInfantry WPMC+LightInfantry
-Kokan_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Gorodok_TC_v1 IMF+LightInfantry WPMC+LightInfantry
-Fallujah_TC_v1 PLA+Armored USMC+Armored
-Kohat_TC_v1 TLF+Mechanized INS+Mechanized
-Anvil_Invasion_v1 INS+Support ADF+Mechanized
-AlBasrah_TC_v1 RGF+Mechanized TLF+Mechanized
-Chora_TC_v1 MEA+CombinedArms INS+CombinedArms
-Lashkar_TC_v2 CAF+Armored MEA+Armored
-GooseBay_RAAS_v1 CAF+AirAssault WPMC+AirAssault
-Belaya_Invasion_v1 PLA+Support WPMC+CombinedArms
-Sanxian_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Narva_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
+Lashkar_RAAS_v1 BAF+Mechanized INS+Mechanized
+Anvil_TC_v1 ADF+CombinedArms PLA+CombinedArms
+Mestia_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 BAF+AirAssault PLA+Support
+Gorodok_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Kokan_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
+Manicouagan_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Kamdesh_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Tallil_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Sanxian_RAAS_v2 BAF+AirAssault WPMC+AirAssault
+Fallujah_Invasion_v2 MEA+Support INS+Motorized
+Chora_AAS_v2 PLA+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 RGF+CombinedArms TLF+CombinedArms
+Yehorivka_RAAS_v1 PLA+Motorized IMF+Motorized
+Logar_TC_v1 PLA+CombinedArms ADF+CombinedArms
+Gorodok_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Belaya_Invasion_v2 TLF+Motorized USA+Motorized
+Sumari_AAS_v2 PLA+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 ADF+AirAssault VDV+AirAssault
+Manicouagan_RAAS_v2 USMC+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v1 USMC+LightInfantry RGF+Mechanized
+Kokan_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v1 VDV+Support BAF+Support
+Anvil_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Lashkar_AAS_v1 TLF+Support MEA+Support
+Gorodok_TC_v1 WPMC+AirAssault ADF+AirAssault
+AlBasrah_AAS_v1 VDV+Support WPMC+AirAssault
+Mestia_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 USA+Support IMF+Support
+Mutaha_RAAS_v1 MEA+Armored TLF+Armored
+Kamdesh_TC_v1 PLA+Armored MEA+Armored
+Narva_AAS_v1 BAF+Support VDV+Mechanized
+Belaya_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+FoolsRoad_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
+Kohat_AAS_v1 MEA+Mechanized USA+Mechanized
+Tallil_AAS_v1 PLA+AirAssault BAF+AirAssault
+Anvil_RAAS_v1 VDV+CombinedArms INS+Mechanized
+Fallujah_RAAS_v1 INS+CombinedArms ADF+CombinedArms
+Gorodok_RAAS_v1 PLA+Support BAF+Support
+Yehorivka_Destruction_v1 PLA+LightInfantry WPMC+LightInfantry
+Chora_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v2 PLA+LightInfantry WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Mestia_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 ADF+CombinedArms VDV+CombinedArms
+Sanxian_Invasion_v2 ADF+CombinedArms PLANMC+CombinedArms
+Kokan_RAAS_v1 ADF+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 PLA+Armored CAF+Armored
+Fallujah_TC_v1 PLA+Armored WPMC+CombinedArms
+Anvil_RAAS_v1 WPMC+AirAssault TLF+AirAssault
+Sumari_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Skorpo_Invasion_v1 USMC+Armored IMF+Armored
+GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 VDV+Armored PLA+Armored
+Chora_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
+Lashkar_AAS_v2 MEA+LightInfantry INS+LightInfantry
+Manicouagan_Invasion_v2 WPMC+LightInfantry PLA+Support
+Logar_AAS_v1 RGF+CombinedArms USA+CombinedArms
+Kohat_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
+Mutaha_TC_v1 USA+Support VDV+Support
+Mestia_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 RGF+CombinedArms WPMC+CombinedArms
+GooseBay_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 CAF+Support IMF+Motorized
+Yehorivka_RAAS_v2 CAF+Armored PLA+Armored
+AlBasrah_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Sumari_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Gorodok_Invasion_v2 USA+LightInfantry PLA+LightInfantry
+Kohat_RAAS_v1 MEA+Mechanized PLA+CombinedArms
+Kamdesh_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 USMC+LightInfantry MEA+LightInfantry
+Sanxian_RAAS_v2 BAF+AirAssault WPMC+AirAssault
+Kokan_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Lashkar_Invasion_v1 RGF+LightInfantry INS+LightInfantry
+Tallil_RAAS_v2 RGF+Motorized USMC+Motorized
+FoolsRoad_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Fallujah_TC_v1 PLA+Support ADF+CombinedArms
+Harju_RAAS_v2 USMC+Armored VDV+Armored
+Yehorivka_AAS_v2 RGF+CombinedArms ADF+CombinedArms
+Gorodok_Invasion_v1 CAF+Motorized PLA+Motorized
+Logar_RAAS_v1 TLF+CombinedArms USA+CombinedArms
+Belaya_AAS_v1 PLA+Armored TLF+Motorized
+Kohat_RAAS_v2 VDV+CombinedArms INS+CombinedArms
+Anvil_TC_v1 TLF+Motorized INS+Motorized
+Kamdesh_AAS_v1 VDV+Mechanized USA+Mechanized
+Mutaha_Invasion_v1 INS+Support VDV+Support
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Lashkar_RAAS_v1 PLA+AirAssault VDV+AirAssault
+AlBasrah_TC_v1 CAF+Motorized TLF+Motorized
+Tallil_AAS_v1 ADF+AirAssault PLA+AirAssault
+Gorodok_RAAS_v1 TLF+AirAssault WPMC+AirAssault
+Manicouagan_Invasion_v2 RGF+LightInfantry WPMC+CombinedArms
+Chora_AAS_v3 RGF+CombinedArms ADF+CombinedArms
+Kohat_RAAS_v2 PLA+Motorized USA+Motorized
+Yehorivka_RAAS_v2 CAF+CombinedArms IMF+CombinedArms
+Harju_AAS_v3 IMF+CombinedArms ADF+CombinedArms
+Fallujah_AAS_v1 PLA+Support INS+Support
+Narva_Invasion_v1 IMF+Armored WPMC+LightInfantry
+GooseBay_RAAS_v2 PLAAGF+Armored BAF+Armored
+Sumari_TC_v1 PLA+CombinedArms ADF+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v2 USA+AirAssault WPMC+AirAssault
+AlBasrah_RAAS_v1 VDV+Mechanized INS+Mechanized
+Manicouagan_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Anvil_AAS_v1 RGF+CombinedArms TLF+CombinedArms
+Kohat_AAS_v1 MEA+AirAssault TLF+AirAssault
+Kamdesh_AAS_v1 USMC+LightInfantry MEA+LightInfantry
+Tallil_RAAS_v2 WPMC+AirAssault ADF+CombinedArms
+Gorodok_Invasion_v1 PLA+Armored RGF+Armored
+Kokan_AAS_v1 VDV+CombinedArms TLF+CombinedArms
+Fallujah_TC_v1 USA+Armored PLA+Armored
+Yehorivka_AAS_v2 IMF+Motorized TLF+Motorized
+Sanxian_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+Narva_RAAS_v1 RGF+Motorized CAF+Motorized
+AlBasrah_Invasion_v1 MEA+Support BAF+Support
+Logar_AAS_v1 RGF+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v2 BAF+Armored VDV+Armored
+Kamdesh_AAS_v1 INS+Support WPMC+AirAssault
+Manicouagan_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Kohat_TC_v1 BAF+Armored PLA+Armored
+Sumari_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Mutaha_Invasion_v1 BAF+Mechanized INS+Mechanized
+BlackCoast_RAAS_v1 IMF+Motorized TLF+Motorized
+Yehorivka_RAAS_v1 WPMC+CombinedArms IMF+Support
+Tallil_TC_v1 CAF+AirAssault WPMC+AirAssault
+FoolsRoad_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+AlBasrah_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
+Anvil_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Gorodok_RAAS_v2 RGF+Mechanized PLA+LightInfantry
+Kohat_TC_v1 TLF+Armored MEA+Armored
+Narva_RAAS_v1 IMF+CombinedArms USA+CombinedArms
+Mutaha_AAS_v2 TLF+AirAssault PLA+AirAssault
+Kokan_Invasion_v1 INS+CombinedArms ADF+CombinedArms
+Yehorivka_RAAS_v2 ADF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 USMC+LightInfantry INS+Motorized
+Chora_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLANMC+CombinedArms
+Manicouagan_AAS_v2 CAF+AirAssault WPMC+AirAssault
+Kamdesh_Insurgency_v1 PLA+Motorized INS+Motorized
+Sanxian_AAS_v3 CAF+CombinedArms WPMC+CombinedArms
+Gorodok_TC_v1 BAF+Mechanized TLF+CombinedArms
+Lashkar_AAS_v2 RGF+Motorized INS+Motorized
+Anvil_RAAS_v2 RGF+CombinedArms CAF+CombinedArms
+BlackCoast_RAAS_v1 VDV+Mechanized PLA+Mechanized
+FoolsRoad_Invasion_v1 IMF+CombinedArms USMC+CombinedArms
+GooseBay_AAS_v1 VDV+Mechanized PLAAGF+Mechanized
+Belaya_RAAS_v1 RGF+Armored ADF+CombinedArms
+Kohat_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
+Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Kamdesh_RAAS_v1 MEA+AirAssault USA+AirAssault
+Yehorivka_Destruction_v1 RGF+Support PLA+Support
+Gorodok_RAAS_v2 PLA+AirAssault USA+Support
+Mestia_TC_v1 PLA+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 CAF+Armored PLA+Armored
+Fallujah_RAAS_v1 ADF+Mechanized RGF+Mechanized
+Sumari_AAS_v1 USMC+CombinedArms VDV+CombinedArms
+Lashkar_Insurgency_v1 VDV+AirAssault INS+Support
+BlackCoast_AAS_v2 WPMC+LightInfantry USA+LightInfantry
+Kohat_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 ADF+AirAssault TLF+AirAssault
+Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Chora_TC_v1 RGF+CombinedArms TLF+CombinedArms
+GooseBay_RAAS_v1 RGF+Mechanized WPMC+LightInfantry
+Skorpo_Invasion_v1 USA+Armored VDV+Armored
+FoolsRoad_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 WPMC+AirAssault ADF+AirAssault
+Yehorivka_AAS_v2 PLA+AirAssault TLF+AirAssault
+Mutaha_RAAS_v1 RGF+Motorized USMC+Armored
+Manicouagan_Skirmish_v2 PLANMC+CombinedArms CAF+CombinedArms
+Gorodok_RAAS_v2 VDV+Armored USMC+Armored
+Lashkar_Invasion_v1 RGF+Support PLA+Support
+Logar_AAS_v1 MEA+CombinedArms USA+CombinedArms
+Fallujah_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+GooseBay_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 TLF+Motorized INS+Motorized
+Kokan_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v2 PLA+CombinedArms VDV+CombinedArms
+Narva_Destruction_v1 WPMC+CombinedArms IMF+Motorized
+Tallil_RAAS_v2 PLA+Motorized USMC+Motorized
+BlackCoast_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
+Sanxian_AAS_v3 PLA+LightInfantry WPMC+LightInfantry
+Chora_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 IMF+Support RGF+CombinedArms
+Yehorivka_Invasion_v2 VDV+Armored CAF+Armored
+FoolsRoad_AAS_v1 VDV+CombinedArms CAF+CombinedArms
+Lashkar_AAS_v1 TLF+AirAssault PLA+AirAssault
+Kohat_RAAS_v1 PLA+AirAssault USA+AirAssault
+Sumari_TC_v1 PLA+CombinedArms INS+CombinedArms
+AlBasrah_AAS_v1 PLA+Armored MEA+Armored
+Manicouagan_Invasion_v1 RGF+Armored USA+Armored
+Tallil_AAS_v1 USMC+LightInfantry INS+Armored
+Fallujah_AAS_v1 PLA+CombinedArms VDV+CombinedArms
