--- a/Tools/Rotation/LayerRotation/LayerRotation_17.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_17.cfg
@@ -1,200 +1,200 @@
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms USMC+CombinedArms
-Kohat_RAAS_v2 ADF+CombinedArms PLA+Support
-Skorpo_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
-Belaya_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 INS+Armored RGF+Armored
-Lashkar_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
-Anvil_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Narva_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Yehorivka_Invasion_v1 TLF+Armored IMF+Armored
-Mutaha_RAAS_v2 PLA+AirAssault ADF+AirAssault
-Kamdesh_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
-Tallil_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Harju_RAAS_v1 BAF+AirAssault RGF+Support
-Sanxian_Invasion_v2 USA+Support PLA+Support
-Kohat_AAS_v1 USMC+Armored TLF+Armored
-GooseBay_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
-Fallujah_TC_v1 TLF+Mechanized BAF+Mechanized
-PacificProvingGrounds_AAS_v1 USA+CombinedArms PLA+CombinedArms
-Kokan_Invasion_v1 USMC+CombinedArms VDV+CombinedArms
-Yehorivka_RAAS_v1 WPMC+AirAssault IMF+LightInfantry
-BlackCoast_RAAS_v1 USMC+Motorized RGF+Motorized
-Chora_AAS_v1 RGF+CombinedArms TLF+CombinedArms
-Belaya_TC_v1 TLF+Armored IMF+Armored
-Lashkar_AAS_v1 RGF+Motorized CAF+Motorized
-Gorodok_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 INS+CombinedArms BAF+Support
-Kamdesh_Skirmish_v1 RGF+CombinedArms TLF+CombinedArms
-Tallil_AAS_v1 PLA+Support INS+Support
-Anvil_RAAS_v1 INS+LightInfantry PLA+LightInfantry
-Narva_Destruction_v1 VDV+Armored CAF+Armored
-Sumari_AAS_v3 TLF+CombinedArms INS+CombinedArms
-Fallujah_RAAS_v1 TLF+Armored PLA+Motorized
-Mutaha_RAAS_v2 USMC+Support VDV+Support
-Chora_AAS_v3 USMC+CombinedArms INS+CombinedArms
-Yehorivka_Destruction_v1 TLF+Motorized CAF+Motorized
-Lashkar_AAS_v2 INS+LightInfantry WPMC+LightInfantry
-Harju_RAAS_v2 IMF+Armored BAF+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 PLA+Motorized TLF+Motorized
-Anvil_Invasion_v1 RGF+Support MEA+LightInfantry
-Kokan_TC_v1 WPMC+CombinedArms BAF+CombinedArms
-Sanxian_AAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v1 RGF+Support PLA+Support
-Kohat_TC_v1 WPMC+AirAssault CAF+AirAssault
-Mutaha_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Manicouagan_Invasion_v1 BAF+CombinedArms VDV+CombinedArms
-Gorodok_RAAS_v1 BAF+Armored IMF+Motorized
-Yehorivka_RAAS_v2 PLA+Support RGF+Support
-Sumari_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-AlBasrah_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
-Kokan_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Lashkar_TC_v2 WPMC+AirAssault MEA+AirAssault
-Sanxian_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Belaya_Skirmish_v1 IMF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 INS+CombinedArms ADF+CombinedArms
-Anvil_Invasion_v1 PLA+Motorized ADF+Mechanized
-Tallil_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
-Manicouagan_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Fallujah_TC_v1 PLA+Armored INS+Armored
-Mutaha_RAAS_v1 MEA+LightInfantry RGF+LightInfantry
-Kamdesh_Invasion_v1 PLA+Armored MEA+LightInfantry
-Gorodok_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Lashkar_RAAS_v1 ADF+Mechanized RGF+Mechanized
-BlackCoast_AAS_v2 ADF+AirAssault VDV+AirAssault
-Sumari_AAS_v2 WPMC+CombinedArms USA+CombinedArms
-Yehorivka_Destruction_v1 WPMC+LightInfantry USA+LightInfantry
-Anvil_AAS_v1 PLA+Motorized RGF+Armored
-GooseBay_AAS_v1 BAF+Armored PLAAGF+Armored
-Chora_TC_v1 PLA+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 MEA+CombinedArms TLF+CombinedArms
-AlBasrah_Invasion_v1 WPMC+CombinedArms USA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Kokan_TC_v1 INS+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 PLA+Motorized USA+Motorized
-Lashkar_AAS_v2 TLF+Support RGF+Motorized
-Gorodok_Invasion_v1 CAF+Motorized TLF+Motorized
-Sumari_Skirmish_v1 RGF+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v1 TLF+Motorized INS+Motorized
-Belaya_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Fallujah_AAS_v1 PLA+Armored USMC+Armored
-Manicouagan_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 IMF+Mechanized PLAAGF+Mechanized
-Anvil_AAS_v1 INS+LightInfantry TLF+CombinedArms
-AlBasrah_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
-Narva_RAAS_v1 WPMC+AirAssault ADF+AirAssault
-Gorodok_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_AAS_v2 INS+CombinedArms WPMC+LightInfantry
-Belaya_AAS_v3 WPMC+AirAssault VDV+AirAssault
-Harju_Invasion_v3 WPMC+CombinedArms CAF+CombinedArms
+Manicouagan_AAS_v3 WPMC+AirAssault PLA+AirAssault
+Sumari_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 PLA+Armored MEA+AirAssault
+Narva_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Gorodok_Destruction_v1 USMC+Motorized PLA+Motorized
+Lashkar_RAAS_v1 INS+LightInfantry MEA+LightInfantry
+Belaya_AAS_v3 USMC+LightInfantry PLA+LightInfantry
+Mestia_TC_v1 IMF+CombinedArms RGF+CombinedArms
+Kohat_RAAS_v2 PLA+Motorized VDV+AirAssault
+Tallil_AAS_v1 TLF+CombinedArms INS+CombinedArms
+BlackCoast_Invasion_v2 CAF+Motorized TLF+Motorized
+Logar_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Anvil_TC_v1 VDV+Armored PLA+Armored
+Kamdesh_AAS_v1 WPMC+CombinedArms MEA+Armored
+Manicouagan_AAS_v1 VDV+AirAssault USA+AirAssault
+Kokan_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Lashkar_TC_v1 PLA+Support CAF+Support
+Mutaha_AAS_v2 INS+Mechanized RGF+Mechanized
+Fallujah_RAAS_v1 PLA+Support WPMC+CombinedArms
+Mestia_AAS_v1 TLF+CombinedArms RGF+CombinedArms
+Gorodok_Invasion_v1 IMF+LightInfantry PLA+LightInfantry
+Tallil_AAS_v1 BAF+CombinedArms MEA+CombinedArms
+Chora_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 RGF+Mechanized BAF+Mechanized
+Belaya_AAS_v1 PLA+LightInfantry ADF+Mechanized
+Manicouagan_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
+FoolsRoad_Destruction_v1 IMF+CombinedArms USMC+CombinedArms
+Anvil_AAS_v1 PLA+Support VDV+Support
+Kohat_TC_v1 PLA+CombinedArms MEA+CombinedArms
+Logar_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 INS+CombinedArms ADF+AirAssault
+Narva_RAAS_v1 RGF+Support BAF+Support
+Sumari_Invasion_v1 CAF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 TLF+AirAssault WPMC+AirAssault
+AlBasrah_AAS_v1 VDV+CombinedArms USMC+CombinedArms
+Lashkar_TC_v1 INS+Support MEA+Support
+Mestia_AAS_v2 TLF+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v1 WPMC+CombinedArms USMC+LightInfantry
+Belaya_Invasion_v1 ADF+Mechanized RGF+Mechanized
+Harju_AAS_v2 CAF+CombinedArms IMF+CombinedArms
+Anvil_TC_v1 CAF+Armored TLF+Armored
+Kohat_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
+Kokan_AAS_v2 PLA+CombinedArms CAF+CombinedArms
+Kamdesh_AAS_v1 MEA+Mechanized VDV+Mechanized
+Manicouagan_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Narva_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
+Yehorivka_RAAS_v1 WPMC+CombinedArms RGF+Motorized
+Fallujah_Skirmish_v2 MEA+CombinedArms RGF+CombinedArms
+Tallil_RAAS_v2 VDV+Armored USMC+Armored
+Lashkar_AAS_v2 PLA+CombinedArms MEA+CombinedArms
+Harju_Invasion_v3 IMF+LightInfantry WPMC+LightInfantry
 FoolsRoad_AAS_v2 IMF+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v1 RGF+Mechanized CAF+Mechanized
-Yehorivka_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-AlBasrah_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Kohat_Invasion_v2 RGF+Armored TLF+Armored
-Anvil_Skirmish_v1 BAF+CombinedArms MEA+CombinedArms
-Gorodok_TC_v1 RGF+Support USA+AirAssault
-GooseBay_RAAS_v1 RGF+Motorized PLA+Motorized
-Fallujah_TC_v1 TLF+Armored USMC+Armored
-Narva_Destruction_v1 ADF+Mechanized VDV+Mechanized
-Kokan_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_RAAS_v1 CAF+Armored PLA+Motorized
-Lashkar_TC_v1 RGF+Armored INS+Armored
-Chora_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-Mutaha_TC_v1 BAF+Mechanized INS+Mechanized
-Yehorivka_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 TLF+Armored PLA+Support
-Belaya_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Anvil_TC_v1 USA+CombinedArms MEA+CombinedArms
-Kohat_Invasion_v1 TLF+Mechanized CAF+Mechanized
-Kamdesh_TC_v1 RGF+LightInfantry MEA+LightInfantry
-Sumari_TC_v1 VDV+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 WPMC+AirAssault PLANMC+AirAssault
-Lashkar_TC_v2 PLA+LightInfantry USA+Support
-Mestia_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 RGF+Support BAF+Support
-Belaya_TC_v1 PLA+Support BAF+Support
-Kokan_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 PLA+AirAssault CAF+AirAssault
-Kohat_AAS_v1 MEA+Armored INS+Armored
-Logar_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-Kamdesh_RAAS_v1 USA+AirAssault MEA+AirAssault
-Lashkar_Invasion_v1 USMC+Armored VDV+Armored
-Fallujah_TC_v1 ADF+Mechanized MEA+Mechanized
-Yehorivka_RAAS_v1 WPMC+LightInfantry ADF+AirAssault
-BlackCoast_RAAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Harju_TC_v1 BAF+CombinedArms RGF+CombinedArms
-AlBasrah_Invasion_v1 INS+CombinedArms MEA+CombinedArms
-Anvil_RAAS_v2 PLA+Motorized RGF+Motorized
-Sanxian_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Kokan_AAS_v2 RGF+CombinedArms USMC+CombinedArms
-GooseBay_RAAS_v1 WPMC+CombinedArms VDV+AirAssault
-Kohat_Invasion_v2 TLF+CombinedArms BAF+CombinedArms
-Chora_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 INS+LightInfantry WPMC+LightInfantry
-Mutaha_TC_v1 BAF+AirAssault TLF+Motorized
-FoolsRoad_Destruction_v1 ADF+CombinedArms VDV+CombinedArms
-Tallil_RAAS_v2 MEA+Armored TLF+Armored
-Gorodok_TC_v1 RGF+LightInfantry WPMC+LightInfantry
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms BAF+CombinedArms
-Yehorivka_RAAS_v1 PLA+LightInfantry WPMC+CombinedArms
-Kokan_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
-GooseBay_RAAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Fallujah_TC_v1 PLA+Support USMC+Support
-AlBasrah_TC_v1 INS+Armored TLF+Armored
-Anvil_AAS_v1 PLA+Support TLF+Mechanized
-Logar_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
-Narva_AAS_v3 BAF+Support RGF+Support
-Mestia_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v1 MEA+Armored INS+Armored
-Lashkar_AAS_v2 CAF+AirAssault MEA+AirAssault
-FoolsRoad_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 PLA+Armored RGF+Armored
-Fallujah_TC_v1 VDV+CombinedArms PLA+CombinedArms
-BlackCoast_Skirmish_v1 RGF+CombinedArms IMF+CombinedArms
-Anvil_RAAS_v1 WPMC+AirAssault BAF+CombinedArms
-GooseBay_Invasion_v1 VDV+Armored CAF+Armored
-Mutaha_TC_v1 RGF+Support CAF+Support
-Kokan_AAS_v2 VDV+CombinedArms TLF+CombinedArms
-AlBasrah_TC_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v3 WPMC+CombinedArms USA+Motorized
-Tallil_Invasion_v1 INS+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 ADF+Mechanized VDV+Mechanized
-Mestia_Skirmish_v1 USMC+CombinedArms IMF+CombinedArms
-Fallujah_TC_v1 PLA+Support USMC+Support
-Kamdesh_TC_v1 MEA+Support INS+Support
-FoolsRoad_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 USA+CombinedArms PLA+CombinedArms
-GooseBay_AAS_v1 WPMC+AirAssault RGF+Motorized
-Anvil_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 RGF+Support PLA+Support
-Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
-Sumari_RAAS_v1 INS+CombinedArms MEA+CombinedArms
-Belaya_AAS_v2 BAF+Support TLF+Support
-Gorodok_RAAS_v1 PLA+LightInfantry BAF+Support
-BlackCoast_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Fallujah_RAAS_v1 INS+CombinedArms RGF+CombinedArms
-Yehorivka_Destruction_v1 IMF+CombinedArms BAF+CombinedArms
-Mutaha_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Tallil_RAAS_v1 TLF+Motorized VDV+CombinedArms
-AlBasrah_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_Skirmish_v1 INS+CombinedArms USA+CombinedArms
-Lashkar_Insurgency_v1 PLA+LightInfantry INS+LightInfantry
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Sanxian_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
-Gorodok_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Narva_Destruction_v1 IMF+Support VDV+Support
-Fallujah_AAS_v1 INS+CombinedArms USMC+Support
-Yehorivka_AAS_v1 TLF+Armored USMC+Armored
-Kokan_AAS_v1 TLF+CombinedArms USA+CombinedArms
+Gorodok_TC_v1 IMF+Motorized WPMC+CombinedArms
+Kohat_RAAS_v2 MEA+Support USA+Support
+GooseBay_RAAS_v2 WPMC+AirAssault BAF+AirAssault
+Kokan_AAS_v1 BAF+CombinedArms PLA+CombinedArms
+Narva_Invasion_v2 USA+Mechanized IMF+Mechanized
+Belaya_AAS_v2 VDV+CombinedArms CAF+CombinedArms
+AlBasrah_RAAS_v1 USA+LightInfantry INS+LightInfantry
+Tallil_TC_v1 VDV+CombinedArms TLF+CombinedArms
+Yehorivka_AAS_v2 VDV+CombinedArms TLF+AirAssault
+Sumari_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Manicouagan_AAS_v3 USA+Motorized RGF+Motorized
+Mutaha_Invasion_v1 CAF+Armored PLA+Armored
+Logar_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v2 USA+Armored PLAAGF+Armored
+BlackCoast_RAAS_v1 WPMC+AirAssault BAF+AirAssault
+Gorodok_RAAS_v2 PLA+Motorized BAF+Armored
+Kamdesh_RAAS_v1 TLF+Support INS+Support
+FoolsRoad_Invasion_v1 RGF+CombinedArms USA+CombinedArms
+Tallil_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
+Anvil_TC_v1 WPMC+LightInfantry RGF+LightInfantry
+Yehorivka_AAS_v2 IMF+Motorized TLF+Motorized
+Kohat_AAS_v1 VDV+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+AlBasrah_Invasion_v2 USA+Armored PLAAGF+Mechanized
+Fallujah_RAAS_v1 INS+CombinedArms CAF+CombinedArms
+Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 WPMC+AirAssault BAF+AirAssault
+Lashkar_AAS_v1 RGF+Armored PLA+Armored
+FoolsRoad_TC_v1 IMF+CombinedArms USA+CombinedArms
+Harju_RAAS_v1 BAF+Armored IMF+Armored
+GooseBay_Invasion_v1 WPMC+CombinedArms USMC+LightInfantry
+Sumari_AAS_v3 ADF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Mutaha_TC_v1 WPMC+AirAssault BAF+AirAssault
+AlBasrah_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 TLF+Support USMC+Support
+Tallil_Invasion_v1 TLF+Motorized PLA+Motorized
+Sanxian_RAAS_v1 ADF+CombinedArms PLA+Armored
+Kokan_Skirmish_v1 USMC+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Manicouagan_AAS_v2 WPMC+LightInfantry PLANMC+LightInfantry
+BlackCoast_Invasion_v1 USMC+AmphibiousAssault PLAAGF+Armored
+FoolsRoad_AAS_v1 ADF+CombinedArms IMF+CombinedArms
+Anvil_TC_v1 USA+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 MEA+Mechanized INS+Mechanized
+AlBasrah_RAAS_v1 RGF+Mechanized PLA+Mechanized
+Kamdesh_AAS_v1 BAF+Support TLF+CombinedArms
+Mestia_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+Mutaha_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
+Lashkar_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+Logar_TC_v1 CAF+CombinedArms VDV+CombinedArms
+Yehorivka_RAAS_v2 VDV+CombinedArms TLF+CombinedArms
+Harju_RAAS_v2 WPMC+LightInfantry USMC+CombinedArms
+Fallujah_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
+BlackCoast_AAS_v2 USA+Armored PLAAGF+Armored
+Chora_AAS_v2 BAF+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v2 RGF+Armored TLF+Armored
+Manicouagan_RAAS_v2 USA+Motorized RGF+Motorized
+Gorodok_TC_v1 WPMC+LightInfantry TLF+Armored
+Belaya_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_Invasion_v1 ADF+Mechanized MEA+Mechanized
+Lashkar_AAS_v1 TLF+Armored INS+Armored
+Skorpo_RAAS_v1 IMF+Support CAF+Support
+Mestia_TC_v1 ADF+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 VDV+CombinedArms BAF+CombinedArms
+Narva_Destruction_v1 CAF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v1 TLF+AirAssault BAF+AirAssault
+AlBasrah_TC_v1 WPMC+AirAssault RGF+CombinedArms
+Harju_RAAS_v1 IMF+Motorized USMC+Motorized
+Anvil_RAAS_v2 USA+Motorized PLA+Motorized
+FoolsRoad_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Gorodok_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Yehorivka_AAS_v2 USMC+CombinedArms IMF+CombinedArms
+Mestia_AAS_v1 RGF+CombinedArms USMC+CombinedArms
+Lashkar_RAAS_v1 PLA+Motorized USA+Motorized
+Tallil_AAS_v1 MEA+CombinedArms WPMC+LightInfantry
+Narva_Destruction_v1 RGF+Armored IMF+Armored
+Fallujah_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 INS+CombinedArms MEA+CombinedArms
+Kamdesh_AAS_v1 VDV+Armored PLA+Armored
+Logar_AAS_v1 INS+CombinedArms ADF+CombinedArms
+Mutaha_AAS_v2 TLF+Mechanized VDV+Support
+Harju_Invasion_v2 RGF+CombinedArms USMC+CombinedArms
+Yehorivka_AAS_v1 ADF+CombinedArms TLF+CombinedArms
+Anvil_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
+BlackCoast_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Tallil_RAAS_v1 TLF+Mechanized USA+Mechanized
+Lashkar_AAS_v1 INS+Mechanized TLF+Mechanized
+Mestia_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v2 WPMC+LightInfantry USA+Mechanized
+AlBasrah_AAS_v1 INS+CombinedArms TLF+CombinedArms
+FoolsRoad_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
+Gorodok_AAS_v1 PLA+AirAssault VDV+AirAssault
+Mutaha_TC_v1 MEA+AirAssault CAF+AirAssault
+Yehorivka_RAAS_v2 PLA+Armored VDV+CombinedArms
+GooseBay_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
+Belaya_AAS_v2 TLF+Support BAF+Support
+Fallujah_RAAS_v1 PLA+Support MEA+Support
+BlackCoast_Skirmish_v1 RGF+CombinedArms PLANMC+CombinedArms
+Skorpo_RAAS_v1 ADF+AirAssault VDV+AirAssault
+Kamdesh_AAS_v1 TLF+Motorized MEA+Support
+AlBasrah_Invasion_v2 VDV+Armored USMC+Armored
+FoolsRoad_AAS_v1 IMF+CombinedArms RGF+CombinedArms
+Lashkar_AAS_v2 MEA+Armored VDV+Armored
+Anvil_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 VDV+AirAssault WPMC+AirAssault
+Manicouagan_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
+Narva_AAS_v3 BAF+Armored RGF+CombinedArms
+Belaya_AAS_v2 PLA+Motorized TLF+Motorized
+Sanxian_Invasion_v2 USMC+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 INS+LightInfantry PLA+LightInfantry
+Mestia_RAAS_v1 USA+CombinedArms TLF+CombinedArms
+Harju_RAAS_v1 IMF+Mechanized WPMC+LightInfantry
+GooseBay_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+FoolsRoad_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Anvil_Invasion_v1 PLA+Support USMC+Support
+Mutaha_AAS_v1 PLA+AirAssault BAF+AirAssault
+Fallujah_RAAS_v2 WPMC+LightInfantry TLF+Mechanized
+Kokan_TC_v1 BAF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 INS+CombinedArms USMC+CombinedArms
+Sumari_Invasion_v1 RGF+CombinedArms MEA+CombinedArms
+Gorodok_RAAS_v2 USMC+Armored PLA+Armored
+Lashkar_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Chora_TC_v1 PLA+CombinedArms ADF+CombinedArms
+Belaya_AAS_v3 TLF+AirAssault CAF+AirAssault
+Narva_RAAS_v1 IMF+Motorized USA+Motorized
+Anvil_Invasion_v1 CAF+Support MEA+Mechanized
+Tallil_RAAS_v2 TLF+Support MEA+Support
+Mestia_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
+AlBasrah_AAS_v1 MEA+Support BAF+Support
+GooseBay_AAS_v1 VDV+AirAssault WPMC+AirAssault
+Sanxian_AAS_v3 WPMC+AirAssault USA+AirAssault
+Kohat_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v2 VDV+AirAssault TLF+Motorized
+BlackCoast_AAS_v2 RGF+LightInfantry WPMC+LightInfantry
+Belaya_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+Fallujah_Invasion_v2 WPMC+CombinedArms TLF+CombinedArms
+Harju_AAS_v2 IMF+CombinedArms USMC+CombinedArms
+AlBasrah_TC_v1 PLANMC+CombinedArms MEA+CombinedArms
