--- a/Tools/Rotation/LayerRotation/LayerRotation_18.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_18.cfg
@@ -1,200 +1,200 @@
-Kohat_TC_v1 USMC+Armored MEA+Armored
-Anvil_Invasion_v1 BAF+CombinedArms VDV+CombinedArms
-Kamdesh_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
-AlBasrah_AAS_v1 TLF+Armored MEA+Mechanized
-Lashkar_AAS_v2 VDV+CombinedArms USA+CombinedArms
-BlackCoast_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v1 TLF+Armored USMC+Armored
-Manicouagan_Invasion_v2 WPMC+LightInfantry USA+LightInfantry
-Chora_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
-Gorodok_TC_v1 WPMC+LightInfantry CAF+Mechanized
-Yehorivka_RAAS_v2 PLA+Support RGF+Support
-Belaya_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-Narva_Destruction_v1 USMC+Support IMF+Support
-Sanxian_AAS_v1 PLANMC+AirAssault WPMC+AirAssault
-Kokan_AAS_v2 INS+CombinedArms PLA+CombinedArms
-Lashkar_RAAS_v1 PLA+Support TLF+Support
-Kohat_TC_v1 USMC+Support INS+Support
-Kamdesh_TC_v1 TLF+AirAssault VDV+AirAssault
-FoolsRoad_Destruction_v1 WPMC+CombinedArms RGF+CombinedArms
-Anvil_TC_v1 MEA+LightInfantry WPMC+LightInfantry
-Fallujah_TC_v1 MEA+Armored VDV+Mechanized
-Chora_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v1 ADF+AirAssault PLA+AirAssault
-Manicouagan_RAAS_v2 WPMC+AirAssault PLANMC+AirAssault
-AlBasrah_Invasion_v2 WPMC+LightInfantry MEA+LightInfantry
-Kokan_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-Skorpo_RAAS_v1 IMF+Support BAF+Support
-Belaya_AAS_v3 USA+Mechanized RGF+Motorized
-FoolsRoad_Invasion_v1 IMF+CombinedArms RGF+CombinedArms
-Lashkar_TC_v2 BAF+Support PLA+Support
-BlackCoast_RAAS_v2 VDV+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v3 CAF+AirAssault WPMC+AirAssault
-Kohat_TC_v1 TLF+Armored USMC+Armored
-Manicouagan_Skirmish_v3 RGF+CombinedArms USMC+CombinedArms
-Anvil_TC_v1 INS+Mechanized USMC+Support
-GooseBay_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
-AlBasrah_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Yehorivka_TC_v1 VDV+AirAssault CAF+AirAssault
-Fallujah_TC_v1 PLA+Armored MEA+Armored
-Mutaha_AAS_v2 TLF+CombinedArms ADF+CombinedArms
-Gorodok_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Sumari_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Kamdesh_RAAS_v1 CAF+AirAssault RGF+Motorized
-BlackCoast_RAAS_v1 IMF+Armored TLF+Armored
-Kokan_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 TLF+Mechanized MEA+Mechanized
-Lashkar_AAS_v2 TLF+Support INS+Support
-Yehorivka_AAS_v1 RGF+Mechanized BAF+AirAssault
-Logar_TC_v1 RGF+CombinedArms CAF+CombinedArms
-Anvil_RAAS_v2 USMC+Armored TLF+Armored
-Fallujah_Invasion_v2 MEA+Armored TLF+Armored
-Sumari_AAS_v3 BAF+CombinedArms PLA+CombinedArms
-Tallil_TC_v1 PLA+Armored WPMC+CombinedArms
-Manicouagan_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
-Harju_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
-Kamdesh_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
-Mutaha_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
-Chora_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 USMC+CombinedArms VDV+CombinedArms
-Kohat_RAAS_v1 PLA+Armored USMC+Armored
-Lashkar_Invasion_v1 VDV+Mechanized CAF+Support
-Fallujah_RAAS_v2 TLF+CombinedArms MEA+CombinedArms
-Sumari_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 MEA+Mechanized INS+Mechanized
-Gorodok_AAS_v1 TLF+Mechanized ADF+Mechanized
-Mestia_Invasion_v1 PLA+CombinedArms TLF+CombinedArms
-Anvil_AAS_v1 TLF+Support PLA+Support
-Narva_TC_v1 WPMC+CombinedArms ADF+AirAssault
-Chora_TC_v1 INS+CombinedArms USA+CombinedArms
-Sanxian_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v2 MEA+Mechanized VDV+Mechanized
-Mutaha_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Lashkar_AAS_v1 PLA+Motorized WPMC+AirAssault
-Harju_RAAS_v2 VDV+Support USMC+Support
-Gorodok_Destruction_v1 USMC+LightInfantry WPMC+LightInfantry
-Kohat_RAAS_v2 USMC+LightInfantry PLA+LightInfantry
-Sumari_RAAS_v1 INS+CombinedArms BAF+CombinedArms
-Fallujah_RAAS_v2 RGF+Mechanized ADF+Mechanized
-BlackCoast_AAS_v2 CAF+Support WPMC+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
-Kamdesh_RAAS_v1 VDV+CombinedArms ADF+CombinedArms
-Anvil_TC_v1 TLF+Support MEA+Support
-Kokan_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
-Yehorivka_Destruction_v1 RGF+Motorized PLA+LightInfantry
+Kamdesh_AAS_v1 WPMC+AirAssault CAF+AirAssault
+Tallil_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
+Mestia_RAAS_v1 TLF+CombinedArms USA+CombinedArms
+Anvil_Invasion_v1 ADF+CombinedArms VDV+CombinedArms
+Gorodok_RAAS_v1 PLA+AirAssault WPMC+AirAssault
+Chora_TC_v1 WPMC+CombinedArms INS+CombinedArms
+Mutaha_AAS_v1 PLA+Motorized TLF+Motorized
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+FoolsRoad_AAS_v1 TLF+CombinedArms CAF+CombinedArms
+GooseBay_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 PLAAGF+Mechanized MEA+AirAssault
+Yehorivka_RAAS_v2 PLA+Armored IMF+Armored
+Lashkar_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 INS+CombinedArms ADF+CombinedArms
+Manicouagan_RAAS_v2 WPMC+LightInfantry PLANMC+LightInfantry
+Kamdesh_Invasion_v1 USMC+LightInfantry PLA+LightInfantry
+Chora_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v3 ADF+AirAssault PLANMC+AirAssault
+Narva_AAS_v1 VDV+AirAssault IMF+LightInfantry
+FoolsRoad_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Gorodok_TC_v1 USMC+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 BAF+Mechanized RGF+Mechanized
+Fallujah_Invasion_v1 INS+LightInfantry PLA+LightInfantry
+Belaya_RAAS_v1 ADF+AirAssault WPMC+AirAssault
+Mestia_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
+AlBasrah_TC_v1 ADF+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v1 MEA+LightInfantry USMC+LightInfantry
+Kokan_AAS_v1 INS+CombinedArms TLF+CombinedArms
+Harju_Invasion_v3 IMF+Motorized CAF+Motorized
+Yehorivka_AAS_v2 TLF+Mechanized IMF+Mechanized
+Kohat_RAAS_v2 MEA+Armored BAF+Armored
 Narva_TC_v1 RGF+Mechanized CAF+Mechanized
-Lashkar_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v2 VDV+Armored PLA+Armored
-Manicouagan_RAAS_v2 WPMC+LightInfantry RGF+LightInfantry
-Fallujah_RAAS_v1 PLA+Motorized USMC+LightInfantry
-Chora_Invasion_v2 INS+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 INS+Mechanized ADF+Mechanized
-Kohat_RAAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Kamdesh_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
-Gorodok_AAS_v1 IMF+LightInfantry TLF+Mechanized
-AlBasrah_Invasion_v2 INS+Motorized USA+Motorized
-GooseBay_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Yehorivka_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Mestia_Invasion_v1 WPMC+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 MEA+Mechanized BAF+Mechanized
-Sanxian_AAS_v3 PLANMC+Support WPMC+CombinedArms
-Chora_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Kamdesh_TC_v1 ADF+AirAssault TLF+AirAssault
-Mutaha_TC_v1 MEA+Support BAF+Support
-FoolsRoad_Invasion_v1 CAF+CombinedArms TLF+CombinedArms
-AlBasrah_AAS_v1 ADF+Mechanized VDV+Mechanized
-Yehorivka_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Anvil_Skirmish_v1 ADF+CombinedArms MEA+CombinedArms
-Lashkar_TC_v1 INS+LightInfantry PLA+LightInfantry
-Gorodok_Invasion_v2 WPMC+AirAssault PLA+Support
-Sumari_TC_v1 TLF+CombinedArms BAF+CombinedArms
-Tallil_TC_v1 RGF+LightInfantry WPMC+LightInfantry
-BlackCoast_RAAS_v2 PLA+Armored CAF+Armored
-Kokan_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v1 WPMC+AirAssault BAF+Support
-Mutaha_TC_v1 USA+LightInfantry PLA+LightInfantry
-FoolsRoad_Skirmish_v1 CAF+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault VDV+AirAssault
-Yehorivka_AAS_v1 RGF+Motorized TLF+Motorized
-Mestia_AAS_v2 RGF+CombinedArms ADF+CombinedArms
-Gorodok_Invasion_v1 RGF+Armored CAF+Armored
-PacificProvingGrounds_AAS_v1 USA+CombinedArms PLANMC+CombinedArms
-Logar_TC_v1 PLA+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v1 USMC+CombinedArms PLAAGF+CombinedArms
-Manicouagan_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 CAF+Support VDV+Support
-AlBasrah_AAS_v1 BAF+Support PLA+LightInfantry
-Chora_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 BAF+Armored VDV+Armored
-Harju_AAS_v1 IMF+Motorized USA+Motorized
-Kokan_Invasion_v1 USA+CombinedArms INS+CombinedArms
-Tallil_TC_v1 WPMC+CombinedArms INS+CombinedArms
-Gorodok_AAS_v1 PLA+Armored BAF+Armored
-Kohat_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 USMC+LightInfantry WPMC+CombinedArms
-Yehorivka_Invasion_v1 IMF+CombinedArms PLA+CombinedArms
-GooseBay_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-Sanxian_AAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 PLA+CombinedArms VDV+CombinedArms
-AlBasrah_AAS_v1 ADF+CombinedArms PLAAGF+Armored
-Harju_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Tallil_RAAS_v2 WPMC+AirAssault PLA+AirAssault
+Anvil_AAS_v1 RGF+Mechanized PLA+CombinedArms
+Gorodok_Invasion_v1 TLF+CombinedArms VDV+CombinedArms
+BlackCoast_RAAS_v1 TLF+AirAssault ADF+AirAssault
+Chora_TC_v1 BAF+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v2 PLA+Motorized TLF+Motorized
+Manicouagan_AAS_v1 PLA+LightInfantry RGF+LightInfantry
+Belaya_AAS_v3 USMC+CombinedArms IMF+Support
+FoolsRoad_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
+Kamdesh_AAS_v1 VDV+Support USMC+Support
+Yehorivka_AAS_v1 CAF+Armored PLA+Armored
+Mutaha_TC_v1 TLF+Armored MEA+Armored
+Kohat_RAAS_v2 INS+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 PLA+Motorized TLF+Armored
+Anvil_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Mestia_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Manicouagan_RAAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Anvil_TC_v1 MEA+Armored BAF+AirAssault
-Kokan_TC_v1 BAF+CombinedArms RGF+CombinedArms
-Mutaha_Invasion_v1 PLA+Armored TLF+Armored
-Fallujah_AAS_v1 INS+Armored MEA+Armored
-Kohat_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-BlackCoast_RAAS_v1 ADF+AirAssault TLF+Motorized
-Belaya_TC_v1 WPMC+LightInfantry PLA+LightInfantry
-Gorodok_AAS_v1 CAF+Support PLA+Support
-Chora_Insurgency_v1 TLF+CombinedArms INS+CombinedArms
-Tallil_AAS_v1 ADF+Mechanized TLF+Mechanized
-Skorpo_RAAS_v1 BAF+Mechanized IMF+Mechanized
-Manicouagan_Skirmish_v2 USMC+CombinedArms PLANMC+CombinedArms
-Yehorivka_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
-Lashkar_RAAS_v1 WPMC+CombinedArms MEA+Support
-Anvil_Invasion_v1 CAF+Support INS+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Fallujah_AAS_v1 MEA+LightInfantry PLA+LightInfantry
-AlBasrah_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
-Kamdesh_TC_v1 VDV+AirAssault PLA+AirAssault
-Mutaha_Invasion_v1 PLA+Support BAF+Support
-Gorodok_RAAS_v1 IMF+Armored USMC+Armored
-BlackCoast_AAS_v2 PLANMC+Armored VDV+Mechanized
-Kohat_TC_v1 INS+LightInfantry WPMC+LightInfantry
-Sumari_Skirmish_v1 VDV+CombinedArms USA+CombinedArms
-Belaya_Invasion_v1 WPMC+LightInfantry USMC+LightInfantry
-Tallil_RAAS_v2 VDV+AirAssault ADF+AirAssault
-Narva_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Manicouagan_RAAS_v1 BAF+Support VDV+Support
-FoolsRoad_AAS_v2 BAF+CombinedArms IMF+CombinedArms
-Fallujah_TC_v1 TLF+CombinedArms CAF+CombinedArms
-Harju_Invasion_v2 IMF+Armored VDV+Support
-Kamdesh_AAS_v1 WPMC+AirAssault USA+AirAssault
-Sanxian_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Kohat_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-Anvil_RAAS_v2 MEA+AirAssault WPMC+AirAssault
-Lashkar_Invasion_v1 BAF+Support MEA+Support
-Kokan_AAS_v1 PLA+CombinedArms USMC+CombinedArms
-Gorodok_AAS_v1 VDV+Mechanized IMF+Armored
-Tallil_RAAS_v2 CAF+CombinedArms MEA+CombinedArms
-GooseBay_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v1 RGF+LightInfantry INS+LightInfantry
-Manicouagan_RAAS_v1 RGF+Armored PLA+Armored
-FoolsRoad_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v2 WPMC+CombinedArms USMC+CombinedArms
-Fallujah_TC_v1 INS+CombinedArms PLA+LightInfantry
-Yehorivka_TC_v1 TLF+Armored IMF+Armored
-Lashkar_Invasion_v1 USA+Support TLF+Support
-Anvil_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Sumari_TC_v1 PLA+CombinedArms INS+CombinedArms
-Tallil_TC_v1 VDV+Mechanized ADF+Mechanized
+Sumari_Skirmish_v1 VDV+CombinedArms USMC+CombinedArms
+Sanxian_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Gorodok_AAS_v1 PLA+Support VDV+Support
+Lashkar_AAS_v1 PLA+LightInfantry TLF+Mechanized
+Chora_Invasion_v1 WPMC+CombinedArms RGF+CombinedArms
+BlackCoast_AAS_v2 IMF+Armored CAF+Armored
+Kamdesh_TC_v1 RGF+CombinedArms USMC+CombinedArms
+Yehorivka_AAS_v1 IMF+Armored VDV+Armored
+Mestia_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 USMC+CombinedArms VDV+CombinedArms
+Narva_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 WPMC+LightInfantry INS+Motorized
+Kohat_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Tallil_AAS_v1 PLA+LightInfantry INS+LightInfantry
+Skorpo_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+BlackCoast_Invasion_v2 PLANMC+Motorized ADF+CombinedArms
+Lashkar_AAS_v2 VDV+Armored CAF+Armored
+Gorodok_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Mutaha_Skirmish_v1 TLF+CombinedArms CAF+CombinedArms
+Harju_AAS_v1 CAF+Support IMF+Support
+Yehorivka_RAAS_v1 BAF+CombinedArms VDV+Support
+Manicouagan_Invasion_v1 USMC+Armored VDV+Armored
+Sumari_RAAS_v1 BAF+CombinedArms VDV+CombinedArms
+Kohat_AAS_v1 MEA+Armored PLA+Armored
+AlBasrah_AAS_v1 PLA+AirAssault VDV+AirAssault
+Narva_AAS_v1 BAF+Mechanized IMF+Mechanized
+Tallil_RAAS_v1 VDV+Mechanized USA+Support
+Kamdesh_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
+Chora_AAS_v2 USMC+CombinedArms VDV+CombinedArms
+Lashkar_RAAS_v1 BAF+Support RGF+Support
+Gorodok_AAS_v1 VDV+CombinedArms ADF+CombinedArms
+Belaya_RAAS_v1 TLF+AirAssault BAF+AirAssault
+Logar_TC_v1 TLF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Mutaha_Invasion_v1 USA+LightInfantry RGF+LightInfantry
+Yehorivka_RAAS_v1 CAF+AirAssault TLF+Armored
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
+FoolsRoad_Skirmish_v2 IMF+CombinedArms BAF+CombinedArms
+Kamdesh_AAS_v1 BAF+Support PLA+Support
+BlackCoast_RAAS_v2 VDV+CombinedArms BAF+CombinedArms
+AlBasrah_Invasion_v1 WPMC+AirAssault INS+LightInfantry
+Anvil_RAAS_v1 MEA+LightInfantry USMC+LightInfantry
+Fallujah_Skirmish_v1 RGF+CombinedArms INS+CombinedArms
+Tallil_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
+Narva_AAS_v2 VDV+Mechanized IMF+Mechanized
+Kokan_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+Mutaha_AAS_v1 MEA+Support WPMC+AirAssault
+Kohat_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
+Yehorivka_RAAS_v2 WPMC+AirAssault TLF+AirAssault
+Manicouagan_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Sumari_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+BlackCoast_AAS_v2 PLANMC+Support TLF+Support
+Anvil_TC_v1 TLF+Motorized PLA+Motorized
+Sanxian_AAS_v2 USMC+Armored WPMC+AirAssault
+Lashkar_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
+Mestia_AAS_v2 IMF+CombinedArms ADF+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Kamdesh_TC_v1 PLA+AirAssault USA+AirAssault
+AlBasrah_RAAS_v1 INS+Support WPMC+AirAssault
+Mutaha_RAAS_v1 ADF+AirAssault WPMC+AirAssault
+Kohat_Invasion_v2 PLA+CombinedArms CAF+CombinedArms
+Chora_RAAS_v1 INS+CombinedArms TLF+CombinedArms
+GooseBay_AAS_v1 CAF+Support RGF+Support
+Belaya_TC_v1 WPMC+CombinedArms IMF+CombinedArms
+Sumari_AAS_v3 MEA+CombinedArms ADF+CombinedArms
+Sanxian_AAS_v3 PLANMC+CombinedArms BAF+AirAssault
+Gorodok_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v2 PLANMC+AirAssault WPMC+AirAssault
+Lashkar_TC_v2 USMC+Motorized TLF+Motorized
+Tallil_AAS_v1 CAF+AirAssault TLF+AirAssault
+Fallujah_RAAS_v1 PLA+Armored CAF+CombinedArms
+Kamdesh_AAS_v1 ADF+Mechanized VDV+Mechanized
+Kokan_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Mestia_AAS_v1 PLA+CombinedArms USA+CombinedArms
+AlBasrah_AAS_v1 PLAAGF+Armored VDV+Mechanized
+Gorodok_TC_v1 TLF+Mechanized IMF+Mechanized
+Chora_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Manicouagan_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v1 WPMC+AirAssault USA+AirAssault
+Narva_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Anvil_TC_v1 MEA+LightInfantry USMC+LightInfantry
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Tallil_RAAS_v2 PLA+Motorized INS+LightInfantry
+FoolsRoad_Destruction_v1 WPMC+CombinedArms BAF+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Mutaha_RAAS_v2 PLA+AirAssault WPMC+AirAssault
+Gorodok_RAAS_v2 ADF+AirAssault WPMC+AirAssault
+BlackCoast_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
+Sanxian_RAAS_v2 PLAAGF+Armored ADF+Mechanized
+AlBasrah_AAS_v1 BAF+AirAssault MEA+AirAssault
+Kamdesh_AAS_v1 BAF+AirAssault PLA+AirAssault
+Anvil_Invasion_v1 PLA+LightInfantry USA+LightInfantry
+Yehorivka_RAAS_v2 CAF+Motorized IMF+Motorized
+Harju_RAAS_v2 WPMC+LightInfantry IMF+Mechanized
+Logar_AAS_v1 USMC+CombinedArms INS+CombinedArms
+Fallujah_TC_v1 MEA+Support RGF+Support
+Belaya_AAS_v2 CAF+Armored TLF+Armored
+Mutaha_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
+Chora_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+AlBasrah_TC_v1 WPMC+CombinedArms TLF+CombinedArms
+Manicouagan_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 PLA+Support CAF+Support
+Sumari_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 TLF+Mechanized MEA+Mechanized
+Skorpo_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
+Yehorivka_TC_v1 TLF+Support WPMC+AirAssault
+GooseBay_RAAS_v1 WPMC+LightInfantry PLANMC+LightInfantry
+Mutaha_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
+FoolsRoad_Destruction_v1 WPMC+CombinedArms RGF+CombinedArms
+Anvil_RAAS_v1 TLF+AirAssault ADF+AirAssault
+Gorodok_TC_v1 BAF+Support RGF+Armored
+Sanxian_AAS_v3 BAF+AirAssault PLANMC+AirAssault
+Chora_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 BAF+AirAssault PLA+AirAssault
+Manicouagan_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+AlBasrah_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v1 VDV+Armored INS+Armored
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Mutaha_TC_v1 USMC+LightInfantry PLA+LightInfantry
+Harju_RAAS_v1 IMF+Motorized WPMC+LightInfantry
+Yehorivka_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
+Mestia_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Narva_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Chora_TC_v1 BAF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
+Manicouagan_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms USA+CombinedArms
+Tallil_AAS_v1 BAF+AirAssault PLA+AirAssault
+Anvil_TC_v1 USA+CombinedArms RGF+Mechanized
+Belaya_AAS_v1 USMC+Armored TLF+Armored
+FoolsRoad_AAS_v1 IMF+CombinedArms RGF+CombinedArms
+AlBasrah_Invasion_v2 INS+Support VDV+Support
+Kamdesh_RAAS_v1 PLA+Armored USMC+Armored
+Mutaha_TC_v1 TLF+CombinedArms VDV+CombinedArms
+Sanxian_RAAS_v2 ADF+AirAssault PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Sumari_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Yehorivka_Invasion_v2 WPMC+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry USA+Mechanized
+Anvil_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
+Mestia_AAS_v1 USMC+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 TLF+Motorized CAF+Motorized
+Lashkar_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
+Kamdesh_RAAS_v1 USMC+Armored PLA+Armored
+Mutaha_TC_v1 USA+Motorized PLA+Motorized
+BlackCoast_AAS_v2 VDV+Mechanized IMF+Mechanized
