--- a/Tools/Rotation/LayerRotation/LayerRotation_19.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_19.cfg
@@ -1,200 +1,200 @@
-Kamdesh_AAS_v1 PLA+Support CAF+Support
-BlackCoast_Invasion_v2 IMF+Support WPMC+CombinedArms
-Kokan_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 VDV+CombinedArms BAF+CombinedArms
-Mutaha_TC_v1 WPMC+AirAssault PLA+AirAssault
-Kohat_TC_v1 CAF+AirAssault WPMC+AirAssault
-FoolsRoad_Destruction_v1 USMC+CombinedArms PLA+CombinedArms
-GooseBay_AAS_v1 CAF+Armored WPMC+CombinedArms
-AlBasrah_RAAS_v1 PLA+Motorized RGF+Motorized
-Gorodok_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 WPMC+AirAssault TLF+AirAssault
-Yehorivka_Destruction_v1 RGF+LightInfantry WPMC+LightInfantry
-Manicouagan_Skirmish_v3 WPMC+CombinedArms USA+CombinedArms
-Tallil_TC_v1 PLA+Support USA+Support
-Skorpo_RAAS_v1 RGF+LightInfantry CAF+AirAssault
-Harju_Skirmish_v2 WPMC+CombinedArms RGF+CombinedArms
-Fallujah_Invasion_v1 WPMC+LightInfantry RGF+LightInfantry
-Anvil_TC_v1 VDV+CombinedArms USA+CombinedArms
-Mestia_TC_v1 VDV+CombinedArms IMF+CombinedArms
-AlBasrah_RAAS_v1 WPMC+CombinedArms TLF+Support
-Mutaha_TC_v1 PLA+AirAssault WPMC+AirAssault
-Gorodok_Invasion_v2 PLA+CombinedArms ADF+CombinedArms
-Lashkar_TC_v1 VDV+CombinedArms USA+CombinedArms
-GooseBay_Skirmish_v1 VDV+CombinedArms USA+CombinedArms
-BlackCoast_AAS_v2 TLF+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 TLF+CombinedArms ADF+CombinedArms
-Kohat_Invasion_v2 WPMC+LightInfantry ADF+CombinedArms
-Logar_RAAS_v1 BAF+CombinedArms INS+CombinedArms
-Fallujah_TC_v1 PLA+Motorized CAF+Motorized
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Mestia_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
-Tallil_TC_v1 BAF+CombinedArms INS+CombinedArms
-Sanxian_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Yehorivka_Skirmish_v1 IMF+CombinedArms ADF+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Gorodok_Invasion_v1 IMF+Mechanized WPMC+LightInfantry
-AlBasrah_AAS_v1 INS+Motorized PLA+Motorized
-BlackCoast_RAAS_v1 PLA+Mechanized IMF+Mechanized
-Harju_Skirmish_v2 USMC+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v2 PLA+Support BAF+Support
+Gorodok_AAS_v1 PLA+Motorized RGF+Motorized
+Manicouagan_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Kokan_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+Tallil_AAS_v1 MEA+Armored TLF+Armored
+Fallujah_AAS_v1 CAF+Support INS+Armored
+Chora_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+AlBasrah_RAAS_v1 USMC+Motorized INS+Motorized
+Sanxian_AAS_v3 WPMC+CombinedArms PLA+CombinedArms
 Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v3 PLA+CombinedArms CAF+CombinedArms
-Mutaha_TC_v1 RGF+Motorized CAF+Armored
-Kohat_TC_v1 INS+Motorized TLF+Motorized
-FoolsRoad_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-Kamdesh_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v3 WPMC+CombinedArms CAF+CombinedArms
-Gorodok_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Manicouagan_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v1 INS+LightInfantry USMC+Armored
-Anvil_Invasion_v1 MEA+LightInfantry WPMC+LightInfantry
-Logar_RAAS_v1 USA+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v2 VDV+Mechanized PLA+Mechanized
-Yehorivka_RAAS_v1 PLA+Support USA+Support
-Lashkar_TC_v2 INS+Support USMC+Support
-FoolsRoad_Destruction_v1 CAF+CombinedArms TLF+CombinedArms
-Kohat_RAAS_v2 CAF+Armored VDV+CombinedArms
-Mutaha_TC_v1 TLF+Armored PLA+Armored
-AlBasrah_AAS_v1 BAF+CombinedArms VDV+CombinedArms
-Mestia_TC_v1 RGF+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 TLF+Mechanized ADF+Mechanized
-Gorodok_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Manicouagan_RAAS_v2 PLAAGF+Armored BAF+Armored
-Kokan_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
-Narva_TC_v1 WPMC+LightInfantry IMF+LightInfantry
-Anvil_Invasion_v1 MEA+LightInfantry CAF+Support
-Lashkar_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v1 TLF+Mechanized USA+Mechanized
-Mutaha_TC_v1 TLF+Support MEA+Support
-Kohat_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v2 INS+Armored MEA+Armored
-Fallujah_RAAS_v2 MEA+Armored TLF+Armored
-Skorpo_RAAS_v1 IMF+Motorized ADF+CombinedArms
-Sumari_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Gorodok_AAS_v1 RGF+Support TLF+Support
-Tallil_Invasion_v1 BAF+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v2 INS+LightInfantry MEA+LightInfantry
-Lashkar_RAAS_v1 WPMC+LightInfantry TLF+Motorized
-Chora_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v1 INS+Support PLA+Support
-Kamdesh_Invasion_v1 USA+CombinedArms RGF+CombinedArms
-Sanxian_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Manicouagan_Skirmish_v2 PLAAGF+CombinedArms BAF+CombinedArms
-Kohat_AAS_v1 WPMC+AirAssault USA+AirAssault
-AlBasrah_AAS_v1 INS+Support PLA+Support
-FoolsRoad_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-Fallujah_AAS_v1 TLF+Armored WPMC+LightInfantry
-BlackCoast_AAS_v2 ADF+Mechanized RGF+Mechanized
-Mestia_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 TLF+Armored BAF+Armored
-Narva_Destruction_v1 WPMC+CombinedArms CAF+CombinedArms
-Lashkar_Skirmish_v1 RGF+CombinedArms MEA+CombinedArms
-Tallil_TC_v1 PLA+Armored TLF+Armored
-Sanxian_RAAS_v2 CAF+Support WPMC+AirAssault
-Anvil_TC_v1 INS+CombinedArms USA+CombinedArms
-Logar_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-Belaya_Invasion_v2 IMF+LightInfantry PLA+LightInfantry
-Kamdesh_RAAS_v1 TLF+Support CAF+Support
-Mutaha_TC_v1 BAF+AirAssault VDV+AirAssault
-Kokan_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 WPMC+AirAssault TLF+Armored
-Narva_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
-AlBasrah_Skirmish_v1 INS+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v2 TLF+CombinedArms INS+CombinedArms
-Yehorivka_RAAS_v1 WPMC+AirAssault TLF+AirAssault
-GooseBay_AAS_v1 USMC+Armored WPMC+LightInfantry
-Manicouagan_Invasion_v2 WPMC+LightInfantry USA+LightInfantry
-Anvil_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 TLF+CombinedArms VDV+CombinedArms
-Belaya_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Mutaha_AAS_v1 MEA+Armored TLF+Mechanized
-FoolsRoad_Destruction_v1 CAF+CombinedArms IMF+CombinedArms
-AlBasrah_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Tallil_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Narva_AAS_v3 CAF+Motorized IMF+Motorized
-Kohat_RAAS_v1 PLA+Armored BAF+Armored
-Sumari_Invasion_v1 USA+CombinedArms PLA+CombinedArms
-Kamdesh_AAS_v1 VDV+CombinedArms PLA+CombinedArms
-Sanxian_RAAS_v2 WPMC+CombinedArms PLAAGF+Mechanized
-Fallujah_TC_v1 CAF+Armored PLA+Armored
-Anvil_TC_v1 INS+Mechanized ADF+Mechanized
-Manicouagan_Invasion_v1 PLANMC+LightInfantry RGF+LightInfantry
-Logar_TC_v1 VDV+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 INS+Mechanized USMC+LightInfantry
-BlackCoast_AAS_v1 IMF+Support TLF+Support
-Yehorivka_AAS_v1 VDV+Support CAF+Support
-FoolsRoad_Destruction_v1 ADF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 VDV+Armored IMF+Armored
-AlBasrah_TC_v1 TLF+AirAssault MEA+Armored
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 TLF+AirAssault PLA+AirAssault
-Narva_Destruction_v1 IMF+Support CAF+Support
-Lashkar_RAAS_v1 MEA+Armored PLA+Armored
-GooseBay_Skirmish_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 VDV+AirAssault ADF+AirAssault
-Kohat_RAAS_v1 USA+LightInfantry PLA+LightInfantry
-Mestia_Skirmish_v1 USA+CombinedArms VDV+CombinedArms
-Yehorivka_Destruction_v1 USMC+Support IMF+Support
-Fallujah_AAS_v1 PLA+LightInfantry INS+LightInfantry
-Logar_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
-Mutaha_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
-Anvil_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
-Belaya_TC_v1 TLF+Motorized BAF+AirAssault
-Gorodok_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
-Narva_RAAS_v1 BAF+Support RGF+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Chora_TC_v1 PLA+CombinedArms USMC+CombinedArms
-Kohat_TC_v1 MEA+Armored BAF+Armored
-AlBasrah_Invasion_v2 WPMC+LightInfantry TLF+Support
-Manicouagan_Skirmish_v2 USA+CombinedArms RGF+CombinedArms
-Yehorivka_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
-Fallujah_TC_v1 RGF+LightInfantry WPMC+LightInfantry
-Lashkar_AAS_v2 BAF+Armored VDV+Armored
-Kamdesh_Invasion_v1 MEA+AirAssault INS+Mechanized
-Sumari_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 PLANMC+Armored USA+Armored
-Tallil_AAS_v1 TLF+Mechanized ADF+Mechanized
-Mutaha_Skirmish_v1 USMC+CombinedArms VDV+CombinedArms
-Harju_Invasion_v3 VDV+CombinedArms WPMC+CombinedArms
-Narva_AAS_v1 IMF+Support RGF+Support
-Kohat_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Anvil_TC_v1 ADF+AirAssault VDV+Mechanized
-AlBasrah_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v1 RGF+Mechanized BAF+Mechanized
-Lashkar_RAAS_v1 PLA+AirAssault VDV+AirAssault
-Yehorivka_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
-Sumari_Skirmish_v1 RGF+CombinedArms TLF+CombinedArms
-Tallil_Invasion_v1 WPMC+LightInfantry RGF+LightInfantry
-Gorodok_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 VDV+CombinedArms INS+CombinedArms
-Mutaha_TC_v1 VDV+AirAssault WPMC+LightInfantry
-Kamdesh_AAS_v1 VDV+Support PLA+Support
-FoolsRoad_Invasion_v1 RGF+CombinedArms ADF+CombinedArms
-Anvil_TC_v1 MEA+CombinedArms USA+CombinedArms
-Belaya_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Chora_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 VDV+Support CAF+Armored
-Harju_AAS_v3 WPMC+CombinedArms VDV+CombinedArms
-Gorodok_RAAS_v2 WPMC+AirAssault TLF+AirAssault
-Fallujah_RAAS_v1 TLF+Mechanized ADF+Mechanized
-Mestia_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Kamdesh_Invasion_v1 RGF+Mechanized ADF+Mechanized
-Kohat_AAS_v1 PLA+Support USA+Support
-Lashkar_TC_v2 PLA+Armored TLF+Armored
-AlBasrah_RAAS_v1 WPMC+CombinedArms INS+Mechanized
-Sumari_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
-Manicouagan_Invasion_v2 USMC+CombinedArms WPMC+CombinedArms
-GooseBay_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Kokan_AAS_v1 MEA+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v2 IMF+LightInfantry WPMC+LightInfantry
-Anvil_TC_v1 PLA+Support INS+Support
-Mestia_Invasion_v1 WPMC+CombinedArms IMF+CombinedArms
-Narva_AAS_v2 IMF+Mechanized VDV+Mechanized
-Kohat_TC_v1 TLF+Mechanized MEA+Mechanized
-Lashkar_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
+Anvil_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Logar_TC_v1 USA+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v2 ADF+Mechanized PLA+Armored
+Manicouagan_RAAS_v2 PLANMC+Support USA+Support
+Gorodok_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Tallil_Invasion_v1 RGF+LightInfantry PLA+LightInfantry
+Mutaha_AAS_v2 RGF+Motorized USMC+Motorized
+Kamdesh_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
+AlBasrah_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Mestia_AAS_v1 TLF+CombinedArms IMF+CombinedArms
+Narva_Destruction_v1 IMF+Mechanized CAF+Mechanized
+Belaya_RAAS_v1 CAF+CombinedArms WPMC+LightInfantry
+Fallujah_TC_v1 PLA+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v2 USMC+Armored VDV+Armored
+Sumari_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 USA+Armored PLANMC+Armored
+Anvil_Invasion_v1 BAF+Armored MEA+Support
+Chora_AAS_v3 TLF+CombinedArms WPMC+CombinedArms
+Tallil_TC_v1 RGF+Mechanized ADF+Mechanized
+Kohat_AAS_v1 CAF+Mechanized VDV+Mechanized
+Manicouagan_AAS_v3 BAF+Mechanized VDV+Mechanized
+Kamdesh_AAS_v1 ADF+Mechanized MEA+Armored
+Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Sanxian_AAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+GooseBay_Skirmish_v1 PLANMC+CombinedArms BAF+CombinedArms
+BlackCoast_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v2 IMF+Armored PLA+Armored
+Kokan_Invasion_v1 VDV+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Kohat_TC_v1 USMC+Armored VDV+Armored
+Sumari_AAS_v2 RGF+CombinedArms CAF+CombinedArms
+Anvil_AAS_v1 USA+Mechanized WPMC+CombinedArms
+Mutaha_RAAS_v2 PLA+LightInfantry USMC+LightInfantry
+FoolsRoad_Destruction_v1 TLF+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 VDV+Armored TLF+Armored
+Kamdesh_RAAS_v1 USA+Armored PLA+Armored
+BlackCoast_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Gorodok_RAAS_v2 WPMC+AirAssault BAF+Support
+GooseBay_RAAS_v1 PLAAGF+CombinedArms RGF+CombinedArms
+Manicouagan_Invasion_v1 RGF+LightInfantry USMC+LightInfantry
+Harju_AAS_v1 VDV+AirAssault WPMC+AirAssault
+Chora_TC_v1 PLA+CombinedArms CAF+CombinedArms
+Yehorivka_AAS_v1 WPMC+LightInfantry USA+LightInfantry
+Skorpo_RAAS_v1 WPMC+AirAssault CAF+Motorized
+Kohat_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+FoolsRoad_Destruction_v1 IMF+CombinedArms TLF+CombinedArms
+Belaya_AAS_v2 BAF+Support TLF+Support
+AlBasrah_TC_v1 INS+LightInfantry MEA+LightInfantry
+Mutaha_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Tallil_AAS_v1 RGF+LightInfantry USMC+Motorized
+Gorodok_AAS_v1 PLA+Support USMC+Support
+Sumari_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Narva_RAAS_v1 VDV+Mechanized USA+Mechanized
+Anvil_RAAS_v1 MEA+Mechanized USA+Mechanized
+Mestia_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 RGF+Mechanized INS+Mechanized
+BlackCoast_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 INS+LightInfantry MEA+AirAssault
+Kohat_AAS_v1 MEA+Support PLA+Support
+FoolsRoad_Skirmish_v2 TLF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Manicouagan_RAAS_v1 RGF+CombinedArms USA+CombinedArms
+Yehorivka_Destruction_v1 TLF+Motorized IMF+Motorized
+Narva_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Sumari_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
+GooseBay_RAAS_v2 VDV+AirAssault WPMC+AirAssault
+AlBasrah_RAAS_v1 PLANMC+CombinedArms MEA+Support
+Chora_AAS_v2 ADF+CombinedArms PLA+CombinedArms
+BlackCoast_AAS_v2 IMF+CombinedArms TLF+CombinedArms
+Gorodok_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 ADF+CombinedArms PLA+CombinedArms
+Lashkar_TC_v1 MEA+LightInfantry WPMC+LightInfantry
+Fallujah_AAS_v1 BAF+Mechanized MEA+Support
+Mutaha_RAAS_v1 BAF+Support TLF+Support
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Kamdesh_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Kokan_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 INS+Mechanized PLA+Armored
+Harju_AAS_v1 ADF+AirAssault WPMC+AirAssault
+BlackCoast_RAAS_v2 ADF+CombinedArms IMF+CombinedArms
+Belaya_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
+Manicouagan_AAS_v2 WPMC+AirAssault BAF+AirAssault
+Yehorivka_Invasion_v2 ADF+CombinedArms PLA+Motorized
+Lashkar_AAS_v1 TLF+Motorized PLA+Motorized
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Chora_TC_v1 INS+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 BAF+Support PLA+Support
+Skorpo_RAAS_v1 ADF+Mechanized VDV+Armored
+Kokan_Invasion_v1 BAF+CombinedArms INS+CombinedArms
+Gorodok_RAAS_v2 TLF+Armored PLA+Armored
+Kamdesh_AAS_v1 INS+Mechanized TLF+Mechanized
+Mestia_TC_v1 RGF+CombinedArms USMC+CombinedArms
+Tallil_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Yehorivka_AAS_v1 USA+Support TLF+Support
+Fallujah_Invasion_v1 TLF+Motorized USA+LightInfantry
+BlackCoast_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Anvil_TC_v1 PLA+AirAssault TLF+AirAssault
+Lashkar_AAS_v2 MEA+AirAssault PLA+AirAssault
+FoolsRoad_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Belaya_AAS_v1 RGF+CombinedArms USA+CombinedArms
+Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Kamdesh_RAAS_v1 CAF+Armored RGF+LightInfantry
+AlBasrah_TC_v1 USA+Motorized RGF+Motorized
+GooseBay_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Logar_AAS_v1 BAF+CombinedArms RGF+CombinedArms
+Fallujah_RAAS_v1 MEA+Armored USA+Armored
+Kohat_Invasion_v2 VDV+Support PLA+Motorized
+Harju_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+Gorodok_TC_v1 USA+Armored TLF+Armored
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Anvil_AAS_v1 WPMC+LightInfantry RGF+Motorized
+Kokan_Invasion_v1 USMC+CombinedArms PLA+CombinedArms
+Narva_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Yehorivka_AAS_v2 WPMC+AirAssault BAF+AirAssault
+FoolsRoad_AAS_v2 TLF+CombinedArms IMF+CombinedArms
+Kamdesh_AAS_v1 WPMC+AirAssault USA+AirAssault
+AlBasrah_RAAS_v1 INS+CombinedArms VDV+CombinedArms
+Skorpo_Invasion_v1 USMC+LightInfantry WPMC+CombinedArms
+Chora_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Belaya_RAAS_v1 RGF+LightInfantry IMF+LightInfantry
+Mutaha_AAS_v1 BAF+Armored RGF+Armored
+Sanxian_AAS_v3 PLA+Mechanized ADF+Mechanized
+Tallil_TC_v1 PLA+CombinedArms MEA+AirAssault
+Anvil_RAAS_v2 MEA+Armored CAF+Armored
+Sumari_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Gorodok_Invasion_v1 VDV+Mechanized BAF+Mechanized
+Lashkar_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Harju_AAS_v2 VDV+CombinedArms USMC+CombinedArms
+AlBasrah_RAAS_v1 ADF+Mechanized PLAAGF+Mechanized
+Skorpo_RAAS_v1 USMC+Support WPMC+CombinedArms
+GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Yehorivka_Destruction_v1 PLA+LightInfantry WPMC+LightInfantry
+Sanxian_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Kohat_RAAS_v1 USMC+Motorized PLA+Motorized
+Logar_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Gorodok_AAS_v1 CAF+Armored PLA+Armored
+Sumari_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 TLF+Mechanized MEA+AirAssault
+Belaya_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
+Kokan_TC_v1 WPMC+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 ADF+Mechanized INS+Mechanized
+Lashkar_AAS_v2 MEA+CombinedArms USA+CombinedArms
+FoolsRoad_Destruction_v1 USA+CombinedArms IMF+CombinedArms
+Anvil_AAS_v1 PLA+LightInfantry WPMC+CombinedArms
+Fallujah_RAAS_v1 USMC+Support MEA+Support
+Chora_Skirmish_v1 ADF+CombinedArms INS+CombinedArms
+Gorodok_RAAS_v2 WPMC+CombinedArms CAF+CombinedArms
+Mutaha_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Narva_Destruction_v1 IMF+Armored WPMC+LightInfantry
+Belaya_AAS_v2 IMF+Support USMC+Support
+AlBasrah_RAAS_v1 VDV+Mechanized USA+Mechanized
+Sumari_TC_v1 PLA+CombinedArms MEA+CombinedArms
+Tallil_RAAS_v2 RGF+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v1 USMC+Support VDV+Support
+Manicouagan_Invasion_v2 CAF+CombinedArms PLANMC+CombinedArms
+Kokan_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v1 IMF+Motorized TLF+Motorized
+Kohat_TC_v1 TLF+Support PLA+Support
+Kamdesh_AAS_v1 USA+Mechanized TLF+Mechanized
+Mutaha_AAS_v1 PLA+Motorized RGF+Motorized
+Gorodok_Destruction_v1 TLF+Mechanized IMF+Mechanized
+Anvil_AAS_v1 PLA+AirAssault INS+Support
+Harju_AAS_v2 VDV+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v1 TLF+Mechanized ADF+Mechanized
+Sanxian_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
+Belaya_TC_v1 PLA+Motorized TLF+Motorized
+Mestia_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Manicouagan_Invasion_v2 USA+Support WPMC+CombinedArms
+Lashkar_AAS_v2 USMC+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Logar_TC_v1 TLF+CombinedArms INS+CombinedArms
+Yehorivka_AAS_v2 CAF+Support PLA+Support
+GooseBay_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_Invasion_v1 USMC+Armored PLA+CombinedArms
+Tallil_RAAS_v2 ADF+AirAssault PLA+AirAssault
+Sumari_AAS_v3 BAF+CombinedArms RGF+CombinedArms
+Anvil_AAS_v1 TLF+CombinedArms INS+CombinedArms
+AlBasrah_TC_v1 WPMC+LightInfantry MEA+LightInfantry
+Mutaha_AAS_v1 PLA+AirAssault VDV+AirAssault
+Manicouagan_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
+Kohat_AAS_v1 TLF+Support WPMC+AirAssault
+Narva_AAS_v1 IMF+CombinedArms USMC+CombinedArms
+Gorodok_RAAS_v2 PLA+CombinedArms IMF+CombinedArms
+Chora_TC_v1 VDV+CombinedArms TLF+CombinedArms
+Kamdesh_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
+Belaya_Invasion_v1 IMF+Motorized USMC+CombinedArms
