--- a/Tools/Rotation/LayerRotation/LayerRotation_2.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_2.cfg
@@ -1,200 +1,200 @@
-Skorpo_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 TLF+CombinedArms MEA+CombinedArms
-Kohat_RAAS_v1 PLA+AirAssault WPMC+AirAssault
-Lashkar_AAS_v1 MEA+Support TLF+Support
-Manicouagan_AAS_v2 USMC+Armored WPMC+LightInfantry
-Mestia_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
-Tallil_Invasion_v1 PLA+Armored BAF+Armored
-AlBasrah_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
-Anvil_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
-BlackCoast_RAAS_v2 RGF+CombinedArms PLANMC+CombinedArms
-Kamdesh_RAAS_v1 TLF+Support INS+Support
-Skorpo_Invasion_v1 IMF+Motorized USA+Motorized
-Fallujah_AAS_v1 TLF+Support WPMC+LightInfantry
-Chora_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Lashkar_RAAS_v1 TLF+Armored PLA+Armored
-Yehorivka_AAS_v1 PLA+Support IMF+Support
-Sumari_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Mutaha_AAS_v1 INS+Support VDV+Support
-GooseBay_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
-Narva_TC_v1 RGF+Armored USMC+CombinedArms
-Anvil_RAAS_v2 USA+Support INS+Support
-BlackCoast_Invasion_v2 TLF+Mechanized ADF+Mechanized
-Fallujah_TC_v1 INS+Mechanized USA+Mechanized
-Mestia_Skirmish_v1 RGF+CombinedArms USA+CombinedArms
-Kamdesh_RAAS_v1 VDV+AirAssault PLA+Support
-Kohat_AAS_v1 INS+LightInfantry PLA+LightInfantry
-Tallil_Invasion_v1 WPMC+CombinedArms USA+CombinedArms
-Sumari_AAS_v2 VDV+CombinedArms BAF+CombinedArms
-AlBasrah_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Manicouagan_AAS_v2 WPMC+LightInfantry PLA+CombinedArms
-Yehorivka_TC_v2 BAF+Mechanized VDV+Mechanized
-Harju_Invasion_v3 WPMC+LightInfantry IMF+LightInfantry
-Mutaha_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Belaya_RAAS_v1 IMF+Motorized TLF+Motorized
-Chora_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Narva_AAS_v2 WPMC+AirAssault CAF+AirAssault
-BlackCoast_Invasion_v2 IMF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Skirmish_v1 WPMC+CombinedArms BAF+CombinedArms
-Kamdesh_TC_v1 WPMC+LightInfantry RGF+LightInfantry
-Gorodok_RAAS_v2 TLF+AirAssault WPMC+AirAssault
-Mestia_AAS_v1 BAF+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 RGF+Support BAF+Support
-Kohat_TC_v1 PLA+AirAssault TLF+CombinedArms
-AlBasrah_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Manicouagan_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 MEA+CombinedArms BAF+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Lashkar_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-Belaya_TC_v1 PLA+LightInfantry USMC+Motorized
-Harju_RAAS_v1 IMF+CombinedArms RGF+CombinedArms
-Sumari_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Tallil_TC_v1 MEA+CombinedArms CAF+CombinedArms
-Gorodok_RAAS_v2 TLF+Support VDV+Support
-Yehorivka_Invasion_v1 CAF+Support PLA+Support
-AlBasrah_TC_v1 CAF+Motorized TLF+Support
-FoolsRoad_TC_v1 IMF+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v2 USMC+Armored TLF+Armored
-Manicouagan_AAS_v2 USA+Mechanized RGF+Mechanized
-Lashkar_Insurgency_v1 MEA+Support INS+Support
-Mutaha_AAS_v2 USA+AirAssault PLA+AirAssault
-GooseBay_AAS_v1 PLAAGF+Mechanized WPMC+LightInfantry
-Sanxian_AAS_v3 PLA+Motorized CAF+Motorized
-Chora_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
-Gorodok_Destruction_v1 VDV+Armored PLA+Armored
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Kohat_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Harju_RAAS_v1 WPMC+AirAssault USMC+Armored
-Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v1 INS+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 TLF+Armored USMC+Armored
-BlackCoast_RAAS_v1 USMC+Armored PLANMC+Armored
-Tallil_TC_v1 CAF+CombinedArms MEA+Mechanized
-Anvil_Skirmish_v1 MEA+CombinedArms ADF+CombinedArms
-Skorpo_Invasion_v1 WPMC+LightInfantry IMF+LightInfantry
-Kamdesh_AAS_v1 INS+Support TLF+Support
-Sumari_Skirmish_v1 RGF+CombinedArms USMC+CombinedArms
-Mutaha_AAS_v1 BAF+Mechanized RGF+Mechanized
-Gorodok_TC_v1 IMF+Motorized TLF+Support
-Yehorivka_Destruction_v1 BAF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 RGF+Support PLA+Support
-Sanxian_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
-Belaya_AAS_v2 PLA+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v2 INS+Support PLAAGF+Mechanized
-Anvil_TC_v1 ADF+AirAssault PLA+AirAssault
-Kokan_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v1 TLF+Mechanized USA+Mechanized
-Lashkar_AAS_v2 WPMC+AirAssault CAF+AirAssault
-Narva_Invasion_v2 RGF+LightInfantry WPMC+LightInfantry
-FoolsRoad_AAS_v2 PLA+CombinedArms ADF+CombinedArms
-Kamdesh_TC_v1 ADF+CombinedArms PLA+Motorized
-Mutaha_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Chora_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Harju_Invasion_v3 USMC+Armored VDV+Armored
-Tallil_AAS_v1 TLF+Mechanized INS+Mechanized
-Logar_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
-Sanxian_AAS_v3 ADF+Mechanized PLAAGF+Armored
-Skorpo_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
-Gorodok_Destruction_v1 IMF+Support BAF+Support
-Belaya_AAS_v1 VDV+AirAssault BAF+AirAssault
-Kohat_TC_v1 USA+AirAssault WPMC+AirAssault
-Fallujah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-FoolsRoad_TC_v1 VDV+CombinedArms BAF+CombinedArms
-Kamdesh_Insurgency_v1 WPMC+LightInfantry INS+Support
-Anvil_TC_v1 USA+AirAssault TLF+AirAssault
-BlackCoast_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Lashkar_AAS_v2 MEA+LightInfantry WPMC+LightInfantry
-Yehorivka_RAAS_v1 IMF+Support VDV+Support
-Mutaha_Invasion_v1 CAF+Motorized PLA+Motorized
-Tallil_Skirmish_v1 MEA+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 VDV+Mechanized USA+Mechanized
-Kohat_TC_v1 VDV+AirAssault CAF+Support
-Fallujah_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Sumari_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Anvil_RAAS_v2 TLF+Support RGF+Support
-Manicouagan_Skirmish_v3 WPMC+CombinedArms VDV+CombinedArms
-Gorodok_TC_v1 PLA+CombinedArms BAF+CombinedArms
-Narva_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
-FoolsRoad_AAS_v2 RGF+CombinedArms PLA+CombinedArms
-Lashkar_AAS_v1 BAF+Mechanized VDV+CombinedArms
-AlBasrah_TC_v1 WPMC+LightInfantry USMC+LightInfantry
-Kokan_TC_v1 MEA+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 TLF+Armored INS+Armored
-Tallil_RAAS_v2 CAF+Support VDV+Support
-Mestia_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 MEA+Mechanized RGF+Motorized
-GooseBay_RAAS_v2 WPMC+AirAssault USA+AirAssault
-Sumari_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v3 PLA+CombinedArms USA+CombinedArms
-BlackCoast_AAS_v2 ADF+CombinedArms PLANMC+CombinedArms
-Chora_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 TLF+Mechanized ADF+Mechanized
-Yehorivka_Invasion_v1 BAF+Mechanized TLF+Armored
-Kokan_TC_v1 VDV+CombinedArms CAF+CombinedArms
-Lashkar_AAS_v1 ADF+AirAssault PLA+AirAssault
-Gorodok_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Tallil_Skirmish_v3 INS+CombinedArms TLF+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms IMF+Motorized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Mestia_Skirmish_v1 IMF+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 CAF+AirAssault VDV+AirAssault
-Belaya_AAS_v2 TLF+AirAssault WPMC+AirAssault
-FoolsRoad_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
-Kamdesh_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Manicouagan_RAAS_v2 CAF+AirAssault WPMC+AirAssault
-Yehorivka_Skirmish_v2 USMC+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 CAF+Motorized PLA+Motorized
-Fallujah_Insurgency_v1 PLA+LightInfantry INS+LightInfantry
-Gorodok_AAS_v1 IMF+Motorized USA+Mechanized
-Kokan_TC_v1 USMC+CombinedArms MEA+CombinedArms
+Kamdesh_AAS_v1 TLF+AirAssault WPMC+AirAssault
+Narva_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 TLF+Motorized USA+Motorized
+BlackCoast_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+Fallujah_RAAS_v1 MEA+Armored PLA+Armored
+GooseBay_AAS_v1 PLANMC+CombinedArms USA+CombinedArms
+Gorodok_RAAS_v1 PLA+Support ADF+Mechanized
+Yehorivka_Destruction_v1 VDV+Armored CAF+Armored
+Sumari_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
+AlBasrah_AAS_v1 TLF+CombinedArms USMC+CombinedArms
+Lashkar_TC_v2 PLA+CombinedArms USMC+CombinedArms
+FoolsRoad_AAS_v2 IMF+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v1 PLAAGF+Mechanized WPMC+LightInfantry
+Narva_Invasion_v2 RGF+Support USA+Support
+BlackCoast_RAAS_v2 BAF+Support IMF+Support
+Logar_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Skorpo_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Kamdesh_TC_v1 MEA+Armored USMC+Armored
+Belaya_AAS_v2 CAF+Armored WPMC+CombinedArms
+Kokan_Invasion_v1 INS+CombinedArms TLF+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Anvil_AAS_v1 MEA+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v1 WPMC+LightInfantry MEA+LightInfantry
-Sanxian_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
-Harju_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Narva_TC_v1 IMF+Motorized WPMC+LightInfantry
-FoolsRoad_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Yehorivka_Destruction_v1 RGF+Support PLA+Support
-Tallil_AAS_v1 VDV+AirAssault PLA+AirAssault
-Chora_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-Kamdesh_TC_v1 PLA+Armored RGF+Armored
-BlackCoast_AAS_v2 VDV+CombinedArms TLF+CombinedArms
-Kokan_Insurgency_v1 USMC+CombinedArms INS+CombinedArms
-AlBasrah_TC_v1 TLF+Mechanized BAF+Mechanized
-Kohat_TC_v1 VDV+Mechanized ADF+CombinedArms
+Kohat_RAAS_v2 PLA+Motorized INS+Motorized
+Chora_TC_v1 VDV+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 TLF+Armored PLA+AirAssault
+Mutaha_AAS_v2 RGF+CombinedArms ADF+CombinedArms
+Anvil_Invasion_v1 VDV+CombinedArms MEA+CombinedArms
+Sumari_AAS_v2 WPMC+CombinedArms MEA+CombinedArms
+GooseBay_RAAS_v2 WPMC+LightInfantry USA+LightInfantry
+Sanxian_AAS_v2 PLAAGF+Armored BAF+Armored
+Mestia_Skirmish_v1 VDV+CombinedArms ADF+CombinedArms
+Gorodok_RAAS_v1 PLA+Armored ADF+CombinedArms
+AlBasrah_Insurgency_v1 PLANMC+Motorized INS+Motorized
+Skorpo_RAAS_v1 IMF+CombinedArms USMC+CombinedArms
+Logar_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 USMC+Support TLF+Support
+BlackCoast_RAAS_v2 PLANMC+AirAssault BAF+AirAssault
+Mutaha_AAS_v2 PLA+LightInfantry WPMC+LightInfantry
+Anvil_Invasion_v1 VDV+Mechanized TLF+Support
+Manicouagan_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
+GooseBay_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
+Yehorivka_RAAS_v1 WPMC+AirAssault PLA+AirAssault
+Gorodok_AAS_v1 IMF+Support PLA+Support
+Sumari_AAS_v2 INS+CombinedArms BAF+CombinedArms
+Fallujah_Invasion_v2 BAF+Armored PLA+Armored
+Tallil_RAAS_v1 INS+LightInfantry TLF+CombinedArms
+Kamdesh_RAAS_v1 INS+Motorized CAF+Motorized
+Harju_RAAS_v2 CAF+CombinedArms RGF+CombinedArms
+Kokan_TC_v1 RGF+CombinedArms TLF+CombinedArms
+Mutaha_RAAS_v2 PLA+Support CAF+Support
+AlBasrah_Invasion_v1 INS+Motorized USMC+Support
+BlackCoast_RAAS_v2 TLF+CombinedArms USMC+CombinedArms
+Kohat_AAS_v1 PLA+Support USMC+Support
+Gorodok_TC_v1 RGF+CombinedArms USMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms ADF+CombinedArms
+Anvil_RAAS_v1 ADF+CombinedArms PLA+LightInfantry
+Belaya_Invasion_v2 TLF+CombinedArms USA+CombinedArms
+Fallujah_AAS_v1 BAF+Mechanized TLF+Mechanized
+Manicouagan_RAAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
+GooseBay_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_AAS_v2 WPMC+CombinedArms MEA+CombinedArms
+Kamdesh_AAS_v1 USMC+Support WPMC+CombinedArms
+Yehorivka_Invasion_v2 IMF+LightInfantry RGF+LightInfantry
+Mestia_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v2 WPMC+LightInfantry PLANMC+LightInfantry
+AlBasrah_RAAS_v1 PLA+Armored MEA+Armored
+Chora_TC_v1 USMC+CombinedArms INS+CombinedArms
+Tallil_AAS_v1 MEA+Support RGF+Motorized
+Gorodok_Destruction_v1 TLF+Mechanized ADF+Mechanized
+Manicouagan_AAS_v3 USMC+Armored PLAAGF+Armored
+Logar_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v2 INS+Mechanized TLF+Mechanized
+GooseBay_AAS_v1 VDV+Mechanized PLANMC+Support
+FoolsRoad_TC_v1 TLF+CombinedArms IMF+CombinedArms
+Mutaha_RAAS_v2 RGF+Mechanized ADF+Mechanized
+Anvil_Invasion_v1 WPMC+LightInfantry RGF+LightInfantry
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 TLF+Mechanized PLA+Armored
+Sumari_Skirmish_v1 TLF+CombinedArms USMC+CombinedArms
+Narva_AAS_v2 CAF+Mechanized RGF+Mechanized
+Tallil_AAS_v1 INS+Armored MEA+Armored
+BlackCoast_Invasion_v2 BAF+Armored PLANMC+Armored
+Gorodok_RAAS_v1 WPMC+AirAssault BAF+AirAssault
+Kohat_TC_v1 INS+Mechanized ADF+Mechanized
+Fallujah_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+FoolsRoad_RAAS_v1 CAF+CombinedArms RGF+CombinedArms
+Kamdesh_Invasion_v1 PLA+Support VDV+Support
+Lashkar_RAAS_v1 INS+LightInfantry WPMC+AirAssault
+Anvil_AAS_v1 ADF+AirAssault MEA+AirAssault
+Yehorivka_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
+Narva_AAS_v2 RGF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+AlBasrah_Invasion_v2 USMC+CombinedArms PLA+Motorized
+Logar_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 PLA+Armored BAF+Armored
+Tallil_RAAS_v1 VDV+AirAssault CAF+AirAssault
+FoolsRoad_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Harju_AAS_v1 IMF+LightInfantry CAF+AirAssault
+Gorodok_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
+Chora_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v3 WPMC+AirAssault CAF+AirAssault
+Anvil_TC_v1 CAF+Armored RGF+Armored
+Lashkar_RAAS_v1 INS+Support TLF+Support
+Sumari_RAAS_v1 INS+CombinedArms USA+CombinedArms
+AlBasrah_Invasion_v2 TLF+Mechanized RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLANMC+CombinedArms
+Logar_RAAS_v1 MEA+CombinedArms USMC+CombinedArms
+Fallujah_AAS_v1 USMC+Support PLA+Support
+Mutaha_RAAS_v1 TLF+AirAssault VDV+AirAssault
+Skorpo_RAAS_v1 BAF+Mechanized IMF+Motorized
+Sanxian_Invasion_v2 PLAAGF+Mechanized BAF+Mechanized
+FoolsRoad_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Lashkar_TC_v1 PLA+CombinedArms CAF+CombinedArms
+Tallil_AAS_v1 MEA+AirAssault PLA+AirAssault
+Yehorivka_RAAS_v2 IMF+CombinedArms PLA+LightInfantry
+Manicouagan_Invasion_v2 PLA+CombinedArms BAF+CombinedArms
+Anvil_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
 Mestia_Skirmish_v1 BAF+CombinedArms VDV+CombinedArms
-Lashkar_AAS_v2 PLA+Support BAF+Support
-Skorpo_Invasion_v1 ADF+Mechanized IMF+Mechanized
-Manicouagan_AAS_v1 PLANMC+Motorized USA+Motorized
-Belaya_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
-GooseBay_AAS_v1 WPMC+CombinedArms BAF+Mechanized
-Mutaha_AAS_v2 TLF+Mechanized USA+Mechanized
-Fallujah_TC_v1 PLA+Support TLF+Support
-FoolsRoad_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Tallil_AAS_v1 INS+Armored RGF+Armored
-BlackCoast_RAAS_v1 PLA+Motorized TLF+Motorized
-Kohat_TC_v1 USA+Motorized TLF+AirAssault
-Lashkar_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Sanxian_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v2 MEA+CombinedArms VDV+CombinedArms
-Kokan_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v1 USMC+Support PLA+Support
-Belaya_TC_v1 ADF+Mechanized TLF+CombinedArms
-Manicouagan_Skirmish_v2 CAF+CombinedArms WPMC+CombinedArms
-Mutaha_Invasion_v1 TLF+Armored INS+Armored
-Fallujah_RAAS_v1 RGF+LightInfantry USA+LightInfantry
-FoolsRoad_RAAS_v1 PLA+CombinedArms IMF+CombinedArms
-Narva_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Tallil_TC_v1 MEA+AirAssault PLA+LightInfantry
-Lashkar_Invasion_v1 PLA+CombinedArms RGF+CombinedArms
-Chora_TC_v1 INS+CombinedArms USMC+CombinedArms
-Kamdesh_RAAS_v1 INS+Mechanized ADF+Mechanized
-Skorpo_RAAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Yehorivka_RAAS_v2 RGF+Armored BAF+Armored
-Anvil_Invasion_v1 WPMC+AirAssault ADF+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Sumari_RAAS_v1 VDV+CombinedArms CAF+CombinedArms
+AlBasrah_AAS_v1 USA+Mechanized VDV+Mechanized
+BlackCoast_AAS_v1 TLF+Support IMF+Support
+Kokan_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 RGF+Support BAF+Support
+Logar_TC_v1 INS+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v3 BAF+AirAssault TLF+Motorized
+Lashkar_AAS_v1 CAF+AirAssault TLF+AirAssault
+Gorodok_RAAS_v1 CAF+Armored IMF+Armored
+Yehorivka_Destruction_v1 PLA+Armored BAF+Armored
+Mutaha_AAS_v1 PLA+LightInfantry MEA+LightInfantry
+Kohat_RAAS_v2 TLF+CombinedArms USA+LightInfantry
+Mestia_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 PLA+Motorized CAF+Motorized
+AlBasrah_Invasion_v2 USA+Armored PLAAGF+Armored
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Logar_TC_v1 ADF+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v2 TLF+Support MEA+AirAssault
+BlackCoast_AAS_v2 PLA+Armored IMF+Armored
+Kokan_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Gorodok_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
+Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Narva_RAAS_v1 CAF+Support IMF+Support
+Mestia_TC_v1 WPMC+CombinedArms TLF+CombinedArms
+Yehorivka_AAS_v1 RGF+LightInfantry TLF+AirAssault
+Belaya_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
+Skorpo_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
+FoolsRoad_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Chora_AAS_v2 BAF+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v1 BAF+Armored WPMC+AirAssault
+Kamdesh_RAAS_v1 VDV+Support PLA+Support
+Narva_Destruction_v1 WPMC+CombinedArms ADF+CombinedArms
+Mestia_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Fallujah_TC_v1 MEA+LightInfantry WPMC+LightInfantry
+Anvil_AAS_v1 CAF+AirAssault RGF+Mechanized
+Tallil_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Belaya_Invasion_v2 VDV+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v2 RGF+Armored USA+AirAssault
+Sumari_AAS_v2 INS+CombinedArms WPMC+CombinedArms
+GooseBay_AAS_v1 RGF+Mechanized PLAAGF+Mechanized
+Kohat_RAAS_v1 TLF+AirAssault MEA+AirAssault
+Mutaha_Skirmish_v1 WPMC+CombinedArms MEA+CombinedArms
+Narva_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+Kamdesh_Insurgency_v1 CAF+Mechanized INS+Mechanized
+AlBasrah_RAAS_v1 CAF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+BlackCoast_Skirmish_v1 PLAAGF+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 VDV+Mechanized ADF+Mechanized
+Manicouagan_AAS_v1 WPMC+AirAssault BAF+Support
+Yehorivka_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
+Chora_AAS_v2 USMC+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 MEA+Support BAF+Support
+Fallujah_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+Belaya_AAS_v2 ADF+AirAssault PLA+Support
+Mutaha_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+Kokan_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 MEA+CombinedArms BAF+CombinedArms
+Anvil_TC_v1 INS+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v2 IMF+Support PLA+Support
+Mestia_AAS_v2 WPMC+CombinedArms ADF+CombinedArms
+Sanxian_Invasion_v2 USMC+Armored PLA+Armored
+Manicouagan_AAS_v2 VDV+AirAssault WPMC+AirAssault
+Harju_AAS_v2 RGF+CombinedArms IMF+CombinedArms
+Kohat_RAAS_v1 TLF+CombinedArms INS+Motorized
+Lashkar_TC_v2 RGF+Mechanized CAF+Mechanized
+Narva_RAAS_v1 ADF+Mechanized IMF+Mechanized
+Chora_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 PLA+Armored VDV+Armored
+BlackCoast_RAAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Kokan_TC_v1 VDV+CombinedArms INS+CombinedArms
+Mutaha_AAS_v1 INS+Armored RGF+Armored
+Tallil_AAS_v1 RGF+Mechanized MEA+Mechanized
+AlBasrah_RAAS_v1 PLANMC+LightInfantry RGF+Motorized
