--- a/Tools/Rotation/LayerRotation/LayerRotation_21.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_21.cfg
@@ -1,200 +1,200 @@
-AlBasrah_TC_v1 BAF+CombinedArms PLAAGF+CombinedArms
-BlackCoast_Skirmish_v1 BAF+CombinedArms PLANMC+CombinedArms
-Mutaha_TC_v1 INS+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 USA+Support TLF+Mechanized
-Mestia_Invasion_v1 BAF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v1 MEA+CombinedArms BAF+CombinedArms
-Tallil_AAS_v1 PLA+Support TLF+Support
-Kohat_RAAS_v2 TLF+Armored USA+Armored
-Kokan_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Lashkar_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Manicouagan_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Narva_AAS_v2 VDV+CombinedArms WPMC+CombinedArms
-Harju_Skirmish_v2 WPMC+CombinedArms IMF+CombinedArms
-Yehorivka_Destruction_v1 IMF+Mechanized TLF+Mechanized
-Sanxian_AAS_v3 ADF+AirAssault PLANMC+Support
-Mutaha_TC_v1 BAF+Mechanized RGF+Mechanized
-Sumari_Skirmish_v1 MEA+CombinedArms INS+CombinedArms
-Kohat_RAAS_v1 PLA+Armored USA+Armored
-Belaya_Invasion_v1 USA+Motorized PLA+Motorized
-Tallil_RAAS_v1 BAF+Support TLF+CombinedArms
-Fallujah_TC_v1 USA+LightInfantry PLA+LightInfantry
-GooseBay_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
-Lashkar_TC_v1 VDV+AirAssault TLF+AirAssault
-Narva_Destruction_v1 BAF+Mechanized IMF+Mechanized
-Yehorivka_RAAS_v1 VDV+Armored PLA+Armored
-Kamdesh_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v2 MEA+AirAssault PLA+Support
-Anvil_RAAS_v1 PLA+Motorized CAF+Motorized
-Gorodok_TC_v1 TLF+Armored PLA+Armored
-Sumari_Invasion_v1 BAF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 MEA+Mechanized TLF+Mechanized
-AlBasrah_TC_v1 WPMC+CombinedArms VDV+CombinedArms
-Kokan_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v2 BAF+Armored PLA+Armored
-Narva_RAAS_v1 IMF+Mechanized WPMC+AirAssault
-Yehorivka_Invasion_v2 VDV+Support BAF+Support
-Mestia_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 WPMC+CombinedArms CAF+CombinedArms
-Mutaha_AAS_v2 VDV+Support INS+Support
-Kamdesh_RAAS_v1 MEA+LightInfantry USMC+LightInfantry
-Sanxian_Invasion_v2 PLA+LightInfantry WPMC+LightInfantry
-Lashkar_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Sumari_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 RGF+Support MEA+CombinedArms
-AlBasrah_AAS_v1 TLF+CombinedArms RGF+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms BAF+CombinedArms
-Gorodok_RAAS_v2 TLF+AirAssault PLA+AirAssault
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Mestia_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-BlackCoast_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Skorpo_Invasion_v1 ADF+CombinedArms VDV+CombinedArms
-Mutaha_AAS_v1 PLA+CombinedArms USA+CombinedArms
-Kokan_Skirmish_v1 ADF+CombinedArms MEA+CombinedArms
-Lashkar_RAAS_v1 WPMC+CombinedArms BAF+Mechanized
-Manicouagan_AAS_v2 USA+AirAssault WPMC+AirAssault
-GooseBay_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
-Narva_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
-FoolsRoad_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 PLA+Armored TLF+CombinedArms
-Fallujah_TC_v1 TLF+Motorized USMC+Motorized
-Chora_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
-Kohat_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v1 VDV+Support WPMC+LightInfantry
-Mestia_AAS_v2 PLA+CombinedArms USMC+CombinedArms
-Anvil_RAAS_v2 USA+Armored PLA+Armored
-Lashkar_Invasion_v1 PLA+Support VDV+Support
-Yehorivka_AAS_v1 TLF+Mechanized VDV+Mechanized
-Gorodok_TC_v1 IMF+Mechanized TLF+CombinedArms
-Kokan_Skirmish_v1 TLF+CombinedArms ADF+CombinedArms
-Fallujah_RAAS_v2 WPMC+LightInfantry USA+LightInfantry
-Manicouagan_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Sumari_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-AlBasrah_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
-GooseBay_AAS_v1 WPMC+LightInfantry USA+LightInfantry
-Belaya_AAS_v2 IMF+LightInfantry ADF+Mechanized
-Anvil_Invasion_v1 TLF+Motorized PLA+Motorized
-Lashkar_Skirmish_v1 INS+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v1 USMC+Support PLA+Support
-Kohat_TC_v1 CAF+CombinedArms PLA+CombinedArms
-Kamdesh_RAAS_v1 USMC+LightInfantry PLA+LightInfantry
-Mestia_Invasion_v1 PLA+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v1 PLA+Armored MEA+CombinedArms
-Mutaha_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Chora_Skirmish_v1 TLF+CombinedArms MEA+CombinedArms
-Gorodok_RAAS_v2 IMF+Support TLF+Support
-Yehorivka_Invasion_v1 IMF+Motorized PLA+Motorized
-Sumari_AAS_v1 VDV+CombinedArms USMC+CombinedArms
-Manicouagan_AAS_v1 RGF+LightInfantry WPMC+CombinedArms
-AlBasrah_TC_v1 BAF+CombinedArms VDV+CombinedArms
-GooseBay_AAS_v1 VDV+Support CAF+Support
-Kokan_TC_v1 INS+CombinedArms ADF+CombinedArms
-Belaya_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 BAF+AirAssault VDV+AirAssault
-Skorpo_RAAS_v1 WPMC+AirAssault CAF+CombinedArms
-Tallil_RAAS_v1 WPMC+AirAssault TLF+AirAssault
-Gorodok_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 RGF+CombinedArms WPMC+CombinedArms
-Mutaha_AAS_v2 ADF+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_AAS_v1 VDV+Armored PLA+Armored
-Anvil_TC_v1 RGF+Support PLA+Support
-Sumari_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 BAF+Mechanized RGF+Mechanized
-Manicouagan_AAS_v3 USA+Mechanized VDV+Mechanized
-Kamdesh_AAS_v1 MEA+CombinedArms USMC+LightInfantry
-Chora_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
-Tallil_Invasion_v1 RGF+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 USA+LightInfantry RGF+LightInfantry
-Skorpo_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 PLA+Armored USMC+CombinedArms
-AlBasrah_RAAS_v1 USA+LightInfantry PLA+LightInfantry
-Kokan_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 ADF+Mechanized RGF+Mechanized
-Kohat_RAAS_v2 CAF+CombinedArms VDV+CombinedArms
-Fallujah_AAS_v1 PLA+Armored USA+Armored
-Logar_RAAS_v1 USMC+CombinedArms INS+CombinedArms
+Sanxian_AAS_v1 CAF+Mechanized PLAAGF+Mechanized
+Mutaha_AAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Chora_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 PLA+LightInfantry USA+LightInfantry
+Kohat_RAAS_v2 PLA+CombinedArms RGF+CombinedArms
+Lashkar_Invasion_v1 USMC+Motorized RGF+Motorized
+BlackCoast_RAAS_v2 WPMC+AirAssault TLF+AirAssault
+Fallujah_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Manicouagan_RAAS_v1 WPMC+LightInfantry USA+LightInfantry
+Yehorivka_Skirmish_v2 ADF+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v1 TLF+CombinedArms VDV+Armored
+Harju_RAAS_v2 WPMC+AirAssault CAF+AirAssault
+Sumari_Invasion_v1 BAF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Narva_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 CAF+CombinedArms PLAAGF+Mechanized
+Sanxian_AAS_v1 CAF+AirAssault PLANMC+AirAssault
+Logar_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
+Kamdesh_Invasion_v1 PLA+Motorized RGF+Motorized
+GooseBay_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Kohat_TC_v1 USMC+Armored TLF+Armored
+Lashkar_AAS_v1 BAF+Support WPMC+LightInfantry
+Kokan_AAS_v2 TLF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Yehorivka_Invasion_v2 PLA+Support USA+Support
+Manicouagan_AAS_v3 VDV+AirAssault WPMC+AirAssault
+Chora_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 PLA+Motorized RGF+Motorized
+Narva_AAS_v3 WPMC+CombinedArms IMF+CombinedArms
+Kamdesh_AAS_v1 WPMC+AirAssault USA+AirAssault
+Tallil_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Lashkar_Invasion_v1 WPMC+LightInfantry MEA+CombinedArms
-GooseBay_Skirmish_v1 USA+CombinedArms RGF+CombinedArms
-Mutaha_AAS_v2 PLA+CombinedArms BAF+CombinedArms
-Kamdesh_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 MEA+Mechanized CAF+Mechanized
-Belaya_AAS_v2 BAF+Mechanized IMF+LightInfantry
-Yehorivka_Destruction_v1 PLA+Support BAF+Support
-Mestia_AAS_v2 IMF+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Fallujah_AAS_v1 PLA+Support INS+Support
-BlackCoast_RAAS_v1 USMC+Support VDV+Support
-Chora_TC_v1 PLA+CombinedArms INS+CombinedArms
-Narva_Destruction_v1 RGF+Armored CAF+Armored
-Sanxian_RAAS_v2 CAF+Motorized PLA+Armored
-Kohat_TC_v1 PLA+Armored USMC+Armored
-Harju_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-Gorodok_TC_v1 CAF+AirAssault WPMC+AirAssault
-Anvil_Invasion_v1 PLA+Armored VDV+Armored
-Mutaha_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Tallil_AAS_v1 PLA+CombinedArms RGF+Support
-Lashkar_TC_v2 PLA+AirAssault USA+AirAssault
-AlBasrah_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms IMF+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-GooseBay_AAS_v1 USA+Armored VDV+Armored
-Mestia_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Kamdesh_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Yehorivka_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Manicouagan_Invasion_v1 PLANMC+Armored WPMC+CombinedArms
-Logar_RAAS_v1 INS+CombinedArms USMC+CombinedArms
-Kohat_TC_v1 CAF+Motorized INS+Motorized
-Mutaha_RAAS_v1 INS+Motorized TLF+Motorized
-Kokan_TC_v1 INS+CombinedArms TLF+CombinedArms
-Gorodok_Destruction_v1 IMF+LightInfantry TLF+Mechanized
-Sanxian_AAS_v2 ADF+Mechanized PLA+Mechanized
-Tallil_RAAS_v2 INS+Motorized CAF+Motorized
-Sumari_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 MEA+LightInfantry PLA+LightInfantry
-Yehorivka_Invasion_v2 USMC+CombinedArms VDV+CombinedArms
-AlBasrah_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
-Fallujah_AAS_v1 USMC+CombinedArms MEA+Mechanized
-Skorpo_RAAS_v1 VDV+AirAssault BAF+AirAssault
-Mestia_TC_v1 IMF+CombinedArms TLF+CombinedArms
-BlackCoast_Invasion_v2 WPMC+CombinedArms TLF+CombinedArms
-Lashkar_TC_v2 PLA+CombinedArms MEA+CombinedArms
-Kamdesh_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Gorodok_RAAS_v2 RGF+LightInfantry USA+LightInfantry
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Chora_Invasion_v1 TLF+CombinedArms USA+CombinedArms
-Mutaha_TC_v1 MEA+AirAssault WPMC+AirAssault
-AlBasrah_TC_v1 BAF+Mechanized PLA+Mechanized
-Tallil_Skirmish_v1 ADF+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v3 PLANMC+Motorized WPMC+CombinedArms
-Yehorivka_Destruction_v1 USMC+CombinedArms IMF+CombinedArms
-Anvil_TC_v1 USMC+LightInfantry WPMC+LightInfantry
-Logar_TC_v1 INS+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 TLF+Motorized INS+Motorized
-Fallujah_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-Sumari_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
-BlackCoast_Invasion_v2 PLAAGF+Armored TLF+Armored
-Mutaha_TC_v1 MEA+Mechanized TLF+Mechanized
-Belaya_TC_v1 TLF+AirAssault IMF+Mechanized
-Chora_Skirmish_v1 INS+CombinedArms BAF+CombinedArms
-Tallil_TC_v1 MEA+LightInfantry PLA+LightInfantry
-Yehorivka_Invasion_v2 PLA+CombinedArms ADF+CombinedArms
-FoolsRoad_AAS_v2 PLA+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 INS+Support MEA+Support
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
-Mestia_AAS_v2 PLA+CombinedArms CAF+CombinedArms
-Fallujah_Insurgency_v1 USMC+CombinedArms INS+Mechanized
-Manicouagan_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Kokan_AAS_v2 INS+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 PLA+Support TLF+Support
-Gorodok_RAAS_v2 PLA+Support BAF+Support
-Lashkar_Invasion_v1 WPMC+LightInfantry INS+Motorized
-Chora_TC_v1 MEA+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 MEA+LightInfantry WPMC+LightInfantry
-Mutaha_RAAS_v1 PLA+Motorized TLF+Motorized
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Belaya_Invasion_v1 IMF+Armored BAF+Armored
-Narva_TC_v1 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
+Anvil_RAAS_v2 USA+LightInfantry PLA+LightInfantry
+BlackCoast_RAAS_v2 ADF+AirAssault TLF+Motorized
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Kokan_AAS_v1 MEA+CombinedArms TLF+CombinedArms
+Gorodok_Invasion_v1 IMF+Mechanized TLF+Mechanized
+Mutaha_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Sanxian_RAAS_v2 USA+Support WPMC+AirAssault
+Logar_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+GooseBay_RAAS_v2 PLA+Mechanized BAF+Mechanized
+Fallujah_RAAS_v2 RGF+LightInfantry MEA+LightInfantry
+Chora_TC_v1 PLA+CombinedArms MEA+CombinedArms
+Anvil_RAAS_v1 MEA+Mechanized TLF+Mechanized
+Yehorivka_Invasion_v2 PLA+Support IMF+Support
+Tallil_AAS_v1 PLA+LightInfantry USA+Mechanized
+FoolsRoad_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+BlackCoast_AAS_v1 IMF+Armored USMC+Armored
+Narva_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Kokan_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 VDV+Mechanized TLF+Mechanized
+Belaya_Invasion_v1 TLF+Motorized PLA+Support
+Sumari_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault CAF+AirAssault
+AlBasrah_RAAS_v1 TLF+Armored CAF+Armored
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Tallil_TC_v1 CAF+Armored RGF+Armored
+Chora_AAS_v1 MEA+CombinedArms PLA+CombinedArms
+Gorodok_Invasion_v1 WPMC+LightInfantry ADF+CombinedArms
+Kohat_AAS_v1 INS+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
+Lashkar_AAS_v1 INS+Support CAF+Support
+Kokan_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 TLF+AirAssault IMF+Motorized
+Anvil_TC_v1 MEA+Support VDV+Support
+Belaya_AAS_v2 IMF+CombinedArms BAF+CombinedArms
+Harju_AAS_v2 CAF+CombinedArms IMF+CombinedArms
+Tallil_Invasion_v1 MEA+Mechanized USA+Mechanized
+Kamdesh_RAAS_v1 ADF+Mechanized TLF+CombinedArms
+Chora_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
+Gorodok_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
+Sanxian_RAAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Sumari_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Lashkar_Invasion_v1 USA+Motorized WPMC+LightInfantry
+Skorpo_RAAS_v1 IMF+LightInfantry RGF+LightInfantry
+Logar_AAS_v1 INS+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Narva_TC_v1 USA+Motorized IMF+Motorized
+Manicouagan_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Belaya_Invasion_v1 IMF+CombinedArms ADF+CombinedArms
+Mutaha_AAS_v2 INS+Armored TLF+Armored
+FoolsRoad_RAAS_v1 IMF+CombinedArms PLA+CombinedArms
+Tallil_TC_v1 TLF+Motorized CAF+Motorized
+Kamdesh_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 BAF+AirAssault VDV+Mechanized
+Mestia_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 IMF+Support PLA+Support
+Lashkar_TC_v2 ADF+AirAssault WPMC+AirAssault
+Sumari_AAS_v1 TLF+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Kohat_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Kokan_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Fallujah_AAS_v1 BAF+Support WPMC+CombinedArms
+Mutaha_Skirmish_v1 VDV+CombinedArms CAF+CombinedArms
+Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Yehorivka_RAAS_v1 IMF+Armored PLA+Armored
+Gorodok_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
+Kamdesh_AAS_v1 PLA+AirAssault TLF+AirAssault
+Logar_TC_v1 PLA+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms BAF+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Chora_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Anvil_Invasion_v1 MEA+Armored WPMC+CombinedArms
+Sanxian_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Fallujah_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
+Yehorivka_TC_v2 TLF+Armored USMC+Armored
+Tallil_AAS_v1 USA+Support VDV+AirAssault
+Gorodok_Invasion_v2 RGF+Motorized USA+Motorized
+Logar_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+BlackCoast_RAAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Lashkar_TC_v1 TLF+AirAssault USA+AirAssault
+GooseBay_AAS_v1 BAF+CombinedArms WPMC+AirAssault
+Mestia_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Kamdesh_AAS_v1 MEA+CombinedArms TLF+CombinedArms
+Manicouagan_Invasion_v2 PLA+Motorized USMC+Motorized
+PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLANMC+CombinedArms
+Yehorivka_Skirmish_v2 USA+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v2 WPMC+AirAssault USA+Mechanized
+Fallujah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Logar_AAS_v1 INS+CombinedArms USMC+CombinedArms
+Narva_Invasion_v1 IMF+Support RGF+Support
+Anvil_RAAS_v1 TLF+Armored INS+Armored
+Mutaha_AAS_v1 TLF+Support INS+Support
+Sumari_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Manicouagan_Invasion_v1 PLANMC+LightInfantry WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Chora_TC_v1 PLA+CombinedArms CAF+CombinedArms
+Tallil_RAAS_v2 ADF+CombinedArms MEA+Support
+Sanxian_RAAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
+AlBasrah_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
+Kokan_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Kohat_TC_v1 PLA+CombinedArms INS+CombinedArms
+Lashkar_AAS_v2 PLA+LightInfantry VDV+AirAssault
+Kamdesh_AAS_v1 TLF+Support USA+Support
+FoolsRoad_AAS_v1 IMF+CombinedArms USA+CombinedArms
+Narva_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+Belaya_AAS_v2 IMF+Armored BAF+Armored
+Fallujah_TC_v1 MEA+LightInfantry PLA+LightInfantry
+Harju_AAS_v1 USA+AirAssault WPMC+AirAssault
+Mutaha_RAAS_v1 PLA+Support INS+Support
+Anvil_RAAS_v2 INS+CombinedArms MEA+CombinedArms
+Tallil_Invasion_v1 USA+CombinedArms PLA+CombinedArms
+Chora_AAS_v2 USA+CombinedArms VDV+CombinedArms
+Gorodok_TC_v1 IMF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 PLA+Support INS+Support
+Yehorivka_RAAS_v2 PLA+Armored USMC+Armored
+Kamdesh_AAS_v1 TLF+Support RGF+Support
+Narva_Destruction_v1 WPMC+AirAssault IMF+Motorized
+Kokan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Lashkar_TC_v2 CAF+CombinedArms MEA+CombinedArms
+Mutaha_RAAS_v1 INS+Mechanized TLF+Mechanized
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Fallujah_RAAS_v1 USA+LightInfantry PLA+CombinedArms
+Belaya_Invasion_v1 RGF+CombinedArms USA+CombinedArms
+Manicouagan_RAAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
+Anvil_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
+GooseBay_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Mestia_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Harju_Invasion_v3 WPMC+LightInfantry IMF+Mechanized
+BlackCoast_RAAS_v1 PLANMC+Motorized IMF+Motorized
+Chora_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v1 MEA+Armored INS+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Fallujah_RAAS_v1 USMC+Support WPMC+CombinedArms
+Tallil_Invasion_v1 RGF+Mechanized ADF+Mechanized
+Logar_AAS_v1 INS+CombinedArms ADF+CombinedArms
+Gorodok_TC_v1 PLA+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 MEA+Armored PLA+Armored
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+LightInfantry
+Mestia_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Lashkar_Invasion_v1 PLA+LightInfantry INS+LightInfantry
+Manicouagan_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
+Anvil_TC_v1 MEA+Mechanized BAF+Mechanized
+Sanxian_RAAS_v1 WPMC+LightInfantry USA+Mechanized
+Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Sumari_AAS_v3 INS+CombinedArms VDV+CombinedArms
+Fallujah_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+BlackCoast_Invasion_v2 PLA+Motorized TLF+Motorized
+Kamdesh_RAAS_v1 USMC+Motorized TLF+AirAssault
+Chora_AAS_v1 TLF+CombinedArms USMC+CombinedArms
+Yehorivka_AAS_v1 TLF+Support IMF+Support
+Lashkar_TC_v1 TLF+AirAssault WPMC+AirAssault
+Kohat_RAAS_v2 PLA+Support TLF+Support
+Mutaha_Invasion_v1 TLF+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+Tallil_RAAS_v1 VDV+Armored CAF+Mechanized
+Kokan_TC_v1 INS+CombinedArms RGF+CombinedArms
+Harju_RAAS_v1 USA+Support IMF+Support
+Manicouagan_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
+Fallujah_Insurgency_v1 ADF+CombinedArms INS+CombinedArms
+Chora_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+AlBasrah_RAAS_v1 PLAAGF+Mechanized USMC+Armored
