--- a/Tools/Rotation/LayerRotation/LayerRotation_22.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_22.cfg
@@ -1,200 +1,200 @@
-Fallujah_RAAS_v1 RGF+Armored TLF+Armored
-Kokan_TC_v1 VDV+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 TLF+Armored PLA+AirAssault
-GooseBay_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-FoolsRoad_Destruction_v1 PLA+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v2 TLF+Motorized CAF+Motorized
-Anvil_RAAS_v2 MEA+Mechanized BAF+Mechanized
-Harju_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Manicouagan_AAS_v3 WPMC+AirAssault USA+AirAssault
-Kohat_Invasion_v2 PLA+Motorized TLF+Motorized
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+CombinedArms
-Fallujah_RAAS_v1 PLA+Armored USMC+Armored
-Sumari_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 WPMC+LightInfantry PLA+LightInfantry
-BlackCoast_AAS_v2 WPMC+AirAssault USA+AirAssault
-Kamdesh_RAAS_v1 USA+AirAssault INS+Motorized
-Belaya_TC_v1 USA+AirAssault VDV+AirAssault
-Anvil_TC_v1 WPMC+AirAssault TLF+AirAssault
-FoolsRoad_Invasion_v1 IMF+CombinedArms USMC+CombinedArms
-Harju_RAAS_v2 IMF+LightInfantry WPMC+LightInfantry
-AlBasrah_RAAS_v1 INS+Motorized WPMC+LightInfantry
-Kohat_TC_v1 PLA+Armored USA+Armored
-Narva_Skirmish_v1 IMF+CombinedArms USMC+CombinedArms
-Tallil_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 BAF+Armored VDV+Armored
-Fallujah_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Kamdesh_AAS_v1 PLA+LightInfantry ADF+CombinedArms
-Logar_AAS_v1 RGF+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 PLA+LightInfantry INS+LightInfantry
-Sanxian_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
-GooseBay_Skirmish_v1 USA+CombinedArms RGF+CombinedArms
-Mutaha_TC_v1 RGF+Armored PLA+Armored
-AlBasrah_AAS_v1 PLA+Motorized VDV+CombinedArms
-Yehorivka_AAS_v1 RGF+Support PLA+Support
-Kohat_Invasion_v1 PLA+Motorized CAF+Motorized
-Mestia_TC_v1 VDV+CombinedArms IMF+CombinedArms
-Fallujah_TC_v1 WPMC+LightInfantry PLA+LightInfantry
-Belaya_TC_v1 USA+Armored PLA+Motorized
-Tallil_AAS_v1 USA+Motorized RGF+Motorized
-Lashkar_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Sumari_Skirmish_v1 MEA+CombinedArms USMC+CombinedArms
-Anvil_RAAS_v2 VDV+Armored USA+Armored
-Manicouagan_AAS_v3 WPMC+CombinedArms VDV+CombinedArms
-Mutaha_TC_v1 MEA+Armored TLF+Motorized
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Chora_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 VDV+Armored CAF+Armored
-Kamdesh_AAS_v1 MEA+Armored USMC+Armored
-Belaya_TC_v1 WPMC+LightInfantry PLA+Armored
-Harju_Invasion_v3 RGF+LightInfantry WPMC+LightInfantry
-Mestia_TC_v1 PLA+CombinedArms IMF+CombinedArms
-Gorodok_RAAS_v2 ADF+CombinedArms VDV+CombinedArms
-Yehorivka_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 CAF+Support WPMC+LightInfantry
-AlBasrah_TC_v1 BAF+CombinedArms PLANMC+CombinedArms
-Mutaha_RAAS_v1 VDV+Support BAF+Support
-Logar_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 PLA+Support RGF+Support
-BlackCoast_RAAS_v1 CAF+CombinedArms PLAAGF+CombinedArms
-Fallujah_Invasion_v1 CAF+Motorized VDV+CombinedArms
-Mestia_Skirmish_v1 RGF+CombinedArms USA+CombinedArms
-Kohat_TC_v1 WPMC+LightInfantry PLA+LightInfantry
-Gorodok_AAS_v1 CAF+Armored PLA+Armored
-Chora_Skirmish_v1 CAF+CombinedArms VDV+CombinedArms
-Kamdesh_Invasion_v1 INS+Armored BAF+Armored
-AlBasrah_TC_v1 ADF+CombinedArms VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Narva_AAS_v2 IMF+Support VDV+Mechanized
-Mutaha_TC_v1 VDV+AirAssault USA+AirAssault
-Manicouagan_AAS_v3 PLAAGF+Armored CAF+Armored
-FoolsRoad_Invasion_v1 RGF+CombinedArms IMF+CombinedArms
-Lashkar_TC_v1 PLA+Motorized USMC+Motorized
-Tallil_TC_v1 RGF+Mechanized USMC+Motorized
-Fallujah_Skirmish_v2 INS+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v2 TLF+Support IMF+Support
-Yehorivka_Invasion_v2 WPMC+CombinedArms TLF+CombinedArms
-Kokan_AAS_v2 TLF+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Kohat_RAAS_v1 INS+Armored WPMC+CombinedArms
-Logar_AAS_v1 PLA+CombinedArms CAF+CombinedArms
-Kamdesh_Insurgency_v1 MEA+Armored INS+Armored
-Gorodok_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-AlBasrah_Skirmish_v1 RGF+CombinedArms USA+CombinedArms
-Narva_TC_v1 USA+Mechanized WPMC+CombinedArms
-Lashkar_AAS_v1 CAF+CombinedArms INS+CombinedArms
-Anvil_AAS_v1 WPMC+AirAssault VDV+AirAssault
-FoolsRoad_Destruction_v1 PLA+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v1 TLF+AirAssault PLA+AirAssault
-BlackCoast_RAAS_v2 TLF+Armored VDV+AirAssault
-Mestia_AAS_v2 ADF+CombinedArms IMF+CombinedArms
-Manicouagan_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
-GooseBay_Invasion_v1 BAF+CombinedArms VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Kohat_TC_v1 VDV+AirAssault PLA+Support
-Narva_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Chora_TC_v1 USA+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 IMF+Armored RGF+Armored
-Fallujah_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v1 PLA+Armored WPMC+AirAssault
-Yehorivka_TC_v2 PLA+Support BAF+Support
-Harju_RAAS_v2 WPMC+AirAssault USA+AirAssault
-AlBasrah_RAAS_v1 PLANMC+CombinedArms INS+CombinedArms
-Manicouagan_RAAS_v1 RGF+Support USMC+Support
-Mestia_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 ADF+AirAssault IMF+Support
-Mutaha_AAS_v1 USA+AirAssault PLA+AirAssault
-Belaya_AAS_v3 USA+CombinedArms IMF+CombinedArms
-Kohat_TC_v1 MEA+CombinedArms PLA+CombinedArms
-Sumari_Invasion_v1 INS+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 MEA+LightInfantry USA+Mechanized
-Fallujah_RAAS_v2 TLF+Mechanized ADF+Mechanized
-FoolsRoad_Skirmish_v1 IMF+CombinedArms VDV+CombinedArms
-Anvil_TC_v1 VDV+Support CAF+Support
-Manicouagan_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Lashkar_AAS_v1 PLA+AirAssault INS+Support
-AlBasrah_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Logar_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
-Kohat_Invasion_v2 PLA+Motorized USMC+Motorized
-Gorodok_TC_v1 RGF+CombinedArms ADF+CombinedArms
-Mutaha_RAAS_v1 PLA+Support INS+Mechanized
-Kokan_TC_v1 WPMC+CombinedArms MEA+CombinedArms
-Belaya_AAS_v2 PLA+Support BAF+Support
-Yehorivka_Invasion_v2 TLF+Mechanized IMF+Mechanized
-Kamdesh_Skirmish_v1 TLF+CombinedArms CAF+CombinedArms
-Lashkar_AAS_v1 MEA+LightInfantry RGF+Mechanized
-Manicouagan_AAS_v3 WPMC+AirAssault CAF+AirAssault
-Mestia_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-GooseBay_RAAS_v2 WPMC+CombinedArms CAF+CombinedArms
-BlackCoast_Skirmish_v1 BAF+CombinedArms PLANMC+CombinedArms
-Kohat_RAAS_v1 TLF+Support MEA+LightInfantry
-Fallujah_RAAS_v2 TLF+CombinedArms BAF+CombinedArms
-Mutaha_Invasion_v1 INS+Support TLF+Support
-Yehorivka_Skirmish_v2 VDV+CombinedArms BAF+CombinedArms
+Sanxian_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v1 MEA+CombinedArms INS+CombinedArms
+Yehorivka_Destruction_v1 IMF+CombinedArms USMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+FoolsRoad_AAS_v2 TLF+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v1 MEA+AirAssault WPMC+AirAssault
+Kohat_TC_v1 USA+Support TLF+CombinedArms
+Kamdesh_AAS_v1 VDV+Armored PLA+Armored
+Tallil_RAAS_v2 USMC+LightInfantry WPMC+LightInfantry
+Mestia_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 ADF+AirAssault WPMC+AirAssault
+Fallujah_TC_v1 PLA+Armored VDV+Armored
+Manicouagan_AAS_v3 WPMC+CombinedArms USA+Armored
+BlackCoast_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Narva_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Mutaha_Invasion_v1 CAF+Mechanized TLF+Mechanized
+Yehorivka_AAS_v2 ADF+AirAssault TLF+AirAssault
+Chora_AAS_v3 VDV+CombinedArms USMC+CombinedArms
+Kamdesh_RAAS_v1 CAF+Mechanized INS+Mechanized
+Lashkar_AAS_v2 BAF+Armored PLA+AirAssault
+Sumari_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
+GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
+Belaya_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 VDV+CombinedArms ADF+CombinedArms
+Anvil_RAAS_v1 INS+LightInfantry PLA+LightInfantry
+Gorodok_TC_v1 PLA+Armored VDV+Armored
+Fallujah_AAS_v1 VDV+Support INS+Support
+Kohat_RAAS_v1 CAF+CombinedArms MEA+CombinedArms
+Yehorivka_Invasion_v2 WPMC+AirAssault IMF+Motorized
+Manicouagan_AAS_v2 USA+AirAssault VDV+AirAssault
+Kokan_AAS_v1 INS+CombinedArms TLF+CombinedArms
+AlBasrah_TC_v1 PLAAGF+CombinedArms RGF+CombinedArms
+Skorpo_RAAS_v1 IMF+Support VDV+Support
+Tallil_RAAS_v2 WPMC+CombinedArms PLA+Motorized
+Kamdesh_Invasion_v1 USMC+Motorized TLF+Motorized
+Sanxian_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Sumari_Skirmish_v1 USA+CombinedArms MEA+CombinedArms
+Lashkar_RAAS_v1 USA+Motorized PLA+Motorized
+Gorodok_RAAS_v2 TLF+Armored IMF+Armored
+BlackCoast_RAAS_v1 IMF+Support PLANMC+Support
+Harju_Invasion_v3 ADF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Mutaha_TC_v1 USMC+Support TLF+Mechanized
+Kohat_RAAS_v1 TLF+Mechanized VDV+Mechanized
+Anvil_AAS_v1 INS+CombinedArms MEA+CombinedArms
+Manicouagan_AAS_v3 USA+Mechanized PLAAGF+Mechanized
+Tallil_AAS_v1 VDV+Support PLA+Support
+Sanxian_Invasion_v1 USMC+AmphibiousAssault WPMC+LightInfantry
+Sumari_AAS_v2 VDV+CombinedArms MEA+CombinedArms
+Fallujah_RAAS_v2 TLF+CombinedArms VDV+CombinedArms
+GooseBay_AAS_v1 VDV+CombinedArms BAF+CombinedArms
+Kamdesh_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v1 PLA+Support IMF+Support
+Skorpo_Invasion_v1 VDV+Mechanized IMF+LightInfantry
+Kohat_AAS_v1 USMC+Armored MEA+Armored
+Belaya_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Gorodok_Skirmish_v1 VDV+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Lashkar_AAS_v2 RGF+Motorized CAF+Motorized
+Sumari_Invasion_v1 USMC+CombinedArms RGF+CombinedArms
+Sanxian_RAAS_v1 USMC+CombinedArms PLAAGF+CombinedArms
+Anvil_TC_v1 PLA+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
+Yehorivka_AAS_v2 ADF+AirAssault TLF+Motorized
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Mestia_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Fallujah_RAAS_v2 PLA+CombinedArms BAF+CombinedArms
+Tallil_TC_v1 INS+LightInfantry WPMC+LightInfantry
+Mutaha_RAAS_v1 BAF+AirAssault PLA+AirAssault
+Lashkar_RAAS_v1 VDV+AirAssault PLA+AirAssault
+Kamdesh_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Gorodok_Invasion_v1 IMF+Motorized CAF+Motorized
+Chora_AAS_v3 MEA+CombinedArms INS+CombinedArms
+Kohat_AAS_v1 RGF+LightInfantry USMC+LightInfantry
+BlackCoast_RAAS_v2 IMF+CombinedArms CAF+CombinedArms
+Logar_TC_v1 CAF+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 MEA+Mechanized TLF+AirAssault
+Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v2 INS+Support USMC+Support
+Anvil_Skirmish_v1 CAF+CombinedArms RGF+CombinedArms
+Kamdesh_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+GooseBay_RAAS_v1 BAF+Support WPMC+AirAssault
+Kokan_Invasion_v1 WPMC+CombinedArms ADF+CombinedArms
+Gorodok_RAAS_v1 IMF+Support USA+Support
+Manicouagan_AAS_v2 VDV+AirAssault WPMC+AirAssault
+Logar_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+Sanxian_AAS_v1 ADF+Mechanized WPMC+AirAssault
+Narva_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Skorpo_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
+Fallujah_AAS_v1 ADF+Mechanized TLF+Mechanized
+Mestia_TC_v1 IMF+CombinedArms VDV+CombinedArms
+Lashkar_RAAS_v1 CAF+AirAssault VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 ADF+Mechanized TLF+Mechanized
+FoolsRoad_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 INS+LightInfantry WPMC+LightInfantry
+Tallil_RAAS_v2 TLF+Support USA+Support
+Anvil_TC_v1 CAF+Motorized RGF+CombinedArms
+BlackCoast_AAS_v1 WPMC+LightInfantry USA+LightInfantry
+Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Gorodok_Destruction_v1 USA+Mechanized IMF+Mechanized
+GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Fallujah_RAAS_v2 RGF+Support PLA+CombinedArms
+Manicouagan_Skirmish_v2 USA+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+Lashkar_AAS_v1 INS+LightInfantry MEA+LightInfantry
+Chora_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
+Yehorivka_AAS_v1 RGF+Motorized USMC+Armored
+Tallil_AAS_v1 VDV+Armored PLA+Armored
+Logar_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+FoolsRoad_Destruction_v1 PLA+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v2 WPMC+LightInfantry RGF+CombinedArms
+Belaya_AAS_v1 VDV+Armored TLF+Armored
+Anvil_TC_v1 MEA+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 CAF+AirAssault MEA+AirAssault
+Narva_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Fallujah_Invasion_v1 PLA+Motorized USA+Motorized
+Mestia_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v1 RGF+CombinedArms INS+Armored
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Chora_AAS_v2 ADF+CombinedArms TLF+CombinedArms
+Yehorivka_Invasion_v1 PLA+CombinedArms CAF+CombinedArms
+BlackCoast_AAS_v2 PLAAGF+Mechanized TLF+Motorized
+Anvil_AAS_v1 VDV+CombinedArms CAF+CombinedArms
+Kokan_AAS_v2 MEA+CombinedArms WPMC+CombinedArms
+AlBasrah_TC_v1 MEA+AirAssault TLF+AirAssault
+Kamdesh_AAS_v1 MEA+Support PLA+Support
+Fallujah_Invasion_v2 MEA+LightInfantry VDV+Armored
+Narva_RAAS_v1 IMF+Mechanized BAF+Mechanized
+Logar_AAS_v1 MEA+CombinedArms RGF+CombinedArms
+Gorodok_TC_v1 PLA+Armored USMC+Armored
+Sanxian_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_AAS_v2 TLF+AirAssault WPMC+AirAssault
+BlackCoast_AAS_v2 RGF+LightInfantry USMC+LightInfantry
+FoolsRoad_Destruction_v1 IMF+CombinedArms USA+CombinedArms
+Yehorivka_AAS_v2 RGF+CombinedArms PLA+Motorized
+GooseBay_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 TLF+CombinedArms USA+CombinedArms
+AlBasrah_TC_v1 INS+Armored MEA+Armored
+Belaya_AAS_v2 WPMC+AirAssault ADF+AirAssault
+Lashkar_Invasion_v1 PLA+Support TLF+Support
+Tallil_AAS_v1 RGF+Armored PLA+Armored
+Manicouagan_AAS_v1 WPMC+AirAssault PLA+AirAssault
+Sanxian_AAS_v2 CAF+AirAssault WPMC+LightInfantry
+Anvil_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+Mutaha_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
+Fallujah_Invasion_v1 VDV+Support USMC+Support
+FoolsRoad_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
+Gorodok_AAS_v1 WPMC+AirAssault PLA+CombinedArms
+Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+AlBasrah_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v2 RGF+CombinedArms PLA+CombinedArms
+Logar_Insurgency_v1 VDV+CombinedArms INS+CombinedArms
+Lashkar_RAAS_v1 TLF+CombinedArms MEA+AirAssault
+Tallil_RAAS_v2 INS+Armored BAF+Armored
+Manicouagan_Skirmish_v2 BAF+CombinedArms WPMC+CombinedArms
 Anvil_AAS_v1 BAF+AirAssault PLA+AirAssault
-AlBasrah_TC_v1 TLF+Mechanized INS+Armored
-Kamdesh_RAAS_v1 PLA+Armored CAF+Armored
-Belaya_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v2 PLA+Support TLF+Support
-Chora_Invasion_v1 INS+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 USA+Mechanized PLA+Support
-Tallil_AAS_v1 VDV+Mechanized CAF+Mechanized
-BlackCoast_RAAS_v1 PLA+AirAssault WPMC+AirAssault
-GooseBay_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Manicouagan_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms BAF+CombinedArms
-Skorpo_Invasion_v1 BAF+Armored IMF+Armored
-Sanxian_AAS_v3 WPMC+AirAssault PLA+AirAssault
-Kokan_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Fallujah_RAAS_v1 INS+Motorized TLF+Support
-Narva_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Invasion_v1 PLA+CombinedArms IMF+CombinedArms
-Mutaha_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 INS+CombinedArms CAF+CombinedArms
-GooseBay_AAS_v1 USMC+Motorized PLAAGF+Mechanized
-Sumari_AAS_v1 RGF+CombinedArms USA+CombinedArms
-Gorodok_TC_v1 TLF+AirAssault WPMC+AirAssault
-Kamdesh_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Mestia_TC_v1 USA+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 WPMC+LightInfantry USMC+LightInfantry
-Skorpo_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Manicouagan_AAS_v1 VDV+AirAssault WPMC+AirAssault
-Tallil_Invasion_v1 PLA+Support CAF+Support
-Yehorivka_TC_v1 USMC+Support VDV+CombinedArms
-Kohat_TC_v1 USA+Armored PLA+Armored
-Lashkar_AAS_v1 BAF+Armored PLA+Armored
-Sumari_TC_v1 INS+CombinedArms VDV+CombinedArms
-Fallujah_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 PLA+LightInfantry USA+Armored
-Mestia_RAAS_v1 IMF+CombinedArms PLA+CombinedArms
-AlBasrah_RAAS_v1 VDV+AirAssault BAF+AirAssault
-GooseBay_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
-Kokan_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
-Kamdesh_RAAS_v1 BAF+Mechanized VDV+Mechanized
-Skorpo_RAAS_v1 RGF+Motorized WPMC+LightInfantry
-Yehorivka_Skirmish_v2 TLF+CombinedArms PLA+CombinedArms
-Mutaha_Invasion_v1 USA+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 VDV+Mechanized TLF+Mechanized
-Chora_AAS_v2 TLF+CombinedArms RGF+CombinedArms
-Sanxian_RAAS_v1 CAF+Mechanized WPMC+AirAssault
-Manicouagan_RAAS_v1 RGF+CombinedArms USMC+CombinedArms
-AlBasrah_Invasion_v2 PLA+LightInfantry USA+LightInfantry
-Anvil_TC_v1 PLA+Support BAF+Support
-Logar_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-Lashkar_TC_v1 MEA+CombinedArms TLF+Motorized
-Fallujah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
-FoolsRoad_Destruction_v1 VDV+CombinedArms PLA+CombinedArms
-Yehorivka_AAS_v2 TLF+Mechanized IMF+Mechanized
-Kamdesh_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v2 USA+Mechanized TLF+CombinedArms
-Sumari_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-GooseBay_Invasion_v1 WPMC+CombinedArms USA+CombinedArms
-Tallil_AAS_v1 USMC+Support INS+Support
-Sanxian_RAAS_v2 WPMC+LightInfantry USA+LightInfantry
-Kokan_Skirmish_v1 BAF+CombinedArms INS+CombinedArms
+Belaya_AAS_v2 PLA+Support IMF+Support
+Harju_Invasion_v3 IMF+Armored RGF+Motorized
+Mestia_AAS_v2 PLA+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v2 PLA+AirAssault MEA+AirAssault
+Fallujah_RAAS_v2 CAF+Armored RGF+Armored
+Sanxian_AAS_v2 USMC+CombinedArms WPMC+CombinedArms
+GooseBay_RAAS_v2 CAF+Motorized WPMC+LightInfantry
+FoolsRoad_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
+Anvil_TC_v1 WPMC+AirAssault PLA+AirAssault
+AlBasrah_AAS_v1 BAF+Armored RGF+Armored
+Tallil_RAAS_v2 ADF+AirAssault INS+CombinedArms
+Gorodok_AAS_v1 CAF+Mechanized IMF+Mechanized
+Kohat_AAS_v1 CAF+CombinedArms RGF+CombinedArms
+Yehorivka_Invasion_v2 WPMC+CombinedArms BAF+CombinedArms
+Sumari_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Mutaha_TC_v1 TLF+Support USA+Support
+FoolsRoad_AAS_v2 TLF+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 PLA+Motorized USMC+Support
+BlackCoast_Invasion_v2 PLA+CombinedArms IMF+CombinedArms
+Anvil_AAS_v1 USA+LightInfantry RGF+LightInfantry
+Fallujah_TC_v1 PLA+Support VDV+Support
+Mestia_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 USMC+Armored TLF+Armored
+Yehorivka_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Sumari_Invasion_v1 ADF+CombinedArms TLF+CombinedArms
+AlBasrah_RAAS_v1 USMC+Armored TLF+AirAssault
+Narva_TC_v1 BAF+Mechanized IMF+Mechanized
+Mutaha_AAS_v1 ADF+Mechanized VDV+Mechanized
+Manicouagan_AAS_v2 WPMC+AirAssault PLA+AirAssault
+GooseBay_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+FoolsRoad_Invasion_v1 IMF+CombinedArms TLF+CombinedArms
+Kohat_RAAS_v2 PLA+LightInfantry USA+LightInfantry
+Tallil_RAAS_v2 USA+AirAssault PLA+AirAssault
+Lashkar_RAAS_v1 PLA+LightInfantry RGF+LightInfantry
+Kamdesh_AAS_v1 PLA+CombinedArms RGF+Armored
+Yehorivka_TC_v2 TLF+Armored CAF+Armored
