--- a/Tools/Rotation/LayerRotation/LayerRotation_23.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_23.cfg
@@ -1,200 +1,200 @@
-AlBasrah_AAS_v1 BAF+Mechanized PLA+Armored
-Anvil_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 CAF+Support INS+Support
-Mestia_AAS_v1 TLF+CombinedArms ADF+CombinedArms
-Kohat_AAS_v1 RGF+Support CAF+Support
-Gorodok_AAS_v1 USA+Support TLF+Motorized
-Yehorivka_Destruction_v1 PLA+Support RGF+Support
-Chora_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
-Kamdesh_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v2 WPMC+CombinedArms RGF+CombinedArms
-Belaya_AAS_v1 WPMC+AirAssault IMF+Motorized
-Kokan_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms PLANMC+CombinedArms
-Fallujah_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v1 BAF+CombinedArms INS+CombinedArms
-Gorodok_Destruction_v1 IMF+CombinedArms PLA+CombinedArms
-Logar_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-AlBasrah_TC_v1 VDV+Mechanized PLA+Mechanized
-Lashkar_AAS_v1 VDV+Support PLA+Motorized
-Yehorivka_AAS_v2 TLF+Motorized PLA+Motorized
-Narva_Invasion_v2 IMF+CombinedArms WPMC+CombinedArms
-Kohat_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v1 INS+CombinedArms USMC+CombinedArms
-Belaya_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Tallil_Invasion_v1 RGF+Motorized WPMC+CombinedArms
-Manicouagan_AAS_v2 BAF+AirAssault WPMC+AirAssault
-Logar_RAAS_v1 INS+CombinedArms CAF+CombinedArms
-Gorodok_TC_v1 VDV+AirAssault WPMC+AirAssault
-Harju_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
-FoolsRoad_Invasion_v1 PLA+CombinedArms USA+CombinedArms
-Lashkar_TC_v2 VDV+Support USMC+Support
-Sanxian_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v2 VDV+CombinedArms PLA+CombinedArms
-AlBasrah_Invasion_v1 PLAAGF+Mechanized INS+LightInfantry
-Kokan_TC_v1 MEA+CombinedArms PLA+CombinedArms
-Anvil_TC_v1 ADF+Mechanized INS+Mechanized
-Kamdesh_TC_v1 INS+Motorized RGF+Motorized
-Mutaha_TC_v1 MEA+AirAssault TLF+AirAssault
-Narva_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-BlackCoast_Invasion_v2 WPMC+LightInfantry USMC+LightInfantry
-Gorodok_AAS_v1 PLA+Armored TLF+Armored
-Tallil_TC_v1 MEA+Armored PLA+Armored
-Lashkar_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Yehorivka_Skirmish_v1 USA+CombinedArms VDV+CombinedArms
-Manicouagan_Invasion_v1 RGF+Armored BAF+Armored
-Kohat_TC_v1 WPMC+CombinedArms INS+CombinedArms
-Belaya_AAS_v2 TLF+Mechanized IMF+Support
-Chora_Skirmish_v1 TLF+CombinedArms CAF+CombinedArms
-GooseBay_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Kamdesh_Invasion_v1 BAF+Armored PLA+Armored
-Anvil_Skirmish_v1 MEA+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v1 USMC+Motorized PLA+Motorized
-Fallujah_RAAS_v2 CAF+Mechanized INS+Mechanized
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Yehorivka_TC_v1 PLA+Support BAF+Support
-Narva_Invasion_v1 CAF+Mechanized IMF+Mechanized
-Tallil_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-AlBasrah_RAAS_v1 USA+Support TLF+Support
-Mutaha_TC_v1 PLA+AirAssault WPMC+AirAssault
-Lashkar_AAS_v2 USMC+Motorized PLA+Motorized
-Gorodok_TC_v1 PLA+Support USMC+Support
-Sumari_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
-GooseBay_AAS_v1 WPMC+AirAssault PLA+AirAssault
-Anvil_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Kohat_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 USA+Mechanized RGF+Armored
-Narva_Invasion_v2 WPMC+CombinedArms CAF+CombinedArms
-Mestia_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Yehorivka_AAS_v1 TLF+Support IMF+Support
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLANMC+CombinedArms
-Mutaha_TC_v1 ADF+AirAssault PLA+Armored
-FoolsRoad_Destruction_v1 ADF+CombinedArms TLF+CombinedArms
-Lashkar_TC_v1 USMC+Support MEA+Support
-Kamdesh_RAAS_v1 TLF+Armored VDV+Armored
-Sumari_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Tallil_TC_v1 MEA+Mechanized TLF+Mechanized
-Anvil_Invasion_v1 PLA+Support TLF+Support
-Belaya_AAS_v3 WPMC+LightInfantry CAF+AirAssault
-Manicouagan_AAS_v3 CAF+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 PLANMC+CombinedArms INS+CombinedArms
-Chora_AAS_v1 USMC+CombinedArms INS+CombinedArms
-Skorpo_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-GooseBay_RAAS_v1 VDV+Support PLANMC+AirAssault
-Harju_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 TLF+AirAssault CAF+AirAssault
-Mutaha_TC_v1 BAF+Support INS+Support
-Fallujah_Invasion_v2 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_RAAS_v2 TLF+Mechanized IMF+Support
-Sumari_TC_v1 PLA+CombinedArms INS+CombinedArms
-Tallil_RAAS_v1 INS+Armored PLA+Armored
-Kohat_AAS_v1 VDV+AirAssault CAF+AirAssault
-FoolsRoad_Destruction_v1 PLA+CombinedArms USMC+CombinedArms
-BlackCoast_AAS_v2 PLA+LightInfantry WPMC+LightInfantry
-Lashkar_RAAS_v1 VDV+Support CAF+Support
-AlBasrah_Skirmish_v1 INS+CombinedArms MEA+CombinedArms
-Gorodok_TC_v1 IMF+LightInfantry VDV+Support
-Anvil_Invasion_v1 TLF+Mechanized INS+Mechanized
-Mutaha_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
-Harju_AAS_v1 IMF+CombinedArms USA+CombinedArms
-GooseBay_AAS_v1 USA+LightInfantry PLA+LightInfantry
-PacificProvingGrounds_AAS_v1 USA+CombinedArms PLANMC+CombinedArms
-Logar_AAS_v1 ADF+CombinedArms RGF+CombinedArms
-Kamdesh_Invasion_v1 TLF+Motorized PLA+CombinedArms
-Manicouagan_AAS_v2 BAF+AirAssault WPMC+AirAssault
-Fallujah_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Lashkar_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Sumari_RAAS_v1 TLF+CombinedArms CAF+CombinedArms
-Narva_Invasion_v2 BAF+CombinedArms IMF+CombinedArms
-Belaya_TC_v1 PLA+AirAssault BAF+AirAssault
-AlBasrah_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
-Sanxian_RAAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 TLF+Armored INS+Support
-Gorodok_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
-BlackCoast_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Kamdesh_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Fallujah_TC_v1 INS+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 INS+Motorized BAF+Mechanized
-Manicouagan_AAS_v3 CAF+Armored RGF+Armored
-Chora_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-GooseBay_RAAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
-Narva_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Sumari_Invasion_v1 TLF+CombinedArms RGF+CombinedArms
-Kohat_RAAS_v2 PLA+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 PLA+LightInfantry USA+LightInfantry
-Tallil_RAAS_v2 MEA+Armored WPMC+CombinedArms
-AlBasrah_TC_v1 VDV+AirAssault TLF+AirAssault
-Yehorivka_Invasion_v2 PLA+CombinedArms USA+CombinedArms
-Kokan_RAAS_v1 CAF+CombinedArms MEA+CombinedArms
-Lashkar_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Gorodok_TC_v1 PLA+LightInfantry USMC+LightInfantry
-Chora_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-Kamdesh_Invasion_v1 CAF+Motorized RGF+Armored
-Sanxian_RAAS_v2 BAF+AirAssault WPMC+AirAssault
-Kohat_TC_v1 USA+Mechanized RGF+Mechanized
-FoolsRoad_Skirmish_v2 USA+CombinedArms PLA+CombinedArms
-Tallil_AAS_v1 WPMC+AirAssault ADF+AirAssault
-Skorpo_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
-Mutaha_TC_v1 TLF+Mechanized VDV+Mechanized
-Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault CAF+AirAssault
-Logar_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
-Lashkar_RAAS_v1 RGF+Support ADF+AirAssault
-Fallujah_TC_v1 TLF+Mechanized CAF+Mechanized
+Belaya_Invasion_v2 IMF+Armored CAF+Armored
+Harju_AAS_v2 ADF+CombinedArms IMF+CombinedArms
+Mutaha_AAS_v2 WPMC+AirAssault MEA+CombinedArms
+Gorodok_TC_v1 BAF+Mechanized IMF+Mechanized
+AlBasrah_RAAS_v1 INS+LightInfantry PLANMC+LightInfantry
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Logar_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+Kohat_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v2 CAF+Armored WPMC+CombinedArms
+Lashkar_Skirmish_v1 MEA+CombinedArms VDV+CombinedArms
+Tallil_AAS_v1 USMC+Armored TLF+Armored
+Anvil_AAS_v1 TLF+Motorized PLA+Motorized
+Chora_Invasion_v1 CAF+CombinedArms VDV+CombinedArms
+Harju_RAAS_v1 USA+Mechanized VDV+Mechanized
+Kamdesh_AAS_v1 WPMC+LightInfantry USA+LightInfantry
+Fallujah_TC_v1 TLF+Support USA+Support
+Mutaha_RAAS_v1 INS+Motorized CAF+Motorized
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+FoolsRoad_Destruction_v1 PLA+CombinedArms CAF+CombinedArms
+Gorodok_RAAS_v2 BAF+Support IMF+LightInfantry
+Manicouagan_RAAS_v2 RGF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 MEA+Support PLA+Support
+Sumari_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Lashkar_AAS_v2 USA+AirAssault PLA+AirAssault
+Yehorivka_Invasion_v2 WPMC+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v1 BAF+Support WPMC+CombinedArms
+BlackCoast_RAAS_v2 USA+Armored PLAAGF+Armored
+Mutaha_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 MEA+AirAssault WPMC+AirAssault
+GooseBay_AAS_v1 PLAAGF+CombinedArms RGF+CombinedArms
+Belaya_Invasion_v1 IMF+Motorized TLF+Motorized
+Fallujah_RAAS_v1 MEA+CombinedArms USMC+Support
+FoolsRoad_Skirmish_v2 PLA+CombinedArms BAF+CombinedArms
+Manicouagan_AAS_v3 BAF+Support PLANMC+Support
+Anvil_AAS_v1 TLF+Mechanized INS+Mechanized
+Logar_AAS_v1 PLA+CombinedArms MEA+CombinedArms
+Tallil_Invasion_v1 RGF+Armored WPMC+LightInfantry
+Skorpo_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v3 CAF+CombinedArms RGF+CombinedArms
+Lashkar_TC_v2 PLA+Support BAF+Support
+BlackCoast_RAAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
+Mutaha_RAAS_v2 PLA+Armored TLF+Armored
+Gorodok_Invasion_v1 PLA+Motorized TLF+Motorized
+Yehorivka_AAS_v1 WPMC+AirAssault TLF+AirAssault
+AlBasrah_TC_v1 WPMC+LightInfantry INS+LightInfantry
+Anvil_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
+Logar_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
+GooseBay_AAS_v1 WPMC+LightInfantry VDV+Mechanized
+Belaya_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
+Mestia_TC_v1 PLA+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v1 PLAAGF+Mechanized BAF+Mechanized
+Tallil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
+Yehorivka_Invasion_v2 USA+Armored TLF+Armored
+Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Anvil_Skirmish_v1 VDV+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v2 ADF+Mechanized PLA+CombinedArms
+Kohat_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 PLA+Armored BAF+Armored
+Gorodok_Destruction_v1 PLA+Armored VDV+Armored
+AlBasrah_RAAS_v1 USA+Mechanized INS+Mechanized
+Mutaha_AAS_v1 VDV+Support PLA+Support
+Belaya_TC_v1 PLA+AirAssault ADF+AirAssault
+Sumari_AAS_v1 VDV+CombinedArms USA+CombinedArms
+Kamdesh_RAAS_v1 MEA+Armored TLF+Armored
+BlackCoast_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Kokan_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
+Anvil_AAS_v1 TLF+Motorized USA+Support
+Kohat_AAS_v1 MEA+AirAssault CAF+AirAssault
 Chora_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Kohat_RAAS_v1 MEA+Mechanized RGF+Mechanized
-Yehorivka_Destruction_v1 ADF+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 ADF+AirAssault RGF+LightInfantry
-GooseBay_RAAS_v2 WPMC+CombinedArms USA+CombinedArms
-Tallil_RAAS_v1 PLA+CombinedArms USA+CombinedArms
-Sumari_AAS_v3 PLA+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v1 IMF+Motorized RGF+Motorized
-Anvil_TC_v1 MEA+Support TLF+Support
-Kokan_RAAS_v1 CAF+CombinedArms VDV+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-AlBasrah_AAS_v1 MEA+CombinedArms USMC+CombinedArms
-Gorodok_Invasion_v1 PLA+CombinedArms TLF+Armored
-Mutaha_TC_v1 VDV+Support USMC+Support
-Belaya_AAS_v3 VDV+Armored PLA+Armored
-Kamdesh_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v2 ADF+CombinedArms PLA+CombinedArms
-Sanxian_Invasion_v2 USMC+Motorized PLANMC+Motorized
-Logar_TC_v1 MEA+CombinedArms PLA+CombinedArms
-Lashkar_RAAS_v1 ADF+Mechanized RGF+Mechanized
-Anvil_TC_v1 VDV+CombinedArms PLA+CombinedArms
-Mestia_TC_v1 CAF+CombinedArms VDV+CombinedArms
-Kohat_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-BlackCoast_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
-Harju_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 ADF+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Belaya_RAAS_v1 WPMC+AirAssault PLA+Support
-AlBasrah_Invasion_v2 BAF+Armored PLANMC+Armored
-Fallujah_TC_v1 USMC+LightInfantry MEA+LightInfantry
-Kokan_TC_v1 MEA+CombinedArms BAF+CombinedArms
-Lashkar_AAS_v2 INS+Support MEA+Support
-Gorodok_TC_v1 USMC+CombinedArms VDV+Armored
-Sumari_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
-Tallil_AAS_v1 PLA+Armored VDV+Armored
-Harju_RAAS_v2 VDV+CombinedArms ADF+CombinedArms
-Anvil_TC_v1 MEA+LightInfantry RGF+LightInfantry
-Mestia_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
-Narva_Destruction_v1 ADF+Mechanized VDV+Mechanized
-Belaya_TC_v1 IMF+CombinedArms ADF+AirAssault
-Manicouagan_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-Kamdesh_RAAS_v1 USA+Motorized TLF+Motorized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-FoolsRoad_Invasion_v1 IMF+CombinedArms RGF+CombinedArms
-AlBasrah_AAS_v1 TLF+Support INS+Armored
-Tallil_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Gorodok_TC_v1 WPMC+LightInfantry IMF+LightInfantry
-Kokan_TC_v1 PLA+CombinedArms USA+CombinedArms
-Mutaha_RAAS_v1 USA+AirAssault PLA+AirAssault
-Narva_Destruction_v1 ADF+CombinedArms IMF+CombinedArms
+Sanxian_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v2 TLF+Support BAF+Support
+Skorpo_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 TLF+CombinedArms MEA+CombinedArms
+Manicouagan_AAS_v2 USA+AirAssault PLANMC+AirAssault
+AlBasrah_TC_v1 VDV+Armored BAF+Support
+FoolsRoad_AAS_v2 TLF+CombinedArms PLA+CombinedArms
+Fallujah_AAS_v1 BAF+Mechanized VDV+Mechanized
+Anvil_Invasion_v1 INS+Mechanized ADF+Mechanized
+Logar_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 USMC+Support PLA+Motorized
+Tallil_TC_v1 TLF+AirAssault WPMC+AirAssault
+Kokan_AAS_v1 PLA+CombinedArms MEA+CombinedArms
+Sanxian_AAS_v1 PLAAGF+Mechanized ADF+Mechanized
+Kamdesh_Invasion_v1 USA+CombinedArms RGF+CombinedArms
+Belaya_AAS_v1 USA+Motorized WPMC+AirAssault
+GooseBay_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 INS+Support PLA+Support
+Mestia_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Fallujah_Invasion_v1 MEA+Armored PLA+Armored
+BlackCoast_AAS_v2 ADF+Mechanized PLA+Mechanized
+Harju_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
+AlBasrah_RAAS_v1 ADF+CombinedArms PLANMC+CombinedArms
+Manicouagan_AAS_v1 WPMC+AirAssault VDV+AirAssault
+FoolsRoad_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
+GooseBay_AAS_v1 WPMC+LightInfantry USA+LightInfantry
+Mutaha_AAS_v2 MEA+Armored USMC+Motorized
+Anvil_RAAS_v1 TLF+AirAssault PLA+AirAssault
+Kokan_TC_v1 TLF+CombinedArms RGF+CombinedArms
+Kohat_RAAS_v2 USMC+CombinedArms RGF+CombinedArms
+Sanxian_Invasion_v2 WPMC+CombinedArms ADF+CombinedArms
+Lashkar_RAAS_v1 USA+Armored PLA+LightInfantry
+Gorodok_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
+Harju_AAS_v3 IMF+CombinedArms WPMC+CombinedArms
+Tallil_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Fallujah_AAS_v1 BAF+Armored RGF+Armored
+Sumari_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+Mutaha_Invasion_v1 BAF+CombinedArms RGF+CombinedArms
+Anvil_RAAS_v1 RGF+Mechanized CAF+Support
+FoolsRoad_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 TLF+Support MEA+Support
+Skorpo_RAAS_v1 BAF+AirAssault WPMC+AirAssault
+GooseBay_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 MEA+CombinedArms TLF+Mechanized
+Lashkar_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Harju_AAS_v2 CAF+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v2 WPMC+AirAssault BAF+AirAssault
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Yehorivka_TC_v1 VDV+Armored PLA+Support
+Mutaha_AAS_v2 PLA+CombinedArms ADF+CombinedArms
+Belaya_Invasion_v1 IMF+Motorized TLF+Motorized
+Manicouagan_RAAS_v2 USMC+CombinedArms PLAAGF+CombinedArms
+Logar_RAAS_v1 RGF+CombinedArms TLF+CombinedArms
+Sanxian_RAAS_v1 WPMC+AirAssault CAF+Motorized
+AlBasrah_RAAS_v1 INS+Support PLANMC+Support
+Lashkar_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
+Anvil_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Narva_Destruction_v1 IMF+Mechanized ADF+Mechanized
+Kohat_AAS_v1 INS+LightInfantry MEA+AirAssault
+GooseBay_AAS_v1 WPMC+AirAssault CAF+AirAssault
+Chora_Skirmish_v1 VDV+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v3 WPMC+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Gorodok_Invasion_v1 PLA+AirAssault IMF+Motorized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v1 ADF+Mechanized INS+Mechanized
+FoolsRoad_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Tallil_TC_v1 USMC+Armored PLA+Armored
+Lashkar_AAS_v2 TLF+Motorized PLA+CombinedArms
+Manicouagan_Invasion_v1 VDV+CombinedArms PLAAGF+CombinedArms
+Anvil_RAAS_v2 CAF+AirAssault PLA+AirAssault
+Sanxian_AAS_v1 CAF+Support PLA+Support
+Yehorivka_AAS_v2 IMF+Mechanized ADF+Mechanized
+Skorpo_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Gorodok_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Logar_AAS_v1 WPMC+CombinedArms INS+CombinedArms
+BlackCoast_Invasion_v1 USMC+AmphibiousAssault VDV+Mechanized
+Kohat_RAAS_v2 VDV+Mechanized INS+Mechanized
+FoolsRoad_Skirmish_v1 PLA+CombinedArms IMF+CombinedArms
+AlBasrah_AAS_v1 MEA+AirAssault TLF+AirAssault
+Tallil_RAAS_v1 RGF+Motorized TLF+Motorized
+Fallujah_AAS_v1 PLA+Armored VDV+Armored
+Sumari_AAS_v3 TLF+CombinedArms VDV+CombinedArms
+GooseBay_Invasion_v1 WPMC+AirAssault BAF+CombinedArms
+Yehorivka_AAS_v2 WPMC+AirAssault ADF+AirAssault
+Gorodok_RAAS_v1 USMC+Armored PLA+Armored
+Anvil_Skirmish_v1 CAF+CombinedArms MEA+CombinedArms
+Sanxian_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Skorpo_RAAS_v1 IMF+LightInfantry USA+AirAssault
+Narva_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
+Logar_RAAS_v1 RGF+CombinedArms USMC+CombinedArms
+Belaya_TC_v1 IMF+Support PLA+Support
+Manicouagan_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+AlBasrah_AAS_v1 MEA+Support PLA+Support
+Kamdesh_Invasion_v1 VDV+AirAssault PLA+Support
+Fallujah_RAAS_v1 PLA+Support USA+Support
+BlackCoast_Skirmish_v1 PLANMC+CombinedArms USA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Yehorivka_AAS_v1 WPMC+AirAssault PLA+AirAssault
+Tallil_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+Chora_AAS_v1 INS+CombinedArms TLF+CombinedArms
+Mutaha_TC_v1 ADF+Mechanized MEA+Mechanized
+Lashkar_AAS_v2 TLF+AirAssault WPMC+AirAssault
+FoolsRoad_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Anvil_AAS_v1 INS+Motorized MEA+LightInfantry
+Manicouagan_Invasion_v2 PLANMC+CombinedArms VDV+CombinedArms
+Kamdesh_RAAS_v1 USA+AirAssault PLA+AirAssault
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Sumari_TC_v1 TLF+CombinedArms INS+CombinedArms
+BlackCoast_AAS_v1 VDV+Support USA+Motorized
+Tallil_RAAS_v1 PLA+Support USMC+Support
+Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
+Logar_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+Kohat_TC_v1 INS+CombinedArms VDV+CombinedArms
+Lashkar_AAS_v1 MEA+LightInfantry WPMC+LightInfantry
+FoolsRoad_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+AlBasrah_AAS_v1 WPMC+CombinedArms INS+Support
+Sanxian_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+Chora_AAS_v2 PLA+CombinedArms RGF+CombinedArms
+Anvil_TC_v1 INS+CombinedArms RGF+CombinedArms
+Kamdesh_AAS_v1 TLF+Motorized USA+Motorized
+Gorodok_AAS_v1 PLA+Armored IMF+Armored
