--- a/Tools/Rotation/LayerRotation/LayerRotation_24.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_24.cfg
@@ -1,200 +1,200 @@
-Yehorivka_TC_v1 WPMC+AirAssault BAF+AirAssault
-Sanxian_RAAS_v1 BAF+AirAssault WPMC+AirAssault
-Harju_AAS_v1 VDV+Mechanized USA+Armored
-Chora_TC_v1 VDV+CombinedArms CAF+CombinedArms
-Anvil_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-GooseBay_AAS_v1 USA+Armored PLAAGF+Armored
-Mestia_TC_v1 PLA+CombinedArms VDV+CombinedArms
-Kamdesh_TC_v1 WPMC+AirAssault USA+AirAssault
-Kohat_TC_v1 PLA+Support TLF+CombinedArms
-Gorodok_Destruction_v1 RGF+LightInfantry WPMC+LightInfantry
-Mutaha_AAS_v1 INS+CombinedArms PLA+CombinedArms
-Logar_TC_v1 INS+CombinedArms TLF+CombinedArms
-Yehorivka_RAAS_v1 USA+Motorized RGF+Motorized
-Lashkar_RAAS_v1 INS+Motorized VDV+Armored
-Harju_Skirmish_v2 BAF+CombinedArms WPMC+CombinedArms
-Fallujah_Invasion_v2 MEA+Mechanized INS+Mechanized
-Anvil_TC_v1 MEA+Support RGF+Support
-FoolsRoad_Skirmish_v1 IMF+CombinedArms VDV+CombinedArms
-Manicouagan_AAS_v1 WPMC+AirAssault PLA+LightInfantry
-Kohat_TC_v1 PLA+CombinedArms BAF+CombinedArms
-Gorodok_Invasion_v2 IMF+Mechanized ADF+Mechanized
-Mutaha_RAAS_v2 USA+Armored MEA+Armored
+Sumari_Invasion_v1 TLF+CombinedArms INS+CombinedArms
+Tallil_RAAS_v1 ADF+AirAssault PLA+LightInfantry
+Kohat_TC_v1 INS+Armored CAF+Armored
+Fallujah_RAAS_v1 USA+Armored INS+Armored
+FoolsRoad_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 PLANMC+Armored CAF+Armored
+Lashkar_Invasion_v1 WPMC+CombinedArms USMC+CombinedArms
+Yehorivka_AAS_v2 USA+AirAssault WPMC+AirAssault
+AlBasrah_TC_v1 MEA+LightInfantry PLAAGF+Mechanized
+Logar_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
 PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v2 WPMC+CombinedArms IMF+LightInfantry
-Kamdesh_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v2 RGF+Motorized USMC+Motorized
-Yehorivka_AAS_v1 ADF+CombinedArms IMF+CombinedArms
-Lashkar_TC_v1 CAF+Mechanized MEA+Mechanized
-Mestia_AAS_v1 USA+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 CAF+AirAssault TLF+Support
-Manicouagan_Invasion_v2 USMC+LightInfantry WPMC+LightInfantry
-FoolsRoad_Skirmish_v1 VDV+CombinedArms IMF+CombinedArms
-Gorodok_RAAS_v2 PLA+Armored BAF+Armored
-Harju_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
-Fallujah_AAS_v1 TLF+Armored PLA+Armored
-Belaya_TC_v1 TLF+Support IMF+Support
-Sumari_Invasion_v1 WPMC+CombinedArms USMC+CombinedArms
-Mutaha_RAAS_v1 MEA+LightInfantry PLA+LightInfantry
-Narva_AAS_v2 RGF+Mechanized ADF+Mechanized
-Lashkar_AAS_v1 PLA+CombinedArms WPMC+LightInfantry
-Kokan_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Yehorivka_Invasion_v2 WPMC+LightInfantry IMF+LightInfantry
-AlBasrah_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLANMC+CombinedArms
-Kohat_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Fallujah_AAS_v1 PLA+Support RGF+Motorized
-Tallil_Invasion_v1 PLA+Armored TLF+Armored
-Logar_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 WPMC+AirAssault BAF+AirAssault
-Harju_RAAS_v2 IMF+Armored RGF+Armored
-Narva_AAS_v1 IMF+CombinedArms CAF+CombinedArms
-Manicouagan_Invasion_v1 WPMC+LightInfantry USMC+CombinedArms
-Yehorivka_TC_v2 PLA+Support USMC+Support
-Gorodok_TC_v1 IMF+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v2 INS+Armored MEA+Armored
-Chora_TC_v1 PLA+CombinedArms USA+CombinedArms
-GooseBay_Invasion_v1 VDV+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 VDV+Support PLA+CombinedArms
-Sumari_TC_v1 MEA+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 TLF+AirAssault MEA+AirAssault
-Tallil_RAAS_v1 VDV+CombinedArms TLF+CombinedArms
-FoolsRoad_Invasion_v1 PLA+CombinedArms CAF+CombinedArms
-Kamdesh_AAS_v1 USA+LightInfantry PLA+LightInfantry
-Harju_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Logar_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 ADF+Mechanized RGF+Mechanized
-Gorodok_Destruction_v1 RGF+Motorized CAF+Motorized
-Anvil_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Mestia_TC_v1 USMC+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 WPMC+LightInfantry MEA+Support
-Fallujah_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 TLF+Support VDV+Support
-Sumari_Invasion_v1 MEA+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Manicouagan_RAAS_v2 VDV+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 WPMC+CombinedArms CAF+AirAssault
-Harju_Skirmish_v2 RGF+CombinedArms WPMC+CombinedArms
-AlBasrah_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
-Lashkar_AAS_v2 WPMC+AirAssault CAF+AirAssault
-Gorodok_AAS_v1 RGF+Support USA+Support
-FoolsRoad_TC_v1 USMC+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v1 INS+Armored MEA+AirAssault
-Anvil_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 USMC+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 BAF+Support RGF+Support
-Manicouagan_RAAS_v2 PLAAGF+Mechanized CAF+Mechanized
-Belaya_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Tallil_Invasion_v1 INS+LightInfantry CAF+Motorized
-Kohat_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 INS+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-AlBasrah_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-Kamdesh_RAAS_v1 USMC+CombinedArms INS+CombinedArms
-Fallujah_Invasion_v2 VDV+Mechanized ADF+CombinedArms
-Kokan_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
-Sanxian_RAAS_v1 USA+CombinedArms PLAAGF+CombinedArms
-Lashkar_AAS_v2 VDV+Armored PLA+Armored
-FoolsRoad_TC_v1 IMF+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 PLA+Armored INS+Armored
-Gorodok_TC_v1 PLA+CombinedArms CAF+Support
-Kohat_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault CAF+AirAssault
-GooseBay_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Narva_Invasion_v1 USA+AirAssault WPMC+LightInfantry
-Skorpo_RAAS_v1 VDV+AirAssault ADF+AirAssault
+Belaya_AAS_v2 IMF+Armored CAF+Armored
+Narva_Destruction_v1 WPMC+LightInfantry RGF+LightInfantry
+BlackCoast_AAS_v1 PLANMC+CombinedArms VDV+Support
+Kokan_Skirmish_v1 TLF+CombinedArms USA+CombinedArms
+Fallujah_RAAS_v2 ADF+CombinedArms TLF+CombinedArms
+Kamdesh_AAS_v1 RGF+Armored TLF+Armored
+Chora_RAAS_v1 PLA+CombinedArms INS+CombinedArms
+Kohat_Invasion_v2 PLA+CombinedArms VDV+CombinedArms
+Yehorivka_AAS_v1 WPMC+AirAssault BAF+AirAssault
+Anvil_RAAS_v2 WPMC+LightInfantry PLA+Armored
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Mestia_TC_v1 BAF+CombinedArms PLA+CombinedArms
+GooseBay_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
+AlBasrah_Invasion_v2 BAF+Mechanized PLAAGF+Mechanized
+Lashkar_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+Belaya_AAS_v2 WPMC+AirAssault CAF+CombinedArms
+Kokan_RAAS_v1 CAF+CombinedArms INS+CombinedArms
+Manicouagan_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v2 PLA+LightInfantry INS+LightInfantry
+Harju_Invasion_v3 IMF+Mechanized USA+Mechanized
+Chora_AAS_v2 TLF+CombinedArms BAF+CombinedArms
+Yehorivka_AAS_v1 IMF+Motorized USMC+Motorized
+Kamdesh_RAAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Kohat_RAAS_v2 INS+Support USA+Support
+Fallujah_RAAS_v2 CAF+CombinedArms TLF+CombinedArms
+Mestia_Invasion_v1 PLA+CombinedArms IMF+CombinedArms
+Anvil_AAS_v1 TLF+Armored MEA+Armored
+AlBasrah_AAS_v1 INS+CombinedArms USMC+CombinedArms
+Tallil_RAAS_v2 BAF+Support WPMC+CombinedArms
+FoolsRoad_Skirmish_v2 VDV+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
+BlackCoast_Invasion_v2 ADF+CombinedArms PLA+CombinedArms
+Sumari_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Belaya_RAAS_v1 TLF+Mechanized IMF+Mechanized
+Harju_RAAS_v1 WPMC+AirAssault IMF+LightInfantry
+Fallujah_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
+Yehorivka_RAAS_v2 TLF+Mechanized IMF+Mechanized
+Manicouagan_Invasion_v1 PLANMC+Support CAF+Support
+Anvil_RAAS_v2 USA+Motorized RGF+Motorized
+Tallil_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+Sanxian_RAAS_v1 ADF+AirAssault PLAAGF+Armored
+FoolsRoad_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_AAS_v2 USA+CombinedArms PLAAGF+CombinedArms
+Narva_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Mestia_AAS_v1 ADF+CombinedArms IMF+CombinedArms
+Fallujah_TC_v1 CAF+CombinedArms RGF+CombinedArms
+AlBasrah_AAS_v1 MEA+AirAssault TLF+Mechanized
+Harju_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Kamdesh_Invasion_v1 WPMC+LightInfantry RGF+LightInfantry
+Mutaha_AAS_v2 TLF+Support USMC+Support
+Kokan_AAS_v1 USMC+CombinedArms RGF+CombinedArms
+Lashkar_AAS_v1 RGF+Support TLF+Armored
+GooseBay_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Anvil_RAAS_v1 INS+Armored VDV+Armored
+Tallil_Invasion_v1 RGF+Motorized INS+Motorized
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 PLA+LightInfantry USA+LightInfantry
+Chora_TC_v1 USMC+CombinedArms INS+CombinedArms
+Sanxian_AAS_v1 ADF+Mechanized WPMC+AirAssault
+Narva_RAAS_v1 VDV+CombinedArms USMC+CombinedArms
+FoolsRoad_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
+Manicouagan_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 IMF+Mechanized ADF+Mechanized
+Lashkar_TC_v2 CAF+Mechanized TLF+Support
+Gorodok_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Fallujah_RAAS_v1 BAF+Support RGF+Support
+Anvil_Invasion_v1 INS+Motorized PLA+Motorized
+Mestia_AAS_v2 PLA+CombinedArms USMC+CombinedArms
+Mutaha_AAS_v1 VDV+Armored ADF+CombinedArms
+Kohat_RAAS_v2 BAF+AirAssault TLF+AirAssault
+Kokan_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 PLA+Support VDV+Support
+Tallil_Invasion_v1 VDV+Mechanized USA+Mechanized
+Yehorivka_RAAS_v1 TLF+AirAssault WPMC+AirAssault
+Kamdesh_AAS_v1 ADF+AirAssault PLA+AirAssault
+Lashkar_AAS_v2 RGF+Motorized TLF+Motorized
+FoolsRoad_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v2 USA+Support PLA+Armored
+Skorpo_Invasion_v1 IMF+Armored VDV+Armored
+Gorodok_AAS_v1 VDV+Support BAF+Support
+Fallujah_TC_v1 MEA+Support PLA+Support
+Mestia_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Manicouagan_RAAS_v1 USMC+LightInfantry PLA+CombinedArms
+Harju_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Kohat_Invasion_v2 TLF+Motorized PLA+Motorized
+Logar_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v1 CAF+Support VDV+Support
+Kamdesh_RAAS_v1 USA+AirAssault PLA+AirAssault
+FoolsRoad_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 TLF+CombinedArms WPMC+AirAssault
+Tallil_Invasion_v1 TLF+Mechanized ADF+Mechanized
+Sumari_AAS_v1 USMC+CombinedArms MEA+CombinedArms
+Lashkar_TC_v2 TLF+Mechanized MEA+Mechanized
+Narva_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms USA+AirAssault
+Harju_AAS_v2 USA+CombinedArms RGF+CombinedArms
+AlBasrah_Invasion_v2 INS+Mechanized CAF+Mechanized
+Gorodok_RAAS_v1 CAF+Motorized PLA+Motorized
+Logar_TC_v1 MEA+CombinedArms PLA+CombinedArms
+Yehorivka_AAS_v2 WPMC+LightInfantry IMF+Armored
+Sanxian_AAS_v3 PLANMC+Armored BAF+Armored
+FoolsRoad_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 MEA+Mechanized ADF+Mechanized
+GooseBay_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Fallujah_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
+Narva_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 PLA+AirAssault INS+Motorized
+Chora_RAAS_v1 CAF+CombinedArms RGF+CombinedArms
+Manicouagan_Invasion_v2 RGF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Mestia_RAAS_v1 TLF+CombinedArms USA+CombinedArms
+Kamdesh_RAAS_v1 CAF+Mechanized PLA+CombinedArms
+Mutaha_TC_v1 PLA+Motorized TLF+Motorized
+AlBasrah_AAS_v1 VDV+Support USMC+Support
+Belaya_AAS_v2 BAF+CombinedArms IMF+CombinedArms
+GooseBay_Invasion_v1 RGF+Support USA+Support
+Sumari_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
+Tallil_AAS_v1 USMC+CombinedArms TLF+CombinedArms
+Lashkar_TC_v2 INS+Armored CAF+Armored
+Manicouagan_RAAS_v2 VDV+Armored PLANMC+Armored
+Kokan_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Yehorivka_Invasion_v1 TLF+CombinedArms IMF+Mechanized
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Sanxian_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
+Anvil_RAAS_v2 MEA+CombinedArms USA+CombinedArms
+Mestia_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
+Narva_AAS_v3 VDV+CombinedArms IMF+CombinedArms
+Fallujah_Invasion_v2 PLA+CombinedArms TLF+Support
+Kamdesh_AAS_v1 MEA+AirAssault TLF+AirAssault
+Kohat_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+AlBasrah_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Gorodok_AAS_v1 TLF+CombinedArms IMF+CombinedArms
+Manicouagan_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
+Chora_AAS_v3 RGF+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 PLA+CombinedArms USMC+CombinedArms
+Mutaha_RAAS_v2 TLF+AirAssault PLA+AirAssault
+Belaya_AAS_v3 CAF+Armored PLA+Armored
+Kokan_RAAS_v1 INS+CombinedArms VDV+CombinedArms
+Narva_RAAS_v1 BAF+Mechanized IMF+Mechanized
+Lashkar_TC_v1 PLA+AirAssault BAF+CombinedArms
+Anvil_RAAS_v2 BAF+AirAssault PLA+AirAssault
+Mestia_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v2 INS+Mechanized TLF+Mechanized
+Fallujah_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Chora_AAS_v3 PLA+CombinedArms USMC+CombinedArms
+Kamdesh_RAAS_v1 PLA+LightInfantry MEA+LightInfantry
+Kohat_TC_v1 ADF+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 TLF+CombinedArms PLANMC+AirAssault
+FoolsRoad_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
+Narva_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Lashkar_AAS_v2 TLF+Armored PLA+Armored
+GooseBay_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 ADF+Mechanized PLAAGF+Armored
+Belaya_AAS_v2 RGF+Mechanized IMF+Mechanized
+Sumari_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
+Yehorivka_RAAS_v2 WPMC+AirAssault BAF+AirAssault
+Anvil_TC_v1 USA+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v1 PLA+CombinedArms MEA+LightInfantry
+Fallujah_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+FoolsRoad_TC_v1 RGF+CombinedArms IMF+CombinedArms
+Kohat_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_Invasion_v1 TLF+Armored BAF+Mechanized
+Narva_AAS_v2 VDV+AirAssault ADF+AirAssault
+Gorodok_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Mestia_TC_v1 BAF+CombinedArms TLF+CombinedArms
+AlBasrah_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Mutaha_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Kokan_Invasion_v1 TLF+CombinedArms USA+CombinedArms
+Lashkar_AAS_v1 VDV+Armored WPMC+LightInfantry
+Fallujah_AAS_v1 RGF+LightInfantry PLA+LightInfantry
+Logar_RAAS_v1 RGF+CombinedArms USA+CombinedArms
 PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_AAS_v1 ADF+CombinedArms TLF+CombinedArms
-Lashkar_RAAS_v1 TLF+Armored USMC+Armored
-Mutaha_RAAS_v2 PLA+LightInfantry VDV+Mechanized
-Gorodok_RAAS_v2 IMF+Motorized USA+Motorized
-Anvil_Invasion_v1 RGF+LightInfantry PLA+LightInfantry
-Fallujah_Skirmish_v1 USA+CombinedArms VDV+CombinedArms
-Yehorivka_AAS_v2 PLA+AirAssault ADF+AirAssault
-Belaya_AAS_v3 PLA+Motorized IMF+Motorized
-Kokan_AAS_v2 PLA+CombinedArms CAF+CombinedArms
-Manicouagan_Invasion_v2 WPMC+CombinedArms PLANMC+CombinedArms
-Skorpo_RAAS_v1 IMF+Armored VDV+Armored
-Tallil_TC_v1 USA+Mechanized INS+CombinedArms
-Chora_Skirmish_v1 TLF+CombinedArms CAF+CombinedArms
-Kohat_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
-Mutaha_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-FoolsRoad_Skirmish_v2 IMF+CombinedArms CAF+CombinedArms
-AlBasrah_AAS_v1 PLANMC+AirAssault VDV+AirAssault
-Gorodok_TC_v1 BAF+AirAssault WPMC+AirAssault
-Yehorivka_Skirmish_v2 IMF+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 PLA+AirAssault BAF+Mechanized
-Sanxian_AAS_v2 USA+LightInfantry WPMC+LightInfantry
-Sumari_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 VDV+Mechanized IMF+Mechanized
-Belaya_AAS_v2 RGF+LightInfantry WPMC+LightInfantry
-Tallil_RAAS_v1 USA+LightInfantry PLA+Motorized
-Mutaha_RAAS_v2 RGF+Mechanized ADF+Mechanized
-Mestia_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v1 TLF+AirAssault WPMC+AirAssault
-AlBasrah_AAS_v1 BAF+Armored RGF+Armored
-Fallujah_TC_v1 WPMC+CombinedArms USA+CombinedArms
-Narva_TC_v1 VDV+Support IMF+Armored
-Yehorivka_Destruction_v1 TLF+CombinedArms RGF+CombinedArms
-FoolsRoad_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Gorodok_TC_v1 RGF+CombinedArms USMC+CombinedArms
-Kohat_RAAS_v1 BAF+Support PLA+Support
-Harju_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_Invasion_v1 TLF+Mechanized INS+Mechanized
-Tallil_AAS_v1 ADF+AirAssault WPMC+AirAssault
-Kokan_AAS_v2 MEA+CombinedArms USMC+CombinedArms
-Lashkar_TC_v2 VDV+CombinedArms PLA+CombinedArms
-GooseBay_RAAS_v2 RGF+Support USMC+CombinedArms
-Mutaha_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Fallujah_Invasion_v2 VDV+Support BAF+Support
-AlBasrah_TC_v1 USA+Armored RGF+Armored
-Sumari_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Anvil_AAS_v1 USA+Armored RGF+Armored
-Gorodok_Invasion_v1 RGF+CombinedArms TLF+CombinedArms
-BlackCoast_Skirmish_v1 IMF+CombinedArms VDV+CombinedArms
-Yehorivka_RAAS_v1 ADF+AirAssault IMF+LightInfantry
-Tallil_RAAS_v1 RGF+Mechanized ADF+Mechanized
-GooseBay_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 VDV+Mechanized BAF+Mechanized
-Mutaha_TC_v1 RGF+Armored CAF+Armored
-Kohat_TC_v1 CAF+CombinedArms WPMC+LightInfantry
-Fallujah_RAAS_v1 PLA+Support RGF+Support
-Kokan_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Skorpo_Invasion_v1 WPMC+CombinedArms ADF+CombinedArms
-AlBasrah_RAAS_v1 TLF+Support PLANMC+Support
-Sumari_TC_v1 VDV+CombinedArms MEA+CombinedArms
-Anvil_TC_v1 PLA+Support TLF+Support
-Tallil_TC_v1 PLA+CombinedArms ADF+CombinedArms
-FoolsRoad_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
-Yehorivka_RAAS_v2 PLA+Support CAF+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_Skirmish_v1 VDV+CombinedArms IMF+CombinedArms
-Mutaha_TC_v1 USMC+Armored PLA+Armored
-Kamdesh_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-Chora_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-AlBasrah_RAAS_v1 TLF+Armored INS+Armored
-Gorodok_TC_v1 IMF+Motorized BAF+Mechanized
-Sanxian_AAS_v2 WPMC+AirAssault PLA+AirAssault
-Manicouagan_Invasion_v1 USA+Armored PLANMC+Armored
-Lashkar_TC_v2 MEA+Mechanized ADF+Mechanized
-Skorpo_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-Kokan_AAS_v2 PLA+CombinedArms INS+CombinedArms
-Belaya_RAAS_v1 TLF+AirAssault WPMC+AirAssault
-Narva_Invasion_v2 IMF+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 MEA+CombinedArms USMC+CombinedArms
-Harju_RAAS_v2 WPMC+AirAssault VDV+AirAssault
-Anvil_RAAS_v1 VDV+CombinedArms USMC+CombinedArms
-Chora_AAS_v2 PLA+CombinedArms USMC+CombinedArms
-Tallil_Invasion_v1 USA+Mechanized PLA+Armored
-Fallujah_RAAS_v2 USA+Mechanized INS+Mechanized
-GooseBay_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Sanxian_RAAS_v2 PLA+Mechanized ADF+Mechanized
-AlBasrah_TC_v1 CAF+CombinedArms PLANMC+CombinedArms
-Kohat_Invasion_v1 TLF+Armored PLA+Armored
-Sumari_AAS_v2 BAF+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 PLA+Motorized BAF+Support
-Gorodok_RAAS_v1 USMC+Motorized PLA+Motorized
-Lashkar_AAS_v1 TLF+CombinedArms INS+CombinedArms
-FoolsRoad_Invasion_v1 WPMC+CombinedArms VDV+CombinedArms
+Yehorivka_AAS_v1 IMF+Armored PLA+Armored
+Manicouagan_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
+Kohat_RAAS_v2 CAF+AirAssault INS+Support
+Gorodok_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
+GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Kamdesh_RAAS_v1 TLF+AirAssault MEA+AirAssault
+Mutaha_Invasion_v1 INS+LightInfantry TLF+Mechanized
+Skorpo_RAAS_v1 RGF+Motorized USA+Motorized
+Kokan_TC_v1 PLA+CombinedArms BAF+CombinedArms
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v2 WPMC+AirAssault VDV+AirAssault
+Chora_AAS_v3 RGF+CombinedArms PLA+CombinedArms
