--- a/Tools/Rotation/LayerRotation/LayerRotation_5.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_5.cfg
@@ -1,200 +1,200 @@
-Narva_Destruction_v1 CAF+Support IMF+Support
-Kohat_AAS_v1 CAF+Support RGF+Support
-Fallujah_AAS_v1 RGF+Armored BAF+Armored
-Lashkar_RAAS_v1 INS+Motorized CAF+Motorized
-Logar_TC_v1 WPMC+CombinedArms PLA+CombinedArms
-GooseBay_Invasion_v1 RGF+Armored WPMC+CombinedArms
-Manicouagan_AAS_v1 PLANMC+LightInfantry RGF+LightInfantry
-Mestia_TC_v1 WPMC+CombinedArms USA+CombinedArms
-Tallil_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
-Mutaha_AAS_v2 PLA+CombinedArms INS+CombinedArms
-Belaya_TC_v1 WPMC+CombinedArms USMC+Armored
-FoolsRoad_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Yehorivka_Invasion_v2 TLF+CombinedArms IMF+CombinedArms
-AlBasrah_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Kohat_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Kamdesh_TC_v1 WPMC+CombinedArms INS+LightInfantry
-Lashkar_RAAS_v1 MEA+AirAssault WPMC+AirAssault
-Mestia_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-GooseBay_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Tallil_RAAS_v1 INS+CombinedArms MEA+CombinedArms
-Fallujah_RAAS_v1 CAF+Armored MEA+Armored
-Harju_RAAS_v1 WPMC+LightInfantry USMC+CombinedArms
-Sumari_Invasion_v1 BAF+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v3 CAF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v2 MEA+Mechanized ADF+AirAssault
-Kokan_Invasion_v1 INS+CombinedArms TLF+CombinedArms
-AlBasrah_TC_v1 PLA+Mechanized ADF+Mechanized
-Lashkar_RAAS_v1 WPMC+AirAssault ADF+AirAssault
-FoolsRoad_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Belaya_AAS_v2 VDV+CombinedArms ADF+CombinedArms
-Yehorivka_Destruction_v1 BAF+CombinedArms PLA+Motorized
-Sanxian_RAAS_v1 CAF+Mechanized PLAAGF+Mechanized
-Chora_AAS_v2 INS+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v2 IMF+CombinedArms RGF+CombinedArms
-Fallujah_AAS_v1 INS+Mechanized MEA+Mechanized
-Kamdesh_Insurgency_v1 VDV+Mechanized INS+Mechanized
-Manicouagan_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 IMF+Mechanized TLF+Support
-Anvil_TC_v1 RGF+Mechanized ADF+Mechanized
-Kohat_RAAS_v1 USMC+LightInfantry PLA+LightInfantry
-Mestia_TC_v1 BAF+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 WPMC+LightInfantry USA+LightInfantry
-Belaya_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 PLA+Motorized INS+Motorized
-AlBasrah_TC_v1 WPMC+CombinedArms CAF+CombinedArms
-BlackCoast_Invasion_v2 TLF+CombinedArms USA+Mechanized
-Yehorivka_Skirmish_v2 TLF+CombinedArms CAF+CombinedArms
-Gorodok_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Harju_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
-Kokan_AAS_v2 MEA+CombinedArms PLA+CombinedArms
-Skorpo_Invasion_v1 USMC+Motorized IMF+Motorized
-Fallujah_TC_v1 INS+Mechanized VDV+Support
-Kamdesh_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Lashkar_TC_v2 VDV+AirAssault WPMC+AirAssault
-Anvil_Invasion_v1 PLA+CombinedArms MEA+CombinedArms
-AlBasrah_AAS_v1 PLANMC+Support USMC+Support
-Sumari_RAAS_v1 MEA+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 IMF+Motorized CAF+Motorized
-Tallil_RAAS_v1 TLF+Support MEA+LightInfantry
-BlackCoast_Invasion_v2 PLA+Armored USMC+Armored
-Yehorivka_AAS_v1 PLA+Motorized USA+Motorized
-Skorpo_RAAS_v1 IMF+Mechanized BAF+Mechanized
-Mutaha_TC_v1 MEA+Support TLF+Support
-Chora_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Narva_Destruction_v1 BAF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 RGF+Motorized MEA+Mechanized
-Logar_TC_v1 INS+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Belaya_TC_v1 VDV+CombinedArms PLA+CombinedArms
-Sumari_Invasion_v1 PLA+CombinedArms CAF+CombinedArms
-Lashkar_TC_v1 WPMC+CombinedArms CAF+Support
-AlBasrah_AAS_v1 TLF+CombinedArms ADF+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v1 PLAAGF+Mechanized IMF+Mechanized
-Mutaha_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 WPMC+AirAssault BAF+CombinedArms
-Anvil_RAAS_v1 TLF+Armored RGF+Armored
-Kamdesh_TC_v1 MEA+Support PLA+Support
-FoolsRoad_Skirmish_v2 VDV+CombinedArms PLA+CombinedArms
-Yehorivka_Destruction_v1 TLF+Support PLA+Support
-Gorodok_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-Manicouagan_Skirmish_v2 CAF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v2 PLAAGF+Armored ADF+Mechanized
-AlBasrah_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
-Belaya_Invasion_v2 ADF+CombinedArms PLA+CombinedArms
-Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Kohat_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Mutaha_AAS_v2 CAF+Mechanized INS+Mechanized
-Tallil_TC_v1 VDV+AirAssault WPMC+AirAssault
-GooseBay_Invasion_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-Kokan_Skirmish_v1 ADF+CombinedArms RGF+CombinedArms
-Anvil_RAAS_v1 BAF+Support PLA+AirAssault
-Gorodok_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
-Kamdesh_Invasion_v1 USMC+LightInfantry PLA+LightInfantry
-Belaya_AAS_v2 TLF+CombinedArms VDV+CombinedArms
-BlackCoast_RAAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Manicouagan_Skirmish_v2 PLA+CombinedArms USA+CombinedArms
-Sanxian_AAS_v1 WPMC+LightInfantry PLA+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Tallil_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-Fallujah_Invasion_v2 PLA+CombinedArms INS+CombinedArms
-Anvil_RAAS_v2 TLF+AirAssault WPMC+AirAssault
-Skorpo_RAAS_v1 WPMC+AirAssault IMF+Armored
-Chora_Skirmish_v1 INS+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 CAF+Armored VDV+Armored
-Lashkar_Invasion_v1 MEA+CombinedArms INS+CombinedArms
-GooseBay_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Yehorivka_RAAS_v1 ADF+AirAssault TLF+AirAssault
-BlackCoast_RAAS_v2 VDV+Armored IMF+Armored
-Kokan_TC_v1 VDV+CombinedArms PLA+CombinedArms
-Manicouagan_Invasion_v1 WPMC+CombinedArms USA+CombinedArms
-Belaya_RAAS_v1 TLF+Mechanized WPMC+LightInfantry
-Sanxian_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Mestia_Skirmish_v1 RGF+CombinedArms USMC+CombinedArms
-AlBasrah_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Gorodok_Destruction_v1 PLA+CombinedArms ADF+CombinedArms
-Lashkar_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 INS+CombinedArms MEA+LightInfantry
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 USA+CombinedArms TLF+CombinedArms
-BlackCoast_Invasion_v2 PLAAGF+CombinedArms ADF+CombinedArms
-Fallujah_AAS_v1 VDV+Mechanized CAF+Mechanized
-Manicouagan_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
-Yehorivka_Skirmish_v2 WPMC+CombinedArms RGF+CombinedArms
-GooseBay_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Kohat_Invasion_v2 WPMC+LightInfantry PLA+Armored
-FoolsRoad_AAS_v1 ADF+CombinedArms TLF+CombinedArms
-Lashkar_RAAS_v1 VDV+AirAssault BAF+AirAssault
-Kamdesh_AAS_v1 TLF+Armored CAF+Armored
-Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_Destruction_v1 RGF+Motorized PLA+Motorized
-AlBasrah_TC_v1 WPMC+AirAssault MEA+AirAssault
-Tallil_TC_v1 PLA+AirAssault MEA+Mechanized
-Belaya_Skirmish_v1 WPMC+CombinedArms USMC+CombinedArms
-Sanxian_AAS_v2 CAF+AirAssault PLANMC+AirAssault
-Yehorivka_Destruction_v1 WPMC+LightInfantry PLA+LightInfantry
-Chora_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-GooseBay_AAS_v1 USA+Armored WPMC+AirAssault
+Mutaha_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Belaya_RAAS_v1 RGF+Armored IMF+Armored
+Anvil_RAAS_v2 TLF+CombinedArms MEA+CombinedArms
+Sanxian_Invasion_v2 PLANMC+Armored BAF+Armored
+Kamdesh_AAS_v1 WPMC+AirAssault PLA+LightInfantry
+AlBasrah_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
+GooseBay_AAS_v1 USA+CombinedArms RGF+CombinedArms
+Tallil_AAS_v1 USMC+Support VDV+Support
+Harju_AAS_v1 IMF+CombinedArms ADF+CombinedArms
+Skorpo_Invasion_v1 IMF+Motorized WPMC+LightInfantry
+Kokan_AAS_v1 TLF+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v1 INS+Support PLA+Support
+Yehorivka_AAS_v1 IMF+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v2 PLA+Support TLF+Support
+FoolsRoad_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Kamdesh_TC_v1 PLA+LightInfantry CAF+AirAssault
+AlBasrah_RAAS_v1 PLAAGF+Armored USMC+Armored
+Narva_Destruction_v1 VDV+CombinedArms CAF+CombinedArms
+Belaya_AAS_v2 IMF+CombinedArms BAF+CombinedArms
+Manicouagan_AAS_v3 WPMC+CombinedArms PLA+CombinedArms
+Mutaha_TC_v1 PLA+Armored INS+CombinedArms
+Gorodok_RAAS_v2 USA+LightInfantry WPMC+LightInfantry
+Kokan_AAS_v1 RGF+CombinedArms MEA+CombinedArms
+Kohat_Invasion_v1 INS+CombinedArms BAF+CombinedArms
+Sanxian_AAS_v3 WPMC+CombinedArms ADF+CombinedArms
+BlackCoast_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
+Harju_RAAS_v1 VDV+Support IMF+Support
+Kamdesh_RAAS_v1 USMC+Support MEA+Support
+Anvil_RAAS_v1 INS+Motorized BAF+Armored
+Narva_Destruction_v1 USMC+Support VDV+Support
+Mestia_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
+Fallujah_TC_v1 PLA+LightInfantry USMC+LightInfantry
+FoolsRoad_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v2 TLF+Support IMF+Support
+Sanxian_AAS_v3 WPMC+CombinedArms PLAAGF+CombinedArms
+AlBasrah_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
+Logar_RAAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 PLA+AirAssault CAF+Motorized
+Anvil_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
+Sumari_RAAS_v1 MEA+CombinedArms INS+CombinedArms
+Gorodok_TC_v1 BAF+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v2 USMC+CombinedArms PLA+CombinedArms
+Narva_Destruction_v1 WPMC+LightInfantry USMC+LightInfantry
+Lashkar_AAS_v2 PLA+AirAssault WPMC+AirAssault
+Tallil_AAS_v1 TLF+Support RGF+Support
+FoolsRoad_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
+Yehorivka_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
+Fallujah_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kamdesh_Invasion_v1 VDV+AirAssault PLA+Armored
+Mestia_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 TLF+Support PLA+Support
 PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Logar_RAAS_v1 RGF+CombinedArms BAF+CombinedArms
-Kohat_TC_v1 TLF+Motorized USMC+Motorized
-Lashkar_AAS_v2 USA+Motorized INS+Motorized
-Manicouagan_Invasion_v2 WPMC+CombinedArms VDV+Mechanized
-Narva_TC_v1 IMF+CombinedArms ADF+CombinedArms
-FoolsRoad_TC_v1 CAF+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v2 CAF+Motorized RGF+Motorized
-Anvil_RAAS_v2 BAF+Mechanized MEA+Mechanized
-Kamdesh_Invasion_v1 VDV+Support TLF+Support
-Fallujah_RAAS_v2 WPMC+CombinedArms RGF+CombinedArms
-Gorodok_RAAS_v1 USA+Support VDV+Support
-Sanxian_RAAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 MEA+Mechanized PLA+CombinedArms
-Lashkar_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
-Mestia_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 TLF+Support USMC+Support
-AlBasrah_TC_v1 MEA+Support RGF+Support
-FoolsRoad_TC_v1 TLF+CombinedArms IMF+CombinedArms
-Tallil_RAAS_v2 RGF+CombinedArms ADF+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms ADF+CombinedArms
-BlackCoast_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v1 MEA+Support PLA+Support
-Kamdesh_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
-Chora_AAS_v3 TLF+CombinedArms MEA+CombinedArms
-Belaya_Invasion_v1 PLA+Support ADF+Mechanized
-Gorodok_TC_v1 WPMC+AirAssault VDV+AirAssault
+Chora_TC_v1 BAF+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v3 USA+Support PLA+CombinedArms
+Harju_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v2 TLF+Mechanized VDV+Mechanized
+Sumari_AAS_v3 WPMC+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v2 RGF+Support TLF+Support
+AlBasrah_TC_v1 PLAAGF+Mechanized CAF+AirAssault
+Sanxian_RAAS_v2 ADF+AirAssault WPMC+AirAssault
+Kamdesh_Insurgency_v1 ADF+Mechanized INS+Mechanized
+Fallujah_RAAS_v1 RGF+Motorized TLF+Motorized
+Mutaha_AAS_v1 INS+CombinedArms ADF+CombinedArms
+Lashkar_TC_v2 TLF+Support PLA+Armored
+Gorodok_RAAS_v1 IMF+Mechanized RGF+Mechanized
+Mestia_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Kohat_Invasion_v1 INS+Armored MEA+Armored
+Yehorivka_AAS_v2 PLA+Armored TLF+Armored
+Manicouagan_AAS_v2 VDV+Armored WPMC+CombinedArms
+Anvil_TC_v1 PLA+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 PLANMC+AirAssault TLF+AirAssault
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Fallujah_Invasion_v2 VDV+CombinedArms WPMC+CombinedArms
+Harju_AAS_v2 BAF+CombinedArms IMF+CombinedArms
+AlBasrah_TC_v1 RGF+Mechanized ADF+Mechanized
+Skorpo_RAAS_v1 IMF+Mechanized BAF+Mechanized
+FoolsRoad_AAS_v1 RGF+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v2 TLF+CombinedArms RGF+CombinedArms
+GooseBay_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Yehorivka_Invasion_v2 TLF+Mechanized ADF+Mechanized
+Kohat_RAAS_v1 PLA+Support WPMC+AirAssault
+Belaya_AAS_v2 IMF+Armored TLF+Armored
+Mestia_Skirmish_v1 IMF+CombinedArms TLF+CombinedArms
+Sanxian_AAS_v3 WPMC+CombinedArms PLAAGF+CombinedArms
+Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Fallujah_Insurgency_v1 TLF+Motorized INS+Support
+Lashkar_AAS_v1 INS+Support TLF+Support
+Kamdesh_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
+Anvil_RAAS_v1 USA+Support VDV+Support
+Gorodok_RAAS_v1 TLF+AirAssault WPMC+AirAssault
+Chora_AAS_v2 TLF+CombinedArms INS+CombinedArms
+Harju_Invasion_v3 IMF+Motorized WPMC+CombinedArms
+Kohat_AAS_v1 USMC+Armored PLA+Armored
+Manicouagan_Skirmish_v2 WPMC+CombinedArms USA+CombinedArms
+Skorpo_RAAS_v1 VDV+Mechanized ADF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Logar_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Tallil_Invasion_v1 PLA+AirAssault RGF+Motorized
+GooseBay_RAAS_v2 WPMC+AirAssault CAF+AirAssault
+Sumari_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
+BlackCoast_AAS_v2 RGF+CombinedArms PLA+CombinedArms
 Fallujah_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-Mestia_AAS_v1 ADF+CombinedArms TLF+CombinedArms
-Mutaha_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Lashkar_Invasion_v1 CAF+CombinedArms TLF+Armored
-GooseBay_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Skorpo_RAAS_v1 IMF+Support USMC+Support
-Anvil_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
-AlBasrah_RAAS_v1 PLANMC+AirAssault ADF+AirAssault
-Narva_Destruction_v1 IMF+LightInfantry WPMC+CombinedArms
-Kokan_TC_v1 PLA+CombinedArms BAF+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v3 RGF+LightInfantry PLA+LightInfantry
-Chora_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Fallujah_Invasion_v1 WPMC+CombinedArms TLF+Support
-Kohat_AAS_v1 TLF+Armored VDV+Armored
-Mutaha_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
-Yehorivka_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Kamdesh_RAAS_v1 MEA+CombinedArms BAF+CombinedArms
-Gorodok_AAS_v1 RGF+Mechanized IMF+Mechanized
-AlBasrah_Invasion_v2 PLAAGF+CombinedArms MEA+CombinedArms
-BlackCoast_RAAS_v2 VDV+Armored PLAAGF+CombinedArms
-Tallil_RAAS_v2 USA+CombinedArms VDV+CombinedArms
-FoolsRoad_RAAS_v1 RGF+CombinedArms ADF+CombinedArms
-Anvil_RAAS_v2 TLF+AirAssault PLA+AirAssault
-Lashkar_AAS_v2 TLF+Support INS+Support
-Skorpo_Invasion_v1 VDV+CombinedArms IMF+CombinedArms
-Mestia_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Narva_AAS_v2 USMC+Armored IMF+Armored
+Chora_Invasion_v2 RGF+CombinedArms BAF+CombinedArms
+Sanxian_AAS_v3 CAF+Mechanized PLA+Mechanized
+AlBasrah_TC_v1 INS+Mechanized USMC+LightInfantry
+Mestia_AAS_v1 IMF+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v2 PLA+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 INS+Motorized CAF+Motorized
+Belaya_Invasion_v1 PLA+CombinedArms TLF+CombinedArms
+Logar_RAAS_v1 RGF+CombinedArms PLA+CombinedArms
+Tallil_RAAS_v2 PLA+LightInfantry MEA+LightInfantry
+Mutaha_AAS_v1 CAF+Armored PLA+Armored
+Kohat_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Chora_TC_v1 INS+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 MEA+Armored CAF+Armored
+Yehorivka_Invasion_v2 ADF+CombinedArms TLF+CombinedArms
+Mestia_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 TLF+Armored INS+Armored
+Harju_AAS_v1 CAF+Mechanized IMF+Mechanized
+Gorodok_RAAS_v2 RGF+Mechanized IMF+Mechanized
+Anvil_TC_v1 INS+CombinedArms PLA+CombinedArms
+Sumari_AAS_v3 TLF+CombinedArms MEA+CombinedArms
+Belaya_Invasion_v1 IMF+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v2 IMF+Mechanized ADF+Mechanized
+Narva_RAAS_v1 WPMC+LightInfantry RGF+Armored
+Kokan_RAAS_v1 USMC+CombinedArms INS+CombinedArms
+Lashkar_TC_v2 TLF+Support CAF+Support
+Kamdesh_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Mutaha_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v2 BAF+Armored PLA+Armored
+Gorodok_RAAS_v2 PLA+Armored IMF+Armored
+Yehorivka_RAAS_v2 WPMC+AirAssault IMF+Support
+Tallil_Invasion_v1 TLF+Armored RGF+Armored
+Logar_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
+AlBasrah_TC_v1 WPMC+AirAssault CAF+AirAssault
+Sanxian_RAAS_v2 PLAAGF+Mechanized USA+Mechanized
+FoolsRoad_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+GooseBay_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
+Kokan_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Anvil_TC_v1 RGF+Support PLA+AirAssault
+Skorpo_RAAS_v1 USA+Support RGF+Support
+Mestia_AAS_v2 USMC+CombinedArms PLA+CombinedArms
+Kamdesh_RAAS_v1 INS+Support TLF+Support
+Kohat_RAAS_v2 ADF+AirAssault TLF+AirAssault
+Yehorivka_Invasion_v1 ADF+CombinedArms RGF+CombinedArms
+Manicouagan_AAS_v2 VDV+AirAssault PLANMC+AirAssault
+Fallujah_AAS_v1 RGF+Motorized PLA+Motorized
+Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+BlackCoast_RAAS_v1 PLANMC+Motorized IMF+Motorized
+Sanxian_RAAS_v2 ADF+AirAssault PLAAGF+CombinedArms
+Chora_Invasion_v1 RGF+CombinedArms MEA+CombinedArms
+Lashkar_AAS_v2 ADF+CombinedArms MEA+CombinedArms
+Tallil_TC_v1 TLF+Motorized INS+Motorized
+Kamdesh_AAS_v1 MEA+Support USMC+Support
+Gorodok_RAAS_v1 RGF+LightInfantry BAF+Support
+Kohat_RAAS_v2 TLF+Support PLA+Support
+Skorpo_RAAS_v1 USA+CombinedArms WPMC+CombinedArms
+Anvil_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 INS+CombinedArms MEA+CombinedArms
+Kokan_TC_v1 RGF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 PLA+Support RGF+Support
+GooseBay_RAAS_v1 VDV+AirAssault WPMC+LightInfantry
+Sumari_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
+Belaya_AAS_v2 WPMC+AirAssault TLF+AirAssault
+Kamdesh_AAS_v1 PLA+Support VDV+Support
+Mestia_AAS_v1 TLF+CombinedArms USMC+CombinedArms
+Mutaha_TC_v1 INS+Support WPMC+LightInfantry
+Anvil_AAS_v1 TLF+AirAssault VDV+AirAssault
+Tallil_Invasion_v1 USMC+Support VDV+Support
+Logar_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 BAF+AirAssault WPMC+AirAssault
+AlBasrah_TC_v1 TLF+Mechanized MEA+Mechanized
+Harju_AAS_v2 USA+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_Insurgency_v1 CAF+Mechanized INS+CombinedArms
+Sumari_AAS_v2 INS+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 RGF+Support PLA+Support
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Belaya_TC_v1 CAF+Support VDV+Support
+Kokan_RAAS_v1 TLF+CombinedArms VDV+CombinedArms
+Mutaha_Invasion_v1 RGF+Mechanized TLF+Mechanized
+Lashkar_RAAS_v1 PLA+AirAssault INS+CombinedArms
+AlBasrah_RAAS_v1 RGF+CombinedArms PLANMC+CombinedArms
+Mestia_Skirmish_v1 ADF+CombinedArms RGF+CombinedArms
+BlackCoast_RAAS_v2 ADF+CombinedArms PLAAGF+CombinedArms
+Manicouagan_AAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Gorodok_Destruction_v1 RGF+Support PLA+CombinedArms
+Fallujah_RAAS_v2 INS+Support TLF+Support
+Kohat_RAAS_v2 CAF+Armored TLF+Armored
+Kamdesh_RAAS_v1 PLA+Armored VDV+Armored
+Belaya_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Anvil_Invasion_v1 CAF+CombinedArms MEA+Armored
+Chora_RAAS_v1 MEA+CombinedArms PLA+CombinedArms
