--- a/Tools/Rotation/LayerRotation/LayerRotation_7.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_7.cfg
@@ -1,200 +1,200 @@
-Kamdesh_Skirmish_v1 USMC+CombinedArms WPMC+CombinedArms
-Manicouagan_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Narva_AAS_v2 WPMC+AirAssault BAF+AirAssault
-FoolsRoad_Destruction_v1 TLF+CombinedArms USA+CombinedArms
-Sanxian_RAAS_v2 BAF+CombinedArms WPMC+AirAssault
-Fallujah_TC_v1 INS+Support BAF+Support
-Kohat_TC_v1 MEA+Mechanized USA+Mechanized
-Logar_RAAS_v1 CAF+CombinedArms RGF+CombinedArms
-Yehorivka_Destruction_v1 TLF+Support VDV+Support
-Gorodok_TC_v1 IMF+Support BAF+Support
-GooseBay_Skirmish_v1 USA+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 INS+CombinedArms WPMC+CombinedArms
-BlackCoast_AAS_v1 BAF+AirAssault WPMC+AirAssault
-Kokan_Invasion_v1 PLA+CombinedArms INS+CombinedArms
-Lashkar_TC_v2 WPMC+LightInfantry INS+LightInfantry
-Anvil_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
-Mutaha_AAS_v2 CAF+CombinedArms MEA+Mechanized
-Mestia_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-Narva_Invasion_v2 USMC+LightInfantry WPMC+LightInfantry
-Manicouagan_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-FoolsRoad_TC_v1 TLF+CombinedArms ADF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
-Belaya_AAS_v1 VDV+Armored BAF+Armored
-AlBasrah_Invasion_v1 WPMC+AirAssault INS+Mechanized
-Yehorivka_AAS_v2 IMF+LightInfantry RGF+LightInfantry
-Chora_Skirmish_v1 TLF+CombinedArms BAF+CombinedArms
-Gorodok_TC_v1 IMF+Motorized TLF+Motorized
-Lashkar_TC_v1 INS+CombinedArms TLF+CombinedArms
-Mutaha_Invasion_v1 VDV+Support BAF+Support
-Kokan_TC_v1 PLA+CombinedArms USMC+CombinedArms
-Fallujah_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Kamdesh_RAAS_v1 TLF+Support MEA+Support
-Kohat_RAAS_v2 VDV+Armored USMC+Armored
-Belaya_Invasion_v1 USMC+Motorized TLF+Motorized
-Anvil_Skirmish_v1 MEA+CombinedArms USA+CombinedArms
-Yehorivka_AAS_v1 VDV+AirAssault ADF+AirAssault
-Harju_RAAS_v1 IMF+LightInfantry ADF+Mechanized
-FoolsRoad_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
-Narva_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
-Mutaha_RAAS_v2 RGF+Mechanized ADF+Mechanized
-Kokan_AAS_v2 MEA+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 CAF+Motorized IMF+Motorized
-Fallujah_AAS_v1 USMC+Armored PLA+Armored
-Gorodok_Destruction_v1 TLF+Support IMF+Support
-GooseBay_Skirmish_v1 VDV+CombinedArms PLAAGF+CombinedArms
-Kohat_TC_v1 USA+LightInfantry WPMC+LightInfantry
-Belaya_AAS_v3 WPMC+LightInfantry IMF+LightInfantry
-Chora_TC_v1 ADF+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v3 WPMC+CombinedArms USA+Armored
-Tallil_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-Sanxian_Skirmish_v1 WPMC+CombinedArms BAF+CombinedArms
-Mutaha_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
-Fallujah_TC_v1 INS+Mechanized MEA+Mechanized
-Mestia_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Lashkar_RAAS_v1 TLF+AirAssault PLA+LightInfantry
-Yehorivka_Invasion_v2 VDV+CombinedArms WPMC+CombinedArms
-FoolsRoad_TC_v1 PLA+CombinedArms VDV+CombinedArms
-Kohat_TC_v1 RGF+LightInfantry MEA+LightInfantry
-BlackCoast_RAAS_v2 USMC+CombinedArms IMF+CombinedArms
-Kokan_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Narva_Destruction_v1 VDV+CombinedArms USA+Support
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Fallujah_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 INS+Support PLA+Support
-GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
-Tallil_Invasion_v1 PLA+CombinedArms VDV+CombinedArms
-Sumari_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-Gorodok_AAS_v1 PLA+Support USMC+LightInfantry
-Belaya_AAS_v2 ADF+CombinedArms TLF+CombinedArms
-Chora_AAS_v2 MEA+CombinedArms PLA+CombinedArms
-Kohat_Invasion_v1 INS+Support MEA+Support
-Mutaha_RAAS_v1 CAF+Support PLA+Support
-Kokan_AAS_v1 VDV+CombinedArms USA+CombinedArms
-Lashkar_AAS_v2 RGF+Armored PLA+Armored
-Anvil_TC_v1 INS+CombinedArms MEA+CombinedArms
-Fallujah_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
-Harju_RAAS_v2 IMF+Armored RGF+Armored
-Gorodok_RAAS_v1 TLF+Armored PLA+Armored
-Mestia_Skirmish_v1 VDV+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 CAF+Support MEA+Mechanized
-AlBasrah_Invasion_v1 INS+Armored PLA+Armored
+Sanxian_RAAS_v1 CAF+AirAssault WPMC+AirAssault
+Mestia_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
+Tallil_AAS_v1 PLA+AirAssault CAF+Armored
+Yehorivka_Invasion_v2 WPMC+LightInfantry IMF+LightInfantry
+Kokan_AAS_v2 TLF+CombinedArms CAF+CombinedArms
+Lashkar_AAS_v1 INS+Armored RGF+Armored
+Manicouagan_RAAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Anvil_TC_v1 PLA+AirAssault TLF+AirAssault
+Kamdesh_AAS_v1 PLA+CombinedArms USMC+LightInfantry
+Mutaha_Invasion_v1 WPMC+LightInfantry USA+LightInfantry
+Skorpo_RAAS_v1 IMF+Armored BAF+Armored
+Logar_AAS_v1 VDV+CombinedArms MEA+CombinedArms
+Fallujah_AAS_v1 USA+LightInfantry WPMC+LightInfantry
+Gorodok_TC_v1 VDV+CombinedArms IMF+CombinedArms
+Mestia_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Belaya_Invasion_v1 IMF+Motorized USMC+Motorized
+Tallil_RAAS_v1 INS+Armored TLF+Armored
+Yehorivka_AAS_v1 PLA+Armored VDV+Armored
+FoolsRoad_TC_v1 IMF+CombinedArms USA+CombinedArms
+PacificProvingGrounds_AAS_v1 USA+CombinedArms PLAAGF+CombinedArms
+Mutaha_RAAS_v2 WPMC+LightInfantry ADF+CombinedArms
+Sumari_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v1 ADF+Mechanized TLF+Mechanized
+AlBasrah_TC_v1 TLF+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v1 TLF+Mechanized IMF+Mechanized
+Anvil_AAS_v1 INS+Mechanized VDV+Mechanized
+Chora_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Manicouagan_Invasion_v1 PLANMC+Armored WPMC+CombinedArms
+Lashkar_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Gorodok_RAAS_v1 CAF+AirAssault WPMC+AirAssault
+Yehorivka_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 MEA+CombinedArms CAF+CombinedArms
+Narva_RAAS_v1 VDV+Mechanized BAF+Mechanized
+FoolsRoad_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 TLF+AirAssault ADF+AirAssault
+Kamdesh_AAS_v1 MEA+Armored USMC+Armored
+Kohat_TC_v1 TLF+Motorized WPMC+AirAssault
+Mestia_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+BlackCoast_Invasion_v2 TLF+CombinedArms PLANMC+CombinedArms
+Manicouagan_AAS_v2 PLANMC+LightInfantry WPMC+LightInfantry
+Tallil_RAAS_v1 USMC+Armored MEA+Armored
+Sumari_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Lashkar_RAAS_v1 INS+Armored RGF+Armored
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 TLF+Armored USA+Armored
+Gorodok_Destruction_v1 USA+Motorized IMF+Support
+GooseBay_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 ADF+Mechanized MEA+Mechanized
+Mestia_AAS_v1 TLF+CombinedArms BAF+CombinedArms
+Kamdesh_TC_v1 MEA+LightInfantry INS+LightInfantry
+Manicouagan_AAS_v2 PLA+CombinedArms USMC+CombinedArms
+Chora_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
+Tallil_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
+BlackCoast_RAAS_v1 IMF+Mechanized WPMC+AirAssault
+Sumari_Skirmish_v1 VDV+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Fallujah_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Kokan_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
+Sanxian_RAAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 BAF+AirAssault VDV+AirAssault
+Gorodok_TC_v1 WPMC+CombinedArms BAF+CombinedArms
+Manicouagan_AAS_v3 WPMC+CombinedArms CAF+CombinedArms
+Mestia_RAAS_v1 USA+CombinedArms RGF+CombinedArms
+Narva_Destruction_v1 CAF+Armored IMF+Armored
+Lashkar_AAS_v2 INS+Mechanized BAF+CombinedArms
+Kohat_Skirmish_v1 CAF+CombinedArms INS+CombinedArms
+Kamdesh_RAAS_v1 USA+Armored PLA+Armored
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Mutaha_RAAS_v1 PLA+Motorized CAF+Motorized
-Logar_AAS_v1 USMC+CombinedArms RGF+CombinedArms
-Kohat_TC_v1 MEA+LightInfantry INS+LightInfantry
-Kamdesh_Invasion_v1 TLF+Motorized PLA+CombinedArms
-Yehorivka_Skirmish_v2 TLF+CombinedArms ADF+CombinedArms
-Manicouagan_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Narva_AAS_v1 RGF+Mechanized ADF+Mechanized
-Lashkar_AAS_v2 WPMC+CombinedArms USMC+CombinedArms
-Sumari_AAS_v3 BAF+CombinedArms VDV+CombinedArms
-Gorodok_Invasion_v1 ADF+CombinedArms TLF+Armored
-Tallil_RAAS_v2 TLF+AirAssault MEA+AirAssault
-Mestia_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 TLF+Support INS+Support
-GooseBay_RAAS_v1 CAF+Support PLANMC+Support
-Anvil_Invasion_v1 MEA+Support CAF+Support
-Harju_AAS_v3 CAF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v2 USA+Support PLA+LightInfantry
-Narva_RAAS_v1 CAF+Armored VDV+Armored
-Chora_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Kokan_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v1 TLF+CombinedArms INS+CombinedArms
-Gorodok_TC_v1 VDV+Armored PLA+Armored
-Kohat_Invasion_v1 MEA+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v1 MEA+CombinedArms RGF+LightInfantry
-FoolsRoad_TC_v1 TLF+CombinedArms BAF+CombinedArms
-AlBasrah_RAAS_v1 PLANMC+CombinedArms ADF+CombinedArms
-Anvil_TC_v1 TLF+CombinedArms MEA+CombinedArms
-Narva_Invasion_v2 RGF+CombinedArms USA+CombinedArms
-Sumari_Skirmish_v1 MEA+CombinedArms INS+CombinedArms
-Tallil_RAAS_v2 RGF+CombinedArms WPMC+AirAssault
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 BAF+CombinedArms TLF+CombinedArms
-Fallujah_RAAS_v1 MEA+CombinedArms VDV+CombinedArms
-Skorpo_Invasion_v1 WPMC+CombinedArms ADF+CombinedArms
-Gorodok_TC_v1 PLA+LightInfantry ADF+Mechanized
-Kokan_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-BlackCoast_RAAS_v1 VDV+Support CAF+Support
-Belaya_AAS_v3 IMF+Support BAF+Support
-Mutaha_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Yehorivka_Destruction_v1 RGF+Motorized BAF+Mechanized
-Tallil_TC_v1 BAF+CombinedArms TLF+CombinedArms
-FoolsRoad_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
-Kohat_TC_v1 PLA+Armored BAF+Armored
-AlBasrah_TC_v1 VDV+AirAssault PLANMC+AirAssault
-Harju_AAS_v1 IMF+Support VDV+Support
-Skorpo_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v3 PLA+CombinedArms USA+CombinedArms
-Manicouagan_AAS_v1 PLANMC+Armored CAF+Armored
-Sanxian_RAAS_v1 WPMC+CombinedArms CAF+Armored
-Anvil_RAAS_v1 INS+Motorized PLA+Motorized
-Lashkar_Insurgency_v1 BAF+Support INS+Support
-Gorodok_TC_v1 VDV+Support PLA+Support
-Mestia_AAS_v2 USA+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 PLA+Motorized USA+Motorized
-AlBasrah_RAAS_v1 CAF+Motorized VDV+CombinedArms
-Kokan_Invasion_v1 RGF+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Kamdesh_AAS_v1 INS+Armored PLA+Armored
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Yehorivka_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-Narva_Destruction_v1 CAF+CombinedArms RGF+LightInfantry
-Lashkar_AAS_v1 INS+Support TLF+Support
-Belaya_AAS_v1 PLA+Armored USA+Armored
-Sanxian_AAS_v3 PLAAGF+CombinedArms BAF+CombinedArms
-FoolsRoad_Skirmish_v2 TLF+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v2 WPMC+AirAssault IMF+Mechanized
-Tallil_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 BAF+Support PLA+Support
-Fallujah_TC_v1 PLA+Armored INS+Armored
-Harju_TC_v1 USA+CombinedArms IMF+CombinedArms
-Mutaha_Invasion_v1 ADF+CombinedArms INS+CombinedArms
-AlBasrah_AAS_v1 RGF+Armored TLF+AirAssault
-Logar_AAS_v1 PLA+CombinedArms RGF+CombinedArms
-Anvil_TC_v1 PLA+CombinedArms RGF+CombinedArms
-Narva_AAS_v2 WPMC+AirAssault ADF+AirAssault
-Kokan_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v1 IMF+CombinedArms TLF+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault PLA+AirAssault
-Yehorivka_AAS_v1 TLF+Support BAF+Support
-Sumari_TC_v1 INS+CombinedArms VDV+CombinedArms
-Fallujah_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 TLF+Support PLA+Motorized
-Mestia_TC_v1 ADF+CombinedArms VDV+CombinedArms
-Kohat_RAAS_v1 TLF+Support VDV+Support
-Tallil_RAAS_v1 TLF+CombinedArms USMC+CombinedArms
-FoolsRoad_TC_v1 IMF+CombinedArms BAF+CombinedArms
-Kamdesh_Invasion_v1 INS+LightInfantry TLF+Support
-Skorpo_RAAS_v1 IMF+Armored USA+Armored
-Narva_AAS_v2 USA+Mechanized RGF+Mechanized
-Kokan_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-Anvil_TC_v1 RGF+Support USMC+Support
-Fallujah_TC_v1 MEA+Mechanized CAF+Armored
-AlBasrah_RAAS_v1 TLF+CombinedArms RGF+CombinedArms
-Yehorivka_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
-Harju_AAS_v1 USA+AirAssault WPMC+AirAssault
-Mestia_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Kohat_RAAS_v2 ADF+CombinedArms VDV+CombinedArms
-Kamdesh_AAS_v1 MEA+Mechanized INS+Mechanized
-Lashkar_RAAS_v1 VDV+Mechanized TLF+Motorized
-Mutaha_Invasion_v1 PLA+Motorized INS+Motorized
-Tallil_Skirmish_v1 WPMC+CombinedArms CAF+CombinedArms
-Anvil_RAAS_v1 USMC+Motorized TLF+Motorized
-Fallujah_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-Chora_AAS_v1 RGF+CombinedArms MEA+CombinedArms
-AlBasrah_TC_v1 USA+Armored RGF+Armored
-Narva_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 PLA+Support VDV+Support
-Yehorivka_RAAS_v2 TLF+Armored BAF+Armored
-Gorodok_TC_v1 WPMC+AirAssault BAF+AirAssault
-FoolsRoad_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Manicouagan_Invasion_v2 WPMC+LightInfantry PLANMC+LightInfantry
+GooseBay_RAAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
+Tallil_Invasion_v1 BAF+CombinedArms PLA+CombinedArms
+Sumari_AAS_v1 USA+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v1 MEA+Mechanized INS+Armored
+Gorodok_TC_v1 WPMC+LightInfantry IMF+LightInfantry
+Manicouagan_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Narva_AAS_v1 BAF+CombinedArms IMF+CombinedArms
+Lashkar_Invasion_v1 RGF+CombinedArms USA+CombinedArms
+Sanxian_AAS_v2 PLAAGF+Mechanized BAF+Mechanized
+AlBasrah_RAAS_v1 WPMC+AirAssault TLF+AirAssault
+Anvil_RAAS_v2 PLA+Armored MEA+Mechanized
+Mestia_TC_v1 PLA+CombinedArms CAF+CombinedArms
+Tallil_AAS_v1 INS+Support USMC+Support
+Yehorivka_Destruction_v1 VDV+Mechanized TLF+Mechanized
+Belaya_AAS_v2 VDV+CombinedArms USMC+CombinedArms
+Kamdesh_RAAS_v1 VDV+AirAssault TLF+AirAssault
+Gorodok_TC_v1 RGF+CombinedArms USA+CombinedArms
+FoolsRoad_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+BlackCoast_AAS_v1 WPMC+LightInfantry VDV+CombinedArms
+Sanxian_Invasion_v2 PLAAGF+Armored USMC+Armored
+Kokan_AAS_v1 BAF+CombinedArms TLF+CombinedArms
+Lashkar_TC_v1 WPMC+CombinedArms USMC+CombinedArms
+Fallujah_AAS_v1 VDV+CombinedArms BAF+CombinedArms
+AlBasrah_AAS_v1 RGF+CombinedArms INS+Motorized
+Kohat_RAAS_v2 PLA+Armored TLF+Armored
+Mestia_Invasion_v1 CAF+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 USMC+Armored PLA+Armored
+Anvil_TC_v1 ADF+Mechanized INS+Mechanized
+Tallil_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+GooseBay_RAAS_v2 WPMC+CombinedArms PLANMC+Armored
+Yehorivka_RAAS_v2 PLA+AirAssault WPMC+AirAssault
+Manicouagan_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Gorodok_Destruction_v1 RGF+Armored USA+Armored
+Kamdesh_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v2 PLA+Armored ADF+Mechanized
+Harju_AAS_v3 ADF+CombinedArms VDV+CombinedArms
+Lashkar_TC_v1 PLA+Support USMC+Support
+AlBasrah_AAS_v1 CAF+Support PLANMC+Support
+Belaya_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+Tallil_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 PLA+CombinedArms BAF+AirAssault
+Narva_TC_v1 VDV+CombinedArms IMF+CombinedArms
+Anvil_RAAS_v2 USA+Support PLA+Support
+Manicouagan_Invasion_v1 CAF+Armored VDV+Armored
+Kamdesh_AAS_v1 RGF+Support USMC+Support
+BlackCoast_AAS_v2 IMF+Motorized TLF+Motorized
+Mutaha_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+AlBasrah_TC_v1 WPMC+LightInfantry TLF+AirAssault
+Sumari_RAAS_v1 USMC+CombinedArms MEA+CombinedArms
+Lashkar_Invasion_v1 USA+LightInfantry PLA+LightInfantry
+Tallil_AAS_v1 INS+Mechanized USA+Mechanized
+FoolsRoad_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Fallujah_AAS_v1 MEA+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v1 CAF+Armored PLA+Armored
+Harju_RAAS_v2 IMF+Support RGF+Support
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
+Kohat_Insurgency_v1 CAF+Armored INS+Support
+Chora_AAS_v2 USMC+CombinedArms TLF+CombinedArms
+Gorodok_TC_v1 BAF+Mechanized IMF+Mechanized
+AlBasrah_RAAS_v1 PLANMC+Support VDV+Support
+Kamdesh_RAAS_v1 VDV+Support PLA+Support
+Tallil_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Manicouagan_Invasion_v2 PLA+AirAssault USMC+Armored
+Sanxian_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
+Kokan_TC_v1 TLF+CombinedArms MEA+CombinedArms
+Anvil_RAAS_v2 PLA+Support RGF+Support
+Lashkar_RAAS_v1 TLF+CombinedArms BAF+CombinedArms
+Mestia_AAS_v2 WPMC+CombinedArms CAF+CombinedArms
+Narva_Invasion_v1 WPMC+LightInfantry IMF+LightInfantry
+Yehorivka_AAS_v2 IMF+CombinedArms TLF+CombinedArms
+Fallujah_TC_v1 ADF+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Harju_RAAS_v2 IMF+LightInfantry RGF+LightInfantry
+Manicouagan_AAS_v1 VDV+CombinedArms PLANMC+CombinedArms
+Skorpo_Invasion_v1 IMF+Mechanized ADF+Mechanized
+Chora_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v2 WPMC+AirAssault ADF+Mechanized
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+Tallil_RAAS_v2 PLA+CombinedArms CAF+CombinedArms
+Mestia_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
+Mutaha_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+Lashkar_TC_v2 MEA+LightInfantry USMC+LightInfantry
+Narva_RAAS_v1 IMF+CombinedArms CAF+Armored
+Logar_AAS_v1 TLF+CombinedArms VDV+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry RGF+LightInfantry
+Kamdesh_Invasion_v1 MEA+Armored PLA+Armored
+Harju_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Kohat_TC_v1 TLF+Motorized PLA+Motorized
+Anvil_AAS_v1 PLA+Armored USA+Armored
+Tallil_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v2 USA+CombinedArms PLAAGF+CombinedArms
+Kokan_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Lashkar_AAS_v2 PLA+CombinedArms TLF+CombinedArms
+Gorodok_RAAS_v1 VDV+Support IMF+Support
+Fallujah_RAAS_v2 PLA+Support INS+Support
+AlBasrah_AAS_v1 TLF+Mechanized INS+Mechanized
+Logar_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v1 IMF+Armored RGF+Armored
+Belaya_Invasion_v1 VDV+Mechanized ADF+Mechanized
+Manicouagan_AAS_v2 WPMC+LightInfantry PLAAGF+Mechanized
+BlackCoast_Skirmish_v1 BAF+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v2 INS+LightInfantry USA+LightInfantry
+Kamdesh_RAAS_v1 BAF+Armored VDV+Armored
+Mestia_RAAS_v1 IMF+CombinedArms USA+CombinedArms
+Lashkar_Invasion_v1 USA+CombinedArms PLA+CombinedArms
+Fallujah_AAS_v1 PLA+Motorized RGF+Motorized
+Harju_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+AlBasrah_RAAS_v1 ADF+AirAssault PLA+Support
+Tallil_AAS_v1 BAF+Mechanized VDV+Mechanized
+Mutaha_RAAS_v1 PLA+Motorized RGF+Motorized
+FoolsRoad_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
+Narva_AAS_v2 VDV+AirAssault WPMC+AirAssault
+Kohat_TC_v1 VDV+CombinedArms USMC+Armored
+Logar_AAS_v1 MEA+CombinedArms CAF+CombinedArms
+GooseBay_RAAS_v1 CAF+AirAssault WPMC+AirAssault
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Fallujah_Invasion_v1 USMC+LightInfantry INS+LightInfantry
+Yehorivka_RAAS_v1 PLA+Support RGF+Support
+Anvil_Skirmish_v1 VDV+CombinedArms ADF+CombinedArms
+Harju_AAS_v1 IMF+LightInfantry USMC+CombinedArms
+Mutaha_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+FoolsRoad_RAAS_v1 USA+CombinedArms PLA+CombinedArms
+Lashkar_Invasion_v1 MEA+CombinedArms USA+CombinedArms
+BlackCoast_RAAS_v2 RGF+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 MEA+Mechanized PLA+Armored
+Logar_AAS_v1 USMC+CombinedArms TLF+CombinedArms
+GooseBay_AAS_v1 WPMC+AirAssault BAF+AirAssault
+AlBasrah_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
