--- a/Tools/Rotation/LayerRotation/LayerRotation_8.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_8.cfg
@@ -1,200 +1,200 @@
-Kohat_TC_v1 CAF+Support PLA+Support
-Lashkar_AAS_v1 WPMC+AirAssault USA+AirAssault
-Fallujah_RAAS_v1 USA+CombinedArms PLA+CombinedArms
-Anvil_AAS_v1 INS+Armored MEA+Armored
-Mutaha_Invasion_v1 VDV+CombinedArms USMC+CombinedArms
-AlBasrah_AAS_v1 ADF+CombinedArms RGF+CombinedArms
-Narva_AAS_v1 WPMC+AirAssault BAF+Armored
-Logar_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 IMF+CombinedArms PLA+CombinedArms
-Gorodok_Destruction_v1 USA+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
-Sumari_Skirmish_v1 INS+CombinedArms USA+CombinedArms
-Tallil_TC_v1 RGF+Support USA+Motorized
-Fallujah_TC_v1 WPMC+CombinedArms CAF+CombinedArms
-Kokan_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Manicouagan_AAS_v2 CAF+AirAssault WPMC+AirAssault
-Mutaha_RAAS_v2 RGF+Armored INS+Armored
-Anvil_RAAS_v2 CAF+AirAssault INS+Motorized
-FoolsRoad_Skirmish_v2 RGF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 USMC+Armored RGF+Armored
-AlBasrah_TC_v1 CAF+Support MEA+Support
-Harju_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v1 IMF+Armored USMC+Support
-Sumari_AAS_v1 INS+CombinedArms RGF+CombinedArms
-Gorodok_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
-Yehorivka_RAAS_v1 PLA+AirAssault WPMC+AirAssault
-Mestia_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v2 TLF+AirAssault RGF+LightInfantry
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-FoolsRoad_Destruction_v1 ADF+CombinedArms RGF+CombinedArms
-Anvil_TC_v1 INS+LightInfantry RGF+LightInfantry
-Belaya_AAS_v2 CAF+Support PLA+Support
-Harju_Skirmish_v2 RGF+CombinedArms USMC+CombinedArms
-Sanxian_AAS_v3 WPMC+LightInfantry PLA+Motorized
-Manicouagan_Invasion_v1 BAF+Mechanized PLAAGF+Mechanized
-Kohat_AAS_v1 USMC+Motorized RGF+Motorized
-Narva_Skirmish_v1 ADF+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 USMC+LightInfantry MEA+LightInfantry
-BlackCoast_AAS_v2 PLA+Motorized USMC+CombinedArms
-Chora_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
-Mutaha_RAAS_v1 ADF+Mechanized RGF+Mechanized
-Gorodok_TC_v1 WPMC+CombinedArms IMF+CombinedArms
-FoolsRoad_Skirmish_v1 IMF+CombinedArms TLF+CombinedArms
-Belaya_TC_v1 IMF+Motorized WPMC+CombinedArms
-Lashkar_TC_v1 BAF+Armored PLA+Armored
-Kokan_Insurgency_v1 TLF+CombinedArms INS+CombinedArms
-Fallujah_RAAS_v2 INS+Mechanized MEA+Mechanized
-Sanxian_AAS_v2 PLA+LightInfantry WPMC+LightInfantry
-Harju_Skirmish_v2 USMC+CombinedArms IMF+CombinedArms
-Yehorivka_RAAS_v2 PLA+Support USMC+Support
-AlBasrah_Invasion_v2 PLA+Armored MEA+Mechanized
-Anvil_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 PLA+Armored BAF+Armored
-Gorodok_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Narva_Skirmish_v1 IMF+CombinedArms VDV+CombinedArms
-Manicouagan_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v1 IMF+CombinedArms PLANMC+AirAssault
-Kamdesh_RAAS_v1 MEA+Mechanized TLF+Mechanized
-Mestia_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v1 WPMC+LightInfantry INS+LightInfantry
-Yehorivka_Destruction_v1 BAF+Support PLA+Support
-Skorpo_Skirmish_v1 RGF+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 PLA+Support RGF+Mechanized
-Sanxian_AAS_v3 CAF+AirAssault WPMC+AirAssault
-Kohat_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 IMF+LightInfantry USA+LightInfantry
-Manicouagan_AAS_v3 PLA+LightInfantry WPMC+LightInfantry
-BlackCoast_AAS_v2 ADF+AirAssault PLANMC+AirAssault
-Logar_AAS_v1 ADF+CombinedArms MEA+CombinedArms
-Lashkar_AAS_v1 WPMC+AirAssault TLF+AirAssault
-Harju_Invasion_v3 RGF+Motorized CAF+Mechanized
-Kamdesh_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Anvil_TC_v1 PLA+Motorized RGF+Motorized
-Gorodok_TC_v1 PLA+CombinedArms USA+CombinedArms
-Yehorivka_TC_v1 IMF+Support TLF+Support
-Belaya_Invasion_v2 USMC+Motorized PLA+Motorized
-Mutaha_AAS_v1 RGF+Support BAF+CombinedArms
-Sumari_AAS_v1 USA+CombinedArms PLA+CombinedArms
-Fallujah_AAS_v1 ADF+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 WPMC+AirAssault VDV+AirAssault
-Manicouagan_Invasion_v2 PLANMC+CombinedArms VDV+CombinedArms
-Narva_AAS_v2 RGF+Mechanized WPMC+AirAssault
-Logar_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLANMC+CombinedArms
-Tallil_TC_v1 INS+Motorized TLF+Motorized
-GooseBay_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-Yehorivka_Destruction_v1 USMC+Armored RGF+Motorized
-Lashkar_AAS_v2 ADF+AirAssault TLF+AirAssault
-Belaya_AAS_v3 TLF+CombinedArms CAF+CombinedArms
-Fallujah_TC_v1 MEA+Mechanized BAF+Mechanized
-Kamdesh_RAAS_v1 WPMC+LightInfantry INS+LightInfantry
-Sumari_Insurgency_v1 TLF+CombinedArms INS+CombinedArms
-AlBasrah_TC_v1 WPMC+LightInfantry MEA+Support
-BlackCoast_RAAS_v1 CAF+AirAssault WPMC+AirAssault
-Chora_TC_v1 INS+CombinedArms PLA+CombinedArms
-Gorodok_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-GooseBay_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v2 BAF+Mechanized PLAAGF+Armored
-Anvil_TC_v1 VDV+AirAssault PLA+AirAssault
-Lashkar_Invasion_v1 VDV+CombinedArms PLA+CombinedArms
-Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-AlBasrah_RAAS_v1 BAF+AirAssault WPMC+AirAssault
-Yehorivka_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_AAS_v1 PLA+CombinedArms MEA+Mechanized
-Gorodok_Invasion_v1 TLF+Motorized IMF+Motorized
-Belaya_AAS_v2 TLF+Support IMF+Support
-Tallil_TC_v1 TLF+Support MEA+Support
-Sumari_AAS_v2 USA+CombinedArms RGF+CombinedArms
-Kamdesh_AAS_v1 RGF+CombinedArms INS+CombinedArms
-Anvil_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Mestia_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
-Kohat_TC_v1 INS+Armored WPMC+AirAssault
-GooseBay_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Mutaha_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-Chora_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
-Lashkar_AAS_v2 PLA+Motorized INS+Motorized
-Yehorivka_AAS_v2 TLF+Motorized PLA+Motorized
-Tallil_AAS_v1 INS+LightInfantry PLA+AirAssault
-Logar_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Belaya_Invasion_v2 CAF+Support PLA+Support
-Fallujah_TC_v1 INS+CombinedArms ADF+CombinedArms
-BlackCoast_Skirmish_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Anvil_TC_v1 USMC+LightInfantry PLA+LightInfantry
-Kamdesh_AAS_v1 CAF+Support VDV+AirAssault
-Sumari_Invasion_v1 INS+CombinedArms BAF+CombinedArms
-Mutaha_RAAS_v2 TLF+CombinedArms INS+CombinedArms
-Sanxian_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 PLA+CombinedArms TLF+Mechanized
-Manicouagan_Invasion_v2 USA+Mechanized VDV+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Logar_RAAS_v1 RGF+CombinedArms ADF+CombinedArms
-Lashkar_AAS_v1 CAF+AirAssault PLA+AirAssault
-Fallujah_TC_v1 USMC+LightInfantry WPMC+LightInfantry
-Anvil_Invasion_v1 BAF+Mechanized INS+Mechanized
-BlackCoast_Skirmish_v1 IMF+CombinedArms CAF+CombinedArms
-Kamdesh_AAS_v1 VDV+CombinedArms INS+CombinedArms
-Kohat_RAAS_v2 WPMC+AirAssault INS+Support
-Chora_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 USMC+CombinedArms RGF+CombinedArms
-Tallil_RAAS_v2 PLA+LightInfantry MEA+LightInfantry
-Mestia_AAS_v2 IMF+CombinedArms ADF+CombinedArms
-Belaya_TC_v1 WPMC+LightInfantry TLF+Support
-Skorpo_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Fallujah_Invasion_v2 BAF+Support PLA+Support
-FoolsRoad_TC_v1 WPMC+CombinedArms BAF+CombinedArms
-Yehorivka_RAAS_v1 IMF+Mechanized TLF+Mechanized
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Mutaha_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Lashkar_Invasion_v1 WPMC+LightInfantry BAF+Support
-Kohat_TC_v1 MEA+AirAssault TLF+AirAssault
-BlackCoast_Skirmish_v1 RGF+CombinedArms TLF+CombinedArms
-Sanxian_AAS_v3 WPMC+CombinedArms USA+CombinedArms
-Anvil_TC_v1 PLA+LightInfantry MEA+LightInfantry
-Belaya_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 INS+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 TLF+AirAssault MEA+AirAssault
-Mestia_Skirmish_v1 TLF+CombinedArms IMF+CombinedArms
-Kamdesh_RAAS_v1 WPMC+AirAssault TLF+AirAssault
-Fallujah_Invasion_v2 VDV+Support BAF+CombinedArms
+Yehorivka_AAS_v2 VDV+CombinedArms PLA+CombinedArms
+Fallujah_TC_v1 TLF+CombinedArms ADF+CombinedArms
+Sanxian_RAAS_v1 USA+CombinedArms WPMC+AirAssault
+Gorodok_AAS_v1 CAF+Support TLF+Support
+Anvil_RAAS_v2 BAF+CombinedArms PLA+CombinedArms
+Narva_Invasion_v2 ADF+CombinedArms IMF+CombinedArms
+Kamdesh_RAAS_v1 CAF+Mechanized INS+Mechanized
+Skorpo_RAAS_v1 IMF+LightInfantry BAF+CombinedArms
+Mestia_RAAS_v1 USMC+CombinedArms TLF+CombinedArms
+Mutaha_TC_v1 TLF+Support VDV+Support
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 RGF+CombinedArms INS+CombinedArms
+Kohat_AAS_v1 USMC+Armored PLA+Support
+Chora_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
+Manicouagan_RAAS_v2 USA+CombinedArms WPMC+CombinedArms
+AlBasrah_AAS_v1 VDV+CombinedArms PLANMC+CombinedArms
+Logar_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Anvil_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
+Belaya_AAS_v2 IMF+Motorized WPMC+LightInfantry
+Mestia_AAS_v1 IMF+CombinedArms TLF+CombinedArms
+Narva_AAS_v1 IMF+Armored USMC+Armored
+Fallujah_RAAS_v1 PLA+LightInfantry USA+LightInfantry
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+FoolsRoad_Destruction_v1 WPMC+CombinedArms ADF+CombinedArms
+Gorodok_RAAS_v2 PLA+Support CAF+Support
+BlackCoast_AAS_v2 BAF+AirAssault IMF+Mechanized
+Mutaha_TC_v1 PLA+LightInfantry MEA+LightInfantry
+Chora_AAS_v3 WPMC+CombinedArms USA+CombinedArms
+Yehorivka_RAAS_v2 USA+Armored PLA+Armored
+Anvil_Invasion_v1 ADF+CombinedArms TLF+CombinedArms
+Kohat_RAAS_v2 CAF+Motorized PLA+AirAssault
+Harju_TC_v1 WPMC+CombinedArms IMF+CombinedArms
+AlBasrah_RAAS_v1 TLF+CombinedArms USMC+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms VDV+CombinedArms
+Mestia_RAAS_v1 IMF+CombinedArms PLA+CombinedArms
+Narva_Invasion_v2 WPMC+AirAssault IMF+Armored
+Gorodok_AAS_v1 CAF+CombinedArms RGF+CombinedArms
+Tallil_TC_v1 WPMC+AirAssault ADF+AirAssault
+Fallujah_RAAS_v2 INS+Support CAF+Support
+Logar_AAS_v1 BAF+CombinedArms TLF+CombinedArms
+Manicouagan_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Yehorivka_Invasion_v2 VDV+Armored ADF+Mechanized
+Anvil_RAAS_v2 PLA+CombinedArms INS+CombinedArms
+Kamdesh_AAS_v1 INS+Support PLA+Support
+Sumari_TC_v1 CAF+CombinedArms TLF+CombinedArms
+Lashkar_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Mutaha_AAS_v2 INS+Support PLA+Support
+Narva_RAAS_v1 IMF+Support WPMC+LightInfantry
+AlBasrah_Invasion_v2 ADF+CombinedArms TLF+CombinedArms
+Tallil_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Mestia_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
+Yehorivka_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Kohat_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 TLF+AirAssault PLA+AirAssault
+Sanxian_Invasion_v2 PLAAGF+Armored BAF+Support
+Kokan_AAS_v1 RGF+CombinedArms PLA+CombinedArms
+Mutaha_RAAS_v2 WPMC+AirAssault ADF+AirAssault
+Fallujah_RAAS_v1 PLA+LightInfantry MEA+LightInfantry
+Logar_TC_v1 MEA+CombinedArms TLF+CombinedArms
+Narva_AAS_v1 USMC+CombinedArms RGF+CombinedArms
+Kamdesh_Invasion_v1 PLA+LightInfantry INS+Support
+FoolsRoad_RAAS_v1 IMF+CombinedArms RGF+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Gorodok_TC_v1 PLA+Support TLF+Support
+Tallil_AAS_v1 CAF+Mechanized RGF+Mechanized
+Mestia_AAS_v2 IMF+CombinedArms USA+CombinedArms
+Sanxian_Invasion_v2 USMC+LightInfantry WPMC+LightInfantry
+Kohat_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Lashkar_TC_v2 VDV+Support TLF+Support
+Harju_RAAS_v2 USA+Support WPMC+LightInfantry
+Kokan_AAS_v1 INS+CombinedArms USA+CombinedArms
+Anvil_AAS_v1 USA+Armored VDV+Armored
+Fallujah_Invasion_v2 TLF+Motorized CAF+Motorized
+BlackCoast_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Chora_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 TLF+CombinedArms CAF+CombinedArms
+Gorodok_RAAS_v2 PLA+Armored BAF+Armored
+Manicouagan_RAAS_v1 PLA+Armored USA+Mechanized
+Narva_Destruction_v1 IMF+Support BAF+Support
+AlBasrah_RAAS_v1 MEA+AirAssault PLANMC+AirAssault
+Mestia_TC_v1 WPMC+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v2 INS+LightInfantry PLA+LightInfantry
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Yehorivka_Invasion_v1 TLF+Support USMC+Support
+Chora_RAAS_v1 USA+CombinedArms RGF+CombinedArms
+Fallujah_TC_v1 WPMC+LightInfantry BAF+Support
+Mutaha_RAAS_v2 CAF+Support PLA+Support
+Kokan_AAS_v2 INS+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
+Belaya_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
+Kohat_RAAS_v2 PLA+Armored TLF+Armored
+Gorodok_AAS_v1 TLF+Motorized IMF+Motorized
+Anvil_TC_v1 CAF+AirAssault WPMC+LightInfantry
+Tallil_RAAS_v2 INS+CombinedArms WPMC+CombinedArms
+Logar_RAAS_v1 RGF+CombinedArms USMC+CombinedArms
+Yehorivka_Invasion_v1 TLF+CombinedArms ADF+CombinedArms
+Manicouagan_AAS_v1 PLA+Mechanized USA+Mechanized
+Mutaha_RAAS_v1 WPMC+CombinedArms PLA+Support
+Fallujah_TC_v1 TLF+Support INS+Support
+Chora_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Harju_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
+Sumari_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v2 BAF+AirAssault PLA+AirAssault
 GooseBay_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
-Mutaha_TC_v1 USMC+CombinedArms TLF+CombinedArms
-Yehorivka_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
-BlackCoast_AAS_v1 ADF+CombinedArms RGF+CombinedArms
-Kokan_Invasion_v1 USA+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Lashkar_AAS_v1 MEA+Armored TLF+CombinedArms
-AlBasrah_TC_v1 MEA+Support USMC+Support
-Sanxian_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Manicouagan_Invasion_v2 PLANMC+CombinedArms WPMC+CombinedArms
-Tallil_RAAS_v2 TLF+CombinedArms PLA+CombinedArms
-FoolsRoad_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 INS+LightInfantry PLA+LightInfantry
-Mutaha_TC_v1 USA+Support INS+Support
-Yehorivka_TC_v2 BAF+Support PLA+Support
-Narva_Invasion_v1 IMF+Armored BAF+Armored
-Anvil_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
-Fallujah_AAS_v1 VDV+Mechanized PLA+Motorized
-Sumari_TC_v1 PLA+CombinedArms INS+CombinedArms
-Kamdesh_AAS_v1 TLF+Support MEA+Support
-Manicouagan_Invasion_v2 WPMC+LightInfantry USA+LightInfantry
-Lashkar_TC_v2 VDV+Mechanized ADF+Mechanized
-Skorpo_RAAS_v1 IMF+Support CAF+Support
-Chora_AAS_v2 TLF+CombinedArms RGF+CombinedArms
-Gorodok_TC_v1 RGF+Support IMF+Support
-Yehorivka_Destruction_v1 USA+Support PLA+CombinedArms
-FoolsRoad_Skirmish_v2 PLA+CombinedArms RGF+CombinedArms
-Kohat_RAAS_v2 MEA+Armored PLA+Armored
-Tallil_RAAS_v1 PLA+Armored MEA+Armored
-AlBasrah_TC_v1 INS+CombinedArms WPMC+CombinedArms
+Yehorivka_RAAS_v2 CAF+Mechanized WPMC+LightInfantry
+AlBasrah_Insurgency_v1 TLF+Mechanized INS+Mechanized
+Lashkar_AAS_v1 BAF+CombinedArms PLA+CombinedArms
+Narva_AAS_v1 USMC+Support VDV+Support
+Tallil_Skirmish_v3 PLA+CombinedArms VDV+CombinedArms
+Kamdesh_RAAS_v1 PLA+AirAssault WPMC+CombinedArms
+Kohat_AAS_v1 MEA+Support PLA+Support
+Mestia_Invasion_v1 RGF+CombinedArms USMC+CombinedArms
+Harju_RAAS_v1 RGF+Mechanized IMF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 WPMC+CombinedArms TLF+Support
+BlackCoast_RAAS_v2 TLF+Mechanized VDV+Mechanized
+Kokan_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+GooseBay_Invasion_v1 USA+LightInfantry WPMC+LightInfantry
+Manicouagan_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
+Tallil_TC_v1 TLF+Mechanized INS+Support
+Yehorivka_AAS_v2 USA+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 TLF+Support MEA+Support
+Skorpo_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+AlBasrah_Invasion_v1 CAF+Support TLF+Support
+Mutaha_RAAS_v2 TLF+Mechanized INS+LightInfantry
+FoolsRoad_Skirmish_v1 IMF+CombinedArms ADF+CombinedArms
+Kamdesh_AAS_v1 BAF+Support MEA+Support
+Anvil_AAS_v1 TLF+CombinedArms MEA+CombinedArms
+Lashkar_AAS_v2 MEA+Armored RGF+Armored
 Sumari_Invasion_v1 USA+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 PLA+LightInfantry USA+LightInfantry
-Fallujah_TC_v1 MEA+LightInfantry INS+Mechanized
-Anvil_AAS_v1 PLA+AirAssault TLF+AirAssault
-Lashkar_Skirmish_v1 RGF+CombinedArms TLF+CombinedArms
-Sanxian_Invasion_v2 WPMC+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v3 PLANMC+Armored CAF+Armored
-BlackCoast_AAS_v2 VDV+AirAssault ADF+Mechanized
+Gorodok_RAAS_v1 IMF+CombinedArms USA+CombinedArms
+Kohat_RAAS_v2 MEA+Mechanized ADF+Mechanized
+Fallujah_TC_v1 USMC+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Manicouagan_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
+Logar_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Harju_Invasion_v3 WPMC+LightInfantry IMF+LightInfantry
+Tallil_RAAS_v1 MEA+Armored INS+Armored
+Mutaha_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
+Kamdesh_RAAS_v1 MEA+Support PLA+Support
+Anvil_AAS_v1 MEA+AirAssault ADF+AirAssault
+BlackCoast_Invasion_v2 IMF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 WPMC+AirAssault PLA+AirAssault
+Yehorivka_AAS_v1 RGF+Armored IMF+Support
+AlBasrah_TC_v1 USMC+LightInfantry PLA+LightInfantry
+Mestia_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 USA+Armored PLA+Armored
+Kohat_Invasion_v1 TLF+Motorized PLA+Motorized
+Sumari_AAS_v2 USA+CombinedArms PLA+CombinedArms
+Manicouagan_RAAS_v1 USA+AirAssault WPMC+AirAssault
+Tallil_TC_v1 CAF+Motorized PLA+Motorized
+Harju_RAAS_v2 WPMC+LightInfantry ADF+CombinedArms
+Chora_AAS_v3 PLA+CombinedArms TLF+CombinedArms
+Anvil_RAAS_v1 TLF+AirAssault VDV+AirAssault
+Narva_Invasion_v1 IMF+LightInfantry WPMC+LightInfantry
+Skorpo_RAAS_v1 RGF+LightInfantry WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Logar_AAS_v1 PLA+CombinedArms USA+CombinedArms
+BlackCoast_RAAS_v1 RGF+Motorized IMF+Motorized
+Kohat_TC_v1 ADF+Mechanized INS+Mechanized
+Mestia_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
+Lashkar_Invasion_v1 PLA+Support WPMC+CombinedArms
+Harju_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Chora_RAAS_v1 MEA+CombinedArms PLA+CombinedArms
+Anvil_TC_v1 PLA+Motorized RGF+Motorized
+Manicouagan_AAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+Kamdesh_AAS_v1 VDV+Armored ADF+AirAssault
+FoolsRoad_Invasion_v1 USA+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLAAGF+CombinedArms
+Mutaha_TC_v1 USA+Mechanized INS+Mechanized
+Kokan_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v2 WPMC+CombinedArms PLA+Armored
+GooseBay_AAS_v1 PLANMC+CombinedArms USA+CombinedArms
+Belaya_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 PLA+LightInfantry MEA+LightInfantry
+Mestia_TC_v1 RGF+CombinedArms IMF+CombinedArms
+Gorodok_RAAS_v2 PLA+Support TLF+Support
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v1 USMC+Support VDV+Support
+Kohat_Insurgency_v1 USA+Support INS+Support
+Manicouagan_RAAS_v1 WPMC+AirAssault BAF+Mechanized
+Chora_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v1 IMF+Motorized USA+Motorized
+AlBasrah_AAS_v1 ADF+Mechanized TLF+Mechanized
+Yehorivka_Skirmish_v2 USMC+CombinedArms PLA+CombinedArms
+Tallil_RAAS_v1 USA+Motorized PLA+Armored
+Narva_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
+Belaya_AAS_v2 CAF+Motorized PLA+Motorized
+Logar_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+GooseBay_AAS_v1 VDV+Mechanized PLA+Mechanized
+Gorodok_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
+Mestia_TC_v1 PLA+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 BAF+Mechanized PLA+Armored
+Kohat_Invasion_v2 USA+Armored PLA+Armored
+Sanxian_RAAS_v2 PLANMC+AirAssault WPMC+AirAssault
