--- a/Tools/Rotation/LayerRotation/LayerRotation_13.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_13.cfg
@@ -1,200 +1,200 @@
-Anvil_Skirmish_v1 RGF+CombinedArms MEA+CombinedArms
-Manicouagan_RAAS_v2 VDV+CombinedArms USMC+CombinedArms
-AlBasrah_Invasion_v2 TLF+Support CAF+Support
-Lashkar_AAS_v1 TLF+CombinedArms INS+CombinedArms
-Sumari_TC_v1 USA+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 USMC+LightInfantry PLA+LightInfantry
-Tallil_TC_v1 WPMC+LightInfantry INS+Support
-Skorpo_Invasion_v1 VDV+CombinedArms USMC+CombinedArms
-Logar_TC_v1 USA+CombinedArms WPMC+CombinedArms
-Kohat_AAS_v1 TLF+Mechanized INS+Mechanized
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Fallujah_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Belaya_Invasion_v1 TLF+AirAssault WPMC+LightInfantry
-Sanxian_AAS_v2 USA+Motorized PLANMC+Motorized
-Kokan_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 TLF+Mechanized MEA+Mechanized
-Narva_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v1 VDV+Mechanized CAF+CombinedArms
-Mestia_TC_v1 USMC+CombinedArms IMF+CombinedArms
-Tallil_TC_v1 RGF+LightInfantry WPMC+LightInfantry
-AlBasrah_Invasion_v1 PLANMC+Support INS+Support
-Kamdesh_TC_v1 RGF+Motorized PLA+Motorized
-Sumari_AAS_v1 PLA+CombinedArms RGF+CombinedArms
-Gorodok_RAAS_v2 USA+AirAssault TLF+Support
-Sanxian_AAS_v3 USMC+LightInfantry WPMC+LightInfantry
-Chora_TC_v1 MEA+CombinedArms WPMC+CombinedArms
-Harju_Invasion_v3 USMC+LightInfantry WPMC+LightInfantry
-Belaya_RAAS_v1 PLA+AirAssault VDV+AirAssault
-Fallujah_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-FoolsRoad_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Tallil_TC_v1 USMC+Armored TLF+Armored
-Lashkar_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-Narva_TC_v1 WPMC+LightInfantry USA+LightInfantry
-Yehorivka_RAAS_v1 PLA+Motorized RGF+Motorized
-Anvil_TC_v1 INS+Support MEA+Support
-AlBasrah_RAAS_v1 WPMC+CombinedArms MEA+Support
-Mestia_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 PLA+AirAssault TLF+AirAssault
-Kamdesh_AAS_v1 PLA+Armored INS+Armored
-Chora_TC_v1 RGF+CombinedArms TLF+CombinedArms
-Mutaha_Invasion_v1 USMC+Armored VDV+Armored
-Lashkar_RAAS_v1 PLA+LightInfantry WPMC+CombinedArms
-Sumari_TC_v1 USA+CombinedArms PLA+CombinedArms
-Sanxian_AAS_v3 ADF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 TLF+AirAssault USA+AirAssault
-Yehorivka_Destruction_v1 VDV+Armored PLA+Armored
-Mestia_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Narva_TC_v1 IMF+LightInfantry WPMC+LightInfantry
-Fallujah_RAAS_v2 MEA+LightInfantry PLA+LightInfantry
-Kamdesh_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Kohat_RAAS_v1 VDV+CombinedArms PLA+Support
-Tallil_Invasion_v1 PLA+CombinedArms USA+CombinedArms
-Harju_RAAS_v2 VDV+Support BAF+Support
-Lashkar_TC_v1 MEA+LightInfantry PLA+LightInfantry
-Kokan_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLANMC+CombinedArms
-AlBasrah_Insurgency_v1 ADF+AirAssault INS+Mechanized
-Gorodok_RAAS_v2 PLA+LightInfantry IMF+LightInfantry
-Skorpo_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-Fallujah_RAAS_v1 INS+LightInfantry USA+LightInfantry
-Sanxian_AAS_v3 WPMC+CombinedArms BAF+CombinedArms
-Kamdesh_Invasion_v1 PLA+AirAssault USMC+Motorized
-Anvil_AAS_v1 TLF+Support MEA+Support
-Tallil_Skirmish_v1 INS+CombinedArms RGF+CombinedArms
-Harju_RAAS_v2 CAF+Support VDV+Support
-Yehorivka_AAS_v2 ADF+CombinedArms RGF+CombinedArms
-Sumari_Invasion_v1 CAF+CombinedArms INS+CombinedArms
-Manicouagan_RAAS_v2 WPMC+AirAssault BAF+AirAssault
-Narva_AAS_v3 IMF+Armored CAF+Armored
-AlBasrah_AAS_v1 ADF+CombinedArms TLF+Mechanized
-Fallujah_RAAS_v2 MEA+Support RGF+Support
-Mestia_Invasion_v1 PLA+CombinedArms USMC+CombinedArms
-GooseBay_AAS_v1 VDV+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 MEA+AirAssault USA+AirAssault
-Gorodok_RAAS_v2 CAF+AirAssault PLA+AirAssault
-Kokan_TC_v1 PLA+CombinedArms USA+CombinedArms
-Tallil_Invasion_v1 TLF+Armored WPMC+CombinedArms
-Kamdesh_AAS_v1 INS+CombinedArms VDV+CombinedArms
-Sumari_AAS_v2 RGF+CombinedArms CAF+CombinedArms
-BlackCoast_AAS_v2 VDV+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v2 CAF+Support PLA+Support
-Yehorivka_RAAS_v2 WPMC+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 MEA+LightInfantry WPMC+CombinedArms
-Harju_Skirmish_v1 IMF+CombinedArms RGF+CombinedArms
-Fallujah_TC_v1 INS+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 USMC+Armored VDV+Armored
-FoolsRoad_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 IMF+Armored USA+Armored
-Manicouagan_Invasion_v2 USMC+LightInfantry WPMC+LightInfantry
-Chora_AAS_v3 WPMC+CombinedArms TLF+CombinedArms
-Sanxian_RAAS_v2 USMC+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 ADF+CombinedArms MEA+CombinedArms
-AlBasrah_Skirmish_v2 WPMC+CombinedArms TLF+CombinedArms
-Mutaha_Invasion_v1 RGF+LightInfantry INS+LightInfantry
-BlackCoast_RAAS_v1 VDV+Mechanized USA+Motorized
-Tallil_RAAS_v1 INS+Armored PLA+Armored
-Kohat_RAAS_v1 INS+LightInfantry RGF+LightInfantry
-Sumari_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 CAF+Mechanized RGF+Mechanized
-Narva_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-Belaya_AAS_v2 BAF+Mechanized TLF+Mechanized
-Chora_RAAS_v1 RGF+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v2 PLA+LightInfantry IMF+LightInfantry
-Harju_Invasion_v2 IMF+CombinedArms BAF+CombinedArms
-Lashkar_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 VDV+CombinedArms ADF+CombinedArms
-Tallil_RAAS_v1 MEA+Armored BAF+Armored
-Mutaha_TC_v1 PLA+CombinedArms INS+CombinedArms
-FoolsRoad_TC_v1 USMC+CombinedArms PLA+CombinedArms
-Kamdesh_Invasion_v1 BAF+Support PLA+Support
-Anvil_RAAS_v1 CAF+Support RGF+Support
-Kohat_AAS_v1 ADF+AirAssault WPMC+AirAssault
-Fallujah_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Narva_AAS_v3 CAF+CombinedArms WPMC+CombinedArms
-Sumari_Insurgency_v1 CAF+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms USA+CombinedArms
-Lashkar_AAS_v1 WPMC+AirAssault TLF+Mechanized
-Chora_Skirmish_v1 USA+CombinedArms TLF+CombinedArms
-Tallil_RAAS_v2 WPMC+CombinedArms MEA+CombinedArms
-Yehorivka_Destruction_v1 RGF+Support PLA+Support
-GooseBay_Skirmish_v1 RGF+CombinedArms WPMC+CombinedArms
-Gorodok_AAS_v1 IMF+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v1 INS+Mechanized RGF+LightInfantry
-Sanxian_RAAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Manicouagan_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Skirmish_v1 PLA+CombinedArms CAF+CombinedArms
-Lashkar_AAS_v2 USA+Mechanized INS+Mechanized
-Belaya_TC_v1 USMC+Motorized TLF+Support
-Sumari_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Kohat_RAAS_v1 PLA+CombinedArms VDV+CombinedArms
-Fallujah_RAAS_v1 USA+Armored MEA+Armored
-Mutaha_AAS_v1 PLA+CombinedArms BAF+CombinedArms
-Kokan_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Yehorivka_Destruction_v1 ADF+AirAssault TLF+Mechanized
-Gorodok_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Tallil_Skirmish_v1 INS+CombinedArms VDV+CombinedArms
-Anvil_TC_v1 TLF+Support RGF+Support
-Lashkar_RAAS_v1 INS+CombinedArms ADF+CombinedArms
-Belaya_Invasion_v2 TLF+AirAssault BAF+Armored
-Chora_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 PLA+CombinedArms TLF+CombinedArms
-Kohat_RAAS_v1 TLF+Armored USA+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry USA+Mechanized
-Mutaha_Invasion_v1 VDV+Mechanized ADF+Mechanized
-Yehorivka_Skirmish_v2 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 PLA+LightInfantry INS+LightInfantry
-Narva_AAS_v1 ADF+AirAssault WPMC+AirAssault
-Gorodok_RAAS_v1 IMF+Mechanized CAF+Mechanized
-Lashkar_Invasion_v1 INS+Support CAF+Support
-Fallujah_RAAS_v2 PLA+Armored BAF+Armored
-AlBasrah_TC_v1 INS+Support TLF+Support
-Kamdesh_Skirmish_v1 MEA+CombinedArms BAF+CombinedArms
-Belaya_AAS_v2 PLA+Support BAF+Support
-Harju_Invasion_v3 BAF+Support IMF+Support
-Mestia_TC_v1 TLF+CombinedArms PLA+CombinedArms
-Anvil_TC_v1 PLA+CombinedArms MEA+LightInfantry
-BlackCoast_AAS_v2 PLA+AirAssault CAF+AirAssault
-Chora_AAS_v1 TLF+CombinedArms VDV+CombinedArms
-Yehorivka_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
-Manicouagan_RAAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
-Tallil_TC_v1 MEA+AirAssault PLA+Armored
-Lashkar_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
-Fallujah_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
+GooseBay_Invasion_v1 PLAAGF+CombinedArms VDV+CombinedArms
+AlBasrah_AAS_v1 USA+AirAssault MEA+Mechanized
+Mestia_TC_v1 RGF+CombinedArms CAF+CombinedArms
+Harju_AAS_v1 CAF+Mechanized VDV+Mechanized
+Manicouagan_AAS_v3 WPMC+CombinedArms USMC+CombinedArms
+Anvil_RAAS_v2 PLA+Armored VDV+Armored
+Fallujah_Invasion_v2 USA+LightInfantry PLA+LightInfantry
+Mutaha_RAAS_v2 ADF+CombinedArms MEA+CombinedArms
+FoolsRoad_Skirmish_v1 PLA+CombinedArms IMF+CombinedArms
+Gorodok_AAS_v1 PLA+AirAssault TLF+Armored
+Tallil_RAAS_v2 RGF+Mechanized BAF+Mechanized
+Kokan_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+Sanxian_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 PLA+Armored USA+Armored
+BlackCoast_Skirmish_v1 PLANMC+CombinedArms ADF+CombinedArms
+AlBasrah_AAS_v1 PLAAGF+Armored USMC+Armored
+Anvil_RAAS_v2 MEA+LightInfantry USA+Support
+Manicouagan_AAS_v3 WPMC+LightInfantry PLANMC+LightInfantry
+Yehorivka_Invasion_v2 PLA+CombinedArms BAF+CombinedArms
+Logar_RAAS_v1 INS+CombinedArms TLF+CombinedArms
+Gorodok_AAS_v1 PLA+Armored USMC+Armored
+Harju_AAS_v1 CAF+CombinedArms IMF+CombinedArms
+Kokan_TC_v1 ADF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 BAF+Support VDV+Support
+Tallil_Invasion_v1 TLF+Armored VDV+Armored
+GooseBay_AAS_v1 PLANMC+Motorized WPMC+LightInfantry
+Lashkar_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Fallujah_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mutaha_RAAS_v1 TLF+Armored MEA+Armored
+AlBasrah_Insurgency_v1 MEA+Support INS+Motorized
+Mestia_RAAS_v1 VDV+CombinedArms USA+CombinedArms
+Yehorivka_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Gorodok_RAAS_v2 USMC+LightInfantry IMF+LightInfantry
+Kokan_Skirmish_v1 WPMC+CombinedArms BAF+CombinedArms
+Kamdesh_AAS_v1 USA+Mechanized PLA+Motorized
+Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Logar_Insurgency_v1 PLA+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
+Tallil_TC_v1 MEA+Mechanized ADF+Mechanized
+Kohat_RAAS_v2 BAF+Mechanized VDV+Mechanized
+BlackCoast_AAS_v2 CAF+Mechanized RGF+Armored
+Lashkar_RAAS_v1 MEA+Armored INS+Armored
+AlBasrah_Invasion_v2 RGF+Mechanized INS+Mechanized
+Chora_AAS_v3 USA+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v2 TLF+Armored USA+Armored
+Fallujah_RAAS_v2 USMC+Motorized PLA+Support
+Kokan_AAS_v2 BAF+CombinedArms MEA+CombinedArms
+Narva_AAS_v2 ADF+AirAssault WPMC+AirAssault
 Mutaha_Invasion_v1 PLA+Armored BAF+Armored
-Kohat_RAAS_v1 PLA+Armored INS+Armored
-AlBasrah_AAS_v1 USMC+Motorized INS+Motorized
-Skorpo_RAAS_v1 WPMC+CombinedArms IMF+LightInfantry
-Kokan_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-Belaya_AAS_v2 TLF+Motorized IMF+Motorized
-Harju_Invasion_v3 RGF+LightInfantry WPMC+LightInfantry
-FoolsRoad_AAS_v1 ADF+CombinedArms PLA+CombinedArms
-Gorodok_RAAS_v1 CAF+Armored PLA+Armored
-Lashkar_TC_v2 PLA+Motorized USMC+Motorized
-Fallujah_RAAS_v1 WPMC+CombinedArms INS+Mechanized
-Tallil_Invasion_v1 VDV+Mechanized CAF+Mechanized
-Manicouagan_AAS_v2 WPMC+CombinedArms PLANMC+CombinedArms
-GooseBay_AAS_v1 USA+Mechanized RGF+Mechanized
-Kohat_TC_v1 TLF+Support RGF+Support
-Sumari_AAS_v2 INS+CombinedArms USA+CombinedArms
-Kamdesh_Invasion_v1 WPMC+LightInfantry MEA+CombinedArms
-Yehorivka_AAS_v2 PLA+CombinedArms BAF+CombinedArms
-Logar_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-AlBasrah_TC_v1 CAF+Mechanized MEA+Mechanized
-Mutaha_RAAS_v1 MEA+Mechanized TLF+Mechanized
-Lashkar_Invasion_v1 USMC+LightInfantry WPMC+LightInfantry
-Anvil_AAS_v1 USA+Support INS+Support
-FoolsRoad_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-Harju_RAAS_v1 USMC+CombinedArms VDV+AirAssault
-Fallujah_TC_v1 USA+Motorized PLA+Motorized
-Narva_Destruction_v1 WPMC+LightInfantry IMF+LightInfantry
-Kohat_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-Skorpo_RAAS_v1 VDV+Armored IMF+Armored
-Gorodok_TC_v1 WPMC+AirAssault TLF+AirAssault
-Yehorivka_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 TLF+CombinedArms ADF+CombinedArms
-Lashkar_TC_v1 MEA+Support CAF+Support
-Anvil_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Logar_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+Harju_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+BlackCoast_AAS_v2 PLANMC+Armored USA+Armored
+Kohat_TC_v1 TLF+Motorized INS+CombinedArms
+Mestia_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 PLA+Armored VDV+Armored
+AlBasrah_RAAS_v1 PLAAGF+Mechanized VDV+Mechanized
+FoolsRoad_AAS_v1 PLA+CombinedArms IMF+CombinedArms
+Fallujah_RAAS_v1 BAF+CombinedArms INS+Motorized
+Kamdesh_RAAS_v1 BAF+AirAssault PLA+AirAssault
+Skorpo_RAAS_v1 USMC+Armored IMF+Armored
+Kokan_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v3 WPMC+AirAssault PLA+AirAssault
+Yehorivka_RAAS_v1 RGF+Armored USMC+Armored
+Chora_TC_v1 PLA+CombinedArms USMC+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Kohat_AAS_v1 TLF+CombinedArms USMC+LightInfantry
+Gorodok_Destruction_v1 VDV+CombinedArms CAF+CombinedArms
+Lashkar_RAAS_v1 PLA+Support USMC+Support
+Mestia_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 TLF+Motorized USMC+Motorized
+Skorpo_RAAS_v1 WPMC+AirAssault USMC+Motorized
+Narva_AAS_v2 IMF+CombinedArms ADF+CombinedArms
+Tallil_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
+Anvil_RAAS_v2 CAF+Armored MEA+Armored
+FoolsRoad_AAS_v2 RGF+CombinedArms TLF+CombinedArms
+BlackCoast_RAAS_v2 WPMC+AirAssault PLANMC+Armored
+Fallujah_TC_v1 VDV+CombinedArms ADF+CombinedArms
+AlBasrah_RAAS_v1 BAF+Mechanized INS+Mechanized
+Sumari_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
+Yehorivka_AAS_v1 USMC+CombinedArms IMF+CombinedArms
+Manicouagan_AAS_v2 PLA+Mechanized USMC+LightInfantry
+Kohat_TC_v1 WPMC+LightInfantry INS+LightInfantry
+Skorpo_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 TLF+Motorized USMC+Motorized
+Kamdesh_Invasion_v1 MEA+Armored INS+Armored
+Mutaha_RAAS_v1 TLF+AirAssault VDV+AirAssault
+Anvil_TC_v1 WPMC+CombinedArms TLF+AirAssault
+Fallujah_RAAS_v2 TLF+Motorized INS+Motorized
+Harju_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
+Kokan_AAS_v2 USA+CombinedArms WPMC+CombinedArms
+Yehorivka_Destruction_v1 IMF+Support RGF+Support
+GooseBay_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+BlackCoast_Skirmish_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 USMC+LightInfantry WPMC+AirAssault
+AlBasrah_RAAS_v1 VDV+AirAssault USA+AirAssault
+Mestia_AAS_v1 BAF+CombinedArms IMF+CombinedArms
+Lashkar_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Gorodok_TC_v1 RGF+Mechanized IMF+Mechanized
+Logar_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
+Anvil_Invasion_v1 BAF+Support TLF+Support
+Fallujah_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
+Kamdesh_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v1 PLA+CombinedArms USA+Motorized
+Manicouagan_RAAS_v2 USA+CombinedArms PLAAGF+CombinedArms
+FoolsRoad_AAS_v2 TLF+CombinedArms RGF+CombinedArms
+Kohat_Invasion_v2 MEA+Armored INS+Armored
+AlBasrah_AAS_v1 RGF+Armored USA+Armored
+Lashkar_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
+Belaya_AAS_v2 ADF+AirAssault PLA+AirAssault
+Sanxian_RAAS_v2 ADF+Mechanized WPMC+AirAssault
+Anvil_RAAS_v2 WPMC+LightInfantry INS+LightInfantry
+Gorodok_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+Mutaha_RAAS_v1 INS+Mechanized ADF+Mechanized
+Mestia_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Harju_RAAS_v1 ADF+CombinedArms IMF+CombinedArms
+BlackCoast_AAS_v2 WPMC+AirAssault TLF+AirAssault
+Sumari_AAS_v2 INS+CombinedArms USMC+CombinedArms
+AlBasrah_Invasion_v2 RGF+LightInfantry PLA+LightInfantry
+Yehorivka_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Narva_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
+Manicouagan_RAAS_v1 CAF+Mechanized WPMC+AirAssault
+Anvil_AAS_v1 INS+LightInfantry MEA+LightInfantry
+Fallujah_RAAS_v1 INS+CombinedArms BAF+CombinedArms
+FoolsRoad_Invasion_v1 TLF+CombinedArms RGF+CombinedArms
+Lashkar_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 PLA+AirAssault ADF+AirAssault
+Mutaha_RAAS_v2 PLA+Support RGF+Support
+Mestia_TC_v1 USMC+CombinedArms TLF+CombinedArms
+Sanxian_RAAS_v1 PLAAGF+CombinedArms ADF+CombinedArms
+Yehorivka_Invasion_v2 VDV+Armored PLA+Armored
+Kohat_AAS_v1 TLF+Armored WPMC+LightInfantry
+AlBasrah_RAAS_v1 CAF+Support INS+Support
+Manicouagan_Skirmish_v2 BAF+CombinedArms WPMC+CombinedArms
+Tallil_AAS_v1 RGF+Mechanized MEA+Mechanized
+Fallujah_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+Chora_AAS_v1 INS+CombinedArms USA+CombinedArms
+Anvil_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
+Belaya_AAS_v1 TLF+Motorized WPMC+LightInfantry
+Kamdesh_AAS_v1 MEA+Mechanized BAF+Mechanized
+Logar_TC_v1 TLF+CombinedArms PLA+CombinedArms
+Lashkar_RAAS_v1 ADF+AirAssault WPMC+AirAssault
+Gorodok_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Yehorivka_Destruction_v1 TLF+AirAssault BAF+Mechanized
+Sanxian_AAS_v2 PLANMC+AirAssault CAF+AirAssault
+Harju_Skirmish_v2 WPMC+CombinedArms IMF+CombinedArms
+PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v2 VDV+CombinedArms ADF+CombinedArms
+Manicouagan_RAAS_v2 PLANMC+AirAssault WPMC+CombinedArms
+Kokan_Invasion_v1 TLF+CombinedArms BAF+CombinedArms
+Fallujah_RAAS_v2 TLF+CombinedArms VDV+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+BlackCoast_Skirmish_v1 TLF+CombinedArms PLANMC+CombinedArms
+Narva_AAS_v1 RGF+Motorized USMC+Motorized
+Mutaha_AAS_v1 WPMC+CombinedArms CAF+AirAssault
+Yehorivka_Destruction_v1 TLF+Support IMF+Support
+Skorpo_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Gorodok_TC_v1 PLA+CombinedArms IMF+CombinedArms
+Mestia_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 INS+Armored PLA+AirAssault
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+FoolsRoad_Destruction_v1 VDV+CombinedArms TLF+CombinedArms
+Belaya_RAAS_v1 TLF+Motorized IMF+Motorized
+Anvil_TC_v1 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_RAAS_v1 USA+Mechanized INS+Mechanized
+Manicouagan_AAS_v2 PLAAGF+Armored VDV+Armored
+Harju_AAS_v1 VDV+Armored WPMC+LightInfantry
+Sumari_Invasion_v1 TLF+CombinedArms CAF+CombinedArms
+AlBasrah_AAS_v1 WPMC+AirAssault USA+AirAssault
+Fallujah_TC_v1 TLF+Support INS+Support
+Yehorivka_AAS_v2 TLF+AirAssault CAF+AirAssault
+Tallil_AAS_v1 USMC+LightInfantry RGF+Armored
+Kokan_AAS_v2 MEA+CombinedArms INS+CombinedArms
+Kohat_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
+Mutaha_RAAS_v1 RGF+LightInfantry PLA+LightInfantry
+Gorodok_TC_v1 CAF+CombinedArms VDV+CombinedArms
+Manicouagan_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Anvil_RAAS_v1 INS+LightInfantry MEA+LightInfantry
+Sumari_AAS_v2 TLF+CombinedArms USA+CombinedArms
+Harju_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 VDV+Support PLA+CombinedArms
+Fallujah_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
+Narva_AAS_v2 IMF+Mechanized ADF+Mechanized
+Tallil_RAAS_v2 USMC+CombinedArms RGF+CombinedArms
+FoolsRoad_AAS_v2 BAF+CombinedArms TLF+CombinedArms
+Yehorivka_Invasion_v1 ADF+Mechanized VDV+Mechanized
+Gorodok_RAAS_v2 IMF+Mechanized ADF+AirAssault
+Kohat_TC_v1 MEA+Mechanized CAF+Mechanized
+Kamdesh_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
+BlackCoast_AAS_v2 TLF+Armored PLA+Armored
+Logar_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Mutaha_Invasion_v1 VDV+CombinedArms USA+CombinedArms
+Anvil_RAAS_v1 BAF+Armored WPMC+CombinedArms
+Kokan_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
+Fallujah_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+GooseBay_AAS_v1 PLANMC+LightInfantry WPMC+LightInfantry
+Yehorivka_AAS_v1 IMF+Mechanized ADF+Mechanized
+FoolsRoad_Destruction_v1 RGF+CombinedArms PLA+CombinedArms
