--- a/Tools/Rotation/LayerRotation/LayerRotation_20.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_20.cfg
@@ -1,200 +1,200 @@
-Fallujah_TC_v1 USA+Armored MEA+Armored
-AlBasrah_Invasion_v2 BAF+Armored PLAAGF+Armored
-Sumari_AAS_v1 PLA+CombinedArms INS+CombinedArms
-Sanxian_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 BAF+Armored IMF+Armored
-Yehorivka_Skirmish_v2 WPMC+CombinedArms TLF+CombinedArms
-BlackCoast_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
-Anvil_RAAS_v2 CAF+CombinedArms TLF+CombinedArms
-Harju_RAAS_v2 USMC+Armored IMF+Mechanized
-Belaya_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 WPMC+AirAssault BAF+AirAssault
-Manicouagan_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 USA+Support MEA+Support
-Chora_AAS_v1 INS+CombinedArms MEA+CombinedArms
-Narva_TC_v1 VDV+CombinedArms WPMC+CombinedArms
-Sanxian_RAAS_v1 WPMC+LightInfantry BAF+Armored
-Kamdesh_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-AlBasrah_Insurgency_v1 VDV+Armored INS+Armored
-Fallujah_TC_v1 USMC+Support INS+Support
-Kokan_Skirmish_v1 ADF+CombinedArms MEA+CombinedArms
-Gorodok_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-BlackCoast_AAS_v2 IMF+LightInfantry WPMC+LightInfantry
-Sumari_TC_v1 WPMC+CombinedArms MEA+CombinedArms
-Lashkar_Invasion_v1 MEA+Support PLA+Support
-Yehorivka_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
-Skorpo_RAAS_v1 VDV+Support IMF+Motorized
-Mestia_Skirmish_v1 USA+CombinedArms IMF+CombinedArms
-Sanxian_AAS_v3 WPMC+AirAssault ADF+AirAssault
-Tallil_RAAS_v1 MEA+LightInfantry USA+LightInfantry
-Fallujah_Invasion_v2 TLF+Support INS+Support
-Belaya_AAS_v3 WPMC+LightInfantry IMF+LightInfantry
-Gorodok_TC_v1 PLA+Support USA+Support
-Mutaha_AAS_v1 CAF+CombinedArms RGF+CombinedArms
-Kamdesh_AAS_v1 USA+Armored PLA+Armored
-FoolsRoad_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 CAF+CombinedArms PLAAGF+CombinedArms
-Anvil_RAAS_v1 INS+Mechanized USA+Mechanized
-Logar_TC_v1 VDV+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 TLF+Armored IMF+Armored
-Lashkar_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-AlBasrah_RAAS_v1 TLF+Support VDV+AirAssault
-Manicouagan_AAS_v2 VDV+AirAssault USA+AirAssault
-Fallujah_RAAS_v1 PLA+LightInfantry WPMC+LightInfantry
-Narva_Invasion_v2 IMF+Motorized CAF+Motorized
-Sumari_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
-Tallil_TC_v1 WPMC+CombinedArms VDV+CombinedArms
-Mutaha_TC_v1 WPMC+AirAssault INS+LightInfantry
-Chora_TC_v1 USMC+CombinedArms RGF+CombinedArms
-Belaya_Invasion_v1 USA+Motorized PLA+Motorized
-GooseBay_AAS_v1 USA+LightInfantry RGF+LightInfantry
-Sanxian_RAAS_v2 WPMC+LightInfantry PLANMC+LightInfantry
-Harju_Skirmish_v1 USMC+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-Gorodok_TC_v1 VDV+Support USA+Support
-Sumari_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Kamdesh_TC_v1 INS+Motorized TLF+Motorized
-Lashkar_TC_v2 CAF+Support MEA+LightInfantry
-Skorpo_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
-Kohat_AAS_v1 TLF+Armored VDV+Armored
-BlackCoast_AAS_v2 CAF+Armored IMF+Armored
-Kokan_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 RGF+Motorized INS+Motorized
-Tallil_Invasion_v1 USA+Motorized VDV+CombinedArms
-Anvil_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Yehorivka_AAS_v1 ADF+AirAssault VDV+AirAssault
-Sanxian_AAS_v3 PLA+AirAssault WPMC+AirAssault
-AlBasrah_AAS_v1 TLF+Support MEA+Support
-FoolsRoad_Destruction_v1 RGF+CombinedArms ADF+CombinedArms
-Skorpo_RAAS_v1 ADF+Mechanized IMF+Support
-Gorodok_RAAS_v2 IMF+Armored TLF+Armored
-Belaya_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
-Sumari_Invasion_v1 MEA+CombinedArms BAF+CombinedArms
-Tallil_RAAS_v1 MEA+CombinedArms PLA+LightInfantry
-Fallujah_RAAS_v2 USA+Armored MEA+Armored
-PacificProvingGrounds_AAS_v1 USA+CombinedArms PLAAGF+CombinedArms
-Mestia_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Anvil_Invasion_v1 INS+Motorized TLF+Motorized
-Lashkar_RAAS_v1 WPMC+CombinedArms USA+Mechanized
-Kohat_TC_v1 PLA+Armored CAF+Armored
-Narva_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Kamdesh_TC_v1 TLF+AirAssault MEA+AirAssault
-Yehorivka_Invasion_v2 TLF+CombinedArms IMF+CombinedArms
-Mutaha_AAS_v1 MEA+Mechanized PLA+CombinedArms
-Gorodok_TC_v1 CAF+CombinedArms IMF+CombinedArms
-Kokan_TC_v1 ADF+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Manicouagan_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-Sanxian_Skirmish_v1 WPMC+CombinedArms BAF+CombinedArms
-Lashkar_TC_v1 BAF+CombinedArms MEA+LightInfantry
-Fallujah_AAS_v1 INS+CombinedArms VDV+CombinedArms
-BlackCoast_Skirmish_v1 PLAAGF+CombinedArms VDV+CombinedArms
-Narva_Invasion_v1 VDV+CombinedArms IMF+CombinedArms
-AlBasrah_TC_v1 TLF+Motorized PLANMC+Motorized
-Sumari_TC_v1 USMC+CombinedArms PLA+CombinedArms
-Kohat_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
-Anvil_Invasion_v1 PLA+Armored INS+Armored
-Mestia_TC_v1 PLA+CombinedArms RGF+CombinedArms
-Sanxian_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
-Lashkar_RAAS_v1 INS+Motorized TLF+Motorized
-Gorodok_RAAS_v2 WPMC+CombinedArms ADF+CombinedArms
-Chora_Invasion_v1 PLA+CombinedArms RGF+CombinedArms
-Narva_RAAS_v1 VDV+Armored BAF+Armored
-GooseBay_RAAS_v2 RGF+Mechanized WPMC+LightInfantry
-Harju_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-AlBasrah_Insurgency_v1 CAF+Armored INS+Armored
-Mutaha_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 WPMC+LightInfantry RGF+LightInfantry
-Belaya_AAS_v2 TLF+Support RGF+Support
-Kamdesh_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Yehorivka_Destruction_v1 BAF+Support IMF+Armored
-BlackCoast_RAAS_v1 IMF+Motorized PLANMC+Motorized
-Kokan_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
-Lashkar_TC_v2 PLA+CombinedArms USMC+CombinedArms
-Kohat_AAS_v1 MEA+LightInfantry INS+LightInfantry
-Sumari_AAS_v2 USA+CombinedArms INS+CombinedArms
-Fallujah_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v3 USA+CombinedArms WPMC+CombinedArms
-Tallil_Skirmish_v3 MEA+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v1 TLF+AirAssault WPMC+AirAssault
-Gorodok_TC_v1 PLA+LightInfantry USA+LightInfantry
-Yehorivka_Invasion_v2 VDV+Mechanized IMF+Mechanized
-Harju_AAS_v3 CAF+CombinedArms IMF+CombinedArms
-Kamdesh_RAAS_v1 TLF+Motorized WPMC+LightInfantry
-AlBasrah_TC_v1 ADF+Mechanized INS+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Lashkar_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-Logar_TC_v1 RGF+CombinedArms USA+CombinedArms
-Narva_AAS_v2 VDV+CombinedArms WPMC+CombinedArms
-Fallujah_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
-Kohat_TC_v1 INS+Armored PLA+Armored
-FoolsRoad_Destruction_v1 PLA+CombinedArms BAF+CombinedArms
-Tallil_TC_v1 INS+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v2 MEA+LightInfantry WPMC+LightInfantry
-Sumari_TC_v1 RGF+CombinedArms USA+CombinedArms
-Anvil_TC_v1 USMC+Armored PLA+Armored
-Yehorivka_RAAS_v2 TLF+AirAssault WPMC+LightInfantry
-Manicouagan_Invasion_v1 RGF+Support BAF+Support
-Gorodok_AAS_v1 IMF+Mechanized RGF+Mechanized
-Lashkar_AAS_v2 WPMC+LightInfantry INS+LightInfantry
-Skorpo_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
-Harju_Skirmish_v1 IMF+CombinedArms BAF+CombinedArms
-Belaya_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
-Kamdesh_RAAS_v1 MEA+AirAssault PLA+AirAssault
-Tallil_TC_v1 VDV+AirAssault INS+Motorized
-Sumari_TC_v1 RGF+CombinedArms CAF+CombinedArms
+BlackCoast_AAS_v2 VDV+Armored USA+Armored
+Lashkar_AAS_v1 PLA+Motorized USMC+Motorized
 PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v2 PLANMC+Support CAF+Support
-Chora_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Yehorivka_RAAS_v1 PLA+AirAssault ADF+AirAssault
-Anvil_RAAS_v2 USMC+CombinedArms RGF+Motorized
-Lashkar_AAS_v1 MEA+CombinedArms USMC+CombinedArms
-Gorodok_AAS_v1 PLA+Armored RGF+Armored
-Belaya_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v2 BAF+Support PLA+Support
-Kamdesh_RAAS_v1 WPMC+AirAssault MEA+AirAssault
-Mestia_AAS_v1 RGF+CombinedArms PLA+CombinedArms
-GooseBay_Invasion_v1 VDV+CombinedArms WPMC+LightInfantry
-Kohat_TC_v1 INS+CombinedArms PLA+CombinedArms
-Logar_RAAS_v1 USMC+CombinedArms MEA+CombinedArms
-AlBasrah_RAAS_v1 RGF+Mechanized PLAAGF+Mechanized
-Manicouagan_RAAS_v2 BAF+Mechanized RGF+Mechanized
-Sumari_Invasion_v1 MEA+CombinedArms INS+CombinedArms
-Lashkar_AAS_v1 MEA+AirAssault INS+Mechanized
-Tallil_AAS_v1 USA+Armored VDV+Armored
-Kokan_Skirmish_v1 TLF+CombinedArms INS+CombinedArms
-Gorodok_RAAS_v1 PLA+LightInfantry USA+LightInfantry
-Kamdesh_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
-Mestia_Skirmish_v1 IMF+CombinedArms USMC+CombinedArms
-Fallujah_RAAS_v2 PLA+LightInfantry MEA+CombinedArms
-Anvil_TC_v1 PLA+Motorized INS+Motorized
-FoolsRoad_Skirmish_v2 IMF+CombinedArms PLA+CombinedArms
-Mutaha_TC_v1 PLA+Armored INS+Armored
-Yehorivka_Destruction_v1 WPMC+CombinedArms TLF+CombinedArms
-Kohat_TC_v1 USMC+LightInfantry WPMC+LightInfantry
-Lashkar_RAAS_v1 WPMC+AirAssault ADF+CombinedArms
-Harju_RAAS_v2 WPMC+AirAssault BAF+AirAssault
-Tallil_Skirmish_v3 TLF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 USA+LightInfantry WPMC+LightInfantry
-Gorodok_TC_v1 IMF+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v1 CAF+Mechanized PLAAGF+CombinedArms
-Skorpo_RAAS_v1 IMF+Motorized RGF+Motorized
-Chora_RAAS_v1 CAF+CombinedArms MEA+CombinedArms
-Fallujah_Invasion_v2 RGF+Motorized USMC+Motorized
-AlBasrah_AAS_v1 PLA+LightInfantry INS+LightInfantry
-Yehorivka_RAAS_v2 USMC+Armored VDV+Support
-Anvil_TC_v1 TLF+Mechanized MEA+Mechanized
-Harju_Skirmish_v1 USMC+CombinedArms IMF+CombinedArms
-Kohat_Invasion_v2 BAF+CombinedArms PLA+CombinedArms
-Narva_TC_v1 WPMC+AirAssault VDV+AirAssault
-Tallil_Skirmish_v3 MEA+CombinedArms USA+CombinedArms
-Lashkar_RAAS_v1 ADF+Mechanized INS+Mechanized
-Skorpo_RAAS_v1 WPMC+CombinedArms CAF+AirAssault
-Sumari_Invasion_v1 CAF+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 TLF+Mechanized INS+Mechanized
+Logar_Skirmish_v1 INS+CombinedArms USA+CombinedArms
+Yehorivka_AAS_v1 PLA+LightInfantry WPMC+AirAssault
+Kohat_Invasion_v1 TLF+CombinedArms WPMC+CombinedArms
+Kokan_RAAS_v1 INS+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 PLA+Motorized INS+Motorized
+Anvil_TC_v1 TLF+Mechanized ADF+Mechanized
+Sanxian_RAAS_v2 WPMC+LightInfantry USMC+CombinedArms
+Mutaha_RAAS_v2 BAF+Mechanized RGF+Mechanized
+Manicouagan_Invasion_v1 PLA+Motorized RGF+Motorized
+Gorodok_RAAS_v2 USA+AirAssault VDV+AirAssault
+Mestia_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Belaya_TC_v1 PLA+Support BAF+AirAssault
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms USA+CombinedArms
+Tallil_RAAS_v1 BAF+Armored PLA+Armored
+Harju_Invasion_v3 USMC+Support IMF+Support
+FoolsRoad_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+AlBasrah_TC_v1 INS+Mechanized TLF+Mechanized
+Anvil_RAAS_v1 PLA+Support USMC+Support
+Logar_RAAS_v1 MEA+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v1 TLF+Armored PLA+CombinedArms
+Kohat_RAAS_v2 VDV+Armored CAF+Armored
+Narva_Destruction_v1 IMF+CombinedArms VDV+CombinedArms
+Mestia_RAAS_v1 TLF+CombinedArms IMF+CombinedArms
+Mutaha_TC_v1 PLA+LightInfantry WPMC+LightInfantry
+Sanxian_RAAS_v2 USA+AirAssault WPMC+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Harju_AAS_v1 BAF+AirAssault IMF+Armored
+Belaya_Invasion_v1 ADF+CombinedArms IMF+CombinedArms
+Gorodok_RAAS_v1 RGF+Support PLA+Support
+Chora_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
+Fallujah_RAAS_v1 TLF+Support INS+Support
+Kohat_RAAS_v2 VDV+Mechanized ADF+Mechanized
+Sumari_RAAS_v1 PLA+CombinedArms INS+CombinedArms
+Yehorivka_AAS_v1 WPMC+CombinedArms IMF+Armored
+Manicouagan_Invasion_v2 RGF+CombinedArms PLAAGF+CombinedArms
+Kamdesh_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Tallil_Skirmish_v3 PLA+CombinedArms BAF+CombinedArms
+BlackCoast_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 PLAAGF+Armored TLF+Motorized
+Belaya_AAS_v1 IMF+Motorized TLF+Motorized
+Gorodok_Destruction_v1 PLA+Support USMC+Support
+Mestia_AAS_v1 IMF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 MEA+Mechanized ADF+Mechanized
+Mutaha_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+Narva_AAS_v1 WPMC+CombinedArms IMF+Armored
+Logar_AAS_v1 INS+CombinedArms VDV+CombinedArms
+Lashkar_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
+Fallujah_RAAS_v2 PLA+CombinedArms WPMC+CombinedArms
+BlackCoast_Skirmish_v1 RGF+CombinedArms ADF+CombinedArms
+Yehorivka_RAAS_v2 PLA+CombinedArms USMC+CombinedArms
+Manicouagan_RAAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 VDV+Mechanized ADF+Mechanized
+AlBasrah_Invasion_v2 TLF+Support RGF+Support
+Skorpo_RAAS_v1 CAF+Support VDV+Support
+Kokan_TC_v1 CAF+CombinedArms PLA+CombinedArms
+Tallil_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Narva_RAAS_v1 WPMC+AirAssault VDV+AirAssault
+Mestia_RAAS_v1 RGF+CombinedArms USA+CombinedArms
+Gorodok_Invasion_v1 ADF+Mechanized VDV+Armored
+Sanxian_RAAS_v2 PLAAGF+CombinedArms USMC+CombinedArms
+Kohat_RAAS_v1 TLF+AirAssault WPMC+AirAssault
+Chora_RAAS_v1 CAF+CombinedArms INS+CombinedArms
+GooseBay_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
+Yehorivka_AAS_v1 PLA+AirAssault BAF+Mechanized
+Manicouagan_Invasion_v2 PLA+CombinedArms WPMC+CombinedArms
+Fallujah_RAAS_v2 CAF+Support PLA+Support
+FoolsRoad_TC_v1 CAF+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+BlackCoast_AAS_v2 PLA+CombinedArms IMF+CombinedArms
+Mutaha_AAS_v2 INS+Motorized VDV+Armored
+Harju_Invasion_v3 WPMC+CombinedArms USA+CombinedArms
+Tallil_RAAS_v1 RGF+Support MEA+Support
+Skorpo_RAAS_v1 RGF+CombinedArms BAF+CombinedArms
+Chora_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Kohat_RAAS_v1 TLF+Support VDV+Armored
+Yehorivka_Invasion_v2 CAF+Motorized PLA+Motorized
+Kokan_RAAS_v1 MEA+CombinedArms ADF+CombinedArms
+Gorodok_AAS_v1 USMC+Armored IMF+Armored
+BlackCoast_RAAS_v1 CAF+AirAssault VDV+AirAssault
+FoolsRoad_TC_v1 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 MEA+Support RGF+CombinedArms
+Manicouagan_AAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 PLA+Armored TLF+Armored
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+AlBasrah_Skirmish_v2 INS+CombinedArms MEA+CombinedArms
+Kohat_RAAS_v2 PLA+Motorized MEA+AirAssault
+Fallujah_RAAS_v2 TLF+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 TLF+Support PLA+Support
+Gorodok_Destruction_v1 VDV+Armored PLA+Armored
+Narva_AAS_v2 WPMC+AirAssault VDV+AirAssault
+Sumari_TC_v1 PLA+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v2 BAF+Mechanized WPMC+LightInfantry
+Kamdesh_AAS_v1 INS+LightInfantry PLA+LightInfantry
+Tallil_RAAS_v2 INS+Support USA+Support
+GooseBay_Invasion_v1 USMC+Armored RGF+Armored
+Yehorivka_AAS_v1 PLA+Support IMF+Support
+Kohat_TC_v1 USA+AirAssault PLA+AirAssault
+Harju_RAAS_v2 USA+Armored WPMC+CombinedArms
+Kokan_AAS_v1 MEA+CombinedArms BAF+CombinedArms
+AlBasrah_RAAS_v1 PLANMC+CombinedArms USMC+CombinedArms
+Anvil_Invasion_v1 VDV+CombinedArms MEA+CombinedArms
+Mestia_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Narva_RAAS_v1 ADF+Mechanized IMF+Support
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Gorodok_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+BlackCoast_Invasion_v2 WPMC+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v1 ADF+AirAssault WPMC+CombinedArms
+Skorpo_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
+Kokan_TC_v1 PLA+CombinedArms ADF+CombinedArms
+Fallujah_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Kohat_RAAS_v2 MEA+LightInfantry WPMC+LightInfantry
+Manicouagan_Invasion_v2 WPMC+LightInfantry PLA+LightInfantry
+Lashkar_AAS_v2 MEA+CombinedArms TLF+CombinedArms
+Kamdesh_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
+Narva_AAS_v1 USA+LightInfantry IMF+Mechanized
+Harju_RAAS_v1 ADF+AirAssault WPMC+AirAssault
+Mestia_AAS_v1 IMF+CombinedArms USA+CombinedArms
+Yehorivka_Invasion_v1 TLF+Mechanized USA+Mechanized
+Gorodok_AAS_v1 TLF+Motorized PLA+Motorized
+Anvil_AAS_v1 WPMC+CombinedArms PLA+AirAssault
+Mutaha_Skirmish_v1 CAF+CombinedArms VDV+CombinedArms
+Fallujah_AAS_v1 BAF+CombinedArms TLF+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms RGF+CombinedArms
+AlBasrah_Invasion_v1 PLA+Armored CAF+Motorized
+Skorpo_RAAS_v1 VDV+Support IMF+Support
+Tallil_Skirmish_v3 PLA+CombinedArms USMC+CombinedArms
+BlackCoast_RAAS_v2 CAF+Motorized TLF+Motorized
+GooseBay_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Sumari_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 ADF+CombinedArms VDV+Armored
+Gorodok_Invasion_v1 USA+CombinedArms TLF+CombinedArms
+FoolsRoad_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Manicouagan_AAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v2 PLA+AirAssault WPMC+CombinedArms
+Kokan_TC_v1 PLA+CombinedArms USMC+CombinedArms
+Lashkar_RAAS_v1 RGF+LightInfantry PLA+LightInfantry
+AlBasrah_Insurgency_v1 CAF+Mechanized INS+Mechanized
+Kamdesh_RAAS_v1 VDV+Mechanized BAF+Mechanized
+Chora_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Tallil_RAAS_v1 CAF+Mechanized PLA+Armored
+Kohat_TC_v1 WPMC+CombinedArms MEA+CombinedArms
+Narva_AAS_v1 USMC+CombinedArms VDV+CombinedArms
+GooseBay_Invasion_v1 PLA+LightInfantry USA+LightInfantry
+FoolsRoad_AAS_v1 CAF+CombinedArms VDV+CombinedArms
+Manicouagan_RAAS_v2 PLAAGF+Mechanized USA+Mechanized
+Anvil_RAAS_v2 USA+Armored INS+Armored
+Gorodok_RAAS_v1 IMF+Motorized TLF+CombinedArms
+AlBasrah_Skirmish_v2 TLF+CombinedArms ADF+CombinedArms
+Sanxian_AAS_v3 ADF+CombinedArms PLANMC+CombinedArms
+Fallujah_Invasion_v1 RGF+CombinedArms USMC+CombinedArms
+Kokan_AAS_v2 MEA+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+BlackCoast_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Lashkar_TC_v1 VDV+Support PLA+CombinedArms
+Tallil_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Yehorivka_Destruction_v1 TLF+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry USMC+LightInfantry
+FoolsRoad_AAS_v1 USA+CombinedArms VDV+CombinedArms
+Mutaha_RAAS_v1 RGF+CombinedArms PLA+Support
+Narva_AAS_v1 ADF+AirAssault WPMC+AirAssault
+Kamdesh_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
+Kohat_AAS_v1 INS+Motorized PLA+Motorized
+Harju_Invasion_v2 USA+CombinedArms WPMC+CombinedArms
+Mestia_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v2 PLAAGF+CombinedArms WPMC+CombinedArms
+Gorodok_TC_v1 RGF+Mechanized IMF+Mechanized
+Sanxian_RAAS_v2 BAF+CombinedArms WPMC+CombinedArms
+Kokan_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Lashkar_Invasion_v1 TLF+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 VDV+AirAssault USMC+Support
+Sumari_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 VDV+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 VDV+Armored PLA+Armored
+Logar_AAS_v1 VDV+CombinedArms TLF+CombinedArms
+Anvil_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
+Kohat_RAAS_v1 WPMC+AirAssault MEA+AirAssault
+Tallil_RAAS_v2 PLA+Support INS+Support
+Mestia_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
+Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
+Kamdesh_Invasion_v1 USA+CombinedArms PLA+CombinedArms
+Sanxian_AAS_v3 PLA+CombinedArms WPMC+CombinedArms
+Sumari_TC_v1 TLF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+BlackCoast_RAAS_v2 USA+AirAssault WPMC+AirAssault
+Manicouagan_AAS_v1 WPMC+LightInfantry BAF+Armored
+Lashkar_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 PLA+Armored MEA+Armored
+Harju_AAS_v3 VDV+CombinedArms USA+CombinedArms
+Anvil_AAS_v1 BAF+AirAssault PLA+AirAssault
+Belaya_TC_v1 PLA+AirAssault BAF+CombinedArms
+Gorodok_RAAS_v2 VDV+Support IMF+Support
+FoolsRoad_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
