--- a/Tools/Rotation/LayerRotation/LayerRotation_3.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_3.cfg
@@ -1,200 +1,200 @@
-Mutaha_TC_v1 PLA+LightInfantry USMC+LightInfantry
-Belaya_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_Destruction_v1 PLA+Support CAF+Support
-Tallil_AAS_v1 MEA+Armored TLF+Armored
-Logar_TC_v1 RGF+CombinedArms USMC+CombinedArms
-Kohat_TC_v1 CAF+Mechanized TLF+Mechanized
-AlBasrah_TC_v1 WPMC+AirAssault VDV+AirAssault
-Kokan_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
-Lashkar_TC_v1 BAF+Support INS+Support
-BlackCoast_AAS_v2 WPMC+AirAssault PLANMC+AirAssault
-Skorpo_RAAS_v1 VDV+Armored USMC+Support
-GooseBay_Skirmish_v1 BAF+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 USA+Motorized PLA+Motorized
-Anvil_TC_v1 VDV+CombinedArms USA+CombinedArms
-FoolsRoad_TC_v1 VDV+CombinedArms PLA+CombinedArms
-Fallujah_TC_v1 USMC+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Narva_Destruction_v1 WPMC+AirAssault IMF+Armored
-Sanxian_AAS_v2 WPMC+CombinedArms ADF+CombinedArms
-Manicouagan_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
-BlackCoast_RAAS_v2 PLAAGF+CombinedArms ADF+CombinedArms
-Lashkar_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
-Tallil_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 USA+Support WPMC+CombinedArms
-Yehorivka_TC_v1 USA+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 TLF+Mechanized MEA+Mechanized
-GooseBay_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Destruction_v1 BAF+CombinedArms PLA+CombinedArms
-Anvil_TC_v1 PLA+Support VDV+Armored
-Fallujah_TC_v1 PLA+Support INS+Support
-Narva_TC_v1 VDV+Support USMC+Support
-Sumari_AAS_v3 VDV+CombinedArms BAF+CombinedArms
-Manicouagan_Invasion_v2 VDV+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 USA+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v2 USA+CombinedArms MEA+Support
-Chora_AAS_v2 TLF+CombinedArms INS+CombinedArms
-AlBasrah_TC_v1 BAF+Armored MEA+Armored
-Harju_AAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Kohat_Insurgency_v1 WPMC+LightInfantry INS+LightInfantry
-Gorodok_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Sanxian_RAAS_v1 WPMC+CombinedArms ADF+Mechanized
-Kamdesh_AAS_v1 TLF+CombinedArms RGF+CombinedArms
-Sumari_Skirmish_v1 MEA+CombinedArms USA+CombinedArms
-Yehorivka_Destruction_v1 USA+Motorized PLA+Motorized
-Fallujah_RAAS_v2 PLA+Motorized INS+Motorized
-Lashkar_TC_v2 TLF+Support INS+Support
-FoolsRoad_TC_v1 IMF+CombinedArms PLA+CombinedArms
-Belaya_TC_v1 PLA+CombinedArms ADF+Mechanized
-Anvil_Invasion_v1 BAF+Armored VDV+Armored
-Harju_Skirmish_v1 RGF+CombinedArms WPMC+CombinedArms
-Tallil_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-AlBasrah_RAAS_v1 TLF+Armored PLANMC+Armored
-Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
-Kohat_TC_v1 WPMC+LightInfantry MEA+LightInfantry
-Kamdesh_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
-Chora_TC_v1 PLA+CombinedArms ADF+CombinedArms
-Lashkar_TC_v1 VDV+Support PLA+AirAssault
-Fallujah_TC_v1 USA+LightInfantry INS+LightInfantry
-Kokan_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Mutaha_Invasion_v1 USA+LightInfantry PLA+LightInfantry
-Sanxian_AAS_v2 WPMC+LightInfantry USA+LightInfantry
-BlackCoast_RAAS_v2 PLAAGF+Armored USMC+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Yehorivka_AAS_v2 USA+Armored IMF+Armored
-FoolsRoad_Invasion_v1 RGF+CombinedArms PLA+CombinedArms
-Tallil_RAAS_v1 PLA+CombinedArms MEA+Armored
-AlBasrah_TC_v1 BAF+CombinedArms RGF+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms ADF+CombinedArms
-Kohat_RAAS_v2 VDV+Support PLA+Support
-Kamdesh_Insurgency_v1 RGF+Motorized INS+Motorized
-Belaya_TC_v1 ADF+Mechanized PLA+AirAssault
-Fallujah_RAAS_v2 WPMC+LightInfantry USA+LightInfantry
+Yehorivka_Destruction_v1 USMC+Motorized PLA+Motorized
+Logar_RAAS_v1 MEA+CombinedArms CAF+CombinedArms
+Belaya_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 INS+Mechanized CAF+Mechanized
+Narva_AAS_v1 WPMC+LightInfantry USMC+LightInfantry
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_Invasion_v2 TLF+Mechanized BAF+Mechanized
+Kamdesh_RAAS_v1 MEA+AirAssault ADF+AirAssault
+Kokan_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
+Lashkar_RAAS_v1 MEA+Mechanized WPMC+LightInfantry
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v2 USMC+Support PLA+Support
+Gorodok_Destruction_v1 IMF+Support VDV+Support
+Belaya_AAS_v3 PLA+AirAssault VDV+AirAssault
+Kohat_RAAS_v1 TLF+Armored MEA+AirAssault
+Manicouagan_AAS_v1 VDV+CombinedArms BAF+CombinedArms
+Narva_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Fallujah_Invasion_v2 PLA+LightInfantry USA+LightInfantry
+Tallil_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 TLF+AirAssault USA+Mechanized
+Mestia_TC_v1 PLA+CombinedArms BAF+CombinedArms
+GooseBay_RAAS_v1 WPMC+CombinedArms USA+CombinedArms
+Anvil_AAS_v1 MEA+Armored USA+Armored
+Chora_Invasion_v1 INS+CombinedArms MEA+CombinedArms
+Lashkar_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 WPMC+AirAssault BAF+Armored
+Skorpo_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
+Kohat_TC_v1 MEA+Support RGF+Support
+Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Yehorivka_Destruction_v1 PLA+Armored IMF+Armored
+Tallil_AAS_v1 CAF+Armored TLF+Armored
+Sumari_AAS_v1 USMC+CombinedArms VDV+CombinedArms
 Manicouagan_AAS_v3 USMC+CombinedArms WPMC+CombinedArms
-Mutaha_Skirmish_v1 BAF+CombinedArms RGF+CombinedArms
-Narva_Invasion_v1 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_AAS_v1 TLF+Support USMC+Support
-Logar_TC_v1 PLA+CombinedArms MEA+CombinedArms
-Yehorivka_RAAS_v1 IMF+Mechanized USA+Mechanized
-Sanxian_RAAS_v2 WPMC+CombinedArms PLANMC+Support
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+CombinedArms RGF+CombinedArms
-Chora_Insurgency_v1 WPMC+CombinedArms INS+CombinedArms
-Lashkar_TC_v1 USA+Motorized TLF+Motorized
-Kohat_TC_v1 USA+Support PLA+Motorized
-Mestia_TC_v1 PLA+CombinedArms ADF+CombinedArms
-Belaya_TC_v1 BAF+Armored TLF+Armored
-Mutaha_AAS_v1 TLF+CombinedArms WPMC+CombinedArms
-FoolsRoad_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
-Gorodok_AAS_v1 IMF+Armored TLF+Armored
-Yehorivka_RAAS_v1 ADF+CombinedArms TLF+CombinedArms
-Harju_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 PLA+LightInfantry RGF+LightInfantry
-Fallujah_Invasion_v2 RGF+LightInfantry USMC+LightInfantry
-Lashkar_TC_v2 MEA+Mechanized BAF+AirAssault
-Kamdesh_Skirmish_v1 ADF+CombinedArms PLA+CombinedArms
-Kohat_TC_v1 PLA+AirAssault TLF+AirAssault
-Narva_AAS_v2 RGF+LightInfantry IMF+LightInfantry
-Mestia_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Tallil_Invasion_v1 WPMC+LightInfantry USA+LightInfantry
-AlBasrah_AAS_v1 MEA+AirAssault WPMC+AirAssault
-Chora_AAS_v3 CAF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 CAF+Support PLA+Support
-Manicouagan_AAS_v3 PLANMC+Armored BAF+AirAssault
-Logar_AAS_v1 TLF+CombinedArms CAF+CombinedArms
-Belaya_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
-Fallujah_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-Anvil_TC_v1 TLF+Mechanized ADF+Mechanized
-Yehorivka_AAS_v2 CAF+CombinedArms TLF+CombinedArms
-Harju_AAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Skorpo_Invasion_v1 WPMC+CombinedArms IMF+Motorized
-Kamdesh_AAS_v1 RGF+Support BAF+Support
-Kohat_AAS_v1 WPMC+AirAssault USA+AirAssault
-Mutaha_TC_v1 TLF+AirAssault MEA+AirAssault
-FoolsRoad_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Gorodok_Destruction_v1 USMC+Support PLA+Support
-BlackCoast_RAAS_v2 TLF+Mechanized PLAAGF+Armored
-Logar_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Belaya_AAS_v2 TLF+Support PLA+Support
-AlBasrah_RAAS_v1 VDV+AirAssault WPMC+AirAssault
-Lashkar_Invasion_v1 TLF+Motorized INS+Motorized
-GooseBay_Skirmish_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Tallil_RAAS_v2 CAF+Armored RGF+Armored
-Fallujah_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Harju_Skirmish_v1 WPMC+CombinedArms ADF+CombinedArms
-Mutaha_Invasion_v1 INS+LightInfantry CAF+Armored
-Gorodok_TC_v1 PLA+AirAssault BAF+AirAssault
-Kokan_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
-Kohat_AAS_v1 INS+Armored PLA+Armored
-BlackCoast_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Lashkar_Skirmish_v1 INS+CombinedArms PLA+CombinedArms
-Anvil_RAAS_v2 WPMC+CombinedArms TLF+AirAssault
-GooseBay_RAAS_v1 USMC+Armored PLAAGF+Armored
-Chora_AAS_v1 INS+CombinedArms CAF+CombinedArms
-Belaya_Invasion_v1 IMF+Support TLF+Support
-AlBasrah_AAS_v1 PLANMC+CombinedArms VDV+CombinedArms
-Gorodok_AAS_v1 IMF+CombinedArms PLA+Motorized
-Logar_AAS_v1 PLA+CombinedArms USMC+CombinedArms
-Yehorivka_RAAS_v1 VDV+Mechanized TLF+Mechanized
-Kamdesh_Invasion_v1 WPMC+CombinedArms TLF+CombinedArms
-FoolsRoad_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Sanxian_RAAS_v1 WPMC+CombinedArms BAF+CombinedArms
-Kohat_TC_v1 MEA+Armored USA+LightInfantry
-Sumari_TC_v1 USMC+CombinedArms INS+CombinedArms
-Narva_Destruction_v1 IMF+LightInfantry WPMC+LightInfantry
-Tallil_TC_v1 PLA+LightInfantry WPMC+LightInfantry
-Fallujah_Skirmish_v1 RGF+CombinedArms INS+CombinedArms
-Belaya_TC_v1 TLF+AirAssault RGF+Support
-AlBasrah_TC_v1 VDV+CombinedArms USA+CombinedArms
-Anvil_Invasion_v1 VDV+Armored TLF+Armored
-Gorodok_TC_v1 VDV+CombinedArms IMF+CombinedArms
-Lashkar_TC_v1 INS+LightInfantry PLA+LightInfantry
-Mestia_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
-Yehorivka_RAAS_v1 IMF+Armored VDV+Armored
-GooseBay_Invasion_v1 PLA+Motorized USA+Motorized
-Sumari_TC_v1 MEA+CombinedArms PLA+CombinedArms
-Tallil_RAAS_v2 USA+CombinedArms MEA+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
-Logar_TC_v1 USA+CombinedArms PLA+CombinedArms
-Manicouagan_Invasion_v1 USA+Armored PLAAGF+Armored
-AlBasrah_TC_v1 INS+Support PLA+LightInfantry
-Chora_RAAS_v1 RGF+CombinedArms INS+CombinedArms
-Kohat_AAS_v1 TLF+Support PLA+Support
-Kamdesh_AAS_v1 INS+LightInfantry MEA+LightInfantry
-Sanxian_Invasion_v2 USA+CombinedArms WPMC+CombinedArms
-Lashkar_RAAS_v1 BAF+Mechanized INS+Support
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-Kokan_TC_v1 INS+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 VDV+AirAssault PLA+AirAssault
-Harju_Invasion_v3 IMF+CombinedArms RGF+CombinedArms
+Gorodok_RAAS_v1 PLA+CombinedArms USA+CombinedArms
+Chora_RAAS_v1 WPMC+CombinedArms PLA+CombinedArms
+Kamdesh_Invasion_v1 INS+LightInfantry VDV+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Mestia_RAAS_v1 WPMC+CombinedArms RGF+CombinedArms
+Mutaha_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+Anvil_RAAS_v1 ADF+CombinedArms INS+CombinedArms
+Lashkar_TC_v1 WPMC+LightInfantry TLF+Armored
 GooseBay_AAS_v1 WPMC+LightInfantry RGF+LightInfantry
-Anvil_TC_v1 TLF+Support INS+Support
-Mestia_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v1 WPMC+LightInfantry TLF+Armored
-Fallujah_Insurgency_v1 MEA+Mechanized INS+Mechanized
-Sanxian_AAS_v2 USA+AirAssault PLANMC+AirAssault
-BlackCoast_Skirmish_v1 PLAAGF+CombinedArms RGF+CombinedArms
-Kamdesh_RAAS_v1 USA+Support INS+Support
-Skorpo_RAAS_v1 VDV+Mechanized IMF+Armored
-AlBasrah_Invasion_v2 INS+LightInfantry USA+LightInfantry
-Kohat_Skirmish_v1 INS+CombinedArms USMC+CombinedArms
-Manicouagan_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 USMC+LightInfantry RGF+LightInfantry
-Lashkar_AAS_v1 BAF+Support PLA+Support
-Narva_Invasion_v1 IMF+Mechanized USA+Mechanized
-Tallil_TC_v1 TLF+Support USMC+Support
-Gorodok_RAAS_v2 TLF+Support IMF+Mechanized
-Mestia_RAAS_v1 CAF+CombinedArms TLF+CombinedArms
-Mutaha_RAAS_v2 INS+Motorized PLA+Motorized
-GooseBay_Invasion_v1 WPMC+CombinedArms USA+CombinedArms
-Fallujah_AAS_v1 USMC+LightInfantry MEA+LightInfantry
-Kamdesh_AAS_v1 PLA+Motorized RGF+CombinedArms
-Anvil_TC_v1 VDV+AirAssault PLA+AirAssault
-Logar_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
-Yehorivka_Invasion_v2 TLF+Armored PLA+Armored
-BlackCoast_RAAS_v2 IMF+CombinedArms USA+CombinedArms
-Chora_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Manicouagan_AAS_v3 WPMC+CombinedArms USMC+Motorized
+BlackCoast_Invasion_v2 WPMC+CombinedArms TLF+CombinedArms
+Yehorivka_AAS_v1 IMF+Armored VDV+Armored
+Kokan_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Manicouagan_AAS_v1 WPMC+CombinedArms VDV+CombinedArms
+Gorodok_RAAS_v1 PLA+Armored VDV+Armored
+Logar_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+Harju_Invasion_v3 IMF+LightInfantry USMC+LightInfantry
+Tallil_AAS_v1 INS+CombinedArms ADF+Mechanized
+Kohat_Skirmish_v1 USA+CombinedArms PLA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms CAF+CombinedArms
+Mutaha_AAS_v2 MEA+Mechanized TLF+Mechanized
+Skorpo_RAAS_v1 RGF+Support USMC+Support
+Lashkar_RAAS_v1 PLA+Armored RGF+Motorized
+Anvil_Skirmish_v1 USMC+CombinedArms VDV+CombinedArms
+Manicouagan_RAAS_v2 WPMC+AirAssault PLA+AirAssault
+Gorodok_Invasion_v1 TLF+Mechanized IMF+Mechanized
+Fallujah_RAAS_v1 INS+CombinedArms CAF+CombinedArms
+AlBasrah_RAAS_v1 PLANMC+CombinedArms MEA+Armored
+Mestia_AAS_v2 WPMC+CombinedArms RGF+CombinedArms
+Belaya_AAS_v1 ADF+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v2 TLF+Support INS+Support
+FoolsRoad_Destruction_v1 USMC+CombinedArms VDV+CombinedArms
+Mutaha_RAAS_v2 WPMC+CombinedArms VDV+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Logar_AAS_v1 MEA+CombinedArms ADF+CombinedArms
+Anvil_TC_v1 CAF+AirAssault MEA+AirAssault
+Kohat_RAAS_v1 INS+Mechanized ADF+Mechanized
+Manicouagan_Invasion_v2 PLANMC+LightInfantry WPMC+LightInfantry
+BlackCoast_RAAS_v1 USA+AirAssault PLANMC+AirAssault
+Sanxian_AAS_v3 ADF+AirAssault PLAAGF+Armored
+AlBasrah_TC_v1 MEA+CombinedArms PLAAGF+CombinedArms
+Sumari_AAS_v2 INS+CombinedArms ADF+CombinedArms
+Fallujah_AAS_v1 INS+CombinedArms MEA+CombinedArms
+Tallil_Invasion_v1 INS+CombinedArms MEA+CombinedArms
+Harju_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Yehorivka_Skirmish_v1 WPMC+CombinedArms VDV+CombinedArms
+Narva_AAS_v1 WPMC+AirAssault IMF+LightInfantry
+Anvil_RAAS_v1 RGF+Motorized USMC+Motorized
+Lashkar_RAAS_v1 TLF+Armored RGF+Armored
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Gorodok_Destruction_v1 WPMC+LightInfantry RGF+LightInfantry
+Mestia_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Fallujah_TC_v1 PLA+LightInfantry RGF+Support
+Manicouagan_AAS_v2 WPMC+AirAssault VDV+AirAssault
+AlBasrah_RAAS_v1 VDV+Mechanized PLAAGF+Mechanized
+Kokan_AAS_v1 ADF+CombinedArms INS+CombinedArms
+GooseBay_Invasion_v1 USA+LightInfantry WPMC+LightInfantry
+Anvil_RAAS_v2 INS+Armored TLF+Motorized
+Lashkar_TC_v2 WPMC+CombinedArms USMC+CombinedArms
+Sumari_AAS_v1 PLA+CombinedArms VDV+CombinedArms
+BlackCoast_AAS_v2 PLAAGF+Mechanized USA+Mechanized
+Kohat_RAAS_v2 RGF+Mechanized USA+Mechanized
+Narva_Invasion_v1 USA+Mechanized WPMC+CombinedArms
+Kamdesh_AAS_v1 TLF+Support INS+Support
+Logar_TC_v1 WPMC+CombinedArms MEA+CombinedArms
+Mutaha_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms USA+CombinedArms
+Sanxian_RAAS_v1 WPMC+AirAssault USA+AirAssault
+Yehorivka_AAS_v2 PLA+Motorized CAF+Motorized
+Kokan_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Fallujah_RAAS_v2 CAF+Support PLA+Support
+Harju_AAS_v1 IMF+Armored CAF+Armored
+Anvil_RAAS_v2 CAF+CombinedArms MEA+CombinedArms
+Lashkar_AAS_v1 VDV+CombinedArms PLA+CombinedArms
+Tallil_RAAS_v1 VDV+AirAssault PLA+AirAssault
+Chora_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
+Gorodok_AAS_v1 TLF+CombinedArms WPMC+AirAssault
+AlBasrah_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+FoolsRoad_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v2 RGF+Support BAF+Support
+Yehorivka_RAAS_v2 TLF+AirAssault WPMC+AirAssault
+Skorpo_Invasion_v1 VDV+CombinedArms ADF+CombinedArms
+Manicouagan_AAS_v2 PLA+LightInfantry CAF+Motorized
+Kamdesh_TC_v1 USMC+Motorized INS+Motorized
+Sumari_AAS_v3 INS+CombinedArms BAF+CombinedArms
+Anvil_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Mutaha_AAS_v1 RGF+Armored USMC+Armored
+Fallujah_Invasion_v2 MEA+Mechanized ADF+Mechanized
+BlackCoast_AAS_v2 TLF+CombinedArms WPMC+CombinedArms
+Kokan_RAAS_v1 TLF+CombinedArms MEA+CombinedArms
+Tallil_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Kohat_TC_v1 MEA+CombinedArms USMC+CombinedArms
+Lashkar_AAS_v2 WPMC+CombinedArms PLA+LightInfantry
+Belaya_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
+FoolsRoad_AAS_v2 ADF+CombinedArms PLA+CombinedArms
+Gorodok_RAAS_v1 PLA+Armored IMF+Armored
+Yehorivka_RAAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Kamdesh_AAS_v1 RGF+CombinedArms CAF+CombinedArms
+Anvil_RAAS_v1 INS+Motorized PLA+Armored
+Mutaha_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
+GooseBay_RAAS_v2 RGF+LightInfantry USMC+LightInfantry
+Tallil_Invasion_v1 USMC+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v2 PLAAGF+Armored USMC+Armored
+Mestia_AAS_v1 IMF+CombinedArms TLF+CombinedArms
+Kohat_TC_v1 VDV+Armored BAF+Armored
+Sanxian_RAAS_v2 ADF+CombinedArms WPMC+AirAssault
+Narva_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Sumari_Invasion_v1 INS+CombinedArms USMC+CombinedArms
+AlBasrah_AAS_v1 TLF+Armored INS+Armored
+Yehorivka_AAS_v1 TLF+Motorized IMF+Motorized
+Gorodok_TC_v1 WPMC+CombinedArms PLA+AirAssault
+Fallujah_RAAS_v2 INS+LightInfantry PLA+LightInfantry
+Logar_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Tallil_Invasion_v1 VDV+Support MEA+Support
+Kamdesh_AAS_v1 INS+CombinedArms ADF+CombinedArms
+Skorpo_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
+Sanxian_AAS_v1 PLA+Mechanized USA+Mechanized
+Mutaha_RAAS_v1 RGF+Support PLA+Armored
+Manicouagan_RAAS_v2 WPMC+CombinedArms PLAAGF+CombinedArms
+Harju_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
+Mestia_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+Lashkar_Invasion_v1 VDV+Mechanized ADF+Mechanized
+Sumari_AAS_v3 MEA+CombinedArms USA+CombinedArms
+BlackCoast_AAS_v1 WPMC+AirAssault BAF+Support
+Tallil_TC_v1 USA+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 WPMC+AirAssault TLF+AirAssault
+Anvil_AAS_v1 INS+Armored VDV+Armored
+Sanxian_RAAS_v2 PLA+Armored CAF+Armored
+Kohat_Invasion_v2 PLA+LightInfantry USMC+Armored
+Logar_AAS_v1 WPMC+CombinedArms MEA+CombinedArms
+Kamdesh_TC_v1 USA+Armored TLF+Armored
+PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v2 VDV+CombinedArms USA+CombinedArms
+Mutaha_AAS_v1 PLA+CombinedArms RGF+LightInfantry
+Lashkar_Invasion_v1 PLA+CombinedArms RGF+CombinedArms
+Belaya_AAS_v3 TLF+Motorized RGF+Motorized
+Sumari_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
+Gorodok_RAAS_v1 PLA+Support USA+Support
+Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 ADF+CombinedArms RGF+CombinedArms
+Tallil_Invasion_v1 WPMC+LightInfantry MEA+Support
+Kohat_RAAS_v2 PLA+LightInfantry WPMC+LightInfantry
+Chora_Skirmish_v1 VDV+CombinedArms MEA+CombinedArms
+Yehorivka_RAAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Manicouagan_AAS_v3 BAF+Armored PLAAGF+Armored
+BlackCoast_AAS_v2 BAF+Mechanized TLF+Mechanized
+Lashkar_Invasion_v1 USMC+LightInfantry VDV+CombinedArms
+Kokan_AAS_v2 RGF+CombinedArms USA+CombinedArms
+Gorodok_TC_v1 PLA+AirAssault WPMC+AirAssault
+Narva_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
+Harju_RAAS_v2 ADF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 TLF+Mechanized CAF+Mechanized
+Logar_AAS_v1 PLA+CombinedArms ADF+CombinedArms
+Tallil_Invasion_v1 RGF+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v1 TLF+Motorized PLA+Motorized
+AlBasrah_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+GooseBay_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Yehorivka_TC_v2 IMF+Mechanized PLA+AirAssault
+Lashkar_AAS_v2 ADF+Mechanized INS+Mechanized
+BlackCoast_Invasion_v2 CAF+Mechanized TLF+Mechanized
+Fallujah_AAS_v1 ADF+CombinedArms INS+CombinedArms
+Mestia_RAAS_v1 BAF+CombinedArms PLA+CombinedArms
+Kohat_AAS_v1 TLF+Armored VDV+Armored
+Belaya_AAS_v3 VDV+Mechanized TLF+Mechanized
+Gorodok_TC_v1 PLA+Armored BAF+Armored
