--- a/Tools/Rotation/LayerRotation/LayerRotation_4.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_4.cfg
@@ -1,200 +1,200 @@
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms ADF+CombinedArms
-FoolsRoad_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 CAF+AirAssault WPMC+AirAssault
-Mutaha_RAAS_v1 WPMC+AirAssault CAF+AirAssault
-AlBasrah_RAAS_v1 WPMC+CombinedArms INS+Armored
-Kamdesh_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-Fallujah_Invasion_v2 USA+Armored TLF+Armored
-Kohat_RAAS_v2 USA+Mechanized INS+Mechanized
-Mestia_TC_v1 PLA+CombinedArms CAF+CombinedArms
-Lashkar_RAAS_v1 USMC+Armored MEA+Armored
-Yehorivka_AAS_v2 PLA+Motorized USA+Support
-Manicouagan_AAS_v3 BAF+CombinedArms WPMC+CombinedArms
-Sumari_TC_v1 CAF+CombinedArms WPMC+CombinedArms
-Anvil_Invasion_v1 TLF+CombinedArms INS+CombinedArms
-Narva_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-GooseBay_Skirmish_v1 WPMC+CombinedArms PLAAGF+CombinedArms
-AlBasrah_AAS_v1 USMC+LightInfantry WPMC+LightInfantry
-Kamdesh_TC_v1 PLA+AirAssault USMC+Support
-Gorodok_TC_v1 IMF+Support BAF+Support
-FoolsRoad_Invasion_v1 IMF+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms USMC+CombinedArms
-Tallil_TC_v1 USMC+Motorized TLF+Motorized
-Kokan_TC_v1 PLA+CombinedArms BAF+CombinedArms
-BlackCoast_RAAS_v1 WPMC+AirAssault TLF+AirAssault
-Yehorivka_Destruction_v1 VDV+Armored PLA+Support
-Chora_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-Fallujah_AAS_v1 TLF+Mechanized BAF+Mechanized
-GooseBay_AAS_v1 CAF+Support RGF+Support
-Harju_Skirmish_v2 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Sanxian_RAAS_v2 WPMC+LightInfantry USMC+LightInfantry
-Kohat_RAAS_v2 ADF+CombinedArms INS+CombinedArms
-Anvil_RAAS_v1 WPMC+LightInfantry PLA+CombinedArms
-Logar_TC_v1 MEA+CombinedArms TLF+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault TLF+AirAssault
-Manicouagan_Invasion_v2 BAF+CombinedArms WPMC+CombinedArms
-Mestia_TC_v1 PLA+CombinedArms BAF+CombinedArms
-Kamdesh_AAS_v1 PLA+CombinedArms CAF+Armored
-Mutaha_AAS_v2 USMC+Armored TLF+Armored
-Kokan_AAS_v1 USA+CombinedArms TLF+CombinedArms
-Fallujah_Invasion_v1 VDV+CombinedArms BAF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms ADF+CombinedArms
-Yehorivka_AAS_v2 RGF+Support CAF+Support
-Tallil_TC_v1 TLF+CombinedArms INS+CombinedArms
-Anvil_TC_v1 USA+AirAssault MEA+AirAssault
-FoolsRoad_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 IMF+Armored USMC+Armored
-Kohat_TC_v1 CAF+AirAssault WPMC+AirAssault
-Sumari_Skirmish_v1 TLF+CombinedArms RGF+CombinedArms
-AlBasrah_AAS_v1 CAF+AirAssault WPMC+AirAssault
-Mutaha_Invasion_v1 MEA+CombinedArms PLA+CombinedArms
-Kokan_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 USMC+Support RGF+Support
-Yehorivka_RAAS_v1 CAF+CombinedArms IMF+LightInfantry
-Gorodok_RAAS_v1 IMF+LightInfantry USMC+LightInfantry
-Lashkar_Invasion_v1 MEA+Armored INS+Armored
-Manicouagan_AAS_v3 WPMC+LightInfantry USA+LightInfantry
+FoolsRoad_AAS_v2 USA+CombinedArms PLA+CombinedArms
+Narva_Destruction_v1 WPMC+AirAssault VDV+Mechanized
+Manicouagan_AAS_v2 WPMC+AirAssault PLA+AirAssault
+Mutaha_RAAS_v1 MEA+Support VDV+Support
+Harju_AAS_v3 BAF+CombinedArms IMF+CombinedArms
+Lashkar_AAS_v1 INS+Support MEA+Support
+AlBasrah_AAS_v1 MEA+Support INS+CombinedArms
+Fallujah_Invasion_v1 PLA+Motorized INS+Motorized
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+BlackCoast_Skirmish_v1 IMF+CombinedArms USA+CombinedArms
+Belaya_AAS_v2 RGF+LightInfantry USA+LightInfantry
+Yehorivka_AAS_v2 IMF+Armored TLF+Support
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Narva_Invasion_v2 WPMC+CombinedArms ADF+CombinedArms
+Kohat_RAAS_v1 WPMC+LightInfantry PLA+LightInfantry
+FoolsRoad_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Harju_AAS_v1 WPMC+AirAssault BAF+AirAssault
+Anvil_RAAS_v1 ADF+Mechanized PLA+Motorized
+Chora_TC_v1 WPMC+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v1 TLF+Mechanized MEA+Mechanized
+AlBasrah_Invasion_v1 INS+LightInfantry USMC+LightInfantry
+Mutaha_AAS_v1 MEA+Support USMC+Support
+Sanxian_AAS_v3 PLA+Mechanized USA+Mechanized
+Lashkar_TC_v2 MEA+CombinedArms USA+Mechanized
+BlackCoast_RAAS_v1 CAF+Armored PLAAGF+Armored
+Kokan_AAS_v1 TLF+CombinedArms VDV+CombinedArms
+Kohat_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+GooseBay_Skirmish_v1 PLAAGF+CombinedArms CAF+CombinedArms
+Tallil_AAS_v1 VDV+Support CAF+Support
+Kamdesh_AAS_v1 MEA+Support PLA+Support
+Mestia_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 PLA+Support CAF+Support
+Anvil_Invasion_v1 USMC+LightInfantry MEA+LightInfantry
+Mutaha_RAAS_v2 VDV+CombinedArms TLF+Mechanized
+BlackCoast_Skirmish_v1 WPMC+CombinedArms TLF+CombinedArms
+Skorpo_RAAS_v1 VDV+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v2 CAF+Armored VDV+Armored
+Logar_AAS_v1 TLF+CombinedArms VDV+CombinedArms
+Yehorivka_Destruction_v1 USA+LightInfantry PLA+LightInfantry
+Narva_AAS_v2 CAF+CombinedArms WPMC+CombinedArms
+Kokan_Skirmish_v1 ADF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+Kohat_RAAS_v1 PLA+Support TLF+Armored
+Fallujah_AAS_v1 MEA+Support TLF+Support
+Kamdesh_AAS_v1 MEA+AirAssault TLF+AirAssault
+FoolsRoad_TC_v1 VDV+CombinedArms IMF+CombinedArms
+Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Tallil_Invasion_v1 INS+Armored BAF+Mechanized
+Lashkar_RAAS_v1 PLA+Support CAF+Support
+Sumari_AAS_v3 CAF+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v2 IMF+Motorized CAF+Motorized
+Narva_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Anvil_TC_v1 CAF+Motorized PLA+Motorized
+BlackCoast_RAAS_v1 WPMC+AirAssault CAF+AirAssault
+Mestia_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+Kohat_RAAS_v2 INS+Motorized CAF+Motorized
+Fallujah_RAAS_v2 PLA+Motorized ADF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Chora_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+AlBasrah_TC_v1 PLAAGF+Mechanized ADF+Mechanized
+Manicouagan_RAAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Yehorivka_Destruction_v1 WPMC+LightInfantry IMF+LightInfantry
+Kamdesh_RAAS_v1 INS+Armored PLA+Armored
+GooseBay_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
+Logar_AAS_v1 ADF+CombinedArms MEA+CombinedArms
+Mutaha_RAAS_v2 MEA+Mechanized PLA+CombinedArms
+Lashkar_AAS_v1 MEA+Support INS+Support
+Fallujah_RAAS_v1 WPMC+CombinedArms INS+CombinedArms
+Narva_Invasion_v2 IMF+LightInfantry WPMC+LightInfantry
+FoolsRoad_AAS_v2 PLA+CombinedArms ADF+CombinedArms
+Kohat_TC_v1 MEA+Support USA+Support
+Sanxian_RAAS_v2 WPMC+AirAssault USA+CombinedArms
+AlBasrah_RAAS_v1 INS+LightInfantry WPMC+LightInfantry
+Sumari_AAS_v1 INS+CombinedArms USA+CombinedArms
+Gorodok_Invasion_v1 VDV+Mechanized IMF+Mechanized
+Kamdesh_RAAS_v1 BAF+Support PLA+Support
+Anvil_RAAS_v1 USMC+LightInfantry MEA+LightInfantry
+Kokan_TC_v1 WPMC+CombinedArms USA+CombinedArms
+Yehorivka_RAAS_v2 WPMC+CombinedArms USMC+CombinedArms
+BlackCoast_AAS_v2 IMF+Motorized USMC+Armored
+Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+Chora_RAAS_v1 INS+CombinedArms PLA+CombinedArms
+Belaya_RAAS_v1 PLA+LightInfantry USA+LightInfantry
+Kohat_TC_v1 PLA+Armored USMC+Armored
+Logar_AAS_v1 TLF+CombinedArms USA+CombinedArms
+Tallil_AAS_v1 PLA+Armored WPMC+LightInfantry
+Fallujah_Invasion_v1 PLA+Motorized INS+Motorized
+Anvil_RAAS_v2 USA+LightInfantry PLA+LightInfantry
+Mutaha_AAS_v2 USA+CombinedArms PLA+CombinedArms
+Yehorivka_Skirmish_v1 VDV+CombinedArms WPMC+CombinedArms
 PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Sanxian_AAS_v3 BAF+Mechanized PLAAGF+CombinedArms
-Fallujah_TC_v1 USMC+CombinedArms INS+CombinedArms
-Chora_Invasion_v1 TLF+CombinedArms MEA+CombinedArms
-Tallil_TC_v1 PLA+Motorized CAF+Motorized
-Narva_TC_v1 RGF+LightInfantry USMC+LightInfantry
-Sumari_TC_v1 USMC+CombinedArms RGF+CombinedArms
-AlBasrah_TC_v1 TLF+Armored ADF+Mechanized
-Yehorivka_Invasion_v2 VDV+Armored USMC+Armored
-Lashkar_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
-Belaya_AAS_v2 WPMC+AirAssault TLF+AirAssault
-Mutaha_AAS_v2 USMC+CombinedArms PLA+CombinedArms
-Kokan_TC_v1 WPMC+CombinedArms PLA+CombinedArms
-Gorodok_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
-Kamdesh_RAAS_v1 TLF+Armored MEA+Armored
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-Kohat_AAS_v1 INS+Armored MEA+Support
-Sanxian_RAAS_v1 USA+LightInfantry WPMC+LightInfantry
-Mestia_Invasion_v1 VDV+CombinedArms ADF+CombinedArms
-BlackCoast_RAAS_v2 ADF+CombinedArms PLANMC+CombinedArms
-Yehorivka_RAAS_v1 VDV+Armored USA+Armored
-Manicouagan_Skirmish_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Harju_AAS_v1 RGF+Support IMF+Support
-AlBasrah_Invasion_v1 USMC+Motorized TLF+CombinedArms
-Tallil_TC_v1 USMC+LightInfantry PLA+LightInfantry
-FoolsRoad_Skirmish_v2 IMF+CombinedArms PLA+CombinedArms
-Narva_AAS_v1 VDV+CombinedArms IMF+CombinedArms
-Anvil_RAAS_v2 INS+Armored MEA+Armored
-Sumari_Insurgency_v1 MEA+CombinedArms INS+CombinedArms
-Lashkar_TC_v2 TLF+CombinedArms PLA+CombinedArms
-Mutaha_RAAS_v1 WPMC+CombinedArms ADF+Mechanized
-Fallujah_RAAS_v2 RGF+Motorized PLA+Motorized
-Mestia_AAS_v1 VDV+CombinedArms BAF+CombinedArms
-Yehorivka_Destruction_v1 TLF+Mechanized IMF+Mechanized
-AlBasrah_TC_v1 INS+CombinedArms BAF+CombinedArms
-Kokan_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Tallil_TC_v1 TLF+Mechanized VDV+Mechanized
-Kohat_TC_v1 WPMC+CombinedArms TLF+Support
-FoolsRoad_Destruction_v1 CAF+CombinedArms PLA+CombinedArms
-Kamdesh_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
-Gorodok_RAAS_v2 PLA+CombinedArms RGF+CombinedArms
-Lashkar_Skirmish_v1 PLA+CombinedArms INS+CombinedArms
-Belaya_AAS_v3 ADF+Mechanized PLA+Armored
-Mutaha_Invasion_v1 CAF+Motorized INS+Motorized
-Mestia_Skirmish_v1 RGF+CombinedArms USMC+CombinedArms
-Fallujah_TC_v1 PLA+Support BAF+Support
-Narva_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
-Tallil_RAAS_v1 PLA+Motorized CAF+Motorized
-AlBasrah_AAS_v1 PLAAGF+CombinedArms VDV+AirAssault
-GooseBay_Skirmish_v1 WPMC+CombinedArms CAF+CombinedArms
-Anvil_Invasion_v1 INS+LightInfantry WPMC+LightInfantry
-Kamdesh_RAAS_v1 PLA+AirAssault BAF+AirAssault
-Sumari_Skirmish_v1 CAF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 VDV+Armored USA+Armored
-Skorpo_RAAS_v1 WPMC+AirAssault BAF+AirAssault
-Belaya_Invasion_v2 BAF+CombinedArms PLA+CombinedArms
-Manicouagan_Skirmish_v3 USMC+CombinedArms VDV+CombinedArms
-Yehorivka_AAS_v1 TLF+Armored IMF+Armored
-Lashkar_AAS_v2 WPMC+AirAssault VDV+Mechanized
-Kohat_RAAS_v2 TLF+Support MEA+Support
-Tallil_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
-Anvil_Invasion_v1 TLF+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 ADF+CombinedArms INS+CombinedArms
-Mutaha_TC_v1 PLA+Motorized WPMC+CombinedArms
-Kamdesh_AAS_v1 INS+CombinedArms TLF+CombinedArms
-Sumari_TC_v1 TLF+CombinedArms MEA+CombinedArms
-AlBasrah_Insurgency_v1 PLAAGF+CombinedArms INS+CombinedArms
-Gorodok_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-FoolsRoad_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 PLA+Support USA+CombinedArms
-Yehorivka_AAS_v1 IMF+LightInfantry PLA+LightInfantry
-Manicouagan_Invasion_v2 PLAAGF+CombinedArms WPMC+CombinedArms
-Kokan_Skirmish_v1 RGF+CombinedArms CAF+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
-Anvil_RAAS_v1 WPMC+AirAssault USA+CombinedArms
-Kamdesh_Skirmish_v1 CAF+CombinedArms INS+CombinedArms
-Fallujah_Invasion_v1 CAF+Support MEA+Support
-Harju_AAS_v1 WPMC+LightInfantry IMF+LightInfantry
-Kohat_Skirmish_v1 PLA+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 BAF+Mechanized VDV+Mechanized
-BlackCoast_RAAS_v2 IMF+Mechanized PLAAGF+Mechanized
-Chora_Invasion_v1 BAF+CombinedArms VDV+CombinedArms
-Narva_AAS_v2 RGF+Armored BAF+Armored
-Tallil_TC_v1 INS+Armored TLF+Support
-Mutaha_AAS_v2 BAF+AirAssault TLF+AirAssault
-Skorpo_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Sumari_Invasion_v1 INS+CombinedArms ADF+CombinedArms
-Anvil_AAS_v1 USMC+CombinedArms MEA+CombinedArms
-Gorodok_TC_v1 TLF+Armored WPMC+AirAssault
-Mestia_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v2 RGF+Armored BAF+Armored
-Kamdesh_Invasion_v1 VDV+Mechanized TLF+Mechanized
-Yehorivka_Skirmish_v2 RGF+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 ADF+Mechanized PLAAGF+CombinedArms
-Fallujah_AAS_v1 BAF+Armored VDV+Armored
-Kokan_AAS_v2 PLA+CombinedArms CAF+CombinedArms
-GooseBay_Invasion_v1 CAF+Armored PLAAGF+Armored
-Manicouagan_AAS_v2 CAF+AirAssault WPMC+AirAssault
-Tallil_TC_v1 TLF+CombinedArms INS+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized BAF+Mechanized
-Anvil_TC_v1 INS+Support RGF+Support
-Narva_Destruction_v1 WPMC+LightInfantry IMF+Mechanized
-Mutaha_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
-Lashkar_TC_v1 INS+Mechanized TLF+Mechanized
-Kohat_TC_v1 INS+Motorized PLA+Motorized
-Chora_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-Gorodok_Invasion_v2 VDV+Support PLA+Armored
-BlackCoast_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Sumari_AAS_v2 INS+CombinedArms ADF+CombinedArms
-Yehorivka_RAAS_v1 PLA+CombinedArms ADF+CombinedArms
-Manicouagan_AAS_v3 VDV+Armored CAF+Armored
-FoolsRoad_Destruction_v1 USMC+CombinedArms TLF+CombinedArms
-Belaya_TC_v1 IMF+Armored PLA+Armored
-Fallujah_TC_v1 TLF+Armored PLA+Armored
-Mestia_AAS_v1 TLF+CombinedArms PLA+CombinedArms
-Kamdesh_AAS_v1 PLA+LightInfantry INS+Support
-Mutaha_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
-Tallil_TC_v1 WPMC+LightInfantry MEA+LightInfantry
-Sumari_TC_v1 USMC+CombinedArms PLA+CombinedArms
-GooseBay_RAAS_v2 WPMC+CombinedArms USA+Support
-Anvil_Invasion_v1 VDV+Support USA+Support
-Logar_RAAS_v1 PLA+CombinedArms INS+CombinedArms
-AlBasrah_RAAS_v1 BAF+CombinedArms VDV+CombinedArms
-Sanxian_RAAS_v2 WPMC+LightInfantry PLA+LightInfantry
-FoolsRoad_AAS_v1 USA+CombinedArms IMF+CombinedArms
-Fallujah_Invasion_v2 INS+CombinedArms TLF+CombinedArms
-Lashkar_TC_v1 MEA+Mechanized ADF+Mechanized
-Narva_TC_v1 ADF+Mechanized IMF+Mechanized
-Kokan_Skirmish_v1 CAF+CombinedArms PLA+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+CombinedArms
-Manicouagan_Invasion_v2 USMC+Armored VDV+Armored
-Yehorivka_TC_v2 TLF+CombinedArms USA+CombinedArms
-Kohat_RAAS_v2 PLA+Motorized TLF+Motorized
-Belaya_TC_v1 IMF+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 USA+Motorized PLA+LightInfantry
-BlackCoast_RAAS_v2 RGF+CombinedArms CAF+CombinedArms
-Mutaha_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
-Mestia_TC_v1 TLF+CombinedArms IMF+CombinedArms
-Tallil_TC_v1 USA+Support PLA+Support
-Gorodok_TC_v1 WPMC+CombinedArms VDV+CombinedArms
-Sumari_AAS_v1 RGF+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 INS+LightInfantry TLF+AirAssault
+Gorodok_RAAS_v2 PLA+Support WPMC+AirAssault
+Sumari_Invasion_v1 INS+CombinedArms WPMC+CombinedArms
+BlackCoast_RAAS_v1 PLA+Armored BAF+Armored
+AlBasrah_AAS_v1 PLAAGF+Mechanized BAF+Mechanized
+FoolsRoad_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Kohat_RAAS_v2 PLA+Armored TLF+CombinedArms
+GooseBay_RAAS_v2 WPMC+LightInfantry RGF+LightInfantry
+Kamdesh_Invasion_v1 PLA+LightInfantry WPMC+LightInfantry
+Manicouagan_AAS_v2 WPMC+CombinedArms VDV+CombinedArms
+Kokan_RAAS_v1 TLF+CombinedArms CAF+CombinedArms
+Fallujah_TC_v1 CAF+Support PLA+Support
+Yehorivka_AAS_v2 IMF+Mechanized ADF+Mechanized
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+BlackCoast_Invasion_v2 WPMC+LightInfantry TLF+Mechanized
+Gorodok_RAAS_v2 WPMC+AirAssault ADF+AirAssault
+Chora_TC_v1 INS+CombinedArms PLA+CombinedArms
+AlBasrah_AAS_v1 MEA+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Kamdesh_RAAS_v1 USMC+Motorized INS+Motorized
+FoolsRoad_Destruction_v1 ADF+CombinedArms TLF+CombinedArms
+Tallil_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 TLF+Support VDV+Support
+Mutaha_TC_v1 INS+LightInfantry BAF+Mechanized
+Logar_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
+Yehorivka_AAS_v2 TLF+AirAssault USA+AirAssault
+Lashkar_Invasion_v1 MEA+Armored USA+Armored
+Chora_RAAS_v1 INS+CombinedArms MEA+CombinedArms
+AlBasrah_TC_v1 PLANMC+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Mestia_RAAS_v1 VDV+CombinedArms USMC+CombinedArms
+Skorpo_RAAS_v1 USA+AirAssault WPMC+AirAssault
+Tallil_Invasion_v1 VDV+Support CAF+Motorized
+Kohat_RAAS_v1 CAF+Mechanized RGF+Mechanized
+Anvil_AAS_v1 BAF+Support PLA+Support
+Mutaha_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
+Kamdesh_AAS_v1 ADF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v2 PLA+Support VDV+Support
+Gorodok_Destruction_v1 TLF+Mechanized USMC+Support
+Chora_AAS_v2 PLA+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Yehorivka_RAAS_v1 RGF+Motorized PLA+Motorized
+Manicouagan_Skirmish_v1 PLA+CombinedArms WPMC+CombinedArms
+Narva_RAAS_v1 BAF+CombinedArms IMF+CombinedArms
+Skorpo_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
+Tallil_AAS_v1 MEA+AirAssault USA+AirAssault
+AlBasrah_RAAS_v1 PLANMC+AirAssault WPMC+AirAssault
+Kamdesh_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
+Lashkar_RAAS_v1 USMC+Support PLA+Motorized
+Fallujah_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
+Kohat_Invasion_v1 USMC+Armored VDV+Armored
+Mutaha_AAS_v1 INS+Mechanized ADF+Mechanized
+Gorodok_RAAS_v2 TLF+Armored PLA+Armored
+FoolsRoad_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Anvil_TC_v1 VDV+CombinedArms PLA+CombinedArms
+Harju_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Kokan_Invasion_v1 CAF+CombinedArms INS+CombinedArms
+Belaya_AAS_v3 CAF+CombinedArms TLF+Support
+AlBasrah_RAAS_v1 RGF+Motorized INS+Motorized
+Lashkar_AAS_v1 TLF+Mechanized CAF+Mechanized
+Fallujah_TC_v1 WPMC+CombinedArms USA+CombinedArms
+Sanxian_AAS_v1 PLANMC+Armored CAF+Armored
+Mutaha_Invasion_v1 INS+Motorized VDV+Mechanized
+Tallil_RAAS_v2 INS+Motorized RGF+Motorized
+Gorodok_RAAS_v1 PLA+CombinedArms RGF+CombinedArms
+Kamdesh_AAS_v1 MEA+Armored CAF+Armored
+GooseBay_Skirmish_v1 WPMC+CombinedArms PLA+CombinedArms
+Anvil_AAS_v1 VDV+Support USMC+Support
+Yehorivka_Destruction_v1 PLA+Support IMF+Support
+AlBasrah_RAAS_v1 INS+CombinedArms ADF+CombinedArms
+Narva_AAS_v2 IMF+Mechanized VDV+Mechanized
+Kohat_TC_v1 INS+Motorized TLF+Motorized
+Sumari_AAS_v3 BAF+CombinedArms INS+CombinedArms
+Fallujah_RAAS_v1 INS+Support ADF+CombinedArms
+Lashkar_Invasion_v1 INS+Motorized TLF+Motorized
+Chora_AAS_v2 RGF+CombinedArms MEA+CombinedArms
+BlackCoast_RAAS_v2 CAF+Armored IMF+Armored
+Tallil_TC_v1 TLF+AirAssault WPMC+AirAssault
+Mestia_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Gorodok_AAS_v1 BAF+CombinedArms RGF+Armored
+Kamdesh_Invasion_v1 USMC+CombinedArms PLA+CombinedArms
+Anvil_RAAS_v2 INS+CombinedArms MEA+CombinedArms
+Kokan_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+Mutaha_AAS_v1 ADF+CombinedArms VDV+CombinedArms
+Kohat_AAS_v1 RGF+Support TLF+Support
+Lashkar_RAAS_v1 WPMC+CombinedArms INS+Armored
+Fallujah_Skirmish_v2 CAF+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 TLF+CombinedArms INS+CombinedArms
+BlackCoast_Invasion_v2 IMF+Armored VDV+Armored
+Chora_AAS_v1 MEA+CombinedArms PLA+CombinedArms
+Harju_RAAS_v2 IMF+Mechanized VDV+Mechanized
+Manicouagan_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Gorodok_AAS_v1 WPMC+LightInfantry IMF+Motorized
+Narva_AAS_v3 VDV+AirAssault WPMC+AirAssault
+FoolsRoad_Destruction_v1 WPMC+CombinedArms PLA+CombinedArms
+Mutaha_AAS_v1 USA+Mechanized MEA+Mechanized
+Lashkar_AAS_v1 INS+Mechanized RGF+Mechanized
+Kokan_TC_v1 USA+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v2 INS+Motorized ADF+CombinedArms
+Kamdesh_AAS_v1 TLF+Armored MEA+Armored
+Mestia_Invasion_v1 PLA+CombinedArms USA+CombinedArms
+Kohat_RAAS_v2 MEA+CombinedArms INS+CombinedArms
+Yehorivka_RAAS_v2 USMC+Armored VDV+Armored
+AlBasrah_AAS_v1 BAF+AirAssault PLA+Motorized
+Sumari_TC_v1 INS+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 USA+CombinedArms TLF+CombinedArms
+Narva_Invasion_v1 USA+Motorized RGF+Motorized
+PacificProvingGrounds_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 TLF+Armored PLA+Armored
