--- a/Tools/Rotation/LayerRotation/LayerRotation_6.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_6.cfg
@@ -1,200 +1,200 @@
-Fallujah_TC_v1 MEA+Armored USMC+Armored
-Kamdesh_RAAS_v1 PLA+CombinedArms INS+Motorized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Manicouagan_Skirmish_v3 WPMC+CombinedArms PLAAGF+CombinedArms
-Kohat_RAAS_v2 USMC+Armored INS+Armored
-Belaya_Invasion_v1 BAF+CombinedArms WPMC+CombinedArms
-Chora_Skirmish_v1 TLF+CombinedArms PLA+CombinedArms
-AlBasrah_TC_v1 PLA+CombinedArms USA+CombinedArms
-BlackCoast_AAS_v1 PLANMC+Motorized VDV+Support
-Kokan_RAAS_v1 TLF+CombinedArms CAF+CombinedArms
-Yehorivka_Destruction_v1 CAF+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 MEA+Armored RGF+Armored
-Logar_TC_v1 TLF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v1 INS+Support CAF+Support
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Kohat_Invasion_v2 PLA+Armored RGF+Armored
-Mutaha_AAS_v2 WPMC+AirAssault BAF+AirAssault
-Kamdesh_AAS_v1 PLA+AirAssault BAF+AirAssault
-Anvil_RAAS_v1 BAF+CombinedArms INS+CombinedArms
-Harju_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Gorodok_TC_v1 PLA+Armored CAF+Armored
-AlBasrah_Invasion_v1 MEA+LightInfantry PLA+LightInfantry
-Tallil_AAS_v1 ADF+AirAssault PLA+AirAssault
-Manicouagan_Skirmish_v2 PLAAGF+CombinedArms RGF+CombinedArms
-Fallujah_RAAS_v2 TLF+CombinedArms WPMC+CombinedArms
-PacificProvingGrounds_AAS_v1 PLA+CombinedArms CAF+CombinedArms
-Sanxian_Invasion_v2 WPMC+LightInfantry USA+Support
-Mestia_TC_v1 BAF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Belaya_AAS_v3 CAF+Armored PLA+Armored
-Mutaha_RAAS_v1 USMC+Motorized INS+Motorized
-Kohat_Insurgency_v1 WPMC+LightInfantry INS+Mechanized
-Chora_AAS_v1 PLA+CombinedArms MEA+CombinedArms
-Tallil_TC_v1 WPMC+CombinedArms VDV+CombinedArms
-Gorodok_RAAS_v2 CAF+Support TLF+Support
-Kamdesh_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Yehorivka_Destruction_v1 TLF+Armored CAF+Support
-Sanxian_AAS_v2 WPMC+AirAssault CAF+AirAssault
-Fallujah_Skirmish_v2 INS+CombinedArms WPMC+CombinedArms
-Manicouagan_RAAS_v1 WPMC+CombinedArms USMC+CombinedArms
-Anvil_TC_v1 RGF+CombinedArms WPMC+CombinedArms
-Narva_Invasion_v2 RGF+Mechanized USA+Armored
-Sumari_TC_v1 ADF+CombinedArms INS+CombinedArms
-Mutaha_RAAS_v2 RGF+Armored BAF+Armored
-Skorpo_RAAS_v1 USMC+LightInfantry IMF+LightInfantry
-Tallil_TC_v1 MEA+Support INS+Support
-FoolsRoad_Invasion_v1 ADF+CombinedArms TLF+CombinedArms
-Kamdesh_AAS_v1 TLF+Armored PLA+LightInfantry
-Lashkar_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 PLAAGF+Mechanized ADF+Mechanized
-Harju_TC_v1 WPMC+CombinedArms BAF+CombinedArms
-Gorodok_Destruction_v1 VDV+CombinedArms BAF+CombinedArms
-Yehorivka_AAS_v2 RGF+Support BAF+Support
-Kohat_RAAS_v1 MEA+CombinedArms VDV+CombinedArms
+AlBasrah_RAAS_v1 USA+LightInfantry MEA+LightInfantry
+Mutaha_RAAS_v1 USMC+LightInfantry RGF+LightInfantry
+Sanxian_Skirmish_v1 WPMC+CombinedArms BAF+CombinedArms
+Manicouagan_AAS_v1 CAF+Motorized PLA+Motorized
+Yehorivka_AAS_v2 VDV+CombinedArms CAF+CombinedArms
+Lashkar_Invasion_v1 WPMC+AirAssault INS+LightInfantry
+Kokan_RAAS_v1 USMC+CombinedArms INS+CombinedArms
+GooseBay_RAAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
+Gorodok_RAAS_v2 USMC+Motorized PLA+Motorized
+Sumari_TC_v1 USMC+CombinedArms PLA+CombinedArms
+Kamdesh_AAS_v1 PLA+Armored CAF+Armored
+Anvil_RAAS_v2 PLA+Armored VDV+Armored
+Fallujah_Invasion_v1 BAF+Support INS+Support
+Chora_AAS_v1 TLF+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
+BlackCoast_AAS_v2 RGF+Support CAF+Support
+Manicouagan_RAAS_v2 PLANMC+CombinedArms BAF+CombinedArms
+Kokan_TC_v1 RGF+CombinedArms PLA+CombinedArms
+GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Gorodok_Destruction_v1 VDV+Mechanized TLF+Mechanized
+Tallil_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v2 PLA+AirAssault USMC+Armored
+Kohat_RAAS_v2 TLF+Armored MEA+Armored
+Lashkar_TC_v1 PLA+AirAssault BAF+AirAssault
+Mestia_AAS_v1 PLA+CombinedArms BAF+CombinedArms
+Kamdesh_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 VDV+CombinedArms WPMC+AirAssault
+Yehorivka_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
+BlackCoast_Skirmish_v1 PLANMC+CombinedArms ADF+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 USA+Armored RGF+Armored
+Gorodok_Destruction_v1 PLA+Motorized ADF+Mechanized
+Mutaha_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Sumari_AAS_v2 RGF+CombinedArms CAF+CombinedArms
+Fallujah_TC_v1 MEA+Support TLF+Support
+Narva_RAAS_v1 WPMC+LightInfantry IMF+LightInfantry
+Kamdesh_AAS_v1 WPMC+LightInfantry MEA+LightInfantry
+FoolsRoad_Destruction_v1 PLA+CombinedArms CAF+CombinedArms
+Harju_RAAS_v2 WPMC+LightInfantry IMF+Support
+BlackCoast_RAAS_v1 TLF+CombinedArms USMC+CombinedArms
+Kokan_TC_v1 USA+CombinedArms INS+CombinedArms
+Anvil_RAAS_v1 PLA+Armored VDV+Armored
+AlBasrah_AAS_v1 MEA+Support VDV+Support
+Chora_Invasion_v2 PLA+CombinedArms MEA+CombinedArms
+Mutaha_AAS_v2 INS+LightInfantry PLA+LightInfantry
+Gorodok_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Tallil_TC_v1 USMC+CombinedArms WPMC+AirAssault
+Mestia_AAS_v2 CAF+CombinedArms PLA+CombinedArms
+Kamdesh_RAAS_v1 INS+Motorized TLF+Motorized
+Lashkar_Invasion_v1 USA+Armored PLA+Armored
+Belaya_AAS_v2 USMC+Support PLA+Support
+Sumari_TC_v1 RGF+CombinedArms INS+CombinedArms
+Manicouagan_AAS_v1 CAF+Support PLANMC+CombinedArms
+Yehorivka_AAS_v1 BAF+Support IMF+Support
+GooseBay_RAAS_v1 RGF+CombinedArms PLANMC+CombinedArms
+Narva_Destruction_v1 VDV+CombinedArms WPMC+CombinedArms
+FoolsRoad_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Harju_RAAS_v2 IMF+Mechanized WPMC+LightInfantry
+Gorodok_TC_v1 BAF+AirAssault TLF+AirAssault
+Mestia_AAS_v2 TLF+CombinedArms VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms BAF+CombinedArms
+Fallujah_Invasion_v2 INS+Motorized PLA+Motorized
+Tallil_RAAS_v1 INS+CombinedArms ADF+Mechanized
+Chora_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
+Belaya_AAS_v1 IMF+Armored CAF+Armored
+Sanxian_AAS_v2 USMC+CombinedArms PLANMC+CombinedArms
+Sumari_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Lashkar_AAS_v1 INS+CombinedArms CAF+CombinedArms
+Harju_Invasion_v3 WPMC+CombinedArms IMF+CombinedArms
+Skorpo_RAAS_v1 WPMC+AirAssault IMF+Motorized
+Gorodok_TC_v1 VDV+AirAssault WPMC+AirAssault
+Yehorivka_AAS_v2 RGF+LightInfantry PLA+LightInfantry
+Mestia_AAS_v1 PLA+CombinedArms USA+CombinedArms
+Manicouagan_AAS_v3 WPMC+AirAssault CAF+AirAssault
+AlBasrah_Invasion_v2 ADF+CombinedArms PLANMC+CombinedArms
+Mutaha_AAS_v2 USA+Support MEA+Support
+Kamdesh_AAS_v1 TLF+CombinedArms PLA+CombinedArms
+Kokan_RAAS_v1 USA+CombinedArms VDV+CombinedArms
+Tallil_RAAS_v1 MEA+Support TLF+Support
+Harju_RAAS_v1 RGF+CombinedArms IMF+CombinedArms
+Chora_TC_v1 CAF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 USMC+Armored IMF+Armored
+Gorodok_Invasion_v2 VDV+Support USMC+LightInfantry
+FoolsRoad_RAAS_v1 USMC+CombinedArms RGF+CombinedArms
+Kohat_AAS_v1 USA+Armored RGF+Armored
+Lashkar_RAAS_v1 MEA+Support VDV+Support
+Mestia_AAS_v2 IMF+CombinedArms ADF+CombinedArms
+Yehorivka_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Manicouagan_Invasion_v2 CAF+AirAssault VDV+Armored
+BlackCoast_RAAS_v1 RGF+Mechanized ADF+Mechanized
+Belaya_TC_v1 PLA+Support USMC+Support
+Logar_RAAS_v1 PLA+CombinedArms WPMC+CombinedArms
+Skorpo_RAAS_v1 WPMC+AirAssault CAF+AirAssault
+Mutaha_RAAS_v1 INS+CombinedArms WPMC+AirAssault
+Kamdesh_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
+Narva_RAAS_v1 VDV+CombinedArms IMF+CombinedArms
+Tallil_RAAS_v2 INS+LightInfantry WPMC+LightInfantry
+AlBasrah_AAS_v1 WPMC+LightInfantry PLA+LightInfantry
+Fallujah_RAAS_v2 USMC+LightInfantry PLA+LightInfantry
+Lashkar_TC_v2 USA+AirAssault PLA+Motorized
+BlackCoast_RAAS_v2 RGF+CombinedArms PLAAGF+CombinedArms
+Anvil_Invasion_v1 INS+CombinedArms VDV+CombinedArms
+Logar_RAAS_v1 INS+CombinedArms PLA+CombinedArms
+Skorpo_RAAS_v1 WPMC+AirAssault ADF+AirAssault
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Mutaha_AAS_v2 ADF+AirAssault WPMC+AirAssault
+Harju_AAS_v3 IMF+CombinedArms VDV+CombinedArms
+Kamdesh_Invasion_v1 RGF+CombinedArms TLF+Mechanized
+Sanxian_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+Chora_AAS_v1 CAF+CombinedArms MEA+CombinedArms
+Kohat_RAAS_v1 MEA+LightInfantry WPMC+LightInfantry
+Lashkar_TC_v1 USMC+CombinedArms MEA+CombinedArms
+Mestia_AAS_v2 USA+CombinedArms WPMC+CombinedArms
+Gorodok_Invasion_v2 IMF+Motorized CAF+Armored
+Fallujah_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+FoolsRoad_TC_v1 PLA+CombinedArms IMF+CombinedArms
+Yehorivka_RAAS_v2 TLF+Armored IMF+Armored
+Tallil_RAAS_v1 WPMC+AirAssault PLA+LightInfantry
+Sumari_Invasion_v1 PLA+CombinedArms BAF+CombinedArms
+Belaya_AAS_v2 WPMC+LightInfantry IMF+LightInfantry
+Anvil_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Sanxian_AAS_v1 USA+AirAssault WPMC+AirAssault
+Mestia_Skirmish_v1 VDV+CombinedArms BAF+CombinedArms
+Gorodok_AAS_v1 PLA+Support USA+Support
+AlBasrah_Invasion_v2 WPMC+CombinedArms MEA+CombinedArms
+Skorpo_RAAS_v1 USMC+Support VDV+Support
+Manicouagan_AAS_v3 BAF+CombinedArms WPMC+CombinedArms
+Narva_TC_v1 IMF+CombinedArms WPMC+CombinedArms
+Chora_AAS_v1 USA+CombinedArms TLF+CombinedArms
+Harju_RAAS_v1 IMF+Motorized USA+Support
+Mutaha_Invasion_v1 PLA+Armored BAF+Armored
+PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLAAGF+CombinedArms
+Tallil_TC_v1 WPMC+AirAssault BAF+AirAssault
+BlackCoast_RAAS_v1 TLF+CombinedArms PLAAGF+CombinedArms
+Mestia_AAS_v1 IMF+CombinedArms PLA+CombinedArms
+Gorodok_AAS_v1 VDV+AirAssault PLA+AirAssault
+Fallujah_Invasion_v1 WPMC+CombinedArms TLF+Armored
+Anvil_RAAS_v2 ADF+AirAssault WPMC+AirAssault
+Kohat_Skirmish_v1 ADF+CombinedArms TLF+CombinedArms
+Manicouagan_AAS_v3 BAF+AirAssault WPMC+AirAssault
+Narva_RAAS_v1 WPMC+AirAssault ADF+AirAssault
+Kamdesh_AAS_v1 PLA+AirAssault WPMC+AirAssault
+Lashkar_Invasion_v1 VDV+Mechanized USA+Mechanized
+PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
+AlBasrah_RAAS_v1 VDV+Armored ADF+Mechanized
+Kokan_Skirmish_v1 CAF+CombinedArms MEA+CombinedArms
+Belaya_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Fallujah_RAAS_v1 PLA+Armored VDV+Armored
+Tallil_Invasion_v1 PLA+Support VDV+Support
+Skorpo_RAAS_v1 IMF+LightInfantry BAF+CombinedArms
+FoolsRoad_TC_v1 USMC+CombinedArms WPMC+CombinedArms
+Manicouagan_RAAS_v1 PLA+Support RGF+Support
+Yehorivka_AAS_v2 TLF+AirAssault WPMC+AirAssault
+Kohat_RAAS_v1 USMC+CombinedArms VDV+CombinedArms
+Mutaha_AAS_v1 INS+LightInfantry CAF+Mechanized
+Mestia_TC_v1 IMF+CombinedArms TLF+CombinedArms
+Kamdesh_RAAS_v1 ADF+CombinedArms VDV+CombinedArms
+Sanxian_Invasion_v2 PLANMC+Armored BAF+Armored
+Sumari_AAS_v1 MEA+CombinedArms PLA+CombinedArms
+BlackCoast_RAAS_v1 IMF+CombinedArms VDV+Mechanized
+Gorodok_TC_v1 BAF+AirAssault PLA+AirAssault
+Chora_AAS_v2 INS+CombinedArms USMC+CombinedArms
+Anvil_AAS_v1 PLA+AirAssault MEA+AirAssault
+Tallil_Invasion_v1 MEA+Support RGF+Support
+FoolsRoad_AAS_v2 WPMC+CombinedArms TLF+CombinedArms
+Mutaha_AAS_v1 CAF+Armored RGF+Armored
+PacificProvingGrounds_AAS_v1 USA+CombinedArms PLA+CombinedArms
+Fallujah_AAS_v1 USA+Motorized TLF+Armored
+Kokan_Skirmish_v1 RGF+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 WPMC+AirAssault ADF+AirAssault
+Lashkar_Invasion_v1 ADF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 WPMC+CombinedArms VDV+CombinedArms
+AlBasrah_AAS_v1 PLANMC+CombinedArms MEA+Mechanized
+Narva_RAAS_v1 USA+Mechanized IMF+Mechanized
+Anvil_AAS_v1 TLF+Armored PLA+Armored
+Yehorivka_TC_v2 IMF+Mechanized TLF+Mechanized
+Tallil_RAAS_v1 INS+Support RGF+Support
+Belaya_Invasion_v2 IMF+Armored TLF+Armored
+BlackCoast_RAAS_v2 WPMC+AirAssault TLF+CombinedArms
+Kokan_AAS_v1 PLA+CombinedArms TLF+CombinedArms
+Mutaha_TC_v1 PLA+Motorized TLF+Motorized
+Fallujah_RAAS_v1 BAF+Mechanized RGF+Mechanized
+Gorodok_AAS_v1 RGF+LightInfantry WPMC+LightInfantry
+Sumari_Invasion_v1 RGF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 VDV+CombinedArms PLA+CombinedArms
+Kohat_AAS_v1 MEA+Armored PLA+Armored
+Logar_TC_v1 INS+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 ADF+CombinedArms IMF+Mechanized
+Tallil_RAAS_v2 MEA+CombinedArms USA+CombinedArms
+Yehorivka_Destruction_v1 USA+Mechanized TLF+Mechanized
+Chora_AAS_v2 TLF+CombinedArms BAF+CombinedArms
+Harju_AAS_v1 USA+Support VDV+Support
+Anvil_RAAS_v2 WPMC+AirAssault TLF+AirAssault
 BlackCoast_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 TLF+Armored INS+LightInfantry
-Narva_Invasion_v2 WPMC+CombinedArms IMF+CombinedArms
-Logar_RAAS_v1 PLA+CombinedArms MEA+CombinedArms
-Fallujah_TC_v1 USA+Motorized PLA+Motorized
-Lashkar_TC_v1 ADF+CombinedArms TLF+CombinedArms
-Mutaha_AAS_v1 USMC+CombinedArms INS+Mechanized
-Harju_Invasion_v2 WPMC+CombinedArms ADF+CombinedArms
-Kamdesh_AAS_v1 BAF+Armored MEA+Armored
-FoolsRoad_RAAS_v1 RGF+CombinedArms USA+CombinedArms
-Yehorivka_RAAS_v1 TLF+Support IMF+Support
-BlackCoast_RAAS_v2 CAF+Mechanized RGF+Mechanized
-Kohat_Invasion_v1 INS+LightInfantry TLF+Support
-Mestia_Skirmish_v1 PLA+CombinedArms USMC+CombinedArms
-Anvil_AAS_v1 PLA+Armored BAF+Armored
-Fallujah_TC_v1 VDV+Mechanized USA+Mechanized
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms PLA+CombinedArms
-Skorpo_Invasion_v1 WPMC+LightInfantry IMF+LightInfantry
-Lashkar_TC_v2 ADF+CombinedArms PLA+LightInfantry
-GooseBay_Skirmish_v1 USA+CombinedArms PLAAGF+CombinedArms
-Harju_RAAS_v2 BAF+Support IMF+Support
-Kamdesh_RAAS_v1 TLF+Mechanized INS+Mechanized
-AlBasrah_Invasion_v1 CAF+Mechanized PLAAGF+Mechanized
-Tallil_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Narva_AAS_v2 VDV+Armored BAF+CombinedArms
-Kohat_TC_v1 WPMC+LightInfantry RGF+LightInfantry
-Logar_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 USA+LightInfantry PLA+LightInfantry
-Gorodok_TC_v1 WPMC+CombinedArms ADF+CombinedArms
-Skorpo_RAAS_v1 USMC+CombinedArms IMF+CombinedArms
-Lashkar_AAS_v1 USMC+CombinedArms TLF+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Fallujah_Invasion_v2 TLF+Armored MEA+Armored
-Kamdesh_Skirmish_v1 MEA+CombinedArms VDV+CombinedArms
-Belaya_AAS_v3 TLF+Motorized PLA+LightInfantry
-Sanxian_RAAS_v1 PLANMC+Support BAF+Support
-Chora_AAS_v1 PLA+CombinedArms WPMC+CombinedArms
-AlBasrah_Invasion_v2 INS+Armored MEA+Armored
-Yehorivka_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
-Sumari_AAS_v1 VDV+CombinedArms MEA+CombinedArms
-Tallil_RAAS_v1 BAF+Support PLA+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault PLA+AirAssault
-FoolsRoad_Destruction_v1 TLF+CombinedArms WPMC+CombinedArms
-Anvil_TC_v1 MEA+AirAssault WPMC+AirAssault
-Kamdesh_RAAS_v1 PLA+Armored VDV+Armored
-Lashkar_TC_v2 BAF+CombinedArms TLF+Mechanized
-Kohat_TC_v1 TLF+Mechanized USA+Mechanized
-Harju_AAS_v3 WPMC+CombinedArms IMF+CombinedArms
-BlackCoast_Invasion_v2 PLAAGF+Mechanized USA+Mechanized
-Manicouagan_AAS_v1 RGF+Mechanized PLAAGF+Mechanized
-Mutaha_AAS_v2 CAF+AirAssault WPMC+AirAssault
-Skorpo_RAAS_v1 WPMC+LightInfantry USMC+Support
-AlBasrah_RAAS_v1 ADF+AirAssault WPMC+AirAssault
-FoolsRoad_Destruction_v1 PLA+CombinedArms WPMC+CombinedArms
-Fallujah_TC_v1 BAF+CombinedArms TLF+CombinedArms
-Gorodok_AAS_v1 RGF+LightInfantry USMC+LightInfantry
-Tallil_TC_v1 PLA+Motorized ADF+CombinedArms
-Anvil_TC_v1 PLA+Motorized USA+Motorized
-Chora_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
-GooseBay_Invasion_v1 PLANMC+LightInfantry USA+LightInfantry
-Narva_AAS_v1 USMC+CombinedArms VDV+CombinedArms
-Mestia_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v2 MEA+Support RGF+Support
-Mutaha_TC_v1 RGF+LightInfantry ADF+AirAssault
-Kokan_Insurgency_v1 USA+CombinedArms INS+CombinedArms
-Kohat_TC_v1 INS+Mechanized RGF+Mechanized
-BlackCoast_AAS_v2 USMC+LightInfantry RGF+LightInfantry
-Sumari_AAS_v1 PLA+CombinedArms INS+CombinedArms
-Gorodok_RAAS_v2 PLA+CombinedArms IMF+LightInfantry
-Kamdesh_Invasion_v1 TLF+Armored BAF+Armored
-Belaya_Skirmish_v1 RGF+CombinedArms PLA+CombinedArms
-Fallujah_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
-AlBasrah_AAS_v1 PLA+Armored VDV+Armored
-Logar_TC_v1 PLA+CombinedArms INS+CombinedArms
-Mutaha_Invasion_v1 CAF+Armored RGF+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-GooseBay_RAAS_v2 WPMC+CombinedArms USA+Mechanized
-Kokan_AAS_v2 VDV+CombinedArms PLA+CombinedArms
-Yehorivka_AAS_v2 WPMC+CombinedArms USA+CombinedArms
-Narva_Invasion_v1 VDV+CombinedArms ADF+CombinedArms
-Mestia_AAS_v2 TLF+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 CAF+CombinedArms TLF+Mechanized
-Tallil_RAAS_v2 INS+CombinedArms WPMC+CombinedArms
-Kamdesh_AAS_v1 USA+CombinedArms INS+CombinedArms
-Lashkar_Insurgency_v1 PLA+Support INS+Support
-BlackCoast_Skirmish_v1 RGF+CombinedArms IMF+CombinedArms
-AlBasrah_TC_v1 PLANMC+AirAssault ADF+Mechanized
-Belaya_AAS_v3 CAF+CombinedArms PLA+CombinedArms
-Manicouagan_AAS_v2 PLA+CombinedArms RGF+CombinedArms
-Sumari_Invasion_v1 INS+CombinedArms TLF+CombinedArms
-Anvil_RAAS_v2 BAF+CombinedArms VDV+CombinedArms
-Mutaha_AAS_v1 MEA+Support VDV+Support
-Gorodok_TC_v1 IMF+Support TLF+Mechanized
-Kokan_AAS_v2 TLF+CombinedArms INS+CombinedArms
-Fallujah_RAAS_v1 WPMC+LightInfantry MEA+LightInfantry
-Tallil_TC_v1 TLF+Armored MEA+Armored
-GooseBay_Invasion_v1 PLAAGF+CombinedArms WPMC+CombinedArms
-FoolsRoad_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Lashkar_TC_v1 INS+CombinedArms MEA+Armored
-Kamdesh_AAS_v1 TLF+Armored PLA+Armored
-Kohat_TC_v1 INS+Motorized TLF+Motorized
-AlBasrah_TC_v1 WPMC+AirAssault BAF+AirAssault
-Manicouagan_Invasion_v2 WPMC+CombinedArms USMC+CombinedArms
-Chora_RAAS_v1 PLA+CombinedArms INS+CombinedArms
-Mutaha_TC_v1 INS+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 USA+LightInfantry WPMC+LightInfantry
-Yehorivka_RAAS_v2 PLA+CombinedArms ADF+CombinedArms
-Fallujah_Invasion_v2 MEA+Mechanized TLF+Mechanized
-Tallil_TC_v1 USA+Armored TLF+Armored
-Lashkar_TC_v2 PLA+Motorized VDV+CombinedArms
-Narva_AAS_v2 RGF+Mechanized IMF+Mechanized
-BlackCoast_Skirmish_v1 CAF+CombinedArms PLAAGF+CombinedArms
-Kamdesh_Invasion_v1 USMC+Motorized RGF+Motorized
-Anvil_TC_v1 WPMC+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
-Mestia_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
-Kohat_RAAS_v1 PLA+Armored USMC+Armored
-Gorodok_Invasion_v1 PLA+AirAssault USA+Motorized
-Sumari_Skirmish_v1 WPMC+CombinedArms INS+CombinedArms
-PacificProvingGrounds_AAS_v1 CAF+CombinedArms PLANMC+CombinedArms
-Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Lashkar_AAS_v2 MEA+Mechanized USA+Mechanized
-Mutaha_Invasion_v1 TLF+Armored VDV+Armored
-Manicouagan_AAS_v2 WPMC+CombinedArms PLAAGF+Armored
-Logar_RAAS_v1 BAF+CombinedArms TLF+CombinedArms
-BlackCoast_RAAS_v1 PLANMC+Armored USMC+Armored
-AlBasrah_TC_v1 TLF+Armored MEA+Armored
-GooseBay_AAS_v1 PLAAGF+Mechanized USA+Mechanized
-Anvil_Invasion_v1 PLA+CombinedArms ADF+CombinedArms
-Fallujah_RAAS_v1 TLF+Support BAF+Support
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLANMC+CombinedArms
-FoolsRoad_TC_v1 ADF+CombinedArms TLF+CombinedArms
-Skorpo_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 WPMC+CombinedArms BAF+CombinedArms
-Mestia_RAAS_v1 RGF+CombinedArms WPMC+CombinedArms
-Narva_RAAS_v1 USMC+Motorized IMF+LightInfantry
-Kohat_TC_v1 INS+Motorized PLA+Motorized
-Lashkar_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-AlBasrah_AAS_v1 ADF+AirAssault MEA+AirAssault
-Anvil_Invasion_v1 MEA+CombinedArms WPMC+CombinedArms
-Fallujah_AAS_v1 ADF+Mechanized PLA+CombinedArms
-Kokan_TC_v1 INS+CombinedArms USMC+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms PLAAGF+CombinedArms
-Mutaha_AAS_v1 PLA+Armored MEA+Armored
-Tallil_Invasion_v1 WPMC+CombinedArms PLA+CombinedArms
-BlackCoast_AAS_v2 IMF+Armored PLAAGF+Armored
+Fallujah_RAAS_v1 INS+Motorized TLF+CombinedArms
+Gorodok_Destruction_v1 CAF+Armored PLA+Armored
+FoolsRoad_AAS_v1 BAF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 ADF+Mechanized MEA+Mechanized
