--- a/Tools/Rotation/LayerRotation/LayerRotation_9.cfg
+++ b/Tools/Rotation/LayerRotation/LayerRotation_9.cfg
@@ -1,200 +1,200 @@
-Yehorivka_Skirmish_v1 RGF+CombinedArms USA+CombinedArms
-Gorodok_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 USMC+Motorized INS+Motorized
-Sumari_TC_v1 USA+CombinedArms INS+CombinedArms
+Anvil_RAAS_v1 USMC+Armored TLF+Armored
+Manicouagan_AAS_v3 WPMC+AirAssault BAF+AirAssault
+Kamdesh_AAS_v1 INS+Motorized USMC+Motorized
+Chora_AAS_v2 ADF+CombinedArms TLF+CombinedArms
+Fallujah_Invasion_v2 PLA+Armored USA+Motorized
+Tallil_RAAS_v2 PLA+Motorized CAF+Motorized
+Logar_Skirmish_v1 TLF+CombinedArms BAF+CombinedArms
+Yehorivka_AAS_v1 USMC+LightInfantry PLA+LightInfantry
+Lashkar_AAS_v1 TLF+Motorized INS+Motorized
+Mestia_RAAS_v1 WPMC+CombinedArms TLF+CombinedArms
+Gorodok_Invasion_v1 IMF+Armored RGF+Armored
+Anvil_RAAS_v2 TLF+CombinedArms ADF+Mechanized
+Harju_Skirmish_v2 WPMC+CombinedArms USA+CombinedArms
+Mutaha_AAS_v2 BAF+Mechanized TLF+Mechanized
+Skorpo_RAAS_v1 VDV+Mechanized IMF+Mechanized
+Kokan_RAAS_v1 PLA+CombinedArms BAF+CombinedArms
+Tallil_Invasion_v1 MEA+AirAssault TLF+Support
+Kamdesh_AAS_v1 PLA+Support VDV+Support
+Sanxian_RAAS_v2 ADF+AirAssault WPMC+AirAssault
+FoolsRoad_RAAS_v1 PLA+CombinedArms CAF+CombinedArms
+AlBasrah_TC_v1 INS+Support USMC+Support
+Manicouagan_RAAS_v2 WPMC+AirAssault CAF+AirAssault
+Mestia_RAAS_v1 USMC+CombinedArms PLA+CombinedArms
+Anvil_Invasion_v1 TLF+Support USMC+Support
+Gorodok_RAAS_v2 USA+Armored VDV+Armored
+Fallujah_Skirmish_v2 WPMC+CombinedArms CAF+CombinedArms
+Harju_RAAS_v1 IMF+Motorized VDV+Support
+Tallil_RAAS_v2 USMC+CombinedArms TLF+CombinedArms
+Chora_AAS_v3 INS+CombinedArms VDV+CombinedArms
+Yehorivka_Invasion_v2 PLA+Motorized CAF+Motorized
+Kamdesh_RAAS_v1 CAF+Motorized INS+Motorized
+Sumari_RAAS_v1 MEA+CombinedArms INS+CombinedArms
+Skorpo_RAAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Mutaha_TC_v1 PLA+Motorized USMC+Motorized
 PacificProvingGrounds_AAS_v1 CAF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 PLANMC+Support USA+Support
-Kokan_AAS_v1 PLA+CombinedArms MEA+CombinedArms
-Lashkar_TC_v2 MEA+AirAssault WPMC+AirAssault
-Sanxian_Invasion_v2 WPMC+LightInfantry PLANMC+Motorized
-FoolsRoad_AAS_v1 BAF+CombinedArms PLA+CombinedArms
-Narva_TC_v1 IMF+Mechanized BAF+Mechanized
-Manicouagan_AAS_v1 PLA+LightInfantry RGF+LightInfantry
-Fallujah_Skirmish_v1 TLF+CombinedArms CAF+CombinedArms
-Tallil_RAAS_v1 PLA+CombinedArms ADF+AirAssault
-Kamdesh_Invasion_v1 MEA+CombinedArms PLA+CombinedArms
-Mutaha_Skirmish_v1 VDV+CombinedArms PLA+CombinedArms
-Gorodok_TC_v1 PLA+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v2 WPMC+LightInfantry RGF+LightInfantry
-Skorpo_Skirmish_v1 IMF+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 VDV+Armored PLA+Armored
-Lashkar_TC_v1 PLA+LightInfantry MEA+Mechanized
-Logar_AAS_v1 ADF+CombinedArms RGF+CombinedArms
+Manicouagan_Invasion_v1 USA+CombinedArms RGF+CombinedArms
+Fallujah_RAAS_v2 MEA+CombinedArms CAF+CombinedArms
+FoolsRoad_AAS_v2 WPMC+CombinedArms BAF+CombinedArms
+BlackCoast_AAS_v1 ADF+Mechanized WPMC+LightInfantry
+Lashkar_TC_v1 VDV+Mechanized BAF+Mechanized
+Chora_RAAS_v1 ADF+CombinedArms INS+CombinedArms
+Anvil_Invasion_v1 WPMC+LightInfantry PLA+LightInfantry
+Tallil_AAS_v1 INS+Support TLF+Support
+AlBasrah_AAS_v1 WPMC+AirAssault TLF+AirAssault
+Mutaha_TC_v1 TLF+CombinedArms CAF+CombinedArms
+Narva_AAS_v1 ADF+CombinedArms VDV+Mechanized
+Harju_AAS_v2 IMF+CombinedArms USMC+CombinedArms
+Belaya_Invasion_v1 USMC+Armored PLA+Armored
+Kohat_RAAS_v2 INS+LightInfantry PLA+LightInfantry
+Gorodok_TC_v1 WPMC+CombinedArms RGF+CombinedArms
+GooseBay_AAS_v1 PLA+Support RGF+Support
+Fallujah_RAAS_v1 INS+CombinedArms USA+CombinedArms
+Yehorivka_RAAS_v2 PLA+AirAssault RGF+CombinedArms
+PacificProvingGrounds_AAS_v1 USA+CombinedArms WPMC+CombinedArms
+FoolsRoad_Invasion_v1 TLF+CombinedArms IMF+CombinedArms
+Sanxian_AAS_v2 ADF+CombinedArms WPMC+CombinedArms
+Kamdesh_RAAS_v1 INS+CombinedArms WPMC+CombinedArms
+Anvil_RAAS_v2 MEA+CombinedArms USA+Support
+Belaya_TC_v1 PLA+Support USMC+Support
+Kohat_AAS_v1 USA+Mechanized TLF+Mechanized
+Lashkar_Insurgency_v1 RGF+Armored INS+Armored
+Gorodok_RAAS_v1 USMC+LightInfantry PLA+LightInfantry
+Mestia_AAS_v1 IMF+CombinedArms WPMC+CombinedArms
+Fallujah_TC_v1 PLA+Armored BAF+Armored
+AlBasrah_AAS_v1 INS+CombinedArms WPMC+CombinedArms
+Mutaha_RAAS_v2 USMC+Support VDV+Support
+Yehorivka_Destruction_v1 BAF+Support PLA+Support
+Manicouagan_AAS_v2 BAF+Armored RGF+Armored
+GooseBay_Skirmish_v1 PLANMC+CombinedArms USA+CombinedArms
+BlackCoast_AAS_v2 PLANMC+LightInfantry TLF+Armored
+Sanxian_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
+Sumari_AAS_v2 PLA+CombinedArms CAF+CombinedArms
 PacificProvingGrounds_AAS_v1 ADF+CombinedArms WPMC+CombinedArms
-AlBasrah_TC_v1 WPMC+AirAssault CAF+AirAssault
-Sumari_Invasion_v1 RGF+CombinedArms CAF+CombinedArms
-Tallil_AAS_v1 USA+Support WPMC+CombinedArms
-Fallujah_TC_v1 PLA+Support CAF+Support
-Chora_Skirmish_v1 PLA+CombinedArms BAF+CombinedArms
-Gorodok_TC_v1 VDV+Mechanized IMF+Mechanized
-Narva_Destruction_v1 ADF+CombinedArms WPMC+CombinedArms
-Belaya_TC_v1 PLA+Armored TLF+Armored
-Yehorivka_RAAS_v1 IMF+Support TLF+CombinedArms
-Lashkar_AAS_v2 MEA+AirAssault WPMC+AirAssault
-Mestia_TC_v1 USA+CombinedArms VDV+CombinedArms
-Manicouagan_Invasion_v2 VDV+CombinedArms USMC+CombinedArms
-Anvil_RAAS_v1 VDV+Armored MEA+Armored
-Tallil_RAAS_v1 TLF+Support PLA+Support
-BlackCoast_RAAS_v1 WPMC+CombinedArms PLANMC+CombinedArms
-Skorpo_RAAS_v1 RGF+Support WPMC+LightInfantry
-FoolsRoad_Destruction_v1 BAF+CombinedArms PLA+CombinedArms
-Kohat_TC_v1 PLA+Support INS+Support
-Kamdesh_AAS_v1 WPMC+CombinedArms ADF+CombinedArms
-Mutaha_AAS_v2 PLA+Armored VDV+Armored
-AlBasrah_Skirmish_v2 WPMC+CombinedArms MEA+CombinedArms
-Fallujah_Invasion_v2 PLA+CombinedArms USA+Armored
-Lashkar_TC_v2 RGF+Support USA+Support
-Mestia_Skirmish_v1 BAF+CombinedArms IMF+CombinedArms
-Anvil_AAS_v1 PLA+Support USA+Support
-Gorodok_TC_v1 PLA+AirAssault ADF+AirAssault
-Harju_Invasion_v3 RGF+Motorized ADF+Mechanized
-Narva_Skirmish_v1 WPMC+CombinedArms IMF+CombinedArms
-BlackCoast_RAAS_v2 ADF+Mechanized RGF+Mechanized
-Yehorivka_RAAS_v1 VDV+Support USMC+Support
-Tallil_RAAS_v2 RGF+LightInfantry WPMC+LightInfantry
-Kokan_Invasion_v1 TLF+CombinedArms USMC+CombinedArms
-Kamdesh_RAAS_v1 USA+LightInfantry VDV+AirAssault
-GooseBay_RAAS_v2 VDV+CombinedArms WPMC+CombinedArms
-Sanxian_AAS_v3 PLANMC+CombinedArms CAF+CombinedArms
-AlBasrah_TC_v1 TLF+Armored INS+Armored
-Lashkar_Invasion_v1 BAF+Support PLA+Support
-Harju_RAAS_v1 USA+CombinedArms IMF+Support
-FoolsRoad_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
-Gorodok_TC_v1 IMF+Motorized CAF+Motorized
-Yehorivka_RAAS_v2 USMC+LightInfantry RGF+LightInfantry
-Mutaha_Invasion_v1 USA+LightInfantry INS+LightInfantry
-Anvil_RAAS_v1 ADF+CombinedArms PLA+CombinedArms
-Kohat_RAAS_v2 WPMC+AirAssault CAF+AirAssault
-Mestia_AAS_v1 USMC+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms USA+CombinedArms
-Tallil_Invasion_v1 USMC+Support TLF+Support
-Lashkar_AAS_v2 WPMC+LightInfantry BAF+Support
-Chora_RAAS_v1 WPMC+CombinedArms MEA+CombinedArms
-AlBasrah_RAAS_v1 RGF+CombinedArms TLF+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault PLA+AirAssault
-FoolsRoad_Invasion_v1 VDV+CombinedArms USA+CombinedArms
-Kamdesh_AAS_v1 TLF+Mechanized RGF+Armored
-BlackCoast_AAS_v2 RGF+Mechanized IMF+Mechanized
-Skorpo_RAAS_v1 RGF+CombinedArms CAF+CombinedArms
-Fallujah_Skirmish_v1 PLA+CombinedArms RGF+CombinedArms
-Narva_Destruction_v1 WPMC+CombinedArms ADF+CombinedArms
-Kohat_TC_v1 RGF+CombinedArms USMC+Motorized
-Tallil_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
-Belaya_TC_v1 WPMC+LightInfantry IMF+LightInfantry
-Anvil_AAS_v1 INS+Support CAF+Support
-Mutaha_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Gorodok_TC_v1 WPMC+AirAssault BAF+AirAssault
-AlBasrah_AAS_v1 WPMC+AirAssault BAF+AirAssault
-Harju_Invasion_v2 USA+AirAssault WPMC+CombinedArms
-Logar_TC_v1 MEA+CombinedArms RGF+CombinedArms
-Kamdesh_RAAS_v1 TLF+Mechanized MEA+Mechanized
-Lashkar_AAS_v1 INS+Motorized USMC+Motorized
-FoolsRoad_Skirmish_v2 TLF+CombinedArms IMF+CombinedArms
-Kohat_Insurgency_v1 TLF+Motorized INS+Armored
-Tallil_TC_v1 CAF+Support MEA+Support
-Sumari_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms WPMC+CombinedArms
-Anvil_RAAS_v1 MEA+AirAssault BAF+AirAssault
-Narva_Invasion_v1 IMF+CombinedArms WPMC+CombinedArms
-Gorodok_RAAS_v1 BAF+AirAssault RGF+Mechanized
-Kokan_Skirmish_v1 PLA+CombinedArms MEA+CombinedArms
-Yehorivka_RAAS_v2 USMC+Motorized TLF+Motorized
-AlBasrah_AAS_v1 USMC+CombinedArms PLAAGF+CombinedArms
-Logar_RAAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Kamdesh_Invasion_v1 VDV+AirAssault MEA+Mechanized
-Mutaha_RAAS_v2 PLA+Support USA+Support
-Mestia_Skirmish_v1 PLA+CombinedArms VDV+CombinedArms
-Manicouagan_AAS_v2 PLA+Mechanized BAF+Mechanized
-Belaya_TC_v1 IMF+Mechanized USA+Mechanized
-Fallujah_TC_v1 MEA+Armored BAF+Mechanized
-Sumari_AAS_v3 WPMC+CombinedArms MEA+CombinedArms
-Anvil_Invasion_v1 INS+Motorized PLA+Motorized
-Kohat_TC_v1 PLA+AirAssault USA+AirAssault
-Chora_TC_v1 TLF+CombinedArms USMC+CombinedArms
-Tallil_RAAS_v1 USA+AirAssault WPMC+AirAssault
-Kamdesh_TC_v1 WPMC+LightInfantry USA+LightInfantry
-Yehorivka_Destruction_v1 PLA+CombinedArms RGF+LightInfantry
-Mutaha_TC_v1 PLA+Motorized CAF+Motorized
-Lashkar_Skirmish_v1 PLA+CombinedArms USA+CombinedArms
-Gorodok_RAAS_v1 TLF+Support USMC+Support
-Manicouagan_AAS_v3 WPMC+CombinedArms USA+CombinedArms
-FoolsRoad_Invasion_v1 IMF+CombinedArms CAF+CombinedArms
-Narva_AAS_v2 IMF+CombinedArms WPMC+CombinedArms
-Skorpo_RAAS_v1 IMF+Mechanized WPMC+CombinedArms
-Kohat_AAS_v1 TLF+Armored BAF+Armored
-Chora_TC_v1 VDV+CombinedArms PLA+CombinedArms
-Fallujah_Invasion_v2 PLA+Support USMC+Support
-Tallil_TC_v1 ADF+Mechanized INS+Mechanized
-Sumari_Skirmish_v1 MEA+CombinedArms WPMC+CombinedArms
-Mutaha_TC_v1 MEA+AirAssault PLA+AirAssault
-Lashkar_TC_v2 INS+Motorized USA+Mechanized
-GooseBay_Invasion_v1 WPMC+CombinedArms CAF+CombinedArms
-Mestia_AAS_v1 WPMC+CombinedArms TLF+CombinedArms
-Yehorivka_RAAS_v2 IMF+Armored CAF+Armored
-PacificProvingGrounds_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Logar_RAAS_v1 PLA+CombinedArms TLF+CombinedArms
-Sanxian_Invasion_v2 CAF+CombinedArms WPMC+CombinedArms
-Kohat_TC_v1 WPMC+AirAssault ADF+AirAssault
-Kokan_TC_v1 ADF+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 PLA+CombinedArms TLF+CombinedArms
-BlackCoast_AAS_v2 IMF+Mechanized USA+Mechanized
-Narva_Invasion_v2 IMF+Motorized RGF+CombinedArms
-Anvil_RAAS_v2 TLF+AirAssault WPMC+AirAssault
-Kamdesh_Skirmish_v1 VDV+CombinedArms INS+CombinedArms
-Gorodok_AAS_v1 IMF+CombinedArms PLA+CombinedArms
-PacificProvingGrounds_AAS_v1 ADF+CombinedArms PLAAGF+CombinedArms
-FoolsRoad_Destruction_v1 TLF+CombinedArms IMF+CombinedArms
-Manicouagan_RAAS_v1 BAF+Support RGF+Support
-Mutaha_TC_v1 USA+AirAssault INS+Armored
-Logar_RAAS_v1 TLF+CombinedArms PLA+CombinedArms
-Belaya_TC_v1 VDV+CombinedArms PLA+CombinedArms
-Yehorivka_Destruction_v1 ADF+CombinedArms VDV+CombinedArms
-Chora_AAS_v1 TLF+CombinedArms INS+CombinedArms
-Anvil_TC_v1 INS+CombinedArms MEA+CombinedArms
-AlBasrah_RAAS_v1 INS+LightInfantry VDV+CombinedArms
-Tallil_RAAS_v2 RGF+LightInfantry PLA+LightInfantry
-Kokan_Invasion_v1 INS+CombinedArms USMC+CombinedArms
-Lashkar_AAS_v2 USA+AirAssault PLA+AirAssault
-Kohat_RAAS_v2 BAF+Support INS+Support
-Sumari_TC_v1 PLA+CombinedArms TLF+CombinedArms
-Fallujah_TC_v1 PLA+Support MEA+Armored
-Sanxian_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
-Mestia_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
-Manicouagan_RAAS_v2 WPMC+CombinedArms RGF+CombinedArms
-Anvil_TC_v1 INS+LightInfantry WPMC+LightInfantry
-FoolsRoad_RAAS_v1 TLF+CombinedArms ADF+CombinedArms
-Yehorivka_Destruction_v1 PLA+Support IMF+Support
-Tallil_RAAS_v2 CAF+Armored WPMC+LightInfantry
-AlBasrah_RAAS_v1 PLANMC+AirAssault USA+AirAssault
-Skorpo_Skirmish_v1 VDV+CombinedArms IMF+CombinedArms
-PacificProvingGrounds_AAS_v1 BAF+CombinedArms WPMC+CombinedArms
-Mutaha_Invasion_v1 PLA+Armored VDV+Armored
-Lashkar_RAAS_v1 ADF+CombinedArms WPMC+CombinedArms
-BlackCoast_RAAS_v1 CAF+AirAssault TLF+AirAssault
-Belaya_AAS_v3 WPMC+LightInfantry BAF+CombinedArms
-Gorodok_RAAS_v2 WPMC+CombinedArms IMF+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-GooseBay_AAS_v1 USMC+CombinedArms WPMC+CombinedArms
-Tallil_TC_v1 VDV+CombinedArms INS+CombinedArms
-Fallujah_TC_v1 MEA+Mechanized ADF+CombinedArms
-Logar_TC_v1 PLA+CombinedArms CAF+CombinedArms
-AlBasrah_Insurgency_v1 VDV+Support INS+Support
-Mutaha_RAAS_v2 USMC+Armored TLF+Armored
-Mestia_AAS_v2 PLA+CombinedArms WPMC+CombinedArms
-Kohat_RAAS_v1 INS+Motorized USA+Motorized
-Lashkar_AAS_v2 TLF+Support WPMC+LightInfantry
-Anvil_Invasion_v1 USMC+Support TLF+Support
-Yehorivka_RAAS_v1 IMF+Mechanized ADF+Mechanized
-Sumari_AAS_v3 TLF+CombinedArms USMC+CombinedArms
-BlackCoast_RAAS_v1 PLANMC+CombinedArms CAF+CombinedArms
-Fallujah_TC_v1 INS+Motorized TLF+Mechanized
-Chora_AAS_v2 TLF+CombinedArms MEA+CombinedArms
-Narva_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
-Belaya_AAS_v2 WPMC+AirAssault PLA+AirAssault
-Logar_RAAS_v1 TLF+CombinedArms USA+CombinedArms
-Mutaha_TC_v1 MEA+Armored WPMC+CombinedArms
-AlBasrah_AAS_v1 PLAAGF+Mechanized USA+Mechanized
-GooseBay_Skirmish_v1 USMC+CombinedArms WPMC+CombinedArms
-Yehorivka_Destruction_v1 USA+LightInfantry IMF+LightInfantry
-Manicouagan_AAS_v2 VDV+Armored USMC+Armored
-Kamdesh_AAS_v1 INS+Mechanized BAF+Mechanized
+Kohat_Invasion_v1 USA+LightInfantry PLA+LightInfantry
+Lashkar_AAS_v1 CAF+CombinedArms PLA+CombinedArms
+Fallujah_RAAS_v1 RGF+Armored WPMC+CombinedArms
+Kamdesh_AAS_v1 CAF+Motorized TLF+Motorized
+Belaya_TC_v1 USMC+Armored TLF+Armored
+Harju_RAAS_v2 IMF+CombinedArms WPMC+CombinedArms
+Mestia_Invasion_v1 CAF+CombinedArms PLA+CombinedArms
+AlBasrah_RAAS_v1 BAF+AirAssault PLAAGF+Mechanized
+Tallil_AAS_v1 MEA+LightInfantry USMC+LightInfantry
+Gorodok_RAAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Chora_AAS_v2 TLF+CombinedArms ADF+CombinedArms
+Mutaha_RAAS_v2 WPMC+AirAssault MEA+AirAssault
+Lashkar_Invasion_v1 ADF+CombinedArms INS+CombinedArms
+PacificProvingGrounds_AAS_v1 PLA+CombinedArms USMC+CombinedArms
+Fallujah_TC_v1 CAF+Armored VDV+Support
+Logar_RAAS_v1 PLA+CombinedArms USMC+CombinedArms
+Kamdesh_AAS_v1 VDV+Support TLF+Support
+GooseBay_AAS_v1 CAF+CombinedArms RGF+CombinedArms
+Mestia_Invasion_v1 RGF+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v1 RGF+Mechanized IMF+Support
+Tallil_TC_v1 MEA+AirAssault TLF+AirAssault
+Sumari_AAS_v3 USA+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 BAF+Mechanized PLAAGF+Mechanized
+Skorpo_RAAS_v1 WPMC+CombinedArms ADF+CombinedArms
+Gorodok_Destruction_v1 WPMC+CombinedArms IMF+CombinedArms
+AlBasrah_AAS_v1 USMC+CombinedArms MEA+CombinedArms
+Kohat_AAS_v1 WPMC+LightInfantry INS+LightInfantry
+Chora_Skirmish_v1 INS+CombinedArms ADF+CombinedArms
+BlackCoast_RAAS_v1 USA+CombinedArms PLANMC+CombinedArms
+Kamdesh_RAAS_v1 PLA+Armored BAF+Armored
+FoolsRoad_Invasion_v1 PLA+CombinedArms IMF+CombinedArms
+Belaya_AAS_v2 IMF+Mechanized RGF+LightInfantry
+Yehorivka_AAS_v1 IMF+CombinedArms PLA+CombinedArms
+Fallujah_TC_v1 MEA+Armored USMC+Armored
+GooseBay_AAS_v1 CAF+AirAssault WPMC+AirAssault
+Tallil_RAAS_v2 WPMC+LightInfantry MEA+LightInfantry
+Mutaha_Invasion_v1 PLA+CombinedArms WPMC+CombinedArms
+Kohat_AAS_v1 WPMC+AirAssault VDV+AirAssault
+Chora_Skirmish_v1 TLF+CombinedArms WPMC+CombinedArms
+Lashkar_AAS_v1 CAF+CombinedArms MEA+Armored
+Kamdesh_AAS_v1 PLA+Support INS+Support
+Mestia_AAS_v1 WPMC+CombinedArms USMC+CombinedArms
+Narva_Destruction_v1 WPMC+CombinedArms USA+CombinedArms
+Yehorivka_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
+FoolsRoad_AAS_v1 VDV+CombinedArms USA+CombinedArms
+Belaya_AAS_v3 WPMC+AirAssault BAF+AirAssault
+AlBasrah_AAS_v1 RGF+Armored BAF+Armored
+Fallujah_Skirmish_v1 WPMC+CombinedArms USA+CombinedArms
+Tallil_RAAS_v2 VDV+Support PLA+CombinedArms
+BlackCoast_Invasion_v2 PLAAGF+CombinedArms TLF+CombinedArms
+Chora_AAS_v2 MEA+CombinedArms BAF+CombinedArms
+Mutaha_RAAS_v2 RGF+CombinedArms ADF+CombinedArms
+Skorpo_RAAS_v1 VDV+AirAssault WPMC+AirAssault
+Manicouagan_RAAS_v1 CAF+CombinedArms WPMC+CombinedArms
+Anvil_TC_v1 INS+Armored TLF+Armored
+Narva_AAS_v2 USMC+Motorized VDV+Armored
+Sumari_Invasion_v1 VDV+CombinedArms MEA+CombinedArms
+Sanxian_AAS_v1 WPMC+CombinedArms USA+CombinedArms
+PacificProvingGrounds_AAS_v1 PLAAGF+CombinedArms BAF+CombinedArms
+Kokan_RAAS_v1 MEA+CombinedArms VDV+CombinedArms
+Fallujah_AAS_v1 WPMC+CombinedArms CAF+CombinedArms
+Yehorivka_RAAS_v1 USMC+Armored IMF+Armored
+AlBasrah_Invasion_v1 INS+CombinedArms PLANMC+CombinedArms
+GooseBay_AAS_v1 WPMC+CombinedArms CAF+AirAssault
+Gorodok_RAAS_v1 PLA+AirAssault CAF+AirAssault
+FoolsRoad_RAAS_v1 PLA+CombinedArms IMF+CombinedArms
+Lashkar_RAAS_v1 USA+Motorized PLA+Motorized
+Kohat_TC_v1 CAF+AirAssault VDV+AirAssault
+Kamdesh_AAS_v1 WPMC+AirAssault PLA+LightInfantry
+Belaya_Invasion_v1 ADF+CombinedArms PLA+CombinedArms
+Narva_RAAS_v1 IMF+Support BAF+Support
+Mestia_RAAS_v1 IMF+CombinedArms TLF+CombinedArms
+Mutaha_TC_v1 USMC+Motorized TLF+Motorized
+Skorpo_RAAS_v1 ADF+Mechanized IMF+Mechanized
+AlBasrah_RAAS_v1 PLANMC+Support TLF+Mechanized
+Kokan_Invasion_v1 RGF+CombinedArms USA+CombinedArms
+Anvil_RAAS_v1 BAF+CombinedArms INS+CombinedArms
+Gorodok_TC_v1 WPMC+CombinedArms IMF+CombinedArms
+Logar_AAS_v1 VDV+CombinedArms BAF+CombinedArms
+Kohat_AAS_v1 TLF+AirAssault VDV+AirAssault
+Tallil_AAS_v1 CAF+Armored WPMC+LightInfantry
+FoolsRoad_Destruction_v1 IMF+CombinedArms WPMC+CombinedArms
+Manicouagan_AAS_v1 RGF+Motorized USMC+Motorized
+Kamdesh_TC_v1 PLA+Armored TLF+Armored
+Chora_RAAS_v1 TLF+CombinedArms WPMC+CombinedArms
+Narva_AAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Belaya_AAS_v2 VDV+Armored USMC+Motorized
+Anvil_Invasion_v1 MEA+CombinedArms PLA+CombinedArms
+Kokan_AAS_v2 VDV+CombinedArms CAF+CombinedArms
+Skorpo_RAAS_v1 CAF+Motorized IMF+Motorized
+Kohat_TC_v1 CAF+Motorized PLA+Motorized
+Yehorivka_RAAS_v1 TLF+AirAssault VDV+AirAssault
+BlackCoast_AAS_v2 USMC+Support VDV+Support
+Mestia_Invasion_v1 WPMC+CombinedArms IMF+CombinedArms
+Sanxian_AAS_v2 PLANMC+CombinedArms WPMC+CombinedArms
+Lashkar_TC_v1 WPMC+AirAssault MEA+AirAssault
+Narva_RAAS_v1 IMF+Support RGF+LightInfantry
+Mutaha_RAAS_v1 PLA+Motorized INS+Motorized
+Harju_RAAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Kokan_Invasion_v1 WPMC+CombinedArms MEA+CombinedArms
+AlBasrah_AAS_v1 VDV+CombinedArms BAF+CombinedArms
+Skorpo_RAAS_v1 IMF+LightInfantry WPMC+LightInfantry
+Logar_Skirmish_v1 BAF+CombinedArms PLA+CombinedArms
+Yehorivka_RAAS_v1 TLF+Mechanized RGF+Mechanized
+Gorodok_AAS_v1 ADF+AirAssault IMF+Armored
+Tallil_Invasion_v1 RGF+LightInfantry WPMC+LightInfantry
+Mestia_RAAS_v1 IMF+CombinedArms ADF+CombinedArms
+BlackCoast_RAAS_v2 WPMC+LightInfantry RGF+LightInfantry
+Belaya_AAS_v3 TLF+CombinedArms VDV+CombinedArms
+Anvil_Skirmish_v1 MEA+CombinedArms TLF+CombinedArms
+Manicouagan_AAS_v3 WPMC+AirAssault BAF+AirAssault
+Fallujah_Invasion_v1 USMC+Support VDV+CombinedArms
+PacificProvingGrounds_AAS_v1 PLANMC+CombinedArms USMC+CombinedArms
+Logar_AAS_v1 TLF+CombinedArms INS+CombinedArms
+Lashkar_AAS_v1 ADF+CombinedArms INS+CombinedArms
+Gorodok_AAS_v1 TLF+AirAssault PLA+AirAssault
+AlBasrah_Skirmish_v1 PLA+CombinedArms TLF+CombinedArms
+Tallil_RAAS_v2 INS+CombinedArms TLF+Armored
+BlackCoast_Invasion_v2 TLF+Support VDV+Support
+Narva_AAS_v1 WPMC+CombinedArms IMF+CombinedArms
+Chora_AAS_v1 PLA+CombinedArms RGF+CombinedArms
+Sanxian_AAS_v2 WPMC+CombinedArms PLA+CombinedArms
+Kamdesh_RAAS_v1 PLA+Support CAF+Support
+Fallujah_TC_v1 ADF+Mechanized RGF+CombinedArms
+Kokan_AAS_v2 CAF+CombinedArms TLF+CombinedArms
+Yehorivka_Invasion_v2 ADF+CombinedArms WPMC+CombinedArms
+Gorodok_RAAS_v1 WPMC+CombinedArms CAF+CombinedArms
